--- a/C++_top_100.html
+++ b/C++_top_100.html
@@ -78,115 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">C++ &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#easiest-way-to-convert-int-to-string-in-c-score-2671193-in-2018">1: Easiest way to convert int to string in C++ (score <span>2671193</span> in 2018)</a></li>
-<li><a href="#the-definitive-c-book-guide-and-list-score-2220799-in-2018">2: The Definitive C++ Book Guide and List (score <span>2220799</span> in 2018)</a></li>
-<li><a href="#how-do-i-iterate-over-the-words-of-a-string-score-2132194-in-2018">3: How do I iterate over the words of a string? (score <span>2132194</span> in 2018)</a></li>
-<li><a href="#convert-char-to-int-in-c-and-c-score-1516373-in-2011">4: Convert char to int in C and C++ (score <span>1516373</span> in 2011)</a></li>
-<li><a href="#why-is-processing-a-sorted-array-faster-than-processing-an-unsorted-array-score-1410048-in-2019">5: Why is processing a sorted array faster than processing an unsorted array? (score <span>1410048</span> in 2019)</a></li>
-<li><a href="#how-do-i-find-the-length-of-an-array-score-1265750-in-2011">6: How do I find the length of an array? (score <span>1265750</span> in 2011)</a></li>
-<li><a href="#how-can-i-convert-a-stdstring-to-int-score-1229147-in-2018">7: How can I convert a std::string to int? (score <span>1229147</span> in 2018)</a></li>
-<li><a href="#read-file-line-by-line-using-ifstream-in-c-score-1228489-in-2018">8: Read file line by line using ifstream in C++ (score <span>1228489</span> in 2018)</a></li>
-<li><a href="#what-does-the-c-standard-state-the-size-of-int-long-type-to-be-score-1194580-in-2016">9: What does the C++ standard state the size of int, long type to be? (score <span>1194580</span> in 2016)</a></li>
-<li><a href="#best-c-ide-or-editor-for-windows-score-1193943-in-2009">10: Best C++ IDE or Editor for Windows (score <span>1193943</span> in 2009)</a></li>
-<li><a href="#sleep-for-milliseconds-score-1182180-in-2015">11: Sleep for milliseconds (score <span>1182180</span> in 2015)</a></li>
-<li><a href="#how-do-you-set-clear-and-toggle-a-single-bit-score-1095506-in-2019">12: How do you set, clear, and toggle a single bit? (score <span>1095506</span> in 2019)</a></li>
-<li><a href="#how-to-get-current-time-and-date-in-c-score-1051055-in-2015">13: How to get current time and date in C++? (score <span>1051055</span> in 2015)</a></li>
-<li><a href="#c-ide-for-linux-score-967131-in-2017">14: C++ IDE for Linux? (score <span>967131</span> in 2017)</a></li>
-<li><a href="#how-to-use-the-pi-constant-in-c-score-959136-in-2014">15: How to use the PI constant in C++ (score <span>959136</span> in 2014)</a></li>
-<li><a href="#parse-split-a-string-in-c-using-string-delimiter-standard-c-score-952287-in-2018">16: Parse (split) a string in C++ using string delimiter (standard C++) (score <span>952287</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-float-and-double-score-936859-in-2018">17: What is the difference between float and double? (score <span>936859</span> in 2018)</a></li>
-<li><a href="#what-are-the-differences-between-a-pointer-variable-and-a-reference-variable-in-c-score-933961-in-2018">18: What are the differences between a pointer variable and a reference variable in C++? (score <span>933961</span> in 2018)</a></li>
-<li><a href="#how-to-convert-a-stdstring-to-const-char-or-char-score-881988-in-2014">19: How to convert a std::string to const char* or char*? (score <span>881988</span> in 2014)</a></li>
-<li><a href="#what-are-the-basic-rules-and-idioms-for-operator-overloading-score-880173-in-2017">20: What are the basic rules and idioms for operator overloading? (score <span>880173</span> in 2017)</a></li>
-<li><a href="#how-to-find-out-if-an-item-is-present-in-a-stdvector-score-864239-in-2017">21: How to find out if an item is present in a std::vector? (score <span>864239</span> in 2017)</a></li>
-<li><a href="#how-do-i-declare-a-2d-array-in-c-using-new-score-851223-in-2016">22: How do I declare a 2d array in C++ using new? (score <span>851223</span> in 2016)</a></li>
-<li><a href="#usrbinld-cannot-find--l-score-838868-in-2016">23: usr/bin/ld: cannot find -l<nameOfTheLibrary> (score <span>838868</span> in 2016)</a></li>
-<li><a href="#stdstring-to-char-score-818531-in">24: std::string to char* (score <span>818531</span> in )</a></li>
-<li><a href="#how-to-convert-stdstring-to-lower-case-score-810490-in-2018">25: How to convert std::string to lower case? (score <span>810490</span> in 2018)</a></li>
-<li><a href="#how-can-i-get-the-list-of-files-in-a-directory-using-c-or-c-score-806406-in-2018">26: How can I get the list of files in a directory using C or C++? (score <span>806406</span> in 2018)</a></li>
-<li><a href="#what-does-int-argc-char-argv-mean-score-798351-in-2018">27: What does int argc, char *argv[] mean? (score <span>798351</span> in 2018)</a></li>
-<li><a href="#what-does-the-explicit-keyword-mean-score-795711-in-2018">28: What does the explicit keyword mean? (score <span>795711</span> in 2018)</a></li>
-<li><a href="#how-to-convert-a-char-array-to-a-string-score-781170-in-2014">29: How to convert a char array to a string? (score <span>781170</span> in 2014)</a></li>
-<li><a href="#what-is-the-easiest-way-to-initialize-a-stdvector-with-hardcoded-elements-score-775328-in-2019">30: What is the easiest way to initialize a std::vector with hardcoded elements? (score <span>775328</span> in 2019)</a></li>
-<li><a href="#why-is-using-namespace-std-considered-bad-practice-score-770478-in-2019">31: Why is “using namespace std;” considered bad practice? (score <span>770478</span> in 2019)</a></li>
-<li><a href="#what-are-the-rules-for-calling-the-superclass-constructor-score-750052-in-2017">33: What are the rules for calling the superclass constructor? (score <span>750052</span> in 2017)</a></li>
-<li><a href="#what-is-the-operator-in-c-score-738032-in-2019">34: What is the “–&gt;” operator in C++? (score <span>738032</span> in 2019)</a></li>
-<li><a href="#iteration-over-stdvector-unsigned-vs-signed-index-variable-score-737570-in-2016">35: Iteration over std::vector: unsigned vs signed index variable (score <span>737570</span> in 2016)</a></li>
-<li><a href="#return-array-in-a-function-score-715453-in-2014">36: Return array in a function (score <span>715453</span> in 2014)</a></li>
-<li><a href="#what-is-the-effect-of-extern-c-in-c-score-709916-in-2018">37: What is the effect of extern “C” in C++? (score <span>709916</span> in 2018)</a></li>
-<li><a href="#how-do-i-erase-an-element-from-stdvector-by-index-score-678605-in-2016">38: How do I erase an element from std::vector&lt;&gt; by index? (score <span>678605</span> in 2016)</a></li>
-<li><a href="#compiling-c11-with-g-score-675811-in-2018">39: Compiling C++11 with g++ (score <span>675811</span> in 2018)</a></li>
-<li><a href="#regular-cast-vs.-static_cast-vs.-dynamic_cast-score-667403-in-2014">40: Regular cast vs. static_cast vs. dynamic_cast (score <span>667403</span> in 2014)</a></li>
-<li><a href="#remove-secure-warnings-_crt_secure_no_warnings-from-projects-by-default-in-visual-studio-score-653402-in-2017">41: Remove secure warnings (_CRT_SECURE_NO_WARNINGS) from projects by default in Visual Studio (score <span>653402</span> in 2017)</a></li>
-<li><a href="#simple-example-of-threading-in-c-score-652032-in-2019">42: Simple example of threading in C++ (score <span>652032</span> in 2019)</a></li>
-<li><a href="#when-to-use-virtual-destructors-score-650734-in-2019">43: When to use virtual destructors? (score <span>650734</span> in 2019)</a></li>
-<li><a href="#difference-between-private-public-and-protected-inheritance-score-643153-in-2018">44: Difference between private, public, and protected inheritance (score <span>643153</span> in 2018)</a></li>
-<li><a href="#c-singleton-design-pattern-score-634664-in-2012">46: C++ Singleton design pattern (score <span>634664</span> in 2012)</a></li>
-<li><a href="#check-if-a-string-contains-a-string-in-c-score-622627-in-2019">47: Check if a string contains a string in C++ (score <span>622627</span> in 2019)</a></li>
-<li><a href="#how-to-initialize-a-vector-in-c-score-621092-in-2017">48: How to initialize a vector in C++ (score <span>621092</span> in 2017)</a></li>
-<li><a href="#how-to-print-out-the-contents-of-a-vector-score-618189-in-2018">49: How to print out the contents of a vector? (score <span>618189</span> in 2018)</a></li>
-<li><a href="#how-to-concatenate-a-stdstring-and-an-int-score-601901-in-2017">50: How to concatenate a std::string and an int? (score <span>601901</span> in 2017)</a></li>
-<li><a href="#how-do-i-build-a-graphical-user-interface-in-c-score-587542-in-2019">51: How do I build a graphical user interface in C++? (score <span>587542</span> in 2019)</a></li>
-<li><a href="#how-to-call-a-parent-class-function-from-derived-class-function-score-577074-in-2014">52: How to call a parent class function from derived class function? (score <span>577074</span> in 2014)</a></li>
-<li><a href="#passing-a-2d-array-to-a-c-function-score-576831-in-2015">53: Passing a 2D array to a C++ function (score <span>576831</span> in 2015)</a></li>
-<li><a href="#fastest-way-to-check-if-a-file-exist-using-standard-cc11c-score-550079-in-2017">54: Fastest way to check if a file exist using standard C++/C++11/C? (score <span>550079</span> in 2017)</a></li>
-<li><a href="#what-is-a-segmentation-fault-score-539500-in-2016">55: What is a segmentation fault? (score <span>539500</span> in 2016)</a></li>
-<li><a href="#what-is-an-unsigned-char-score-539232-in-2016">56: What is an unsigned char? (score <span>539232</span> in 2016)</a></li>
-<li><a href="#what-is-the-difference-between-include-and-include-filename-score-537618-in-2016">57: What is the difference between #include <filename> and #include “filename”? (score <span>537618</span> in 2016)</a></li>
-<li><a href="#what-is-a-smart-pointer-and-when-should-i-use-one-score-532699-in-2015">58: What is a smart pointer and when should I use one? (score <span>532699</span> in 2015)</a></li>
-<li><a href="#how-do-i-tokenize-a-string-in-c-score-529167-in-2013">59: How do I tokenize a string in C++? (score <span>529167</span> in 2013)</a></li>
-<li><a href="#what-does-dereferencing-a-pointer-mean-score-519585-in-2017">60: What does “dereferencing” a pointer mean? (score <span>519585</span> in 2017)</a></li>
-<li><a href="#when-should-static_cast-dynamic_cast-const_cast-and-reinterpret_cast-be-used-score-515678-in-2015">61: When should static_cast, dynamic_cast, const_cast and reinterpret_cast be used? (score <span>515678</span> in 2015)</a></li>
-<li><a href="#why-do-we-need-virtual-functions-in-c-score-514757-in-2017">62: Why do we need virtual functions in C++? (score <span>514757</span> in 2017)</a></li>
-<li><a href="#what-is-an-undefined-referenceunresolved-external-symbol-error-and-how-do-i-fix-it-score-514061-in-2018">63: What is an undefined reference/unresolved external symbol error and how do I fix it? (score <span>514061</span> in 2018)</a></li>
-<li><a href="#struct-constructor-in-c-score-511554-in-2014">64: Struct Constructor in C++? (score <span>511554</span> in 2014)</a></li>
-<li><a href="#how-to-convert-string-to-char-array-in-c-score-499222-in-2015">65: How to convert string to char array in C++? (score <span>499222</span> in 2015)</a></li>
-<li><a href="#convert-a-char-to-stdstring-score-498258-in-2018">66: convert a char* to std::string (score <span>498258</span> in 2018)</a></li>
-<li><a href="#how-to-compile-and-run-cc-in-a-unix-consolemac-terminal-score-496686-in-2018">67: How to compile and run C/C++ in a Unix console/Mac terminal? (score <span>496686</span> in 2018)</a></li>
-<li><a href="#appending-a-vector-to-a-vector-score-491976-in-2016">68: Appending a vector to a vector (score <span>491976</span> in 2016)</a></li>
-<li><a href="#difference-between-struct-and-typedef-struct-in-c-score-489010-in">69: Difference between ‘struct’ and ‘typedef struct’ in C++? (score <span>489010</span> in )</a></li>
-<li><a href="#how-to-find-if-a-given-key-exists-in-a-c-stdmap-score-487253-in-2017">70: How to find if a given key exists in a C++ std::map (score <span>487253</span> in 2017)</a></li>
-<li><a href="#how-can-i-profile-c-code-running-on-linux-score-485365-in-2018">71: How can I profile C++ code running on Linux? (score <span>485365</span> in 2018)</a></li>
-<li><a href="#read-whole-ascii-file-into-c-stdstring-score-478956-in-2014">72: Read whole ASCII file into C++ std::string (score <span>478956</span> in 2014)</a></li>
-<li><a href="#how-do-i-get-the-directory-that-a-program-is-running-from-score-477268-in-2013">73: How do I get the directory that a program is running from? (score <span>477268</span> in 2013)</a></li>
-<li><a href="#easily-measure-elapsed-time-score-469449-in-2013">74: Easily measure elapsed time (score <span>469449</span> in 2013)</a></li>
-<li><a href="#convert-a-string-in-c-to-upper-case-score-469068-in-2012">75: Convert a String In C++ To Upper Case (score <span>469068</span> in 2012)</a></li>
-<li><a href="#how-to-initialize-private-static-members-in-c-score-466489-in-2018">76: How to initialize private static members in C++? (score <span>466489</span> in 2018)</a></li>
-<li><a href="#differences-between-c-string-and-compare-score-464209-in-2012">77: Differences between C++ string == and compare()? (score <span>464209</span> in 2012)</a></li>
-<li><a href="#unresolved-external-symbol-in-object-files-score-462491-in-2016">78: Unresolved external symbol in object files (score <span>462491</span> in 2016)</a></li>
-<li><a href="#what-is-the-difference-between-const-int-const-int-const-and-int-const-score-459578-in-2017">79: What is the difference between const int<em>, const int </em> const, and int const *? (score <span>459578</span> in 2017)</a></li>
-<li><a href="#undefined-reference-to-vtable-score-455622-in-2019">80: Undefined reference to vtable (score <span>455622</span> in 2019)</a></li>
-<li><a href="#how-do-you-declare-an-interface-in-c-score-455244-in-2009">81: How do you declare an interface in C++? (score <span>455244</span> in 2009)</a></li>
-<li><a href="#what-is-the-c-function-to-raise-a-number-to-a-power-score-452219-in-2009">82: What is the C++ function to raise a number to a power? (score <span>452219</span> in 2009)</a></li>
-<li><a href="#why-can-templates-only-be-implemented-in-the-header-file-score-450124-in-2019">83: Why can templates only be implemented in the header file? (score <span>450124</span> in 2019)</a></li>
-<li><a href="#stdcin-input-with-spaces-score-448215-in-2018">84: std::cin input with spaces? (score <span>448215</span> in 2018)</a></li>
-<li><a href="#how-to-replace-all-occurrences-of-a-character-in-string-score-446818-in-2016">85: How to replace all occurrences of a character in string? (score <span>446818</span> in 2016)</a></li>
-<li><a href="#what-is-a-lambda-expression-in-c11-score-445636-in-2011">86: What is a lambda expression in C++11? (score <span>445636</span> in 2011)</a></li>
-<li><a href="#private-and-protected-members-c-score-443439-in-2018">87: Private and Protected Members : C++ (score <span>443439</span> in 2018)</a></li>
-<li><a href="#how-to-stop-c-console-application-from-exiting-immediately-score-442739-in-2014">88: How to stop C++ console application from exiting immediately? (score <span>442739</span> in 2014)</a></li>
-<li><a href="#case-insensitive-string-comparison-in-c-score-440956-in-2017">89: Case-insensitive string comparison in C++ (score <span>440956</span> in 2017)</a></li>
-<li><a href="#what-are-c-functors-and-their-uses-score-438237-in-2018">90: What are C++ functors and their uses? (score <span>438237</span> in 2018)</a></li>
-<li><a href="#what-is-meant-with-const-at-end-of-function-declaration-score-437523-in-2019">91: What is meant with “const” at end of function declaration? (score <span>437523</span> in 2019)</a></li>
-<li><a href="#how-to-convert-int-to-qstring-score-432339-in-2015">92: How to convert int to QString? (score <span>432339</span> in 2015)</a></li>
-<li><a href="#how-do-i-add-a-linker-or-compile-flag-in-a-cmake-file-score-430588-in-2019">93: How do I add a linker or compile flag in a CMake file? (score <span>430588</span> in 2019)</a></li>
-<li><a href="#can-i-call-a-constructor-from-another-constructor-do-constructor-chaining-in-c-score-428350-in-2017">94: Can I call a constructor from another constructor (do constructor chaining) in C++? (score <span>428350</span> in 2017)</a></li>
-<li><a href="#c-structure-initialization-score-426595-in-2017">95: C++ Structure Initialization (score <span>426595</span> in 2017)</a></li>
-<li><a href="#how-can-i-loop-through-a-c-map-of-maps-score-424125-in-2019">96: How can I loop through a C++ map of maps? (score <span>424125</span> in 2019)</a></li>
-<li><a href="#what-is-the-difference-between-g-and-gcc-score-422142-in-2018">97: What is the difference between g++ and gcc? (score <span>422142</span> in 2018)</a></li>
-<li><a href="#how-do-you-make-a-http-request-with-c-score-412466-in-2015">98: How do you make a HTTP request with C++? (score <span>412466</span> in 2015)</a></li>
-<li><a href="#how-do-you-create-a-static-class-in-c-score-412436-in-2018">99: How do you create a static class in C++? (score <span>412436</span> in 2018)</a></li>
-<li><a href="#how-to-make-a-simple-c-makefile-score-411599-in-2015">100: How to make a SIMPLE C++ Makefile? (score <span>411599</span> in 2015)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="easiest-way-to-convert-int-to-string-in-c-score-2671193-in-2018" class="level3">
