--- a/C_top_100.html
+++ b/C_top_100.html
@@ -78,115 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">C &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-to-initialize-all-members-of-an-array-to-the-same-value-score-1778177-in-2017">1: How to initialize all members of an array to the same value? (score <span>1778177</span> in 2017)</a></li>
-<li><a href="#how-do-i-determine-the-size-of-my-array-in-c-score-1765256-in-2013">2: How do I determine the size of my array in C? (score <span>1765256</span> in 2013)</a></li>
-<li><a href="#convert-char-to-int-in-c-and-c-score-1516373-in-2011">3: Convert char to int in C and C++ (score <span>1516373</span> in 2011)</a></li>
-<li><a href="#how-to-generate-a-random-int-in-c-score-1515123-in-2018">4: How to generate a random int in C? (score <span>1515123</span> in 2018)</a></li>
-<li><a href="#using-boolean-values-in-c-score-1246473-in-2016">5: Using boolean values in C (score <span>1246473</span> in 2016)</a></li>
-<li><a href="#how-do-you-set-clear-and-toggle-a-single-bit-score-1095506-in-2019">6: How do you set, clear, and toggle a single bit? (score <span>1095506</span> in 2019)</a></li>
-<li><a href="#how-do-i-concatenate-constliteral-strings-in-c-score-964267-in-2017">7: How do I concatenate const/literal strings in C? (score <span>964267</span> in 2017)</a></li>
-<li><a href="#how-to-convert-integer-to-string-in-c-score-945144-in-2018">8: How to convert integer to string in C? (score <span>945144</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-float-and-double-score-936859-in-2018">9: What is the difference between float and double? (score <span>936859</span> in 2018)</a></li>
-<li><a href="#correct-format-specifier-for-double-in-printf-score-936300-in-2019">10: Correct format specifier for double in printf (score <span>936300</span> in 2019)</a></li>
-<li><a href="#c-what-is-the-difference-between-i-and-i-score-933182-in-2019">11: C: What is the difference between ++i and i++? (score <span>933182</span> in 2019)</a></li>
-<li><a href="#how-do-i-create-an-array-of-strings-in-c-score-916965-in-2018">12: How do I create an array of strings in C? (score <span>916965</span> in 2018)</a></li>
-<li><a href="#how-to-convert-a-string-to-integer-in-c-score-897704-in-2018">13: How to convert a string to integer in C? (score <span>897704</span> in 2018)</a></li>
-<li><a href="#max-value-of-integer-score-847436-in-2017">14: max value of integer (score <span>847436</span> in 2017)</a></li>
-<li><a href="#what-does-static-mean-in-c-score-846258-in-2017">15: What does “static” mean in C? (score <span>846258</span> in 2017)</a></li>
-<li><a href="#how-can-i-get-the-list-of-files-in-a-directory-using-c-or-c-score-806406-in-2018">16: How can I get the list of files in a directory using C or C++? (score <span>806406</span> in 2018)</a></li>
-<li><a href="#how-do-function-pointers-in-c-work-score-766864-in">17: How do function pointers in C work? (score <span>766864</span> in )</a></li>
-<li><a href="#how-can-i-get-a-files-size-in-c-score-735156-in-2019">18: How can I get a file’s size in C? (score <span>735156</span> in 2019)</a></li>
-<li><a href="#is-there-a-printf-converter-to-print-in-binary-format-score-717928-in">19: Is there a printf converter to print in binary format? (score <span>717928</span> in )</a></li>
-<li><a href="#how-do-you-format-an-unsigned-long-long-int-using-printf-score-717617-in-2018">20: How do you format an unsigned long long int using printf? (score <span>717617</span> in 2018)</a></li>
-<li><a href="#how-to-initialize-a-struct-in-accordance-with-c-programming-language-standards-score-712842-in-2018">21: How to initialize a struct in accordance with C programming language standards (score <span>712842</span> in 2018)</a></li>
-<li><a href="#what-is-the-effect-of-extern-c-in-c-score-709916-in-2018">22: What is the effect of extern “C” in C++? (score <span>709916</span> in 2018)</a></li>
-<li><a href="#c-read-file-line-by-line-score-708636-in">23: C read file line by line (score <span>708636</span> in )</a></li>
-<li><a href="#what-is-the-argument-for-printf-that-formats-a-long-score-707746-in-2018">24: What is the argument for printf that formats a long? (score <span>707746</span> in 2018)</a></li>
-<li><a href="#rounding-number-to-2-decimal-places-in-c-score-690219-in-2012">25: Rounding Number to 2 Decimal Places in C (score <span>690219</span> in 2012)</a></li>
-<li><a href="#what-is-size_t-in-c-score-666997-in-2013">26: What is size_t in C? (score <span>666997</span> in 2013)</a></li>
-<li><a href="#how-do-i-use-extern-to-share-variables-between-source-files-score-665535-in-2017">27: How do I use extern to share variables between source files? (score <span>665535</span> in 2017)</a></li>
-<li><a href="#min-and-max-in-c-score-655315-in-2015">28: MIN and MAX in C (score <span>655315</span> in 2015)</a></li>
-<li><a href="#typedef-struct-vs-struct-definitions-score-645139-in-2018">29: typedef struct vs struct definitions (score <span>645139</span> in 2018)</a></li>
-<li><a href="#how-to-printf-unsigned-long-in-c-score-640953-in-2017">30: How to printf “unsigned long” in C? (score <span>640953</span> in 2017)</a></li>
-<li><a href="#what-is-segmentation-fault-core-dumped-score-587699-in-2013">31: what is Segmentation fault (core dumped)? (score <span>587699</span> in 2013)</a></li>
-<li><a href="#in-c-how-should-i-read-a-text-file-and-print-all-strings-score-582393-in-2010">32: In C, how should I read a text file and print all strings (score <span>582393</span> in 2010)</a></li>
-<li><a href="#warning-implicit-declaration-of-function-score-575586-in-2011">33: warning: implicit declaration of function (score <span>575586</span> in 2011)</a></li>
-<li><a href="#what-is-the-printf-format-specifier-for-bool-score-575382-in">34: What is the printf format specifier for bool? (score <span>575382</span> in )</a></li>
-<li><a href="#how-to-convert-integer-to-char-in-c-score-574458-in-2015">35: How to convert integer to char in C? (score <span>574458</span> in 2015)</a></li>
-<li><a href="#split-string-with-delimiters-in-c-score-572995-in-2013">36: Split string with delimiters in C (score <span>572995</span> in 2013)</a></li>
-<li><a href="#how-to-convert-an-int-to-string-in-c-score-565158-in-2018">37: How to convert an int to string in C? (score <span>565158</span> in 2018)</a></li>
-<li><a href="#write-to-.txt-file-score-558915-in-2014">38: Write to .txt file? (score <span>558915</span> in 2014)</a></li>
-<li><a href="#undefined-reference-to-pthread_create-in-linux-score-550266-in-2017">39: Undefined reference to pthread_create in Linux (score <span>550266</span> in 2017)</a></li>
-<li><a href="#fastest-way-to-check-if-a-file-exist-using-standard-cc11c-score-550079-in-2017">40: Fastest way to check if a file exist using standard C++/C++11/C? (score <span>550079</span> in 2017)</a></li>
-<li><a href="#what-is-a-static-function-score-546371-in-2017">41: What is a “static” function? (score <span>546371</span> in 2017)</a></li>
-<li><a href="#what-is-a-segmentation-fault-score-539500-in-2016">42: What is a segmentation fault? (score <span>539500</span> in 2016)</a></li>
-<li><a href="#what-is-an-unsigned-char-score-539232-in-2016">43: What is an unsigned char? (score <span>539232</span> in 2016)</a></li>
-<li><a href="#what-is-the-difference-between-include-and-include-filename-score-537618-in-2016">44: What is the difference between #include <filename> and #include “filename”? (score <span>537618</span> in 2016)</a></li>
-<li><a href="#use-of-exit-function-score-533873-in-2013">45: Use of exit() function (score <span>533873</span> in 2013)</a></li>
-<li><a href="#is-the-size-of-c-int-2-bytes-or-4-bytes-score-523652-in-2014">46: Is the size of C “int” 2 bytes or 4 bytes? (score <span>523652</span> in 2014)</a></li>
-<li><a href="#c-char-array-initialization-score-523179-in-2015">47: C char array initialization (score <span>523179</span> in 2015)</a></li>
-<li><a href="#printf-formatting-for-hex-score-506267-in">49: printf() formatting for hex (score <span>506267</span> in )</a></li>
-<li><a href="#how-do-you-pass-a-function-as-a-parameter-in-c-score-506257-in-2016">50: How do you pass a function as a parameter in C? (score <span>506257</span> in 2016)</a></li>
-<li><a href="#get-a-substring-of-a-char-score-504615-in-2015">51: Get a substring of a char* (score <span>504615</span> in 2015)</a></li>
-<li><a href="#difference-between-malloc-and-calloc-score-499399-in-2013">52: Difference between malloc and calloc? (score <span>499399</span> in 2013)</a></li>
-<li><a href="#how-to-compile-and-run-cc-in-a-unix-consolemac-terminal-score-496686-in-2018">53: How to compile and run C/C++ in a Unix console/Mac terminal? (score <span>496686</span> in 2018)</a></li>
-<li><a href="#reading-string-from-input-with-space-character-score-492341-in-2018">54: Reading string from input with space character? (score <span>492341</span> in 2018)</a></li>
-<li><a href="#reading-a-string-with-scanf-score-489645-in-2018">55: Reading a string with scanf (score <span>489645</span> in 2018)</a></li>
-<li><a href="#why-should-we-typedef-a-struct-so-often-in-c-score-487703-in-2016">56: Why should we typedef a struct so often in C? (score <span>487703</span> in 2016)</a></li>
-<li><a href="#how-to-convert-char-to-integer-in-c-score-487261-in-2017">57: How to convert char to integer in C? (score <span>487261</span> in 2017)</a></li>
-<li><a href="#how-to-define-an-enumerated-type-enum-in-c-score-487173-in-2011">58: How to define an enumerated type (enum) in C? (score <span>487173</span> in 2011)</a></li>
-<li><a href="#whats-the-best-way-to-check-if-a-file-exists-in-c-score-483699-in-2019">59: What’s the best way to check if a file exists in C? (score <span>483699</span> in 2019)</a></li>
-<li><a href="#how-do-i-get-the-directory-that-a-program-is-running-from-score-477268-in-2013">60: How do I get the directory that a program is running from? (score <span>477268</span> in 2013)</a></li>
-<li><a href="#regarding-mainint-argc-char-argv-score-474856-in-2018">61: Regarding ’main(int argc, char *argv[])’ (score <span>474856</span> in 2018)</a></li>
-<li><a href="#easily-measure-elapsed-time-score-469449-in-2013">62: Easily measure elapsed time (score <span>469449</span> in 2013)</a></li>
-<li><a href="#strings-and-character-with-printf-score-465676-in-2013">63: Strings and character with printf (score <span>465676</span> in 2013)</a></li>
-<li><a href="#what-is-the-difference-between-const-int-const-int-const-and-int-const-score-459578-in-2017">64: What is the difference between const int<em>, const int </em> const, and int const *? (score <span>459578</span> in 2017)</a></li>
-<li><a href="#float-vs.-double-precision-score-457932-in-2017">65: ‘float’ vs. ‘double’ precision (score <span>457932</span> in 2017)</a></li>
-<li><a href="#how-do-you-make-an-array-of-structs-in-c-score-438475-in-2019">66: How do you make an array of structs in C? (score <span>438475</span> in 2019)</a></li>
-<li><a href="#what-can-be-the-reasons-of-connection-refused-errors-score-436704-in-2017">67: What can be the reasons of connection refused errors? (score <span>436704</span> in 2017)</a></li>
-<li><a href="#arrow-operator---usage-in-c-score-433083-in-2019">68: Arrow operator (-&gt;) usage in C (score <span>433083</span> in 2019)</a></li>
-<li><a href="#preventing-console-window-from-closing-on-visual-studio-cc-console-application-score-425965-in-2013">69: Preventing console window from closing on Visual Studio C/C++ Console application (score <span>425965</span> in 2013)</a></li>
-<li><a href="#how-to-declare-strings-in-c-score-424760-in-2017">70: How to declare strings in C (score <span>424760</span> in 2017)</a></li>
-<li><a href="#how-to-print-the-array-score-420176-in-2012">71: How to print the array? (score <span>420176</span> in 2012)</a></li>
-<li><a href="#convert-a-character-digit-to-the-corresponding-integer-in-c-score-415138-in-2017">72: Convert a character digit to the corresponding integer in C (score <span>415138</span> in 2017)</a></li>
-<li><a href="#get-the-current-time-in-c-score-411745-in-2016">73: Get the current time in C (score <span>411745</span> in 2016)</a></li>
-<li><a href="#c-compiler-for-windows-score-405559-in-2013">74: C compiler for Windows? (score <span>405559</span> in 2013)</a></li>
-<li><a href="#how-do-i-properly-compare-strings-score-401772-in-2017">75: How do I properly compare strings? (score <span>401772</span> in 2017)</a></li>
-<li><a href="#debug-vs-release-in-cmake-score-398790-in-2018">76: Debug vs Release in CMake (score <span>398790</span> in 2018)</a></li>
-<li><a href="#the-definitive-c-book-guide-and-list-score-398612-in-2019">77: The Definitive C Book Guide and List (score <span>398612</span> in 2019)</a></li>
-<li><a href="#execution-time-of-c-program-score-396880-in-2016">78: Execution time of C program (score <span>396880</span> in 2016)</a></li>
-<li><a href="#makefile4-missing-separator.-stop-score-394642-in-2013">79: makefile:4: *** missing separator. Stop (score <span>394642</span> in 2013)</a></li>
-<li><a href="#initialization-of-a-normal-array-with-one-default-value-score-390258-in-2016">80: Initialization of a normal array with one default value (score <span>390258</span> in 2016)</a></li>
-<li><a href="#check-substring-exists-in-a-string-in-c-score-385439-in-2017">81: Check substring exists in a string in C (score <span>385439</span> in 2017)</a></li>
-<li><a href="#how-do-i-concatenate-two-strings-in-c-score-384554-in-2017">82: How do I concatenate two strings in C? (score <span>384554</span> in 2017)</a></li>
-<li><a href="#why-are-ifndef-and-define-used-in-c-header-files-score-381732-in-2019">83: Why are #ifndef and #define used in C++ header files? (score <span>381732</span> in 2019)</a></li>
-<li><a href="#c-pointer-to-arrayarray-of-pointers-disambiguation-score-380998-in-2014">84: C pointer to array/array of pointers disambiguation (score <span>380998</span> in 2014)</a></li>
-<li><a href="#calling-cc-from-python-score-380797-in-2017">85: Calling C/C++ from Python? (score <span>380797</span> in 2017)</a></li>
-<li><a href="#improve-insert-per-second-performance-of-sqlite-score-379997-in-2019">86: Improve INSERT-per-second performance of SQLite? (score <span>379997</span> in 2019)</a></li>
-<li><a href="#strdup---what-does-it-do-in-c-score-379908-in-2013">87: strdup() - what does it do in C? (score <span>379908</span> in 2013)</a></li>
-<li><a href="#c-printf-a-float-value-score-379409-in-2012">88: C: printf a float value (score <span>379409</span> in 2012)</a></li>
-<li><a href="#unit-testing-c-code-score-375093-in-2019">89: Unit Testing C Code (score <span>375093</span> in 2019)</a></li>
-<li><a href="#typedef-function-pointer-score-373780-in-2019">90: Typedef function pointer? (score <span>373780</span> in 2019)</a></li>
-<li><a href="#printing-prime-numbers-from-1-through-100-score-366862-in-2011">92: Printing prime numbers from 1 through 100 (score <span>366862</span> in 2011)</a></li>
-<li><a href="#how-to-print-a-int64_t-type-in-c-score-365851-in-2013">93: How to print a int64_t type in C (score <span>365851</span> in 2013)</a></li>
-<li><a href="#clearing-a-char-array-c-score-364411-in-2012">94: clearing a char array c (score <span>364411</span> in 2012)</a></li>
-<li><a href="#how-to-open-read-and-write-from-serial-port-in-c-score-364263-in-2018">95: How to open, read, and write from serial port in C? (score <span>364263</span> in 2018)</a></li>
-<li><a href="#what-does-void-mean-in-c-c-and-c-score-360403-in-2018">96: What does void mean in C, C++, and C#? (score <span>360403</span> in 2018)</a></li>
-<li><a href="#stack-smashing-detected-score-356971-in-2012">97: Stack smashing detected (score <span>356971</span> in 2012)</a></li>
-<li><a href="#how-to-do-scanf-for-single-char-in-c-score-356225-in-2014">98: How to do scanf for single char in C (score <span>356225</span> in 2014)</a></li>
-<li><a href="#how-do-i-check-if-an-integer-is-even-or-odd-score-355377-in-2015">99: How do I check if an integer is even or odd? (score <span>355377</span> in 2015)</a></li>
-<li><a href="#difference-between-while-loop-and-do-while-loop-score-349762-in-2010">100: Difference between “while” loop and “do while” loop (score <span>349762</span> in 2010)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-to-initialize-all-members-of-an-array-to-the-same-value-score-1778177-in-2017" class="level3">
