--- a/Computer_graphics_top_100_se.html
+++ b/Computer_graphics_top_100_se.html
@@ -78,118 +78,15 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Computer_graphics &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-is-gaussian-blur-implemented-score-37432-in-2017">1: How is Gaussian Blur Implemented? (score <span>37432</span> in 2017)</a></li>
-<li><a href="#should-new-graphics-programmers-be-learning-vulkan-instead-of-opengl-score-30278-in-2016">2: Should new graphics programmers be learning Vulkan instead of OpenGL? (score <span>30278</span> in 2016)</a></li>
-<li><a href="#is-there-any-reason-to-prefer-direct3d-over-opengl-score-25674-in-2017">3: Is there any reason to prefer Direct3D over OpenGL? (score <span>25674</span> in 2017)</a></li>
-<li><a href="#how-can-i-debug-glsl-shaders-score-24877-in">4: How can I debug GLSL shaders? (score <span>24877</span> in )</a></li>
-<li><a href="#why-are-homogeneous-coordinates-used-in-computer-graphics-score-23534-in">5: Why are Homogeneous Coordinates used in Computer Graphics? (score <span>23534</span> in )</a></li>
-<li><a href="#albedo-vs-diffuse-score-19287-in">6: Albedo vs Diffuse (score <span>19287</span> in )</a></li>
-<li><a href="#what-is-ray-marching-is-sphere-tracing-the-same-thing-score-17832-in">7: What is Ray Marching? Is Sphere Tracing the same thing? (score <span>17832</span> in )</a></li>
-<li><a href="#sharp-corners-with-signed-distance-fields-fonts-score-15904-in">8: Sharp Corners with Signed Distance Fields Fonts (score <span>15904</span> in )</a></li>
-<li><a href="#when-is-a-compute-shader-more-efficient-than-a-pixel-shader-for-image-filtering-score-13677-in">9: When is a compute shader more efficient than a pixel shader for image filtering? (score <span>13677</span> in )</a></li>
-<li><a href="#how-many-polygons-in-a-scene-can-modern-hardware-reach-while-maintaining-realtime-and-how-to-get-there-score-12230-in">10: How many polygons in a scene can modern hardware reach while maintaining realtime, and how to get there? (score <span>12230</span> in )</a></li>
-<li><a href="#opencl-doesnt-detect-gpu-score-11720-in">11: OpenCL doesn’t detect GPU (score <span>11720</span> in )</a></li>
-<li><a href="#what-is-the-simplest-way-to-compute-principal-curvature-for-a-mesh-triangle-score-11669-in">12: What is the simplest way to compute principal curvature for a mesh triangle? (score <span>11669</span> in )</a></li>
-<li><a href="#shading-phong-vs-gouraud-vs-flat-score-11655-in">13: Shading: Phong vs Gouraud vs Flat (score <span>11655</span> in )</a></li>
-<li><a href="#whats-the-difference-between-orthographic-and-perspective-projection-score-10858-in">14: What’s the difference between orthographic and perspective projection? (score <span>10858</span> in )</a></li>
-<li><a href="#sharing-code-between-multiple-glsl-shaders-score-10814-in">15: Sharing code between multiple GLSL shaders (score <span>10814</span> in )</a></li>
-<li><a href="#how-can-virtual-texturing-actually-be-efficient-score-10453-in-2015">16: How can virtual texturing actually be efficient? (score <span>10453</span> in 2015)</a></li>
-<li><a href="#how-to-combine-rotation-in-2-axis-into-one-matrix-score-10122-in">17: How to combine rotation in 2 axis into one matrix (score <span>10122</span> in )</a></li>
-<li><a href="#opengl-glsl---sobel-edge-detection-filter-score-9998-in-2017">18: OpenGL GLSL - Sobel Edge Detection Filter (score <span>9998</span> in 2017)</a></li>
-<li><a href="#directx-openglvulkan-concepts-mapping-chart-score-9646-in-2016">19: DirectX / OpenGL(Vulkan) concepts mapping chart (score <span>9646</span> in 2016)</a></li>
-<li><a href="#glsl.-can-someone-explain-why-gl_fragcoord.xy-screensize-is-performed-and-for-what-reason-score-9634-in-2019">20: GLSL. Can someone explain why gl_FragCoord.xy / screenSize is performed and for what reason? (score <span>9634</span> in 2019)</a></li>
-<li><a href="#light-intensity-of-an-rgb-value-score-9583-in-2017">21: “Light intensity” of an RGB value (score <span>9583</span> in 2017)</a></li>
-<li><a href="#what-is-the-difference-between-glossy-and-specular-reflection-score-9452-in-2017">22: What is the difference between glossy and specular reflection? (score <span>9452</span> in 2017)</a></li>
-<li><a href="#world-coordinates-normalised-device-coordinates-and-device-coordinates-score-9400-in">23: World coordinates, Normalised device coordinates and device coordinates (score <span>9400</span> in )</a></li>
-<li><a href="#why-does-monte-carlo-ray-tracing-perform-better-than-distributed-ray-tracing-score-9249-in-2015">24: Why does monte carlo ray tracing perform better than distributed ray tracing? (score <span>9249</span> in 2015)</a></li>
-<li><a href="#what-is-fwidth-and-how-does-it-work-score-8707-in">25: What is fwidth and how does it work? (score <span>8707</span> in )</a></li>
-<li><a href="#does-a-sphere-projected-into-2d-space-always-result-in-an-ellipse-score-8482-in-2015">26: Does a sphere projected into 2D space always result in an ellipse? (score <span>8482</span> in 2015)</a></li>
-<li><a href="#how-to-implement-a-trackball-in-opengl-score-8467-in-2015">27: How to implement a trackball in OpenGL? (score <span>8467</span> in 2015)</a></li>
-<li><a href="#what-is-a-stencil-buffer-score-7891-in">28: What is a stencil buffer? (score <span>7891</span> in )</a></li>
-<li><a href="#how-is-anti-aliasing-implemented-in-ray-tracing-score-7876-in-2016">29: How is Anti Aliasing Implemented in Ray Tracing? (score <span>7876</span> in 2016)</a></li>
-<li><a href="#why-are-quads-used-in-filmmaking-and-triangle-in-gaming-score-7842-in">30: Why are quads used in filmmaking and triangle in gaming? (score <span>7842</span> in )</a></li>
-<li><a href="#get-vector-length-with-glm-score-7625-in-2016">31: Get vector length with GLM (score <span>7625</span> in 2016)</a></li>
-<li><a href="#what-is-tessellation-in-computer-graphics-score-7436-in">32: What is Tessellation in computer graphics (score <span>7436</span> in )</a></li>
-<li><a href="#what-are-affine-transformations-score-7101-in">33: What are Affine Transformations? (score <span>7101</span> in )</a></li>
-<li><a href="#physically-based-shading---ambientindirect-lighting-score-6944-in">34: Physically based shading - ambient/indirect lighting (score <span>6944</span> in )</a></li>
-<li><a href="#why-is-the-transposed-inverse-of-the-model-view-matrix-used-to-transform-the-normal-vectors-score-6737-in-2015">35: Why is the transposed inverse of the model view matrix used to transform the normal vectors? (score <span>6737</span> in 2015)</a></li>
-<li><a href="#programmatically-generating-vertex-normals-score-6473-in">36: Programmatically generating vertex normals (score <span>6473</span> in )</a></li>
-<li><a href="#radiosity-vs-ray-tracing-score-6417-in">37: Radiosity VS Ray tracing (score <span>6417</span> in )</a></li>
-<li><a href="#how-is-a-light-probe-different-than-an-environmental-cube-map-score-6308-in">38: How is a light probe different than an environmental cube map? (score <span>6308</span> in )</a></li>
-<li><a href="#how-to-calculate-surface-normals-for-generated-geometry-score-6042-in-2017">39: How to Calculate Surface Normals for Generated Geometry (score <span>6042</span> in 2017)</a></li>
-<li><a href="#how-to-achieve-gimbal-lock-with-euler-angles-score-5992-in-2016">40: How to achieve gimbal lock with Euler angles? (score <span>5992</span> in 2016)</a></li>
-<li><a href="#what-is-ambient-lighting-score-5909-in-2015">41: What is ambient lighting? (score <span>5909</span> in 2015)</a></li>
-<li><a href="#what-is-an-index-buffer-and-how-is-it-related-to-vertex-buffers-score-5907-in">42: What is an index buffer and how is it related to vertex buffers? (score <span>5907</span> in )</a></li>
-<li><a href="#what-are-spherical-harmonics-light-probes-score-5859-in-2017">43: What are Spherical Harmonics &amp; Light Probes? (score <span>5859</span> in 2017)</a></li>
-<li><a href="#multiple-viewports-with-modern-opengl-score-5815-in-2017">44: Multiple viewports with modern OpenGL? (score <span>5815</span> in 2017)</a></li>
-<li><a href="#how-to-map-square-texture-to-triangle-score-5771-in">45: How to map square texture to triangle? (score <span>5771</span> in )</a></li>
-<li><a href="#gl_static_draw-vs-gl_dynamic_draw-vs-gl_stream_draw-does-it-matter-score-5712-in">46: GL_STATIC_DRAW vs GL_DYNAMIC_DRAW vs GL_STREAM_DRAW: does it matter? (score <span>5712</span> in )</a></li>
-<li><a href="#what-is-the-cost-of-changing-state-score-5685-in-2015">47: What is the cost of changing state? (score <span>5685</span> in 2015)</a></li>
-<li><a href="#why-is-accessing-textures-much-slower-when-calculating-the-texture-coordinate-in-the-fragment-shader-score-5543-in">48: Why is accessing textures much slower when calculating the texture coordinate in the fragment shader? (score <span>5543</span> in )</a></li>
-<li><a href="#what-are-the-differences-between-gpu-instancing-and-standard-instancing-score-5513-in">49: What are the differences between GPU instancing and standard instancing? (score <span>5513</span> in )</a></li>
-<li><a href="#what-is-importance-sampling-score-5298-in-2017">50: What is Importance Sampling? (score <span>5298</span> in 2017)</a></li>
-<li><a href="#why-do-red-green-and-blue-make-up-all-the-colors-score-5233-in-2017">51: Why do red, green, and blue make up all the colors? (score <span>5233</span> in 2017)</a></li>
-<li><a href="#send-texture-to-shader-score-5030-in">52: Send Texture to Shader (score <span>5030</span> in )</a></li>
-<li><a href="#opengl---detection-of-edges-score-4976-in-2016">53: OpenGL - Detection of edges (score <span>4976</span> in 2016)</a></li>
-<li><a href="#how-to-properly-combine-the-diffuse-and-specular-terms-score-4941-in">54: How to properly combine the diffuse and specular terms? (score <span>4941</span> in )</a></li>
-<li><a href="#is-russian-roulette-really-the-answer-score-4845-in-2016">55: Is Russian Roulette really the answer? (score <span>4845</span> in 2016)</a></li>
-<li><a href="#difference-between-rendering-in-opengl-and-3d-animation-software-score-4537-in-2015">56: Difference between rendering in OpenGL and 3D animation software (score <span>4537</span> in 2015)</a></li>
-<li><a href="#cause-of-shadow-acne-score-4525-in">57: Cause of shadow acne (score <span>4525</span> in )</a></li>
-<li><a href="#how-to-derive-a-perspective-projection-matrix-from-its-components-score-4507-in-2018">58: How to derive a perspective projection matrix from its components? (score <span>4507</span> in 2018)</a></li>
-<li><a href="#archimedean-spiral-in-c-score-4438-in-2015">59: Archimedean spiral in C++ (score <span>4438</span> in 2015)</a></li>
-<li><a href="#fast-antialiased-line-drawing-score-4400-in">60: Fast antialiased line drawing (score <span>4400</span> in )</a></li>
-<li><a href="#why-do-we-have-graphics-frameworks-like-opengl-and-directx-when-games-could-just-draw-pixels-directly-score-4280-in-2016">61: Why do we have graphics frameworks like OpenGL and DirectX, when games could just draw pixels directly? (score <span>4280</span> in 2016)</a></li>
-<li><a href="#why-do-t-junctions-in-meshes-result-in-cracks-score-4262-in">62: Why do T-junctions in meshes result in cracks? (score <span>4262</span> in )</a></li>
-<li><a href="#how-physically-based-is-the-diffuse-and-specular-distinction-score-4169-in-2018">63: How physically-based is the diffuse and specular distinction? (score <span>4169</span> in 2018)</a></li>
-<li><a href="#vulkan-uniform-buffers-versus-push-constants-for-static-data-score-4165-in">64: Vulkan: Uniform Buffers versus Push Constants for static data (score <span>4165</span> in )</a></li>
-<li><a href="#what-is-the-correct-order-of-transformations-scale-rotate-and-translate-and-why-score-4142-in">65: What is the correct order of transformations scale, rotate and translate and why? (score <span>4142</span> in )</a></li>
-<li><a href="#what-algorithms-are-behind-google-street-views-3d-mapping-mode-score-4113-in">66: What algorithm(s) are behind Google Street View’s 3d mapping mode? (score <span>4113</span> in )</a></li>
-<li><a href="#progressive-path-tracing-with-explicit-light-sampling-score-4015-in">67: Progressive Path Tracing with Explicit Light Sampling (score <span>4015</span> in )</a></li>
-<li><a href="#how-to-make-a-3d-model-for-unity-5-score-4012-in-2017">68: How to make a 3D model for Unity 5 (score <span>4012</span> in 2017)</a></li>
-<li><a href="#how-does-directx-12-sli-vram-stacking-work-score-3995-in">69: How does DirectX 12 SLI VRAM stacking work? (score <span>3995</span> in )</a></li>
-<li><a href="#why-is-recursion-forbidden-in-opencl-score-3962-in">70: Why is recursion forbidden in OpenCL? (score <span>3962</span> in )</a></li>
-<li><a href="#what-is-the-state-of-art-in-geometric-lod-in-games-score-3937-in">71: What is the state of art in geometric LOD in games? (score <span>3937</span> in )</a></li>
-<li><a href="#how-to-load-a-model-in-.json-in-three.js-score-3887-in-2016">72: How to load a model in .json in three.js (score <span>3887</span> in 2016)</a></li>
-<li><a href="#how-to-do-error-handling-with-opengl-score-3883-in-2017">73: How to do error handling with OpenGL? (score <span>3883</span> in 2017)</a></li>
-<li><a href="#physically-based-rendering-and-ray-tracing-score-3873-in">74: Physically based rendering and ray tracing (score <span>3873</span> in )</a></li>
-<li><a href="#how-does-temporal-reprojection-work-score-3753-in-2015">75: How does temporal reprojection work? (score <span>3753</span> in 2015)</a></li>
-<li><a href="#how-is-anisotropic-filtering-typically-implemented-in-modern-gpus-score-3729-in-2016">76: How is anisotropic filtering typically implemented in modern GPUs? (score <span>3729</span> in 2016)</a></li>
-<li><a href="#what-does-st-mean-in-the-context-of-opengl-score-3723-in">77: What does “st” mean in the context of OpenGL? (score <span>3723</span> in )</a></li>
-<li><a href="#how-does-vsync-affect-fps-exactly-when-not-at-full-vsync-fps-score-3700-in">78: How does vsync affect fps exactly when not at full vsync fps? (score <span>3700</span> in )</a></li>
-<li><a href="#how-to-translate-object-to-origin-score-3698-in">79: How to translate object to origin? (score <span>3698</span> in )</a></li>
-<li><a href="#how-can-i-debug-what-is-being-rendered-to-a-frame-buffer-object-in-opengl-score-3678-in-2015">80: How can I debug what is being rendered to a Frame Buffer Object in OpenGL? (score <span>3678</span> in 2015)</a></li>
-<li><a href="#why-are-normal-maps-blue-and-purple-in-color-score-3573-in-2019">81: Why are normal maps blue and purple in color? (score <span>3573</span> in 2019)</a></li>
-<li><a href="#how-to-convert-euler-angles-to-quaternions-and-get-the-same-euler-angles-back-from-quaternions-score-3533-in-2018">82: How to convert Euler angles to Quaternions and get the same Euler angles back from Quaternions? (score <span>3533</span> in 2018)</a></li>
-<li><a href="#advice-on-how-to-create-glsl-2d-soft-smokecloud-shader-score-3428-in">83: Advice on how to create GLSL 2D soft smoke/cloud shader (score <span>3428</span> in )</a></li>
-<li><a href="#path-tracing-the-cook-torrance-brdf-score-3418-in-2017">84: Path tracing the Cook-Torrance BRDF (score <span>3418</span> in 2017)</a></li>
-<li><a href="#understanding-glmperspective-vs-glmortho-score-3346-in">85: understanding glm::perspective vs glm::ortho (score <span>3346</span> in )</a></li>
-<li><a href="#what-is-the-difference-between-radiance-and-irradiance-in-brdf-score-3330-in">86: What is the difference between radiance and irradiance in BRDF (score <span>3330</span> in )</a></li>
-<li><a href="#what-is-the-difference-between-a-point-transformation-and-a-vector-transformation-score-3320-in">87: What is the difference between a point transformation and a vector transformation? (score <span>3320</span> in )</a></li>
-<li><a href="#shadow-rays-in-raytracing-score-3306-in-2015">88: Shadow rays in Raytracing (score <span>3306</span> in 2015)</a></li>
-<li><a href="#dynamic-array-in-glsl-score-3239-in-2017">89: Dynamic Array in GLSL (score <span>3239</span> in 2017)</a></li>
-<li><a href="#computing-a-rotation-complex-numbers-vs-rotation-matrix-score-3196-in">90: Computing a rotation: complex numbers vs rotation matrix (score <span>3196</span> in )</a></li>
-<li><a href="#why-is-the-scan-line-filling-algorithm-so-seemingly-over-complicated-score-3194-in-2017">91: Why is the scan line filling algorithm so seemingly over complicated? (score <span>3194</span> in 2017)</a></li>
-<li><a href="#how-are-volumetric-effects-handled-in-raytracing-score-3182-in">92: How are volumetric effects handled in raytracing? (score <span>3182</span> in )</a></li>
-<li><a href="#does-cosine-weighted-hemisphere-sampling-still-require-ndotl-when-calculating-contribution-for-indirect-light-score-3147-in-2017">93: Does cosine weighted hemisphere sampling still require NdotL when calculating contribution for indirect light? (score <span>3147</span> in 2017)</a></li>
-<li><a href="#confusion-between-usages-of-linear-rgb-and-srgb-score-3069-in-2017">94: Confusion between usages of linear RGB and sRGB (score <span>3069</span> in 2017)</a></li>
-<li><a href="#mirror-reflections-ray-tracing-or-rasterisation-score-3018-in-2017">95: Mirror Reflections: Ray Tracing or Rasterisation? (score <span>3018</span> in 2017)</a></li>
-<li><a href="#how-does-texture-cache-work-considering-multiple-shader-units-score-2990-in">96: How does Texture Cache work considering multiple shader units (score <span>2990</span> in )</a></li>
-<li><a href="#how-do-i-use-barycentric-coordinates-to-interpolate-vertex-normal-score-2933-in-2017">97: How do I use barycentric coordinates to interpolate vertex normal? (score <span>2933</span> in 2017)</a></li>
-<li><a href="#what-is-the-accepted-method-of-converting-shininess-to-roughness-and-vice-versa-score-2905-in">98: What is the accepted method of converting shininess to roughness, and vice versa? (score <span>2905</span> in )</a></li>
-<li><a href="#correct-form-of-the-ggx-geometry-term-score-2900-in">99: Correct form of the GGX geometry term (score <span>2900</span> in )</a></li>
-<li><a href="#what-are-some-methods-to-render-transparency-in-opengl-score-2871-in-2015">100: What are some methods to render transparency in OpenGL (score <span>2871</span> in 2015)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-is-gaussian-blur-implemented-score-37432-in-2017" class="level3">
