--- a/Computer_science_theory_top_100_se.html
+++ b/Computer_science_theory_top_100_se.html
@@ -13,118 +13,15 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Computer_science_theory &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#core-algorithms-deployed-score-192475-in-2013">1: Core algorithms deployed (score <span>192475</span> in 2013)</a></li>
-<li><a href="#what-papers-should-everyone-read-score-161084-in-2017">2: What papers should everyone read? (score <span>161084</span> in 2017)</a></li>
-<li><a href="#is-norbert-blums-2017-proof-that-p-ne-np-correct-score-115991-in-2017">3: Is Norbert Blum’s 2017 proof that <span class="math inline">\(P \ne NP\)</span> correct? (score <span>115991</span> in 2017)</a></li>
-<li><a href="#whats-new-in-purely-functional-data-structures-since-okasaki-score-115419-in">4: What’s new in purely functional data structures since Okasaki? (score <span>115419</span> in )</a></li>
-<li><a href="#what-books-should-everyone-read-score-109951-in-2017">5: What Books Should Everyone Read? (score <span>109951</span> in 2017)</a></li>
-<li><a href="#algorithms-from-the-book.-score-108588-in-2011">6: Algorithms from the Book. (score <span>108588</span> in 2011)</a></li>
-<li><a href="#what-is-the-enlightenment-im-supposed-to-attain-after-studying-finite-automata-score-95025-in-2014">7: What is the enlightenment I’m supposed to attain after studying finite automata? (score <span>95025</span> in 2014)</a></li>
-<li><a href="#major-unsolved-problems-in-theoretical-computer-science-score-86634-in-2010">8: Major unsolved problems in theoretical computer science? (score <span>86634</span> in 2010)</a></li>
-<li><a href="#to-what-extent-is-advanced-mathematics-neededuseful-in-a.i.-research-score-48191-in-2012">9: To what extent is “advanced mathematics” needed/useful in A.I. research? (score <span>48191</span> in 2012)</a></li>
-<li><a href="#how-do-the-state-of-the-art-pathfinding-algorithms-for-changing-graphs-d-d-lite-lpa-etc-differ-score-45048-in-2012">10: How do the state-of-the-art pathfinding algorithms for changing graphs (D<em>, D</em>-Lite, LPA*, etc) differ? (score <span>45048</span> in 2012)</a></li>
-<li><a href="#what-would-a-very-simple-quantum-program-look-like-score-41031-in-2011">11: What would a very simple quantum program look like? (score <span>41031</span> in 2011)</a></li>
-<li><a href="#what-videos-should-everybody-watch-score-38885-in-2011">12: What videos should everybody watch? (score <span>38885</span> in 2011)</a></li>
-<li><a href="#why-would-one-ever-use-an-octree-over-a-kd-tree-score-29762-in-2011">13: Why would one ever use an Octree over a KD-tree? (score <span>29762</span> in 2011)</a></li>
-<li><a href="#what-cs-blogs-should-everyone-read-score-28830-in-2019">14: What CS blogs should everyone read? (score <span>28830</span> in 2019)</a></li>
-<li><a href="#what-is-the-contribution-of-lambda-calculus-to-the-field-of-theory-of-computation-score-27857-in">15: What is the contribution of lambda calculus to the field of theory of computation? (score <span>27857</span> in )</a></li>
-<li><a href="#tournament-selection-in-genetic-algorithms-score-26844-in">16: tournament selection in genetic algorithms (score <span>26844</span> in )</a></li>
-<li><a href="#universities-for-quantum-computing-information-score-24408-in-2012">17: Universities for Quantum Computing / Information? (score <span>24408</span> in 2012)</a></li>
-<li><a href="#application-of-calculus-in-computer-science-score-23350-in-2013">18: Application of calculus in computer science (score <span>23350</span> in 2013)</a></li>
-<li><a href="#books-on-automata-theory-for-self-study-score-22768-in-2010">19: Books on automata theory for self-study (score <span>22768</span> in 2010)</a></li>
-<li><a href="#how-practical-is-automata-theory-score-22338-in-2011">20: How practical is Automata Theory? (score <span>22338</span> in 2011)</a></li>
-<li><a href="#direct-sat-to-3-sat-reduction-score-22278-in-2011">21: Direct SAT to 3-SAT reduction (score <span>22278</span> in 2011)</a></li>
-<li><a href="#why-is-2sat-in-p-score-22231-in-2011">22: Why is 2SAT in P? (score <span>22231</span> in 2011)</a></li>
-<li><a href="#explain-p-np-problem-to-10-year-old-score-22200-in-2011">23: Explain P = NP problem to 10 year old (score <span>22200</span> in 2011)</a></li>
-<li><a href="#what-is-the-actual-time-complexity-of-gaussian-elimination-score-21354-in-2017">24: What is the actual time complexity of Gaussian elimination? (score <span>21354</span> in 2017)</a></li>
-<li><a href="#is-integer-factorization-an-np-complete-problem-score-21023-in-2017">25: Is integer factorization an NP-complete problem? (score <span>21023</span> in 2017)</a></li>
-<li><a href="#application-of-graph-theory-in-computer-science-score-20125-in-2017">26: Application of graph theory in computer science (score <span>20125</span> in 2017)</a></li>
-<li><a href="#relationship-between-turing-machine-and-lambda-calculus-score-19315-in-2010">27: Relationship between Turing Machine and Lambda calculus? (score <span>19315</span> in 2010)</a></li>
-<li><a href="#what-is-the-difference-between-non-determinism-and-randomness-score-19080-in-2010">28: What is the difference between non-determinism and randomness? (score <span>19080</span> in 2010)</a></li>
-<li><a href="#intuitively-why-is-the-complementary-slackness-condition-true-score-18725-in-2014">29: Intuitively, why is the complementary slackness condition true? (score <span>18725</span> in 2014)</a></li>
-<li><a href="#problems-between-p-and-npc-score-18635-in-2011">30: Problems Between P and NPC (score <span>18635</span> in 2011)</a></li>
-<li><a href="#uses-of-algebraic-structures-in-theoretical-computer-science-score-18480-in-2012">31: Uses of algebraic structures in theoretical computer science (score <span>18480</span> in 2012)</a></li>
-<li><a href="#list-of-tcs-conferences-and-workshops-score-18393-in-2011">32: List of TCS conferences and workshops (score <span>18393</span> in 2011)</a></li>
-<li><a href="#super-mario-galaxy-problem-score-17714-in-2017">33: Super Mario Galaxy problem (score <span>17714</span> in 2017)</a></li>
-<li><a href="#which-is-the-limit-of-lossless-compression-data-if-there-exists-such-a-limit-score-16785-in-2011">34: Which is the limit of lossless compression data? (if there exists such a limit) (score <span>16785</span> in 2011)</a></li>
-<li><a href="#what-lecture-notes-should-everyone-read-score-15885-in-2017">35: What Lecture Notes Should Everyone Read? (score <span>15885</span> in 2017)</a></li>
-<li><a href="#what-kind-of-mathematical-background-is-needed-for-complexity-theory-score-15531-in-2011">36: What kind of mathematical background is needed for complexity theory? (score <span>15531</span> in 2011)</a></li>
-<li><a href="#why-is-cnf-used-for-sat-and-not-dnf-score-15399-in-2011">37: Why is CNF used for SAT and not DNF? (score <span>15399</span> in 2011)</a></li>
-<li><a href="#funny-tcs-related-papers-etc-score-15340-in-2010">38: Funny TCS-related papers etc? (score <span>15340</span> in 2010)</a></li>
-<li><a href="#real-computers-have-only-a-finite-number-of-states-so-what-is-the-relevance-of-turing-machines-to-real-computers-score-15003-in-2016">39: Real computers have only a finite number of states, so what is the relevance of Turing machines to real computers? (score <span>15003</span> in 2016)</a></li>
-<li><a href="#research-and-open-challenges-in-programming-language-theory-score-14670-in-2017">40: Research and open challenges in Programming Language Theory (score <span>14670</span> in 2017)</a></li>
-<li><a href="#what-would-it-mean-to-disprove-church-turing-thesis-score-13997-in-2011">41: What would it mean to disprove Church-Turing thesis? (score <span>13997</span> in 2011)</a></li>
-<li><a href="#why-go-to-theoretical-computer-scienceresearch-score-13409-in-2011">42: Why go to theoretical computer science/research? (score <span>13409</span> in 2011)</a></li>
-<li><a href="#what-are-the-recent-tcs-books-whose-drafts-are-available-online-score-13175-in-2017">43: What are the recent TCS books whose drafts are available online? (score <span>13175</span> in 2017)</a></li>
-<li><a href="#universal-approximation-theorem-neural-networks-score-12948-in-2017">44: Universal Approximation Theorem — Neural Networks (score <span>12948</span> in 2017)</a></li>
-<li><a href="#most-memorable-cs-paper-titles-score-12815-in-2017">45: Most memorable CS paper titles (score <span>12815</span> in 2017)</a></li>
-<li><a href="#complexity-of-the-simplex-algorithm-score-12662-in-2013">46: Complexity of the simplex algorithm (score <span>12662</span> in 2013)</a></li>
-<li><a href="#why-can-machine-learning-not-recognize-prime-numbers-score-12640-in-2013">47: Why can machine learning not recognize prime numbers? (score <span>12640</span> in 2013)</a></li>
-<li><a href="#what-is-the-difference-between-a-second-preimage-attack-and-a-collision-attack-score-12584-in-2010">48: What is the difference between a second preimage attack and a collision attack? (score <span>12584</span> in 2010)</a></li>
-<li><a href="#powerful-algorithms-too-complex-to-implement-score-12560-in-2011">49: Powerful Algorithms too complex to implement (score <span>12560</span> in 2011)</a></li>
-<li><a href="#complexity-of-finding-the-eigendecomposition-of-a-matrix-score-12130-in-2017">50: Complexity of Finding the Eigendecomposition of a Matrix (score <span>12130</span> in 2017)</a></li>
-<li><a href="#what-is-the-recommended-software-for-drawing-data-structures-such-as-graphs-and-trees-score-12097-in-2010">51: What is the recommended software for drawing data structures such as graphs and trees? (score <span>12097</span> in 2010)</a></li>
-<li><a href="#approximation-algorithms-for-metric-tsp-score-11981-in-2013">52: Approximation algorithms for Metric TSP (score <span>11981</span> in 2013)</a></li>
-<li><a href="#what-is-the-best-text-of-computation-theorytheory-of-computation-score-11900-in-2010">53: What is the best text of computation theory/theory of computation? (score <span>11900</span> in 2010)</a></li>
-<li><a href="#applications-of-topology-to-computer-science-score-11553-in-2010">54: Applications of topology to computer science (score <span>11553</span> in 2010)</a></li>
-<li><a href="#what-is-the-difference-between-ltl-and-ctl-score-11413-in-2013">55: What is the difference between LTL and CTL? (score <span>11413</span> in 2013)</a></li>
-<li><a href="#advice-on-good-research-practices-score-11358-in-2017">56: Advice on good research practices (score <span>11358</span> in 2017)</a></li>
-<li><a href="#fastest-way-to-find-an-s-t-min-cut-from-an-s-t-max-flow-score-10777-in">57: Fastest way to find an s-t min-cut from an s-t max-flow? (score <span>10777</span> in )</a></li>
-<li><a href="#data-for-testing-graph-algorithms-score-10639-in-2011">58: Data for testing graph algorithms (score <span>10639</span> in 2011)</a></li>
-<li><a href="#alan-turings-contributions-to-computer-science-score-10375-in-2012">59: Alan Turing’s Contributions to Computer Science (score <span>10375</span> in 2012)</a></li>
-<li><a href="#how-to-check-if-a-number-is-a-perfect-power-in-polynomial-time-score-10370-in-2010">60: How to check if a number is a perfect power in polynomial time (score <span>10370</span> in 2010)</a></li>
-<li><a href="#one-stack-two-queues-score-10089-in-2010">61: One Stack, Two Queues (score <span>10089</span> in 2010)</a></li>
-<li><a href="#what-is-the-computational-complexity-of-solving-chess-score-9986-in-2011">62: What is the computational complexity of “solving” chess? (score <span>9986</span> in 2011)</a></li>
-<li><a href="#how-hard-is-unshuffling-a-string-score-9976-in-2013">63: How hard is unshuffling a string? (score <span>9976</span> in 2013)</a></li>
-<li><a href="#what-is-the-k-sat-problem-score-9914-in">64: What is the k-SAT problem? (score <span>9914</span> in )</a></li>
-<li><a href="#why-is-the-consensus-problem-so-important-in-distributed-computing-score-9354-in-2013">65: Why is the consensus problem so important in distributed computing? (score <span>9354</span> in 2013)</a></li>
-<li><a href="#was-the-reduction-in-shors-algorithm-originally-discovered-by-shor-score-9285-in-2014">66: Was the reduction in Shor’s algorithm originally discovered by Shor? (score <span>9285</span> in 2014)</a></li>
-<li><a href="#graduate-studies-phd-in-cs-theory-vs.-applied-math-score-9152-in-2011">67: Graduate studies (PhD) in CS Theory vs. Applied Math (score <span>9152</span> in 2011)</a></li>
-<li><a href="#applications-of-game-theory-in-computer-science-score-9090-in-2013">68: Applications of Game theory in computer science? (score <span>9090</span> in 2013)</a></li>
-<li><a href="#a-simple-problem-whose-decidability-is-not-known-score-9071-in-2017">69: A simple problem whose decidability is not known (score <span>9071</span> in 2017)</a></li>
-<li><a href="#computational-complexity-of-learning-classification-algorithms---fitting-the-parameters-score-9069-in-2011">70: Computational complexity of learning (classification) algorithms - fitting the parameters (score <span>9069</span> in 2011)</a></li>
-<li><a href="#what-is-the-difference-between-propositions-and-judgments-score-8965-in-2015">71: What is the difference between propositions and judgments? (score <span>8965</span> in 2015)</a></li>
-<li><a href="#how-to-get-a-job-score-8917-in-2010">72: How to get a job (score <span>8917</span> in 2010)</a></li>
-<li><a href="#vertex-cover-applications-in-the-real-world-score-8809-in-2011">73: Vertex Cover applications in the real world (score <span>8809</span> in 2011)</a></li>
-<li><a href="#is-finding-the-minimum-regular-expression-an-np-complete-problem-score-8653-in-2010">74: Is finding the minimum regular expression an NP-complete problem? (score <span>8653</span> in 2010)</a></li>
-<li><a href="#should-we-consider-mathsfp-neq-mathsfnp-a-law-of-nature-score-8636-in-2017">75: Should we consider <span class="math inline">\(\mathsf{P} \neq \mathsf{NP}\)</span> a law of nature? (score <span>8636</span> in 2017)</a></li>
-<li><a href="#algorithm-for-max-network-flow-with-lower-bounds-and-its-complexity-score-8435-in-2013">76: Algorithm for Max Network Flow with lower bounds and its complexity (score <span>8435</span> in 2013)</a></li>
-<li><a href="#flood-fill-vs-depth-first-search-score-8414-in-2013">77: Flood fill vs depth first search (score <span>8414</span> in 2013)</a></li>
-<li><a href="#are-research-papers-hard-to-read-score-8395-in-2010">78: Are research papers hard to read? (score <span>8395</span> in 2010)</a></li>
-<li><a href="#which-algorithms-are-used-most-often-in-practice-score-8393-in-2010">79: Which algorithms are used most often in practice? (score <span>8393</span> in 2010)</a></li>
-<li><a href="#counting-the-number-of-simple-paths-in-undirected-graph-score-8370-in-2013">80: Counting the Number of Simple Paths in Undirected Graph (score <span>8370</span> in 2013)</a></li>
-<li><a href="#efficient-diff-algorithm-for-trees-and-levenshtein-distance-score-8339-in-2012">81: efficient diff algorithm for trees and Levenshtein distance (score <span>8339</span> in 2012)</a></li>
-<li><a href="#finding-the-shortest-path-in-the-presence-of-negative-cycles-score-8325-in-2013">82: Finding the shortest path in the presence of negative cycles (score <span>8325</span> in 2013)</a></li>
-<li><a href="#applications-of-hamiltonian-cycle-problem-score-8273-in-2016">83: Applications of Hamiltonian Cycle Problem (score <span>8273</span> in 2016)</a></li>
-<li><a href="#how-to-publish-a-paper-score-8259-in-2011">84: How to publish a paper? (score <span>8259</span> in 2011)</a></li>
-<li><a href="#complex-analysis-in-theoretical-computer-science-score-8259-in">85: Complex analysis in theoretical computer science (score <span>8259</span> in )</a></li>
-<li><a href="#what-is-the-real-difference-between-traveling-salesman-problem-tsp-and-vehicle-routing-problem-vrp-score-8153-in-2012">86: what is the real difference between traveling salesman problem (TSP) and vehicle routing problem (VRP)? (score <span>8153</span> in 2012)</a></li>
-<li><a href="#comparing-two-graphs-score-8140-in-2014">87: Comparing two graphs (score <span>8140</span> in 2014)</a></li>
-<li><a href="#relationship-between-context-freedecidable-languages-and-np-score-8135-in">88: Relationship between context-free/decidable languages and NP (score <span>8135</span> in )</a></li>
-<li><a href="#is-there-a-hash-function-for-a-collection-i.e.-multi-set-of-integers-that-has-good-theoretical-guarantees-score-8004-in-2017">89: Is there a hash function for a collection (i.e., multi-set) of integers that has good theoretical guarantees? (score <span>8004</span> in 2017)</a></li>
-<li><a href="#major-unsolved-problems-in-distributed-systems-score-7954-in-2017">90: Major unsolved problems in distributed systems? (score <span>7954</span> in 2017)</a></li>
-<li><a href="#examples-of-unrelated-mathematics-playing-a-fundamental-role-in-tcs-score-7939-in-2017">91: Examples of “Unrelated” Mathematics Playing a Fundamental Role in TCS? (score <span>7939</span> in 2017)</a></li>
-<li><a href="#what-are-some-good-introductory-books-on-type-theory-score-7901-in-2014">92: What are some good introductory books on type theory? (score <span>7901</span> in 2014)</a></li>
-<li><a href="#is-optimally-solving-the-nnn-rubiks-cube-np-hard-score-7898-in-2010">93: Is optimally solving the n×n×n Rubik’s Cube NP-hard? (score <span>7898</span> in 2010)</a></li>
-<li><a href="#how-important-is-knowing-how-to-program-for-tcs-score-7832-in-2011">94: How important is knowing how to program for TCS? (score <span>7832</span> in 2011)</a></li>
-<li><a href="#why-is-non-determinism-push-down-automata-necessary-score-7773-in-2012">95: Why is non-determinism (Push-down automata) necessary? (score <span>7773</span> in 2012)</a></li>
-<li><a href="#examples-of-the-price-of-abstraction-score-7728-in">96: Examples of the price of abstraction? (score <span>7728</span> in )</a></li>
-<li><a href="#queueing-theory-how-to-estimate-steady-state-queue-length-for-single-queue-n-servers-score-7687-in-2011">97: Queueing Theory: How to estimate steady-state queue length for single queue, N servers? (score <span>7687</span> in 2011)</a></li>
-<li><a href="#how-do-i-referee-a-paper-score-7622-in-2017">98: How do I referee a paper? (score <span>7622</span> in 2017)</a></li>
-<li><a href="#solid-applications-of-category-theory-in-tcs-score-7543-in">99: Solid applications of category theory in TCS? (score <span>7543</span> in )</a></li>
-<li><a href="#is-the-n-queens-problem-np-hard-score-7509-in-2012">100: Is the N Queens problem NP-hard? (score <span>7509</span> in 2012)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="core-algorithms-deployed-score-192475-in-2013" class="level3">
