--- a/Css_top_100.html
+++ b/Css_top_100.html
@@ -78,117 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Css &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-to-horizontally-center-a-div-score-3829513-in-2018">1: How to horizontally center a &lt;div&gt;? (score <span>3829513</span> in 2018)</a></li>
-<li><a href="#how-do-i-vertically-center-text-with-css-score-3100733-in-2019">2: How do I vertically center text with CSS? (score <span>3100733</span> in 2019)</a></li>
-<li><a href="#how-to-align-a-div-to-the-middle-horizontallywidth-of-the-page-score-2419195-in-2019">3: How to align a &lt;div&gt; to the middle (horizontally/width) of the page (score <span>2419195</span> in 2019)</a></li>
-<li><a href="#how-do-i-auto-resize-an-image-to-fit-a-div-container-score-2256223-in-2019">4: How do I auto-resize an image to fit a ‘div’ container? (score <span>2256223</span> in 2019)</a></li>
-<li><a href="#set-cellpadding-and-cellspacing-in-css-score-2226855-in-2018">5: Set cellpadding and cellspacing in CSS? (score <span>2226855</span> in 2018)</a></li>
-<li><a href="#center-a-column-using-twitter-bootstrap-3-score-2068068-in-2019">6: Center a column using Twitter Bootstrap 3 (score <span>2068068</span> in 2019)</a></li>
-<li><a href="#i-need-an-unordered-list-without-any-bullets-score-1985502-in-2019">7: I need an unordered list without any bullets (score <span>1985502</span> in 2019)</a></li>
-<li><a href="#make-the-cursor-a-hand-when-a-user-hovers-over-a-list-item-score-1857281-in-2018">8: Make the cursor a hand when a user hovers over a list item (score <span>1857281</span> in 2018)</a></li>
-<li><a href="#css-background-opacity-score-1857136-in-2019">9: CSS Background Opacity (score <span>1857136</span> in 2019)</a></li>
-<li><a href="#how-to-align-content-of-a-div-to-the-bottom-score-1847026-in-2019">10: How to align content of a div to the bottom (score <span>1847026</span> in 2019)</a></li>
-<li><a href="#how-to-make-a-div-100-height-of-the-browser-window-score-1834779-in-2019">11: How to make a div 100% height of the browser window (score <span>1834779</span> in 2019)</a></li>
-<li><a href="#is-there-a-css-parent-selector-score-1806412-in-2019">12: Is there a CSS parent selector? (score <span>1806412</span> in 2019)</a></li>
-<li><a href="#how-to-disable-text-selection-highlighting-score-1755509-in-2019">13: How to disable text selection highlighting (score <span>1755509</span> in 2019)</a></li>
-<li><a href="#css-opacity-only-to-background-color-not-the-text-on-it-score-1753836-in-2019">14: CSS opacity only to background color, not the text on it? (score <span>1753836</span> in 2019)</a></li>
-<li><a href="#change-an-html5-inputs-placeholder-color-with-css-score-1702940-in-2018">15: Change an HTML5 input’s placeholder color with CSS (score <span>1702940</span> in 2018)</a></li>
-<li><a href="#stretch-and-scale-a-css-image-in-the-background---with-css-only-score-1676896-in-2017">16: Stretch and scale a CSS image in the background - with CSS only (score <span>1676896</span> in 2017)</a></li>
-<li><a href="#how-to-overlay-one-div-over-another-div-score-1664399-in-2019">17: How to overlay one div over another div (score <span>1664399</span> in 2019)</a></li>
-<li><a href="#hiding-the-scroll-bar-on-an-html-page-score-1654295-in-2019">18: Hiding the scroll bar on an HTML page (score <span>1654295</span> in 2019)</a></li>
-<li><a href="#css-center-text-horizontally-and-vertically-inside-a-div-block-score-1633481-in-2019">19: CSS center text (horizontally and vertically) inside a div block (score <span>1633481</span> in 2019)</a></li>
-<li><a href="#how-to-style-a-checkbox-using-css-score-1556560-in-2019">20: How to style a checkbox using CSS (score <span>1556560</span> in 2019)</a></li>
-<li><a href="#how-do-i-vertically-align-text-in-a-div-score-1542747-in-2018">21: How do I vertically align text in a div? (score <span>1542747</span> in 2018)</a></li>
-<li><a href="#how-to-remove-focus-border-outline-around-textinput-boxes-chrome-score-1525931-in-2019">22: How to remove focus border (outline) around text/input boxes? (Chrome) (score <span>1525931</span> in 2019)</a></li>
-<li><a href="#how-do-i-style-a-select-dropdown-with-only-css-score-1519897-in-2019">23: How do I style a &lt;select&gt; dropdown with only CSS? (score <span>1519897</span> in 2019)</a></li>
-<li><a href="#how-do-i-give-text-or-an-image-a-transparent-background-using-css-score-1510757-in-2016">24: How do I give text or an image a transparent background using CSS? (score <span>1510757</span> in 2016)</a></li>
-<li><a href="#how-to-vertically-align-an-image-inside-a-div-score-1475597-in-2019">25: How to vertically align an image inside a div (score <span>1475597</span> in 2019)</a></li>
-<li><a href="#how-to-apply-a-css-filter-to-a-background-image-score-1462311-in-2019">26: How to apply a CSS filter to a background image (score <span>1462311</span> in 2019)</a></li>
-<li><a href="#hide-scroll-bar-but-while-still-being-able-to-scroll-score-1456454-in-2018">27: Hide scroll bar, but while still being able to scroll (score <span>1456454</span> in 2018)</a></li>
-<li><a href="#resize-image-proportionally-with-css-score-1398643-in-2018">28: Resize image proportionally with CSS? (score <span>1398643</span> in 2018)</a></li>
-<li><a href="#how-to-vertically-center-a-div-for-all-browsers-score-1394635-in-2018">29: How to vertically center a div for all browsers? (score <span>1394635</span> in 2018)</a></li>
-<li><a href="#vertically-align-text-within-a-div-score-1388670-in-2019">30: Vertically align text within a div (score <span>1388670</span> in 2019)</a></li>
-<li><a href="#vertical-align-with-bootstrap-3-score-1388358-in-2015">31: vertical-align with Bootstrap 3 (score <span>1388358</span> in 2015)</a></li>
-<li><a href="#how-do-i-make-a-placeholder-for-a-select-box-score-1375841-in-2019">32: How do I make a placeholder for a ‘select’ box? (score <span>1375841</span> in 2019)</a></li>
-<li><a href="#transitions-on-the-display-property-score-1340917-in-2019">33: Transitions on the display: property (score <span>1340917</span> in 2019)</a></li>
-<li><a href="#how-to-make-div-not-larger-than-its-contents-score-1323786-in-2015">34: How to make div not larger than its contents? (score <span>1323786</span> in 2015)</a></li>
-<li><a href="#bootstrap---text-align-class-for-inside-a-table-score-1319954-in-2019">35: Bootstrap - Text-align class for inside a table (score <span>1319954</span> in 2019)</a></li>
-<li><a href="#how-to-insert-spacestabs-in-text-using-htmlcss-score-1265157-in-2019">36: How to insert spaces/tabs in text using HTML/CSS (score <span>1265157</span> in 2019)</a></li>
-<li><a href="#how-do-i-disable-the-resizable-property-of-a-textarea-score-1259614-in-2019">37: How do I disable the resizable property of a textarea? (score <span>1259614</span> in 2019)</a></li>
-<li><a href="#retrieve-the-position-xy-of-an-html-element-score-1258174-in-2013">38: Retrieve the position (X,Y) of an HTML element (score <span>1258174</span> in 2013)</a></li>
-<li><a href="#how-to-vertical-align-elements-in-a-div-score-1237657-in-2018">39: How to Vertical align elements in a div? (score <span>1237657</span> in 2018)</a></li>
-<li><a href="#center-image-using-text-align-center-score-1188789-in-2013">40: Center image using text-align center? (score <span>1188789</span> in 2013)</a></li>
-<li><a href="#vertically-align-text-next-to-an-image-score-1187180-in-2019">41: Vertically align text next to an image? (score <span>1187180</span> in 2019)</a></li>
-<li><a href="#how-to-disable-a-link-using-only-css-score-1144833-in-2017">42: How to disable a link using only CSS? (score <span>1144833</span> in 2017)</a></li>
-<li><a href="#change-navbar-color-in-twitter-bootstrap-score-1110481-in-2018">43: Change navbar color in Twitter Bootstrap (score <span>1110481</span> in 2018)</a></li>
-<li><a href="#how-to-apply-css-to-iframe-score-1101856-in-2014">44: How to apply CSS to iframe? (score <span>1101856</span> in 2014)</a></li>
-<li><a href="#space-between-two-rows-in-a-table-score-1096005-in-2016">45: Space between two rows in a table? (score <span>1096005</span> in 2016)</a></li>
-<li><a href="#how-do-you-easily-horizontally-center-a-div-using-css-score-1095138-in">46: How do you easily horizontally center a &lt;div&gt; using CSS? (score <span>1095138</span> in )</a></li>
-<li><a href="#changing-the-color-of-an-hr-element-score-1094306-in-2018">47: Changing the color of an hr element (score <span>1094306</span> in 2018)</a></li>
-<li><a href="#using-css-for-a-fade-in-effect-on-page-load-score-1067009-in-2019">48: Using CSS for a fade-in effect on page load (score <span>1067009</span> in 2019)</a></li>
-<li><a href="#how-to-center-absolutely-positioned-element-in-div-score-1065702-in-2017">49: How to center absolutely positioned element in div? (score <span>1065702</span> in 2017)</a></li>
-<li><a href="#font-scaling-based-on-width-of-container-score-1051157-in-2019">50: Font scaling based on width of container (score <span>1051157</span> in 2019)</a></li>
-<li><a href="#how-can-i-position-my-div-at-the-bottom-of-its-container-score-1043714-in-2017">51: How can I position my div at the bottom of its container? (score <span>1043714</span> in 2017)</a></li>
-<li><a href="#making-a-div-vertically-scrollable-using-css-score-1023998-in-2015">52: Making a div vertically scrollable using CSS (score <span>1023998</span> in 2015)</a></li>
-<li><a href="#opacity-of-background-color-but-not-the-text-score-1007381-in-2016">53: Opacity of background-color, but not the text (score <span>1007381</span> in 2016)</a></li>
-<li><a href="#remove-stubborn-underline-from-link-score-982128-in-2019">54: Remove stubborn underline from link (score <span>982128</span> in 2019)</a></li>
-<li><a href="#align-image-in-center-and-middle-within-div-score-975288-in-2014">55: Align image in center and middle within div (score <span>975288</span> in 2014)</a></li>
-<li><a href="#how-to-make-a-vertical-line-in-html-score-967203-in-2016">56: How to make a vertical line in HTML (score <span>967203</span> in 2016)</a></li>
-<li><a href="#how-can-i-remove-a-style-added-with-.css-function-score-956804-in-2018">57: How can I remove a style added with .css() function? (score <span>956804</span> in 2018)</a></li>
-<li><a href="#how-to-write-ahover-in-inline-css-score-955832-in-2017">58: How to write a:hover in inline CSS? (score <span>955832</span> in 2017)</a></li>
-<li><a href="#set-the-table-column-width-constant-regardless-of-the-amount-of-text-in-its-cells-score-948281-in-2017">59: Set the table column width constant regardless of the amount of text in its cells? (score <span>948281</span> in 2017)</a></li>
-<li><a href="#how-to-align-checkboxes-and-their-labels-consistently-cross-browsers-score-939259-in-2018">60: How to align checkboxes and their labels consistently cross-browsers (score <span>939259</span> in 2018)</a></li>
-<li><a href="#responsive-font-size-in-css-score-931009-in-2019">61: Responsive font size in CSS (score <span>931009</span> in 2019)</a></li>
-<li><a href="#how-to-make-an-image-center-vertically-horizontally-inside-a-bigger-div-score-929682-in-2016">62: How to make an image center (vertically &amp; horizontally) inside a bigger div (score <span>929682</span> in 2016)</a></li>
-<li><a href="#how-can-i-transition-height-0-to-height-auto-using-css-score-929463-in-2017">63: How can I transition height: 0; to height: auto; using CSS? (score <span>929463</span> in 2017)</a></li>
-<li><a href="#set-cookie-and-get-cookie-with-javascript-score-928603-in-2018">64: Set cookie and get cookie with JavaScript (score <span>928603</span> in 2018)</a></li>
-<li><a href="#media-min-width-max-width-score-921201-in-2016">65: <span class="citation" data-cites="Media">@Media</span> min-width &amp; max-width (score <span>921201</span> in 2016)</a></li>
-<li><a href="#css-to-make-html-page-footer-stay-at-bottom-of-the-page-with-a-minimum-height-but-not-overlap-the-page-score-918389-in-2018">66: CSS to make HTML page footer stay at bottom of the page with a minimum height, but not overlap the page (score <span>918389</span> in 2018)</a></li>
-<li><a href="#how-do-you-get-centered-content-using-twitter-bootstrap-score-918180-in-2017">67: How do you get centered content using Twitter Bootstrap? (score <span>918180</span> in 2017)</a></li>
-<li><a href="#how-to-line-break-from-css-without-using-score-917036-in-2018">68: How to line-break from css, without using <br />? (score <span>917036</span> in 2018)</a></li>
-<li><a href="#css-selector-for-first-element-with-class-score-913018-in-2018">69: CSS selector for first element with class (score <span>913018</span> in 2018)</a></li>
-<li><a href="#make-a-div-fill-the-height-of-the-remaining-screen-space-score-891472-in-2019">70: Make a div fill the height of the remaining screen space (score <span>891472</span> in 2019)</a></li>
-<li><a href="#styling-an-input-typefile-button-score-889426-in-2019">71: Styling an input type=“file” button (score <span>889426</span> in 2019)</a></li>
-<li><a href="#set-size-on-background-image-with-css-score-871034-in-2014">72: Set size on background image with CSS? (score <span>871034</span> in 2014)</a></li>
-<li><a href="#flexbox-center-horizontally-and-vertically-score-870181-in-2016">73: Flexbox: center horizontally and vertically (score <span>870181</span> in 2016)</a></li>
-<li><a href="#slide-right-to-left-score-867488-in-2016">74: Slide right to left? (score <span>867488</span> in 2016)</a></li>
-<li><a href="#stretch-and-scale-css-background-score-864111-in-2012">75: Stretch and scale CSS background (score <span>864111</span> in 2012)</a></li>
-<li><a href="#placing-border-inside-of-div-and-not-on-its-edge-score-852960-in-2015">76: Placing border inside of div and not on its edge (score <span>852960</span> in 2015)</a></li>
-<li><a href="#how-to-force-child-div-to-be-100-of-parent-divs-height-without-specifying-parents-height-score-851350-in-2019">77: How to force child div to be 100% of parent div’s height without specifying parent’s height? (score <span>851350</span> in 2019)</a></li>
-<li><a href="#best-way-to-center-a-div-on-a-page-vertically-and-horizontally-score-849636-in-2018">78: Best way to center a &lt;div&gt; on a page vertically and horizontally? (score <span>849636</span> in 2018)</a></li>
-<li><a href="#can-i-have-an-onclick-effect-in-css-score-847017-in-2019">79: Can I have an onclick effect in CSS? (score <span>847017</span> in 2019)</a></li>
-<li><a href="#convert-html-css-to-pdf-with-php-score-843541-in-2018">80: Convert HTML + CSS to PDF with PHP? (score <span>843541</span> in 2018)</a></li>
-<li><a href="#css-force-image-resize-and-keep-aspect-ratio-score-837591-in-2013">81: CSS force image resize and keep aspect ratio (score <span>837591</span> in 2013)</a></li>
-<li><a href="#how-to-add-some-non-standard-font-to-a-website-score-831371-in-2012">82: How to add some non-standard font to a website? (score <span>831371</span> in 2012)</a></li>
-<li><a href="#how-do-you-make-div-elements-display-inline-score-829472-in-2013">83: How do you make div elements display inline? (score <span>829472</span> in 2013)</a></li>
-<li><a href="#bootstrap-navbar-with-left-center-or-right-aligned-items-score-828222-in-2018">84: Bootstrap NavBar with left, center or right aligned items (score <span>828222</span> in 2018)</a></li>
-<li><a href="#responsive-image-align-center-bootstrap-3-score-816165-in-2017">85: Responsive image align center bootstrap 3 (score <span>816165</span> in 2017)</a></li>
-<li><a href="#how-to-set-bullet-colors-in-ulli-html-lists-via-css-without-using-any-images-or-span-tags-score-810364-in-2017">86: How to set Bullet colors in UL/LI html lists via CSS without using any images or span tags (score <span>810364</span> in 2017)</a></li>
-<li><a href="#make-body-have-100-of-the-browser-height-score-810272-in-2014">87: Make body have 100% of the browser height (score <span>810272</span> in 2014)</a></li>
-<li><a href="#how-to-style-icon-color-size-and-shadow-of-font-awesome-icons-score-807573-in-2018">88: How to style icon color, size, and shadow of Font Awesome Icons (score <span>807573</span> in 2018)</a></li>
-<li><a href="#remove-border-from-iframe-score-804807-in-2019">89: Remove border from IFrame (score <span>804807</span> in 2019)</a></li>
-<li><a href="#fixed-position-but-relative-to-container-score-803251-in-2015">90: Fixed position but relative to container (score <span>803251</span> in 2015)</a></li>
-<li><a href="#how-do-i-center-float-elements-score-800209-in-2016">91: How do I center float elements? (score <span>800209</span> in 2016)</a></li>
-<li><a href="#angularjs-ngclass-conditional-score-797735-in-2019">92: AngularJS ngClass conditional (score <span>797735</span> in 2019)</a></li>
-<li><a href="#how-do-i-right-align-div-elements-score-795939-in-2018">93: How do I right align div elements? (score <span>795939</span> in 2018)</a></li>
-<li><a href="#how-to-make-twitter-bootstrap-menu-dropdown-on-hover-rather-than-click-score-793142-in-2017">94: How to make Twitter Bootstrap menu dropdown on hover rather than click (score <span>793142</span> in 2017)</a></li>
-<li><a href="#bootstrap-3-navbar-with-logo-score-792825-in-2014">95: Bootstrap 3 Navbar with Logo (score <span>792825</span> in 2014)</a></li>
-<li><a href="#how-to-set-up-fixed-width-for-td-score-792029-in-2019">96: How to set up fixed width for &lt;td&gt;? (score <span>792029</span> in 2019)</a></li>
-<li><a href="#how-can-i-make-bootstrap-columns-all-the-same-height-score-779166-in-2017">97: How can I make Bootstrap columns all the same height? (score <span>779166</span> in 2017)</a></li>
-<li><a href="#how-to-place-two-divs-next-to-each-other-score-778829-in-2015">98: How to place two divs next to each other? (score <span>778829</span> in 2015)</a></li>
-<li><a href="#twitter-bootstrap-form-file-element-upload-button-score-777570-in-2018">99: Twitter Bootstrap Form File Element Upload Button (score <span>777570</span> in 2018)</a></li>
-<li><a href="#media-queries-how-to-target-desktop-tablet-and-mobile-score-774778-in-2013">100: Media Queries: How to target desktop, tablet and mobile? (score <span>774778</span> in 2013)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-to-horizontally-center-a-div-score-3829513-in-2018" class="level3">
