--- a/Electronics_top_100_se.html
+++ b/Electronics_top_100_se.html
@@ -13,118 +13,15 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Electronics &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#what-do-solidstriped-lines-on-a-wire-indicate-score-483638-in">1: What do solid/striped lines on a wire indicate? (score <span>483638</span> in )</a></li>
-<li><a href="#how-much-voltagecurrent-is-dangerous-score-358958-in-2018">2: How much voltage/current is “dangerous”? (score <span>358958</span> in 2018)</a></li>
-<li><a href="#choosing-power-supply-how-to-get-the-voltage-and-current-ratings-score-356250-in-2015">3: Choosing power supply, how to get the voltage and current ratings? (score <span>356250</span> in 2015)</a></li>
-<li><a href="#how-to-reduce-dc-voltage-using-resistors-score-349189-in-2015">4: how to reduce DC voltage using resistors? (score <span>349189</span> in 2015)</a></li>
-<li><a href="#what-are-the-different-types-of-solder-used-for-score-346367-in">5: What are the different types of solder used for? (score <span>346367</span> in )</a></li>
-<li><a href="#whats-the-proper-soldering-iron-temperature-for-standard-.031-6040-solder-score-333590-in-2014">6: What’s the proper soldering iron temperature for standard .031" 60/40 solder? (score <span>333590</span> in 2014)</a></li>
-<li><a href="#does-mah-measure-how-long-a-battery-would-last-score-311064-in-2014">7: Does mAh measure how long a battery would last? (score <span>311064</span> in 2014)</a></li>
-<li><a href="#how-can-i-tell-the-size-of-a-barrel-power-connector-score-309763-in-2013">8: How can I tell the size of a barrel power connector? (score <span>309763</span> in 2013)</a></li>
-<li><a href="#how-to-calculate-the-time-of-charging-and-discharging-of-battery-score-284720-in">9: How to Calculate the time of Charging and Discharging of battery? (score <span>284720</span> in )</a></li>
-<li><a href="#why-does-a-tesla-car-use-an-ac-motor-instead-of-a-dc-one-score-280788-in-2013">10: Why does a Tesla car use an AC motor instead of a DC one? (score <span>280788</span> in 2013)</a></li>
-<li><a href="#what-is-the-difference-between-v_cc-v_dd-v_ee-v_ss-score-258974-in-2016">11: What is the difference between $V_{CC}$, $V_{DD}$, $V_{EE}$, $V_{SS}$ (score <span>258974</span> in 2016)</a></li>
-<li><a href="#headphone-wire-color-coding-score-258581-in-2011">12: Headphone wire color coding (score <span>258581</span> in 2011)</a></li>
-<li><a href="#saving-arduino-sensor-data-to-a-text-file-score-248343-in">13: Saving Arduino sensor data to a text file (score <span>248343</span> in )</a></li>
-<li><a href="#whats-the-difference-between-a-microcontroller-and-a-microprocessor-score-245840-in-2011">14: What’s the difference between a microcontroller and a microprocessor? (score <span>245840</span> in 2011)</a></li>
-<li><a href="#vhdl-converting-from-an-integer-type-to-a-std_logic_vector-score-245570-in">15: VHDL: Converting from an INTEGER type to a STD_LOGIC_VECTOR (score <span>245570</span> in )</a></li>
-<li><a href="#how-does-a-capacitor-block-dc-score-245437-in-2012">16: How does a capacitor block DC? (score <span>245437</span> in 2012)</a></li>
-<li><a href="#how-are-current-and-voltage-related-to-torque-and-speed-of-a-brushless-motor-score-242687-in-2013">17: How are current and voltage related to torque and speed of a brushless motor? (score <span>242687</span> in 2013)</a></li>
-<li><a href="#why-are-there-3-pins-on-some-batteries-score-241673-in-2013">18: Why are there 3 pins on some batteries? (score <span>241673</span> in 2013)</a></li>
-<li><a href="#difference-between-latch-and-flip-flop-score-239799-in-2016">19: Difference between latch and flip-flop? (score <span>239799</span> in 2016)</a></li>
-<li><a href="#what-is-forward-and-reverse-voltage-when-working-with-diodes-score-226080-in-2014">20: What is “forward” and “reverse” voltage when working with diodes? (score <span>226080</span> in 2014)</a></li>
-<li><a href="#usart-uart-rs232-usb-spi-i2c-ttl-etc.-what-are-all-of-these-and-how-do-they-relate-to-each-other-score-221226-in-2013">21: USART, UART, RS232, USB, SPI, I2C, TTL, etc. what are all of these and how do they relate to each other? (score <span>221226</span> in 2013)</a></li>
-<li><a href="#what-is-negative-voltage-score-221089-in-2011">22: What is negative voltage? (score <span>221089</span> in 2011)</a></li>
-<li><a href="#reducing-voltage-with-resistors-score-220051-in-2017">23: Reducing voltage with resistors (score <span>220051</span> in 2017)</a></li>
-<li><a href="#how-do-i-calculate-the-cutoff-frequency-of-a-low-pass-rc-circuit-score-212597-in-2018">24: How do I calculate the cutoff frequency of a low pass rc circuit? (score <span>212597</span> in 2018)</a></li>
-<li><a href="#what-standard-uart-rates-are-there-score-210726-in-2011">25: What standard UART rates are there? (score <span>210726</span> in 2011)</a></li>
-<li><a href="#are-aa-battery-and-18650-battery-the-same-score-208103-in-2016">26: Are AA battery and 18650 battery the same? (score <span>208103</span> in 2016)</a></li>
-<li><a href="#what-is-the-minimum-required-voltage-for-charging-a-3.7-v-li-ion-battery-score-200708-in-2015">27: What is the minimum required voltage for charging a 3.7 V Li-ion battery? (score <span>200708</span> in 2015)</a></li>
-<li><a href="#how-long-will-this-appliance-run-from-a-battery-score-200468-in-2015">28: How long will this appliance run from a battery? (score <span>200468</span> in 2015)</a></li>
-<li><a href="#slow-blow-vs-fast-acting-fuse-score-196914-in-2012">29: Slow Blow vs Fast Acting Fuse (score <span>196914</span> in 2012)</a></li>
-<li><a href="#can-you-clarify-what-an-1no1nc-switch-is-score-190645-in-2012">30: Can you clarify what an 1NO1NC switch is? (score <span>190645</span> in 2012)</a></li>
-<li><a href="#why-was-mini-usb-deprecated-in-favor-of-micro-usb-score-186078-in-2016">31: Why was Mini USB deprecated in favor of Micro USB? (score <span>186078</span> in 2016)</a></li>
-<li><a href="#how-can-i-tell-charge-only-usb-cables-from-usb-data-cables-score-183214-in-2016">32: How can I tell charge-only USB cables from USB data cables? (score <span>183214</span> in 2016)</a></li>
-<li><a href="#what-is-the-relation-between-fft-length-and-frequency-resolution-score-181774-in">33: What is the relation between FFT length and frequency resolution? (score <span>181774</span> in )</a></li>
-<li><a href="#open-and-short-circuit-questions-score-180965-in-2016">34: Open and Short Circuit questions (score <span>180965</span> in 2016)</a></li>
-<li><a href="#differentiation-between-passive-and-active-components-score-178468-in-2013">35: Differentiation between passive and active components (score <span>178468</span> in 2013)</a></li>
-<li><a href="#v-ac-to-5v-dc-converter-lossless-score-177506-in">36: 230V AC to 5V DC converter, lossless (score <span>177506</span> in )</a></li>
-<li><a href="#why-do-we-connect-a-battery-to-ground-when-jumping-a-car-score-175657-in">37: Why do we connect a battery to ground when jumping a car? (score <span>175657</span> in )</a></li>
-<li><a href="#why-does-micro-usb-2.0-have-5-pins-when-the-a-type-only-has-4-score-172029-in-2019">38: Why does micro USB 2.0 have 5 pins, when the A-type only has 4? (score <span>172029</span> in 2019)</a></li>
-<li><a href="#how-much-current-can-i-draw-from-the-arduinos-pins-score-170557-in">39: How much current can I draw from the Arduino’s pins? (score <span>170557</span> in )</a></li>
-<li><a href="#what-is-the-difference-between-vrms-and-vm-score-166779-in">40: What is the difference between Vrms and Vm? (score <span>166779</span> in )</a></li>
-<li><a href="#what-is-the-voltage-range-of-a-standard-headphone-jack-from-a-phone-score-162417-in-2012">41: What is the voltage range of a standard headphone jack from a phone? (score <span>162417</span> in 2012)</a></li>
-<li><a href="#what-are-the-behaviors-of-capacitors-and-inductors-at-time-t0-score-162260-in-2011">42: What are the behaviors of capacitors and inductors at time t=0? (score <span>162260</span> in 2011)</a></li>
-<li><a href="#how-to-convert-an-expression-from-sop-to-pos-and-back-in-boolean-algebra-score-161632-in-2017">43: How to convert an expression from SOP to POS and back in Boolean Algebra? (score <span>161632</span> in 2017)</a></li>
-<li><a href="#what-is-a-decoupling-capacitor-and-how-do-i-know-if-i-need-one-score-160301-in-2017">44: What is a decoupling capacitor and how do I know if I need one? (score <span>160301</span> in 2017)</a></li>
-<li><a href="#what-is-a-digital-motor-score-158743-in-2018">45: What is a “digital” motor? (score <span>158743</span> in 2018)</a></li>
-<li><a href="#how-to-calculate-voltage-drop-over-and-power-loss-in-wires-score-157724-in-2013">46: How to calculate voltage drop over and power loss in wires (score <span>157724</span> in 2013)</a></li>
-<li><a href="#why-is-there-a-diode-connected-in-parallel-to-a-relay-coil-score-155487-in-2014">47: Why is there a diode connected in parallel to a relay coil? (score <span>155487</span> in 2014)</a></li>
-<li><a href="#how-to-become-an-embedded-software-developer-score-152813-in-2011">48: How to become an embedded software developer? (score <span>152813</span> in 2011)</a></li>
-<li><a href="#led-bulb-still-emits-light-when-turned-off-score-152665-in-2014">49: LED bulb still emits light when turned off (score <span>152665</span> in 2014)</a></li>
-<li><a href="#mosfet-as-a-switch---when-is-it-in-saturation-score-150484-in-2011">50: MOSFET as a Switch - When is it in Saturation? (score <span>150484</span> in 2011)</a></li>
-<li><a href="#what-do-the-pcb-markings-mean-score-150239-in">51: What do the PCB markings mean? (score <span>150239</span> in )</a></li>
-<li><a href="#why-does-fuse-blow-up-sometimes-score-147084-in">52: Why does fuse blow up sometimes? (score <span>147084</span> in )</a></li>
-<li><a href="#how-to-get-more-than-100ma-from-a-usb-port-score-146392-in">53: How to get more than 100mA from a USB port (score <span>146392</span> in )</a></li>
-<li><a href="#how-to-program-arduino-nano-pro-mini-pro-micro-clone-that-has-no-usb-port-score-145601-in-2014">54: How to program Arduino Nano / Pro-Mini / Pro-Micro clone that has no usb port? (score <span>145601</span> in 2014)</a></li>
-<li><a href="#powering-arduino-nano-12volts-score-145329-in-2017">55: Powering Arduino Nano 12volts (score <span>145329</span> in 2017)</a></li>
-<li><a href="#how-to-compare-mah-and-wh-score-144952-in-2012">56: How to compare mAh and Wh (score <span>144952</span> in 2012)</a></li>
-<li><a href="#what-would-happen-if-i-connect-two-different-dc-voltage-sources-in-parallel-score-144409-in-2014">57: What would happen if I connect two different DC voltage sources in parallel? (score <span>144409</span> in 2014)</a></li>
-<li><a href="#how-to-tell-polarity-expected-of-a-dc-barrel-jack-score-143267-in">58: How to tell polarity expected of a DC barrel jack? (score <span>143267</span> in )</a></li>
-<li><a href="#relation-and-difference-between-fourier-laplace-and-z-transforms-score-142125-in-2013">59: Relation and difference between Fourier, Laplace and Z transforms (score <span>142125</span> in 2013)</a></li>
-<li><a href="#what-is-the-polarity-of-a-car-cigarette-lighter-adapter-score-139078-in">60: What is the polarity of a car cigarette lighter adapter? (score <span>139078</span> in )</a></li>
-<li><a href="#why-is-high-input-impedance-good-score-138650-in">61: Why is high input impedance good? (score <span>138650</span> in )</a></li>
-<li><a href="#how-to-measure-capacity-of-a-lithium-ion-battery-score-138512-in">62: How to measure capacity of a Lithium-ion battery (score <span>138512</span> in )</a></li>
-<li><a href="#are-solder-fumes-bad-for-me-score-135386-in-2018">63: Are solder fumes bad for me? (score <span>135386</span> in 2018)</a></li>
-<li><a href="#how-can-i-use-a-12-v-input-on-a-digital-arduino-pin-score-134906-in-2012">64: How can I use a 12 V input on a digital Arduino pin? (score <span>134906</span> in 2012)</a></li>
-<li><a href="#differences-between-oled-led-lcd-and-tft-screens-score-134806-in">65: Differences between OLED, LED, LCD, and TFT Screens (score <span>134806</span> in )</a></li>
-<li><a href="#difference-between-uart-and-rs-232-score-133400-in-2016">66: Difference between UART and RS-232? (score <span>133400</span> in 2016)</a></li>
-<li><a href="#how-to-determine-a-system-is-stable-using-pole-zero-analysis-score-132633-in">67: How to determine a system is stable using pole zero analysis? (score <span>132633</span> in )</a></li>
-<li><a href="#why-we-use-330-ohm-resistor-to-connect-a-led-score-130203-in-2017">68: Why we use 330 ohm resistor to connect a LED? (score <span>130203</span> in 2017)</a></li>
-<li><a href="#why-does-the-thickness-of-a-wire-affect-resistance-score-130052-in">69: Why does the thickness of a wire affect resistance? (score <span>130052</span> in )</a></li>
-<li><a href="#help-me-understand-the-relationship-between-positive-negative-neutral-and-ground-in-ac-and-dc-score-129284-in-2013">70: Help me understand the relationship between positive, negative, neutral and ground in AC and DC (score <span>129284</span> in 2013)</a></li>
-<li><a href="#altium-how-do-i-flipmirror-components-x-and-y-dont-work-score-129236-in-2013">71: Altium: How do I flip/mirror components? X and Y don’t work (score <span>129236</span> in 2013)</a></li>
-<li><a href="#what-is-input-and-output-impedance-of-an-opamp-score-127349-in-2013">72: What is input and output impedance of an opamp? (score <span>127349</span> in 2013)</a></li>
-<li><a href="#why-does-the-can-bus-use-a-120-ohm-resistor-as-the-terminating-resistor-and-not-any-other-value-score-125185-in-2013">73: Why does the CAN bus use a 120 ohm resistor as the terminating resistor and not any other value? (score <span>125185</span> in 2013)</a></li>
-<li><a href="#torque-kgcm-what-is-kgcm-score-123675-in">74: Torque kgcm (what is kgcm)? (score <span>123675</span> in )</a></li>
-<li><a href="#rules-and-guidelines-for-drawing-good-schematics-score-122517-in-2018">75: Rules and guidelines for drawing good schematics (score <span>122517</span> in 2018)</a></li>
-<li><a href="#what-is-the-purpose-of-carbon-brushes-in-an-electric-motor-score-121883-in">76: What is the purpose of carbon brushes in an electric motor (score <span>121883</span> in )</a></li>
-<li><a href="#tradeoffs-when-considering-spi-or-i2c-score-121336-in-2014">77: Tradeoffs when considering SPI or I2C? (score <span>121336</span> in 2014)</a></li>
-<li><a href="#how-to-connect-multiple-i2c-interface-devices-into-a-single-pin-a4-sda-and-a5-scl-on-arduino-score-121062-in">78: How to connect multiple i2c-interface devices into a single pin A4 (SDA) and A5 (SCL) on Arduino? (score <span>121062</span> in )</a></li>
-<li><a href="#what-does-edge-triggered-and-level-triggered-mean-score-120777-in-2011">79: What does edge triggered and level triggered mean? (score <span>120777</span> in 2011)</a></li>
-<li><a href="#step-up-3.3v-to-5v-for-digital-io-score-120263-in">80: Step up 3.3V to 5V for digital I/O (score <span>120263</span> in )</a></li>
-<li><a href="#how-to-improve-torque-and-rpm-of-a-dc-motor-score-119704-in-2012">81: How to improve torque and RPM of a DC motor? (score <span>119704</span> in 2012)</a></li>
-<li><a href="#what-is-the-difference-between-flash-memory-and-eeprom-score-119418-in-2013">82: What is the difference between Flash memory and EEPROM? (score <span>119418</span> in 2013)</a></li>
-<li><a href="#three-phase-power-supply---what-is-line-to-line-voltage-score-118583-in">83: Three phase power supply - what is line to line voltage (score <span>118583</span> in )</a></li>
-<li><a href="#soldering-a-vga-cable---number-of-wires-doesnt-match-score-118061-in">84: Soldering a VGA cable - number of wires doesn’t match (score <span>118061</span> in )</a></li>
-<li><a href="#what-is-offset-null-in-ic-741-score-117968-in-2013">85: What is “offset null” in IC 741? (score <span>117968</span> in 2013)</a></li>
-<li><a href="#how-is-it-possible-to-have-high-voltage-and-low-current-it-seems-to-contradict-the-relationship-between-current-and-voltage-in-eir-score-117726-in-2015">86: How is it possible to have high voltage and low current? It seems to contradict the relationship between current and voltage in E=IR (score <span>117726</span> in 2015)</a></li>
-<li><a href="#what-does-40va-rating-for-transformer-mean-score-116117-in">87: What does 40VA rating for transformer mean? (score <span>116117</span> in )</a></li>
-<li><a href="#how-do-the-open-loop-voltage-gain-and-closed-loop-voltage-gain-differ-score-115327-in-2017">88: How do the open loop voltage gain and closed loop voltage gain differ? (score <span>115327</span> in 2017)</a></li>
-<li><a href="#definition-of-power-signals-and-energy-signals-score-114849-in">89: definition of power signals and energy signals (score <span>114849</span> in )</a></li>
-<li><a href="#voltage-across-capacitor-score-114126-in">90: Voltage across capacitor (score <span>114126</span> in )</a></li>
-<li><a href="#standard-pcb-trace-widths-score-111949-in-2010">91: Standard PCB trace widths? (score <span>111949</span> in 2010)</a></li>
-<li><a href="#how-grounding-works-to-prevent-electrical-shock-score-111161-in">92: How grounding works to prevent electrical shock (score <span>111161</span> in )</a></li>
-<li><a href="#convert-watt-to-ampere-hour-for-battery-score-110708-in-2014">93: Convert Watt to Ampere-hour for battery (score <span>110708</span> in 2014)</a></li>
-<li><a href="#how-should-i-use-a-multimeter-to-determine-which-aa-batteries-to-keep-and-which-to-toss-score-110041-in">94: How should I use a multimeter to determine which AA batteries to keep and which to toss? (score <span>110041</span> in )</a></li>
-<li><a href="#solder-wont-stick-score-109713-in-2015">95: Solder won’t stick (score <span>109713</span> in 2015)</a></li>
-<li><a href="#how-to-increase-current-of-a-dc-circuit-score-109249-in-2012">96: How to increase current of a DC circuit (score <span>109249</span> in 2012)</a></li>
-<li><a href="#basic-electronics-book-score-109026-in-2017">97: Basic Electronics Book (score <span>109026</span> in 2017)</a></li>
-<li><a href="#how-to-calculate-total-resistance-in-circuit-with-parallel-and-series-resistors-connected-score-108731-in-2013">98: how to calculate total resistance in circuit with parallel and series resistors connected (score <span>108731</span> in 2013)</a></li>
-<li><a href="#how-is-an-xor-with-more-than-2-inputs-supposed-to-work-score-108250-in-2013">99: How is an XOR with more than 2 inputs supposed to work? (score <span>108250</span> in 2013)</a></li>
-<li><a href="#maximum-i2c-bus-length-score-107699-in-2014">100: Maximum I2C Bus Length? (score <span>107699</span> in 2014)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="what-do-solidstriped-lines-on-a-wire-indicate-score-483638-in" class="level3">
