--- a/Geography_top_100_se.html
+++ b/Geography_top_100_se.html
@@ -13,117 +13,14 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Geography &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#measuring-accuracy-of-latitude-and-longitude-score-378152-in-2016">1: Measuring accuracy of latitude and longitude? (score <span>378152</span> in 2016)</a></li>
-<li><a href="#does-y-mean-latitude-and-x-mean-longitude-in-every-gis-software-score-372460-in-2016">2: Does Y mean latitude and X mean longitude in every GIS software? (score <span>372460</span> in 2016)</a></li>
-<li><a href="#calculating-longitude-length-in-miles-score-370205-in-2019">3: Calculating longitude length in miles (score <span>370205</span> in 2019)</a></li>
-<li><a href="#what-is-the-difference-between-vector-and-raster-data-models-score-339907-in">4: What is the difference between Vector and Raster data models? (score <span>339907</span> in )</a></li>
-<li><a href="#adding-basemaps-from-google-or-bing-in-qgis-score-289106-in-2018">5: Adding Basemaps from Google or Bing in QGIS? (score <span>289106</span> in 2018)</a></li>
-<li><a href="#exporting-list-of-values-into-csv-or-txt-file-using-arcpy-score-271465-in-2018">6: Exporting list of values into csv or txt file using ArcPy? (score <span>271465</span> in 2018)</a></li>
-<li><a href="#displaying-local-file-in-google-maps-score-241935-in-2018">7: Displaying local file in Google Maps? (score <span>241935</span> in 2018)</a></li>
-<li><a href="#export-google-maps-route-to-kmlgpx-score-219459-in-2015">8: Export Google Maps Route to KML/GPX (score <span>219459</span> in 2015)</a></li>
-<li><a href="#what-ratio-scales-do-google-maps-zoom-levels-correspond-to-score-214635-in-2014">9: What ratio scales do Google Maps zoom levels correspond to? (score <span>214635</span> in 2014)</a></li>
-<li><a href="#merging-multiple-vector-layers-to-one-layer-using-qgis-score-186558-in-2017">10: Merging multiple vector layers to one layer using QGIS? (score <span>186558</span> in 2017)</a></li>
-<li><a href="#algorithm-for-offsetting-a-latitudelongitude-by-some-amount-of-meters-score-180095-in-2016">11: Algorithm for offsetting a latitude/longitude by some amount of meters (score <span>180095</span> in 2016)</a></li>
-<li><a href="#avoiding-google-maps-geocode-limit-score-167026-in-2017">12: Avoiding Google Maps geocode limit? (score <span>167026</span> in 2017)</a></li>
-<li><a href="#changing-default-zoom-in-google-embedded-map-score-166358-in-2018">13: Changing default zoom in Google embedded map? (score <span>166358</span> in 2018)</a></li>
-<li><a href="#adding-new-address-to-google-maps-score-159250-in-2017">14: Adding new address to Google Maps? (score <span>159250</span> in 2017)</a></li>
-<li><a href="#differences-between-dem-dsm-and-dtm-score-158164-in-2019">15: Differences between DEM, DSM and DTM? (score <span>158164</span> in 2019)</a></li>
-<li><a href="#calculating-polygon-areas-in-qgis-score-156611-in-2018">16: Calculating polygon areas in QGIS? (score <span>156611</span> in 2018)</a></li>
-<li><a href="#opening-shapefile-in-r-score-152104-in-2019">17: Opening shapefile in R? (score <span>152104</span> in 2019)</a></li>
-<li><a href="#installing-file-geodatabase-.gdb-support-in-qgis-score-150973-in-2018">18: Installing File Geodatabase (*.gdb) support in QGIS? (score <span>150973</span> in 2018)</a></li>
-<li><a href="#epsg-3857-or-4326-for-googlemaps-openstreetmap-and-leaflet-score-150019-in-2017">19: EPSG 3857 or 4326 for GoogleMaps, OpenStreetMap and Leaflet (score <span>150019</span> in 2017)</a></li>
-<li><a href="#what-is-the-maximum-theoretical-accuracy-of-gps-score-146288-in">20: What is the maximum Theoretical accuracy of GPS? (score <span>146288</span> in )</a></li>
-<li><a href="#importing-dwg-into-qgis-project-score-145374-in-2019">21: Importing DWG into QGIS project? (score <span>145374</span> in 2019)</a></li>
-<li><a href="#getting-coordinates-from-click-or-drag-event-in-google-maps-api-score-140097-in-2018">22: Getting coordinates from click or drag event in Google Maps API? (score <span>140097</span> in 2018)</a></li>
-<li><a href="#what-are-raster-and-vector-data-in-gis-and-when-to-use-score-136876-in-2017">23: What are Raster and Vector data in GIS and when to use? (score <span>136876</span> in 2017)</a></li>
-<li><a href="#difference-between-wgs84-and-epsg4326-score-129398-in-2018">24: Difference between WGS84 and EPSG:4326? (score <span>129398</span> in 2018)</a></li>
-<li><a href="#getting-coordinates-from-geometry-in-postgis-score-126791-in-2019">25: Getting coordinates from geometry in PostGIS? (score <span>126791</span> in 2019)</a></li>
-<li><a href="#creating-point-features-with-exact-coordinates-in-qgis-score-124795-in-2018">26: Creating point features with exact coordinates in QGIS? (score <span>124795</span> in 2018)</a></li>
-<li><a href="#difference-between-projection-and-datum-score-124762-in-2018">27: Difference between projection and datum? (score <span>124762</span> in 2018)</a></li>
-<li><a href="#converting-between-kml-and-shapefile-shp-format-score-115840-in-2017">28: Converting between KML and shapefile (SHP) format? (score <span>115840</span> in 2017)</a></li>
-<li><a href="#why-does-gps-positioning-require-four-satellites-score-115714-in-2012">29: Why does GPS positioning require four satellites? (score <span>115714</span> in 2012)</a></li>
-<li><a href="#listing-available-online-wms-services-weather-land-data-place-names-score-113788-in-2016">30: Listing available online WMS services (Weather, Land Data, Place Names)? (score <span>113788</span> in 2016)</a></li>
-<li><a href="#turning-on-map-view-in-google-earth-score-112721-in-2019">31: Turning on map view in Google Earth? (score <span>112721</span> in 2019)</a></li>
-<li><a href="#adding-values-in-two-columns-to-new-column-on-sync-table-in-carto-score-112307-in-2018">32: Adding values in two columns to new column on sync table in CARTO? (score <span>112307</span> in 2018)</a></li>
-<li><a href="#running-create-extension-postgis-gives-error-could-not-open-extension-control-file-score-111052-in-2017">33: Running Create Extension postgis gives ERROR could not open extension control file? (score <span>111052</span> in 2017)</a></li>
-<li><a href="#installing-gdal-with-python-on-windows-score-110658-in-2015">34: Installing GDAL with Python on windows? (score <span>110658</span> in 2015)</a></li>
-<li><a href="#calculating-latitudelongitude-x-miles-from-point-score-107682-in-2017">35: Calculating Latitude/Longitude X miles from point? (score <span>107682</span> in 2017)</a></li>
-<li><a href="#showing-popup-on-mouse-over-not-on-click-using-leaflet-score-106803-in-2018">36: Showing popup on mouse-over, not on click using Leaflet? (score <span>106803</span> in 2018)</a></li>
-<li><a href="#find-points-within-a-distance-using-mysql-score-102300-in-2012">37: Find points within a distance using MySQL (score <span>102300</span> in 2012)</a></li>
-<li><a href="#seeking-general-gis-questions-for-job-interviews-score-102071-in-2017">38: Seeking General GIS Questions for Job interviews? (score <span>102071</span> in 2017)</a></li>
-<li><a href="#converting-mapinfo-tab-andor-mif-to-shp-using-free-tools-or-arcgis-for-desktop-core-product-score-101362-in-2016">39: Converting MapInfo TAB and/or MIF to SHP using free tools or ArcGIS for Desktop core product? (score <span>101362</span> in 2016)</a></li>
-<li><a href="#inserting-point-into-postgis-score-101118-in-2017">40: Inserting point into PostGIS? (score <span>101118</span> in 2017)</a></li>
-<li><a href="#loading-external-geojson-file-into-leaflet-map-score-100414-in-2018">41: Loading external GeoJSON file into Leaflet map? (score <span>100414</span> in 2018)</a></li>
-<li><a href="#how-to-export-attribute-tables-to-excel-score-99427-in-2017">42: How to export attribute tables to Excel? (score <span>99427</span> in 2017)</a></li>
-<li><a href="#seeking-mobile-gis-applications-for-android-tablets-score-98893-in-2018">43: Seeking Mobile GIS applications for Android Tablets? (score <span>98893</span> in 2018)</a></li>
-<li><a href="#seeking-examples-of-beautiful-maps-score-98143-in-2018">44: Seeking examples of beautiful maps? (score <span>98143</span> in 2018)</a></li>
-<li><a href="#seeking-full-list-of-iso-alpha-2-and-iso-alpha-3-country-codes-score-96284-in-2019">45: Seeking full list of ISO ALPHA-2 and ISO ALPHA-3 country codes? (score <span>96284</span> in 2019)</a></li>
-<li><a href="#obtaining-up-to-date-list-of-us-zip-codes-with-latitude-and-longitude-geocodes-score-95594-in-2017">46: Obtaining up-to-date list of US ZIP Codes with Latitude and Longitude Geocodes? (score <span>95594</span> in 2017)</a></li>
-<li><a href="#extract-raster-value-into-polygon-attribute-score-94434-in-2014">47: Extract Raster Value into Polygon Attribute (score <span>94434</span> in 2014)</a></li>
-<li><a href="#getting-list-of-coordinates-for-points-in-layer-using-qgis-score-94022-in-2017">48: Getting list of coordinates for points in layer using QGIS? (score <span>94022</span> in 2017)</a></li>
-<li><a href="#converting-projected-coordinates-to-latlon-using-python-score-91891-in-2017">49: Converting projected coordinates to lat/lon using Python? (score <span>91891</span> in 2017)</a></li>
-<li><a href="#locating-property-corners-using-plat-map-description-score-91551-in-2018">50: Locating property corners using plat map description? (score <span>91551</span> in 2018)</a></li>
-<li><a href="#basic-ifthen-in-python-parser-of-arcgis-field-calculator-score-91340-in-2016">51: Basic If/Then in Python Parser of ArcGIS Field Calculator? (score <span>91340</span> in 2016)</a></li>
-<li><a href="#exporting-attribute-table-to-excel-from-qgis-score-90893-in-2019">52: Exporting attribute table to Excel from QGIS? (score <span>90893</span> in 2019)</a></li>
-<li><a href="#getting-polygon-boundaries-of-city-in-json-from-google-maps-api-score-89521-in-2018">53: Getting polygon boundaries of City in JSON from Google Maps API? (score <span>89521</span> in 2018)</a></li>
-<li><a href="#python-question---how-do-i-extract-a-part-of-a-string-score-88360-in-2016">54: Python Question - how do I extract a part of a string (score <span>88360</span> in 2016)</a></li>
-<li><a href="#converting-kmz-file-to-kml-score-87834-in-2018">55: Converting kmz file to kml? (score <span>87834</span> in 2018)</a></li>
-<li><a href="#moving-marker-smoothly-along-two-gps-coordinates-score-87699-in">56: Moving marker smoothly along two GPS coordinates (score <span>87699</span> in )</a></li>
-<li><a href="#converting-x-y-coordinates-to-longitude-latitude-using-qgis-score-87642-in-2018">57: Converting x y coordinates to longitude latitude using QGIS? (score <span>87642</span> in 2018)</a></li>
-<li><a href="#my-house-address-isnt-listed-on-google-maps-score-86148-in-2012">58: My house address isn’t listed on Google Maps (score <span>86148</span> in 2012)</a></li>
-<li><a href="#creating-new-layer-from-selection-in-qgis-score-83331-in-2018">59: Creating new layer from selection in QGIS? (score <span>83331</span> in 2018)</a></li>
-<li><a href="#seeking-administrative-boundaries-for-various-countries-score-80963-in-2018">60: Seeking administrative boundaries for various countries? (score <span>80963</span> in 2018)</a></li>
-<li><a href="#changing-projection-of-shapefile-in-qgis-score-80619-in-2018">61: Changing projection of shapefile in QGIS? (score <span>80619</span> in 2018)</a></li>
-<li><a href="#comparing-various-javascript-mapping-libraries-score-80077-in-2017">62: Comparing various JavaScript mapping libraries? (score <span>80077</span> in 2017)</a></li>
-<li><a href="#can-qgis-open-kmz-files-score-79470-in-2018">63: Can QGIS open KMZ files? (score <span>79470</span> in 2018)</a></li>
-<li><a href="#determining-which-us-zipcodes-map-to-more-than-one-state-or-more-than-one-city-score-79050-in-2017">64: Determining which US zipcodes map to more than one state or more than one city? (score <span>79050</span> in 2017)</a></li>
-<li><a href="#python-gdal-package-missing-header-file-when-installing-via-pip-score-78740-in-2017">65: Python GDAL package missing header file when installing via pip (score <span>78740</span> in 2017)</a></li>
-<li><a href="#convert-.dwg-file-to-.shp-file-using-arcgis-desktop-score-77813-in-2017">66: Convert .dwg file to .shp file using ArcGIS Desktop? (score <span>77813</span> in 2017)</a></li>
-<li><a href="#installing-gdal-and-ogr-for-python-score-77294-in-2017">67: Installing GDAL and OGR for Python? (score <span>77294</span> in 2017)</a></li>
-<li><a href="#clipping-raster-with-vector-boundaries-using-qgis-score-76915-in-2017">68: Clipping raster with vector boundaries using QGIS? (score <span>76915</span> in 2017)</a></li>
-<li><a href="#layers-with-same-coordinate-system-should-alignoverlap-in-arcmap-but-do-not-score-76422-in-2019">69: Layers with same coordinate system should align/overlap in ArcMap but do not? (score <span>76422</span> in 2019)</a></li>
-<li><a href="#creating-drive-time-polygon-around-map-point-score-76214-in-2016">70: Creating drive time polygon around map point? (score <span>76214</span> in 2016)</a></li>
-<li><a href="#selecting-features-within-polygon-from-another-layer-using-qgis-score-75347-in-2018">71: Selecting features within Polygon from another layer using QGIS? (score <span>75347</span> in 2018)</a></li>
-<li><a href="#create-a-geographygeometry-column-from-x-and-y-fields---sql-server-2008-score-75279-in-2015">72: Create a geography/geometry column from x and y fields - SQL Server 2008 (score <span>75279</span> in 2015)</a></li>
-<li><a href="#how-to-geocode-300000-addresses-on-the-fly-score-73914-in-2016">73: How to Geocode 300,000 addresses on the fly? (score <span>73914</span> in 2016)</a></li>
-<li><a href="#installing-latest-qgis-version-on-ubuntu-score-73421-in-2017">74: Installing latest QGIS version on Ubuntu? (score <span>73421</span> in 2017)</a></li>
-<li><a href="#getting-boundary-of-raster-image-as-polygon-in-arcgis-desktop-score-72539-in-2018">75: Getting boundary of raster image as polygon in ArcGIS Desktop? (score <span>72539</span> in 2018)</a></li>
-<li><a href="#extracting-raster-dem-elevations-to-vector-attribute-tables-in-arcgis-desktop-score-72248-in-2016">76: Extracting raster DEM elevations to vector attribute tables in ArcGIS Desktop? (score <span>72248</span> in 2016)</a></li>
-<li><a href="#find-the-centroid-of-a-cluster-of-points-score-71586-in-2011">77: find the centroid of a cluster of points (score <span>71586</span> in 2011)</a></li>
-<li><a href="#drawing-polyline-in-leaflet-score-71431-in-2018">78: Drawing polyline in Leaflet? (score <span>71431</span> in 2018)</a></li>
-<li><a href="#cropping-shapefiles-in-qgis-score-71190-in-2018">79: Cropping Shapefiles in QGIS? (score <span>71190</span> in 2018)</a></li>
-<li><a href="#opening-and-extracting-data-from-shapefiles-score-70631-in-2014">80: Opening and extracting data from Shapefiles? (score <span>70631</span> in 2014)</a></li>
-<li><a href="#interview-questions-for-hiring-gis-analyst-score-70370-in-2016">81: Interview questions for hiring GIS Analyst? (score <span>70370</span> in 2016)</a></li>
-<li><a href="#finding-minimum-area-rectangle-for-given-points-score-70362-in-2017">82: Finding minimum-area-rectangle for given points? (score <span>70362</span> in 2017)</a></li>
-<li><a href="#choosing-openlayers-or-leaflet-score-70118-in-2018">83: Choosing OpenLayers or Leaflet? (score <span>70118</span> in 2018)</a></li>
-<li><a href="#converting-vector-layer-to-raster-using-qgis-score-69470-in-2018">84: Converting vector layer to raster using QGIS? (score <span>69470</span> in 2018)</a></li>
-<li><a href="#citing-arcgis-desktop-when-writing-papers-score-69449-in-2018">85: Citing ArcGIS Desktop when writing papers? (score <span>69449</span> in 2018)</a></li>
-<li><a href="#opening-.gdb-folder-in-arcmap-score-69186-in-2018">86: Opening *.gdb folder in ArcMap? (score <span>69186</span> in 2018)</a></li>
-<li><a href="#will-the-openlayers-plugin-be-updated-for-qgis3-score-67985-in-2018">87: Will the OpenLayers Plugin be updated for QGIS3? (score <span>67985</span> in 2018)</a></li>
-<li><a href="#getting-lat-long-of-clicked-location-using-leaflet-api-score-67458-in-2018">88: Getting Lat, Long of clicked location using Leaflet API? (score <span>67458</span> in 2018)</a></li>
-<li><a href="#extracting-google-earth-elevation-data-to-excel-score-66429-in-2018">89: Extracting Google Earth elevation data to Excel? (score <span>66429</span> in 2018)</a></li>
-<li><a href="#how-to-remove-esri-basemap-credits-score-66365-in-2019">90: How to remove Esri basemap credits? (score <span>66365</span> in 2019)</a></li>
-<li><a href="#adding-gpx-files-into-arcmap-score-65548-in-2018">91: Adding GPX files into ArcMap? (score <span>65548</span> in 2018)</a></li>
-<li><a href="#extracting-coordinates-of-polygon-vertices-in-arcmap-score-65323-in-2015">92: Extracting coordinates of polygon vertices in ArcMap? (score <span>65323</span> in 2015)</a></li>
-<li><a href="#display-latitude-and-longitude-on-googlemaps-on-click-score-65179-in-2016">93: display latitude and longitude on googlemaps on click (score <span>65179</span> in 2016)</a></li>
-<li><a href="#how-to-read-a-shapefile-in-python-score-64908-in-2018">94: How to read a shapefile in Python? (score <span>64908</span> in 2018)</a></li>
-<li><a href="#fixing-runtime-error-r6034-application-has-made-attempt-to-load-c-runtime-library-incorrectly-score-64614-in-2019">95: Fixing Runtime Error R6034: application has made attempt to load C runtime library incorrectly? (score <span>64614</span> in 2019)</a></li>
-<li><a href="#online-wkt-and-geojson-viewer-score-64389-in">96: Online WKT and GeoJSON viewer (score <span>64389</span> in )</a></li>
-<li><a href="#truck-routing-in-google-maps-score-64345-in-2018">97: Truck Routing in Google Maps? (score <span>64345</span> in 2018)</a></li>
-<li><a href="#what-are-the-differences-between-wms-wfs-wcs-wps-score-64026-in-2017">98: What are the differences between WMS, WFS, WCS, WPS? (score <span>64026</span> in 2017)</a></li>
-<li><a href="#generating-random-locations-nearby-score-64010-in-2017">99: Generating random locations nearby? (score <span>64010</span> in 2017)</a></li>
-<li><a href="#renaming-attributesfields-in-shapefile-attribute-table-using-qgis-score-63986-in-2017">100: Renaming attributes/fields in shapefile attribute table using QGIS? (score <span>63986</span> in 2017)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="measuring-accuracy-of-latitude-and-longitude-score-378152-in-2016" class="level3">
