--- a/Git_top_100.html
+++ b/Git_top_100.html
@@ -78,113 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Git &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-undo-the-most-recent-local-commits-in-git-score-8179416-in-2019">1: How do I undo the most recent local commits in Git? (score <span>8179416</span> in 2019)</a></li>
-<li><a href="#how-do-i-delete-a-git-branch-locally-and-remotely-score-7599991-in-2019">2: How do I delete a Git branch locally and remotely? (score <span>7599991</span> in 2019)</a></li>
-<li><a href="#how-do-i-revert-a-git-repository-to-a-previous-commit-score-5388210-in-2019">3: How do I revert a Git repository to a previous commit? (score <span>5388210</span> in 2019)</a></li>
-<li><a href="#how-do-i-check-out-a-remote-git-branch-score-4913384-in-2017">4: How do I check out a remote Git branch? (score <span>4913384</span> in 2017)</a></li>
-<li><a href="#how-do-i-force-git-pull-to-overwrite-local-files-score-4145107-in-2018">5: How do I force “git pull” to overwrite local files? (score <span>4145107</span> in 2018)</a></li>
-<li><a href="#how-do-i-push-a-new-local-branch-to-a-remote-git-repository-and-track-it-too-score-3200291-in-2019">6: How do I push a new local branch to a remote Git repository and track it too? (score <span>3200291</span> in 2019)</a></li>
-<li><a href="#how-do-i-clone-a-specific-git-branch-score-2851810-in-2019">7: How do I clone a specific Git branch? (score <span>2851810</span> in 2019)</a></li>
-<li><a href="#how-do-i-undo-git-add-before-commit-score-2801667-in-2019">8: How do I undo ‘git add’ before commit? (score <span>2801667</span> in 2019)</a></li>
-<li><a href="#reset-local-repository-branch-to-be-just-like-remote-repository-head-score-2740228-in-2016">9: Reset local repository branch to be just like remote repository HEAD (score <span>2740228</span> in 2016)</a></li>
-<li><a href="#how-do-i-use-git-reset-hard-head-to-revert-to-a-previous-commit-score-2672030-in-2015">10: How do I use ‘git reset –hard HEAD’ to revert to a previous commit? (score <span>2672030</span> in 2015)</a></li>
-<li><a href="#how-can-i-determine-the-url-that-a-local-git-repository-was-originally-cloned-from-score-2524689-in-2015">13: How can I determine the URL that a local Git repository was originally cloned from? (score <span>2524689</span> in 2015)</a></li>
-<li><a href="#how-to-resolve-merge-conflicts-in-git-score-2455683-in-2019">14: How to resolve merge conflicts in Git (score <span>2455683</span> in 2019)</a></li>
-<li><a href="#how-to-modify-existing-unpushed-commit-messages-score-2441373-in-2019">15: How to modify existing, unpushed commit messages? (score <span>2441373</span> in 2019)</a></li>
-<li><a href="#how-do-i-discard-unstaged-changes-in-git-score-2381631-in-2019">16: How do I discard unstaged changes in Git? (score <span>2381631</span> in 2019)</a></li>
-<li><a href="#git-fetch-remote-branch-score-2247058-in-2019">17: Git fetch remote branch (score <span>2247058</span> in 2019)</a></li>
-<li><a href="#how-to-remove-local-untracked-files-from-the-current-git-working-tree-score-2119033-in-2019">18: How to remove local (untracked) files from the current Git working tree (score <span>2119033</span> in 2019)</a></li>
-<li><a href="#delete-commits-from-a-branch-in-git-score-2101706-in-2018">19: Delete commits from a branch in Git (score <span>2101706</span> in 2018)</a></li>
-<li><a href="#how-can-i-delete-a-file-from-a-git-repository-score-2100597-in-2019">20: How can I delete a file from a Git repository? (score <span>2100597</span> in 2019)</a></li>
-<li><a href="#how-do-you-create-a-remote-git-branch-score-1980171-in-2017">21: How do you create a remote Git branch? (score <span>1980171</span> in 2017)</a></li>
-<li><a href="#undo-a-git-merge-that-hasnt-been-pushed-yet-score-1960312-in-2016">22: Undo a Git merge that hasn’t been pushed yet (score <span>1960312</span> in 2016)</a></li>
-<li><a href="#how-can-i-reset-or-revert-a-file-to-a-specific-revision-score-1760694-in-2019">23: How can I reset or revert a file to a specific revision? (score <span>1760694</span> in 2019)</a></li>
-<li><a href="#how-do-you-clone-a-git-repository-into-a-specific-folder-score-1749479-in-2016">24: How do you clone a Git repository into a specific folder? (score <span>1749479</span> in 2016)</a></li>
-<li><a href="#message-src-refspec-master-does-not-match-any-when-pushing-commits-in-git-score-1674634-in-2019">25: Message ‘src refspec master does not match any’ when pushing commits in Git (score <span>1674634</span> in 2019)</a></li>
-<li><a href="#i-ran-into-a-merge-conflict.-how-can-i-abort-the-merge-score-1595425-in-2018">26: I ran into a merge conflict. How can I abort the merge? (score <span>1595425</span> in 2018)</a></li>
-<li><a href="#difference-between-git-add--a-and-git-add-.-score-1568771-in-2013">27: Difference between “git add -A” and “git add .” (score <span>1568771</span> in 2013)</a></li>
-<li><a href="#view-the-change-history-of-a-file-using-git-versioning-score-1532762-in-2017">28: View the change history of a file using Git versioning (score <span>1532762</span> in 2017)</a></li>
-<li><a href="#squash-my-last-x-commits-together-using-git-score-1425969-in-2017">29: Squash my last X commits together using Git (score <span>1425969</span> in 2017)</a></li>
-<li><a href="#comparing-two-branches-in-git-score-1416596-in-2015">30: Comparing two branches in Git? (score <span>1416596</span> in 2015)</a></li>
-<li><a href="#what-is-the-best-and-safest-way-to-merge-a-git-branch-into-master-score-1403349-in-2019">31: What is the best (and safest) way to merge a Git branch into master? (score <span>1403349</span> in 2019)</a></li>
-<li><a href="#how-to-change-the-uri-url-for-a-remote-git-repository-score-1386571-in-2018">32: How to change the URI (URL) for a remote Git repository? (score <span>1386571</span> in 2018)</a></li>
-<li><a href="#how-do-i-revert-all-local-changes-in-git-managed-project-to-previous-state-score-1362819-in-2015">33: How do I revert all local changes in Git managed project to previous state? (score <span>1362819</span> in 2015)</a></li>
-<li><a href="#how-to-list-all-the-files-in-a-commit-score-1353105-in-2015">34: How to list all the files in a commit? (score <span>1353105</span> in 2015)</a></li>
-<li><a href="#download-a-specific-tag-with-git-score-1311826-in-2017">35: Download a specific tag with Git (score <span>1311826</span> in 2017)</a></li>
-<li><a href="#how-to-get-the-current-branch-name-in-git-score-1309177-in-2016">36: How to get the current branch name in Git? (score <span>1309177</span> in 2016)</a></li>
-<li><a href="#make-an-existing-git-branch-track-a-remote-branch-score-1272353-in-2014">37: Make an existing Git branch track a remote branch? (score <span>1272353</span> in 2014)</a></li>
-<li><a href="#fix-a-git-detached-head-score-1238695-in-2018">38: Fix a Git detached head? (score <span>1238695</span> in 2018)</a></li>
-<li><a href="#how-to-fetch-all-git-branches-score-1191591-in-2018">40: How to fetch all Git branches (score <span>1191591</span> in 2018)</a></li>
-<li><a href="#how-do-i-properly-force-a-git-push-score-1164381-in-2017">41: How do I properly force a Git push? (score <span>1164381</span> in 2017)</a></li>
-<li><a href="#how-to-clone-all-remote-branches-in-git-score-1148399-in-2017">42: How to clone all remote branches in Git? (score <span>1148399</span> in 2017)</a></li>
-<li><a href="#remove-files-from-git-commit-score-1142383-in-2013">43: Remove files from Git commit (score <span>1142383</span> in 2013)</a></li>
-<li><a href="#how-do-i-provide-a-username-and-password-when-running-git-clone-gitremote.git-score-1128830-in-2019">44: How do I provide a username and password when running “git clone git@remote.git”? (score <span>1128830</span> in 2019)</a></li>
-<li><a href="#how-to-remove-a-directory-from-git-repository-score-1101791-in-2016">45: How to remove a directory from git repository? (score <span>1101791</span> in 2016)</a></li>
-<li><a href="#how-to-make-git-forget-about-a-file-that-was-tracked-but-is-now-in-.gitignore-score-1080222-in-2017">46: How to make Git “forget” about a file that was tracked but is now in .gitignore? (score <span>1080222</span> in 2017)</a></li>
-<li><a href="#git-pull-a-certain-branch-from-github-score-1066120-in-2018">47: Git pull a certain branch from GitHub (score <span>1066120</span> in 2018)</a></li>
-<li><a href="#how-to-fully-delete-a-git-repository-created-with-init-score-1051497-in-2016">48: How to fully delete a git repository created with init? (score <span>1051497</span> in 2016)</a></li>
-<li><a href="#git-merge-master-into-feature-branch-score-1045383-in-2019">49: Git merge master into feature branch (score <span>1045383</span> in 2019)</a></li>
-<li><a href="#how-to-delete-a-remote-tag-score-1035939-in-2018">50: How to delete a remote tag? (score <span>1035939</span> in 2018)</a></li>
-<li><a href="#gitignore-and-the-following-untracked-working-tree-files-would-be-overwritten-by-checkout-score-1011972-in-2019">51: .gitignore and “The following untracked working tree files would be overwritten by checkout” (score <span>1011972</span> in 2019)</a></li>
-<li><a href="#how-to-create-a-.gitignore-file-score-990996-in-2019">52: How to create a .gitignore file (score <span>990996</span> in 2019)</a></li>
-<li><a href="#why-are-there-two-ways-to-unstage-a-file-in-git-score-986301-in-2019">53: Why are there two ways to unstage a file in Git? (score <span>986301</span> in 2019)</a></li>
-<li><a href="#how-do-you-push-a-tag-to-a-remote-repository-using-git-score-983045-in-2018">54: How do you push a tag to a remote repository using Git? (score <span>983045</span> in 2018)</a></li>
-<li><a href="#getting-git-to-work-with-a-proxy-server-score-982415-in-2017">55: Getting git to work with a proxy server (score <span>982415</span> in 2017)</a></li>
-<li><a href="#what-does-cherry-picking-a-commit-with-git-mean-score-962343-in-2019">56: What does cherry-picking a commit with Git mean? (score <span>962343</span> in 2019)</a></li>
-<li><a href="#create-a-branch-in-git-from-another-branch-score-946581-in-2017">57: Create a branch in Git from another branch (score <span>946581</span> in 2017)</a></li>
-<li><a href="#is-there-a-way-to-cache-github-credentials-for-pushing-commits-score-938473-in-2019">58: Is there a way to cache GitHub credentials for pushing commits? (score <span>938473</span> in 2019)</a></li>
-<li><a href="#how-to-specify-the-private-ssh-key-to-use-when-executing-shell-command-on-git-score-927267-in-2018">60: How to specify the private SSH-key to use when executing shell command on Git? (score <span>927267</span> in 2018)</a></li>
-<li><a href="#easy-way-to-pull-latest-of-all-git-submodules-score-926733-in-2018">61: Easy way to pull latest of all git submodules (score <span>926733</span> in 2018)</a></li>
-<li><a href="#why-do-i-need-to-do---set-upstream-all-the-time-score-918075-in-2013">62: Why do I need to do <code>--set-upstream</code> all the time? (score <span>918075</span> in 2013)</a></li>
-<li><a href="#find-and-restore-a-deleted-file-in-a-git-repository-score-914401-in-2016">63: Find and restore a deleted file in a Git repository (score <span>914401</span> in 2016)</a></li>
-<li><a href="#git-fatal-could-not-read-from-remote-repository-score-907938-in-2014">64: git: fatal: Could not read from remote repository (score <span>907938</span> in 2014)</a></li>
-<li><a href="#move-the-most-recent-commits-to-a-new-branch-with-git-score-904253-in-2017">65: Move the most recent commit(s) to a new branch with Git (score <span>904253</span> in 2017)</a></li>
-<li><a href="#undoing-a-git-rebase-score-900162-in-2014">66: Undoing a git rebase (score <span>900162</span> in 2014)</a></li>
-<li><a href="#how-can-i-reconcile-detached-head-with-masterorigin-score-897094-in-2017">67: How can I reconcile detached HEAD with master/origin? (score <span>897094</span> in 2017)</a></li>
-<li><a href="#how-to-ignore-certain-files-in-git-score-883957-in-2019">68: How to ignore certain files in Git (score <span>883957</span> in 2019)</a></li>
-<li><a href="#how-to-see-the-changes-in-a-git-commit-score-879722-in-2019">69: How to see the changes in a Git commit? (score <span>879722</span> in 2019)</a></li>
-<li><a href="#lf-will-be-replaced-by-crlf-in-git---what-is-that-and-is-it-important-score-875112-in-2017">70: LF will be replaced by CRLF in git - What is that and is it important? (score <span>875112</span> in 2017)</a></li>
-<li><a href="#why-is-git-better-than-subversion-score-874452-in-2010">71: Why is Git better than Subversion? (score <span>874452</span> in 2010)</a></li>
-<li><a href="#how-to-solve-permission-denied-publickey-error-when-using-git-score-870971-in-2018">72: How to solve Permission denied (publickey) error when using Git? (score <span>870971</span> in 2018)</a></li>
-<li><a href="#how-can-i-add-an-empty-directory-to-a-git-repository-score-869097-in-2014">73: How can I add an empty directory to a Git repository? (score <span>869097</span> in 2014)</a></li>
-<li><a href="#updating-a-local-repository-with-changes-from-a-github-repository-score-867048-in-2019">74: Updating a local repository with changes from a GitHub repository (score <span>867048</span> in 2019)</a></li>
-<li><a href="#rollback-to-an-old-git-commit-in-a-public-repo-score-861582-in-2015">75: Rollback to an old Git commit in a public repo (score <span>861582</span> in 2015)</a></li>
-<li><a href="#github-error-message---permission-denied-publickey-score-852612-in-2016">76: GitHub Error Message - Permission denied (publickey) (score <span>852612</span> in 2016)</a></li>
-<li><a href="#how-do-i-resolve-git-saying-commit-your-changes-or-stash-them-before-you-can-merge-score-849978-in-2019">77: How do I resolve git saying “Commit your changes or stash them before you can merge”? (score <span>849978</span> in 2019)</a></li>
-<li><a href="#ignoring-any-bin-directory-on-a-git-project-score-846770-in-2017">78: ignoring any ‘bin’ directory on a git project (score <span>846770</span> in 2017)</a></li>
-<li><a href="#how-do-i-make-git-use-the-editor-of-my-choice-for-commits-score-845181-in-2017">79: How do I make Git use the editor of my choice for commits? (score <span>845181</span> in 2017)</a></li>
-<li><a href="#how-do-i-make-git-ignore-file-mode-chmod-changes-score-843774-in-2014">80: How do I make Git ignore file mode (chmod) changes? (score <span>843774</span> in 2014)</a></li>
-<li><a href="#how-to-change-the-commit-author-for-one-specific-commit-score-841438-in-2018">81: How to change the commit author for one specific commit? (score <span>841438</span> in 2018)</a></li>
-<li><a href="#how-can-i-remove-a-commit-on-github-score-840447-in-2018">82: How can I remove a commit on GitHub? (score <span>840447</span> in 2018)</a></li>
-<li><a href="#how-do-i-remove-a-submodule-score-815253-in-2018">83: How do I remove a submodule? (score <span>815253</span> in 2018)</a></li>
-<li><a href="#you-have-not-concluded-your-merge-merge_head-exists-score-804474-in-2016">84: You have not concluded your merge (MERGE_HEAD exists) (score <span>804474</span> in 2016)</a></li>
-<li><a href="#git-cannot-checkout-branch---error-pathspec-did-not-match-any-files-known-to-git-score-794843-in-2017">85: Git: cannot checkout branch - error: pathspec ‘…’ did not match any file(s) known to git (score <span>794843</span> in 2017)</a></li>
-<li><a href="#how-to-retrieve-the-hash-for-the-current-commit-in-git-score-792346-in-2017">86: How to retrieve the hash for the current commit in Git? (score <span>792346</span> in 2017)</a></li>
-<li><a href="#how-to-change-the-author-and-committer-name-and-e-mail-of-multiple-commits-in-git-score-789248-in-2018">87: How to change the author and committer name and e-mail of multiple commits in Git? (score <span>789248</span> in 2018)</a></li>
-<li><a href="#receiving-fatal-not-a-git-repository-when-attempting-to-remote-add-a-git-repo-score-783501-in-2014">88: Receiving “fatal: Not a git repository” when attempting to remote add a Git repo (score <span>783501</span> in 2014)</a></li>
-<li><a href="#cannot-push-to-github---keeps-saying-need-merge-score-779252-in-2016">89: Cannot push to GitHub - keeps saying need merge (score <span>779252</span> in 2016)</a></li>
-<li><a href="#download-single-files-from-github-score-775547-in-2015">90: Download single files from GitHub (score <span>775547</span> in 2015)</a></li>
-<li><a href="#how-do-i-show-the-changes-which-have-been-staged-score-772216-in-2018">91: How do I show the changes which have been staged? (score <span>772216</span> in 2018)</a></li>
-<li><a href="#remove-a-file-from-a-git-repository-without-deleting-it-from-the-local-filesystem-score-768277-in-2015">92: Remove a file from a Git repository without deleting it from the local filesystem (score <span>768277</span> in 2015)</a></li>
-<li><a href="#how-to-git-clone-including-submodules-score-763224-in-2019">93: How to “git clone” including submodules? (score <span>763224</span> in 2019)</a></li>
-<li><a href="#throw-away-local-commits-in-git-score-758261-in-2019">94: Throw away local commits in Git (score <span>758261</span> in 2019)</a></li>
-<li><a href="#pushing-to-git-returning-error-code-403-fatal-http-request-failed-score-740028-in-2014">95: Pushing to Git returning Error Code 403 fatal: HTTP request failed (score <span>740028</span> in 2014)</a></li>
-<li><a href="#git-error-failed-to-push-some-refs-to-score-736623-in-2015">96: git error: failed to push some refs to (score <span>736623</span> in 2015)</a></li>
-<li><a href="#how-do-i-access-my-ssh-public-key-score-735775-in-2018">97: How do I access my SSH public key? (score <span>735775</span> in 2018)</a></li>
-<li><a href="#viewing-unpushed-git-commits-score-730034-in-2019">98: Viewing unpushed Git commits (score <span>730034</span> in 2019)</a></li>
-<li><a href="#how-to-uncommit-my-last-commit-in-git-score-725603-in-2018">99: How to uncommit my last commit in Git (score <span>725603</span> in 2018)</a></li>
-<li><a href="#stash-only-one-file-out-of-multiple-files-that-have-changed-with-git-score-720799-in-2019">100: Stash only one file out of multiple files that have changed with Git? (score <span>720799</span> in 2019)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-undo-the-most-recent-local-commits-in-git-score-8179416-in-2019" class="level3">
