--- a/Html_top_100.html
+++ b/Html_top_100.html
@@ -78,95 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Html &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-to-create-an-html-button-that-acts-like-a-link-score-5631819-in-2017">1: How to create an HTML button that acts like a link? (score <span>5631819</span> in 2017)</a></li>
-<li><a href="#how-to-check-whether-a-checkbox-is-checked-in-jquery-score-3985774-in-2019">2: How to check whether a checkbox is checked in jQuery? (score <span>3985774</span> in 2019)</a></li>
-<li><a href="#redirect-from-an-html-page-score-3138547-in-2018">4: Redirect from an HTML page (score <span>3138547</span> in 2018)</a></li>
-<li><a href="#how-do-i-vertically-center-text-with-css-score-3100733-in-2019">5: How do I vertically center text with CSS? (score <span>3100733</span> in 2019)</a></li>
-<li><a href="#how-to-change-an-elements-class-with-javascript-score-2446526-in-2019">8: How to change an element’s class with JavaScript? (score <span>2446526</span> in 2019)</a></li>
-<li><a href="#which-href-value-should-i-use-for-javascript-links-or-javascriptvoid0-score-2233339-in-2017">12: Which “href” value should I use for JavaScript links, “#” or “javascript:void(0)”? (score <span>2233339</span> in 2017)</a></li>
-<li><a href="#set-cellpadding-and-cellspacing-in-css-score-2226855-in-2018">13: Set cellpadding and cellspacing in CSS? (score <span>2226855</span> in 2018)</a></li>
-<li><a href="#get-the-value-in-an-input-text-box-score-2222219-in-2014">14: Get the value in an input text box (score <span>2222219</span> in 2014)</a></li>
-<li><a href="#how-can-i-know-which-radio-button-is-selected-via-jquery-score-2061588-in-2017">15: How can I know which radio button is selected via jQuery? (score <span>2061588</span> in 2017)</a></li>
-<li><a href="#i-need-an-unordered-list-without-any-bullets-score-1985502-in-2019">16: I need an unordered list without any bullets (score <span>1985502</span> in 2019)</a></li>
-<li><a href="#css-background-opacity-score-1857136-in-2019">17: CSS Background Opacity (score <span>1857136</span> in 2019)</a></li>
-<li><a href="#how-to-make-a-div-100-height-of-the-browser-window-score-1834779-in-2019">19: How to make a div 100% height of the browser window (score <span>1834779</span> in 2019)</a></li>
-<li><a href="#html-text-input-allow-only-numeric-input-score-1744569-in-2019">20: HTML text input allow only numeric input (score <span>1744569</span> in 2019)</a></li>
-<li><a href="#change-an-html5-inputs-placeholder-color-with-css-score-1702940-in-2018">21: Change an HTML5 input’s placeholder color with CSS (score <span>1702940</span> in 2018)</a></li>
-<li><a href="#how-to-overlay-one-div-over-another-div-score-1664399-in-2019">22: How to overlay one div over another div (score <span>1664399</span> in 2019)</a></li>
-<li><a href="#css-center-text-horizontally-and-vertically-inside-a-div-block-score-1633481-in-2019">24: CSS center text (horizontally and vertically) inside a div block (score <span>1633481</span> in 2019)</a></li>
-<li><a href="#how-to-style-a-checkbox-using-css-score-1556560-in-2019">25: How to style a checkbox using CSS (score <span>1556560</span> in 2019)</a></li>
-<li><a href="#how-do-i-give-text-or-an-image-a-transparent-background-using-css-score-1510757-in-2016">28: How do I give text or an image a transparent background using CSS? (score <span>1510757</span> in 2016)</a></li>
-<li><a href="#jquery-disableenable-submit-button-score-1455050-in-2019">31: jQuery disable/enable submit button (score <span>1455050</span> in 2019)</a></li>
-<li><a href="#how-to-replace-innerhtml-of-a-div-using-jquery-score-1425674-in-2016">32: How to replace innerHTML of a div using jQuery? (score <span>1425674</span> in 2016)</a></li>
-<li><a href="#resize-image-proportionally-with-css-score-1398643-in-2018">33: Resize image proportionally with CSS? (score <span>1398643</span> in 2018)</a></li>
-<li><a href="#vertical-align-with-bootstrap-3-score-1388358-in-2015">34: vertical-align with Bootstrap 3 (score <span>1388358</span> in 2015)</a></li>
-<li><a href="#how-do-i-make-a-placeholder-for-a-select-box-score-1375841-in-2019">35: How do I make a placeholder for a ‘select’ box? (score <span>1375841</span> in 2019)</a></li>
-<li><a href="#how-to-select-a-radio-button-by-default-score-1364538-in-2014">37: How to select a radio button by default? (score <span>1364538</span> in 2014)</a></li>
-<li><a href="#how-can-i-select-an-element-by-name-with-jquery-score-1362990-in-2018">38: How can I select an element by name with jQuery? (score <span>1362990</span> in 2018)</a></li>
-<li><a href="#how-to-make-javascript-execute-after-page-load-score-1349255-in-2019">40: How to make JavaScript execute after page load? (score <span>1349255</span> in 2019)</a></li>
-<li><a href="#open-link-in-new-tab-or-window-score-1348610-in-2016">41: Open link in new tab or window (score <span>1348610</span> in 2016)</a></li>
-<li><a href="#how-to-add-a-browser-tab-icon-favicon-for-a-website-score-1346125-in-2017">42: How to add a browser tab icon (favicon) for a website? (score <span>1346125</span> in 2017)</a></li>
-<li><a href="#recommended-way-to-embed-pdf-in-html-score-1342368-in-2012">43: Recommended way to embed PDF in HTML? (score <span>1342368</span> in 2012)</a></li>
-<li><a href="#include-another-html-file-in-a-html-file-score-1329300-in-2012">44: Include another HTML file in a HTML file (score <span>1329300</span> in 2012)</a></li>
-<li><a href="#how-to-make-div-not-larger-than-its-contents-score-1323786-in-2015">45: How to make div not larger than its contents? (score <span>1323786</span> in 2015)</a></li>
-<li><a href="#bootstrap---text-align-class-for-inside-a-table-score-1319954-in-2019">46: Bootstrap - Text-align class for inside a table (score <span>1319954</span> in 2019)</a></li>
-<li><a href="#html-5-is-it-or-score-1298945-in-2019">47: HTML 5: Is it <br>, <br/>, or <br />? (score <span>1298945</span> in 2019)</a></li>
-<li><a href="#jquery.click-vs-onclick-score-1286792-in-2019">48: jQuery.click() vs onClick (score <span>1286792</span> in 2019)</a></li>
-<li><a href="#how-do-i-modify-the-url-without-reloading-the-page-score-1266619-in-2019">49: How do I modify the URL without reloading the page? (score <span>1266619</span> in 2019)</a></li>
-<li><a href="#how-to-insert-spacestabs-in-text-using-htmlcss-score-1265157-in-2019">50: How to insert spaces/tabs in text using HTML/CSS (score <span>1265157</span> in 2019)</a></li>
-<li><a href="#how-do-i-disable-the-resizable-property-of-a-textarea-score-1259614-in-2019">51: How do I disable the resizable property of a textarea? (score <span>1259614</span> in 2019)</a></li>
-<li><a href="#retrieve-the-position-xy-of-an-html-element-score-1258174-in-2013">52: Retrieve the position (X,Y) of an HTML element (score <span>1258174</span> in 2013)</a></li>
-<li><a href="#pure-javascript-equivalent-of-jquerys-.ready---how-to-call-a-function-when-the-pagedom-is-ready-for-it-score-1254609-in-2017">53: Pure JavaScript equivalent of jQuery’s $.ready() - how to call a function when the page/DOM is ready for it (score <span>1254609</span> in 2017)</a></li>
-<li><a href="#set-the-value-of-an-input-field-score-1239497-in-2017">54: Set the value of an input field (score <span>1239497</span> in 2017)</a></li>
-<li><a href="#how-to-vertical-align-elements-in-a-div-score-1237657-in-2018">55: How to Vertical align elements in a div? (score <span>1237657</span> in 2018)</a></li>
-<li><a href="#what-characters-can-be-used-for-updown-triangle-arrow-without-stem-for-display-in-html-score-1200054-in-2016">56: What characters can be used for up/down triangle (arrow without stem) for display in HTML? (score <span>1200054</span> in 2016)</a></li>
-<li><a href="#center-image-using-text-align-center-score-1188789-in-2013">57: Center image using text-align center? (score <span>1188789</span> in 2013)</a></li>
-<li><a href="#how-to-disable-a-link-using-only-css-score-1144833-in-2017">59: How to disable a link using only CSS? (score <span>1144833</span> in 2017)</a></li>
-<li><a href="#how-to-apply-css-to-iframe-score-1101856-in-2014">60: How to apply CSS to iframe? (score <span>1101856</span> in 2014)</a></li>
-<li><a href="#space-between-two-rows-in-a-table-score-1096005-in-2016">61: Space between two rows in a table? (score <span>1096005</span> in 2016)</a></li>
-<li><a href="#changing-the-color-of-an-hr-element-score-1094306-in-2018">63: Changing the color of an hr element (score <span>1094306</span> in 2018)</a></li>
-<li><a href="#how-do-you-disable-browser-autocomplete-on-web-form-field-input-tag-score-1091818-in-2018">64: How do you disable browser Autocomplete on web form field / input tag? (score <span>1091818</span> in 2018)</a></li>
-<li><a href="#javascript---onclick-to-get-the-id-of-the-clicked-button-score-1053833-in-2012">66: JavaScript - onClick to get the ID of the clicked button (score <span>1053833</span> in 2012)</a></li>
-<li><a href="#how-to-get-current-formatted-date-ddmmyyyy-in-javascript-and-append-it-to-an-input-score-1052167-in-2016">67: How to get current formatted date dd/mm/yyyy in Javascript and append it to an input (score <span>1052167</span> in 2016)</a></li>
-<li><a href="#showhide-div-using-javascript-score-1048784-in-2019">68: Show/hide ‘div’ using JavaScript (score <span>1048784</span> in 2019)</a></li>
-<li><a href="#get-checkbox-value-in-jquery-score-1047008-in-2011">69: Get checkbox value in jQuery (score <span>1047008</span> in 2011)</a></li>
-<li><a href="#how-can-i-position-my-div-at-the-bottom-of-its-container-score-1043714-in-2017">70: How can I position my div at the bottom of its container? (score <span>1043714</span> in 2017)</a></li>
-<li><a href="#multiple-lines-of-input-in-score-1037912-in-2014">72: Multiple lines of input in <input type="text" /> (score <span>1037912</span> in 2014)</a></li>
-<li><a href="#maximum-call-stack-size-exceeded-error-score-1023585-in-2017">74: Maximum call stack size exceeded error (score <span>1023585</span> in 2017)</a></li>
-<li><a href="#how-to-set-value-of-input-text-using-jquery-score-1016869-in-2019">75: How to set value of input text using jQuery (score <span>1016869</span> in 2019)</a></li>
-<li><a href="#how-to-auto-format-indent-xmlhtml-in-notepad-score-1012752-in-2017">76: How To Auto-Format / Indent XML/HTML in Notepad++ (score <span>1012752</span> in 2017)</a></li>
-<li><a href="#make-iframe-automatically-adjust-height-according-to-the-contents-without-using-scrollbar-score-1002034-in-2013">77: Make iframe automatically adjust height according to the contents without using scrollbar? (score <span>1002034</span> in 2013)</a></li>
-<li><a href="#how-can-i-make-a-button-redirect-my-page-to-another-page-score-997900-in-2015">78: How can I make a button redirect my page to another page? (score <span>997900</span> in 2015)</a></li>
-<li><a href="#hreftel-and-mobile-numbers-score-979028-in-2017">79: href=“tel:” and mobile numbers (score <span>979028</span> in 2017)</a></li>
-<li><a href="#align-image-in-center-and-middle-within-div-score-975288-in-2014">80: Align image in center and middle within div (score <span>975288</span> in 2014)</a></li>
-<li><a href="#set-http-header-to-utf-8-using-php-score-967630-in-2014">81: Set HTTP header to UTF-8 using PHP (score <span>967630</span> in 2014)</a></li>
-<li><a href="#how-to-make-a-vertical-line-in-html-score-967203-in-2016">82: How to make a vertical line in HTML (score <span>967203</span> in 2016)</a></li>
-<li><a href="#change-the-image-source-on-rollover-using-jquery-score-956957-in-2016">84: Change the image source on rollover using jQuery (score <span>956957</span> in 2016)</a></li>
-<li><a href="#how-to-write-ahover-in-inline-css-score-955832-in-2017">85: How to write a:hover in inline CSS? (score <span>955832</span> in 2017)</a></li>
-<li><a href="#how-to-close-current-tab-in-a-browser-window-score-943247-in-2018">87: How to close current tab in a browser window? (score <span>943247</span> in 2018)</a></li>
-<li><a href="#how-to-align-checkboxes-and-their-labels-consistently-cross-browsers-score-939259-in-2018">88: How to align checkboxes and their labels consistently cross-browsers (score <span>939259</span> in 2018)</a></li>
-<li><a href="#how-to-make-an-image-center-vertically-horizontally-inside-a-bigger-div-score-929682-in-2016">90: How to make an image center (vertically &amp; horizontally) inside a bigger div (score <span>929682</span> in 2016)</a></li>
-<li><a href="#set-cookie-and-get-cookie-with-javascript-score-928603-in-2018">91: Set cookie and get cookie with JavaScript (score <span>928603</span> in 2018)</a></li>
-<li><a href="#what-does-enctypemultipartform-data-mean-score-925700-in-2019">92: What does enctype=‘multipart/form-data’ mean? (score <span>925700</span> in 2019)</a></li>
-<li><a href="#how-to-run-a-function-when-the-page-is-loaded-score-920311-in-2019">93: How to run a function when the page is loaded? (score <span>920311</span> in 2019)</a></li>
-<li><a href="#how-do-you-get-centered-content-using-twitter-bootstrap-score-918180-in-2017">94: How do you get centered content using Twitter Bootstrap? (score <span>918180</span> in 2017)</a></li>
-<li><a href="#how-to-line-break-from-css-without-using-score-917036-in-2018">95: How to line-break from css, without using <br />? (score <span>917036</span> in 2018)</a></li>
-<li><a href="#how-to-send-http-request-in-java-score-913251-in-2014">96: How to send HTTP request in java? (score <span>913251</span> in 2014)</a></li>
-<li><a href="#how-to-display-base64-images-in-html-score-905633-in-2017">97: How to display Base64 images in HTML? (score <span>905633</span> in 2017)</a></li>
-<li><a href="#how-to-trigger-a-file-download-when-clicking-an-html-button-or-javascript-score-897161-in-2017">98: How to trigger a file download when clicking an HTML button or JavaScript (score <span>897161</span> in 2017)</a></li>
-<li><a href="#how-do-you-create-a-hidden-div-that-doesnt-create-a-line-break-or-horizontal-space-score-896654-in-2017">99: How do you create a hidden div that doesn’t create a line break or horizontal space? (score <span>896654</span> in 2017)</a></li>
-<li><a href="#make-a-div-fill-the-height-of-the-remaining-screen-space-score-891472-in-2019">100: Make a div fill the height of the remaining screen space (score <span>891472</span> in 2019)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-to-create-an-html-button-that-acts-like-a-link-score-5631819-in-2017" class="level3">
