--- a/Java_top_100.html
+++ b/Java_top_100.html
@@ -78,87 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Java &lt;- StackOverflow top 71</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-convert-a-string-to-an-int-in-java-score-5767039-in-2018">1: How do I convert a String to an int in Java? (score <span>5767039</span> in 2018)</a></li>
-<li><a href="#how-do-i-declare-and-initialize-an-array-in-java-score-4290819-in-2017">2: How do I declare and initialize an array in Java? (score <span>4290819</span> in 2017)</a></li>
-<li><a href="#how-do-i-generate-random-integers-within-a-specific-range-in-java-score-3879757-in-2019">3: How do I generate random integers within a specific range in Java? (score <span>3879757</span> in 2019)</a></li>
-<li><a href="#how-to-split-a-string-in-java-score-3688160-in-2018">4: How to split a string in Java (score <span>3688160</span> in 2018)</a></li>
-<li><a href="#iterate-through-a-hashmap-score-3596326-in-2019">5: Iterate through a HashMap (score <span>3596326</span> in 2019)</a></li>
-<li><a href="#initialization-of-an-arraylist-in-one-line-score-2834764-in-2014">6: Initialization of an ArrayList in one line (score <span>2834764</span> in 2014)</a></li>
-<li><a href="#how-do-i-create-a-file-and-write-to-it-in-java-score-2755644-in-2017">7: How do I create a file and write to it in Java? (score <span>2755644</span> in 2017)</a></li>
-<li><a href="#how-does-the-java-for-each-loop-work-score-2503583-in-2018">8: How does the Java ‘for each’ loop work? (score <span>2503583</span> in 2018)</a></li>
-<li><a href="#what-does-could-not-find-or-load-main-class-mean-score-2477019-in-2018">9: What does “Could not find or load main class” mean? (score <span>2477019</span> in 2018)</a></li>
-<li><a href="#how-do-i-efficiently-iterate-over-each-entry-in-a-java-map-score-2356995-in-2019">10: How do I efficiently iterate over each entry in a Java Map? (score <span>2356995</span> in 2019)</a></li>
-<li><a href="#whats-the-simplest-way-to-print-a-java-array-score-2123014-in-2019">11: What’s the simplest way to print a Java array? (score <span>2123014</span> in 2019)</a></li>
-<li><a href="#how-do-i-read-convert-an-inputstream-into-a-string-in-java-score-2007290-in-2019">12: How do I read / convert an InputStream into a String in Java? (score <span>2007290</span> in 2019)</a></li>
-<li><a href="#what-is-the-difference-between-public-protected-package-private-and-private-in-java-score-1981495-in-2018">13: What is the difference between public, protected, package-private and private in Java? (score <span>1981495</span> in 2018)</a></li>
-<li><a href="#how-do-i-determine-whether-an-array-contains-a-particular-value-in-java-score-1869332-in-2019">14: How do I determine whether an array contains a particular value in Java? (score <span>1869332</span> in 2019)</a></li>
-<li><a href="#is-java-pass-by-reference-or-pass-by-value-score-1865334-in-2018">15: Is Java “pass-by-reference” or “pass-by-value”? (score <span>1865334</span> in 2018)</a></li>
-<li><a href="#how-to-fix-java.lang.unsupportedclassversionerror-unsupported-major.minor-version-score-1810449-in-2019">16: How to fix java.lang.UnsupportedClassVersionError: Unsupported major.minor version (score <span>1810449</span> in 2019)</a></li>
-<li><a href="#how-to-round-a-number-to-n-decimal-places-in-java-score-1530287-in-2017">17: How to round a number to n decimal places in Java (score <span>1530287</span> in 2017)</a></li>
-<li><a href="#convert-arraylist-to-string-array-score-1474844-in-2018">18: Convert ArrayList<String> to String[] array (score <span>1474844</span> in 2018)</a></li>
-<li><a href="#differences-between-hashmap-and-hashtable-score-1473992-in-2019">19: Differences between HashMap and Hashtable? (score <span>1473992</span> in 2019)</a></li>
-<li><a href="#create-arraylist-from-array-score-1422325-in-2016">20: Create ArrayList from array (score <span>1422325</span> in 2016)</a></li>
-<li><a href="#why-is-processing-a-sorted-array-faster-than-processing-an-unsorted-array-score-1410048-in-2019">21: Why is processing a sorted array faster than processing an unsorted array? (score <span>1410048</span> in 2019)</a></li>
-<li><a href="#how-to-generate-a-random-alpha-numeric-string-score-1334589-in-2019">22: How to generate a random alpha-numeric string? (score <span>1334589</span> in 2019)</a></li>
-<li><a href="#sort-a-mapkey-value-by-values-score-1327878-in-2018">23: Sort a Map&lt;Key, Value&gt; by values (score <span>1327878</span> in 2018)</a></li>
-<li><a href="#how-do-i-create-a-java-string-from-the-contents-of-a-file-score-1307219-in-2018">24: How do I create a Java string from the contents of a file? (score <span>1307219</span> in 2018)</a></li>
-<li><a href="#how-can-i-create-an-executable-jar-with-dependencies-using-maven-score-1210754-in-2018">25: How can I create an executable JAR with dependencies using Maven? (score <span>1210754</span> in 2018)</a></li>
-<li><a href="#how-do-you-assert-that-a-certain-exception-is-thrown-in-junit-4-tests-score-1186587-in-2013">26: How do you assert that a certain exception is thrown in JUnit 4 tests? (score <span>1186587</span> in 2013)</a></li>
-<li><a href="#avoiding-null-statements-score-1182090-in-2018">27: Avoiding != null statements (score <span>1182090</span> in 2018)</a></li>
-<li><a href="#how-do-i-fix-android.os.networkonmainthreadexception-score-1139887-in-2019">28: How do I fix ‘android.os.NetworkOnMainThreadException’? (score <span>1139887</span> in 2019)</a></li>
-<li><a href="#does-java-support-default-parameter-values-score-1111010-in-2019">29: Does Java support default parameter values? (score <span>1111010</span> in 2019)</a></li>
-<li><a href="#how-to-get-an-enum-value-from-a-string-value-in-java-score-1045192-in-2018">31: How to get an enum value from a string value in Java? (score <span>1045192</span> in 2018)</a></li>
-<li><a href="#sort-arraylist-of-custom-objects-by-property-score-1033206-in-2016">32: Sort ArrayList of custom Objects by property (score <span>1033206</span> in 2016)</a></li>
-<li><a href="#how-can-i-concatenate-two-arrays-in-java-score-1023252-in-2018">33: How can I concatenate two arrays in Java? (score <span>1023252</span> in 2018)</a></li>
-<li><a href="#when-to-use-linkedlist-over-arraylist-in-java-score-1008299-in-2018">34: When to use LinkedList over ArrayList in Java? (score <span>1008299</span> in 2018)</a></li>
-<li><a href="#how-to-use-java.net.urlconnection-to-fire-and-handle-http-requests-score-989794-in-2018">35: How to use java.net.URLConnection to fire and handle HTTP requests (score <span>989794</span> in 2018)</a></li>
-<li><a href="#what-are-the-possible-values-of-the-hibernate-hbm2ddl.auto-configuration-and-what-do-they-do-score-955696-in-2019">36: What are the possible values of the Hibernate hbm2ddl.auto configuration and what do they do (score <span>955696</span> in 2019)</a></li>
-<li><a href="#difference-between-wait-and-sleep-score-864573-in-2017">37: Difference between wait() and sleep() (score <span>864573</span> in 2017)</a></li>
-<li><a href="#whats-the-difference-between-component-repository-service-annotations-in-spring-score-852949-in-2017">38: What’s the difference between <span class="citation" data-cites="Component">@Component</span>, <span class="citation" data-cites="Repository">@Repository</span> &amp; <span class="citation" data-cites="Service">@Service</span> annotations in Spring? (score <span>852949</span> in 2017)</a></li>
-<li><a href="#what-is-reflection-and-why-is-it-useful-score-846678-in-2015">39: What is reflection and why is it useful? (score <span>846678</span> in 2015)</a></li>
-<li><a href="#what-is-a-serialversionuid-and-why-should-i-use-it-score-845205-in-2015">40: What is a serialVersionUID and why should I use it? (score <span>845205</span> in 2015)</a></li>
-<li><a href="#how-can-i-initialise-a-static-map-score-808780-in-2018">41: How can I initialise a static Map? (score <span>808780</span> in 2018)</a></li>
-<li><a href="#how-do-i-test-a-private-function-or-a-class-that-has-private-methods-fields-or-inner-classes-score-804279-in-2019">42: How do I test a private function or a class that has private methods, fields or inner classes? (score <span>804279</span> in 2019)</a></li>
-<li><a href="#how-do-i-call-one-constructor-from-another-in-java-score-798292-in-2008">43: How do I call one constructor from another in Java? (score <span>798292</span> in 2008)</a></li>
-<li><a href="#how-to-add-local-jar-files-to-a-maven-project-score-786969-in-2018">44: How to add local jar files to a Maven project? (score <span>786969</span> in 2018)</a></li>
-<li><a href="#difference-between-stringbuilder-and-stringbuffer-score-761903-in-2016">45: Difference between StringBuilder and StringBuffer (score <span>761903</span> in 2016)</a></li>
-<li><a href="#how-to-create-a-generic-array-in-java-score-727576-in-2017">46: How to create a generic array in Java? (score <span>727576</span> in 2017)</a></li>
-<li><a href="#java-inner-class-and-static-nested-class-score-695972-in-2019">47: Java inner class and static nested class (score <span>695972</span> in 2019)</a></li>
-<li><a href="#implements-runnable-vs-extends-thread-in-java-score-663876-in-2018">48: “implements Runnable” vs “extends Thread” in Java (score <span>663876</span> in 2018)</a></li>
-<li><a href="#why-does-java-have-transient-fields-score-663871-in-2016">49: Why does Java have transient fields? (score <span>663871</span> in 2016)</a></li>
-<li><a href="#why-is-subtracting-these-two-times-in-1927-giving-a-strange-result-score-620541-in-2018">50: Why is subtracting these two times (in 1927) giving a strange result? (score <span>620541</span> in 2018)</a></li>
-<li><a href="#comparing-java-enum-members-or-equals-score-614360-in-2017">51: Comparing Java enum members: == or equals()? (score <span>614360</span> in 2017)</a></li>
-<li><a href="#creating-a-memory-leak-with-java-score-610179-in-2019">52: Creating a memory leak with Java (score <span>610179</span> in 2019)</a></li>
-<li><a href="#how-can-i-convert-a-stack-trace-to-a-string-score-568558-in-2016">53: How can I convert a stack trace to a string? (score <span>568558</span> in 2016)</a></li>
-<li><a href="#what-exactly-is-apache-camel-score-533978-in-2016">54: What exactly is Apache Camel? (score <span>533978</span> in 2016)</a></li>
-<li><a href="#what-is-a-javabean-exactly-score-528745-in-2019">55: What is a JavaBean exactly? (score <span>528745</span> in 2019)</a></li>
-<li><a href="#download-a-file-with-android-and-showing-the-progress-in-a-progressdialog-score-518763-in-2014">56: Download a file with Android, and showing the progress in a ProgressDialog (score <span>518763</span> in 2014)</a></li>
-<li><a href="#does-a-finally-block-always-get-executed-in-java-score-471713-in-2019">57: Does a finally block always get executed in Java? (score <span>471713</span> in 2019)</a></li>
-<li><a href="#iterating-through-a-collection-avoiding-concurrentmodificationexception-when-removing-objects-in-a-loop-score-461129-in-2019">58: Iterating through a Collection, avoiding ConcurrentModificationException when removing objects in a loop (score <span>461129</span> in 2019)</a></li>
-<li><a href="#android-sdk-installation-doesnt-find-jdk-score-435935-in-2018">59: Android SDK installation doesn’t find JDK (score <span>435935</span> in 2018)</a></li>
-<li><a href="#why-is-char-preferred-over-string-for-passwords-score-373132-in-2017">60: Why is char[] preferred over String for passwords? (score <span>373132</span> in 2017)</a></li>
-<li><a href="#why-use-getters-and-settersaccessors-score-367892-in-2017">61: Why use getters and setters/accessors? (score <span>367892</span> in 2017)</a></li>
-<li><a href="#proper-use-cases-for-android-usermanager.isuseragoat-score-301207-in-2018">62: Proper use cases for Android UserManager.isUserAGoat()? (score <span>301207</span> in 2018)</a></li>
-<li><a href="#how-do-servlets-work-instantiation-sessions-shared-variables-and-multithreading-score-282529-in-2017">63: How do servlets work? Instantiation, sessions, shared variables and multithreading (score <span>282529</span> in 2017)</a></li>
-<li><a href="#why-dont-javas---compound-assignment-operators-require-casting-score-275111-in-2018">64: Why don’t Java’s +=, -=, *=, /= compound assignment operators require casting? (score <span>275111</span> in 2018)</a></li>
-<li><a href="#how-to-avoid-java-code-in-jsp-files-score-274966-in-2015">65: How to avoid Java code in JSP files? (score <span>274966</span> in 2015)</a></li>
-<li><a href="#fastest-way-to-determine-if-an-integers-square-root-is-an-integer-score-262060-in-2018">66: Fastest way to determine if an integer’s square root is an integer (score <span>262060</span> in 2018)</a></li>
-<li><a href="#must-override-a-superclass-method-errors-after-importing-a-project-into-eclipse-score-250927-in-2019">67: ‘Must Override a Superclass Method’ Errors after importing a project into Eclipse (score <span>250927</span> in 2019)</a></li>
-<li><a href="#why-is-printing-b-dramatically-slower-than-printing-score-228782-in-2018">68: Why is printing “B” dramatically slower than printing “#”? (score <span>228782</span> in 2018)</a></li>
-<li><a href="#is-null-check-needed-before-calling-instanceof-score-219704-in-2017">69: Is null check needed before calling instanceof? (score <span>219704</span> in 2017)</a></li>
-<li><a href="#why-does-this-code-using-random-strings-print-hello-world-score-193430-in-2015">70: Why does this code using random strings print “hello world”? (score <span>193430</span> in 2015)</a></li>
-<li><a href="#why-is-executing-java-code-in-comments-with-certain-unicode-characters-allowed-score-73395-in-2015">71: Why is executing Java code in comments with certain Unicode characters allowed? (score <span>73395</span> in 2015)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-convert-a-string-to-an-int-in-java-score-5767039-in-2018" class="level3">
