--- a/Js_top_100.html
+++ b/Js_top_100.html
@@ -78,110 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Js &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-remove-a-particular-element-from-an-array-in-javascript-score-6032283-in-2019">1: How do I remove a particular element from an array in JavaScript? (score <span>6032283</span> in 2019)</a></li>
-<li><a href="#how-do-i-redirect-to-another-webpage-score-5895389-in-2018">2: How do I redirect to another webpage? (score <span>5895389</span> in 2018)</a></li>
-<li><a href="#how-to-check-whether-a-string-contains-a-substring-in-javascript-score-5745859-in-2019">3: How to check whether a string contains a substring in JavaScript? (score <span>5745859</span> in 2019)</a></li>
-<li><a href="#for-each-over-an-array-in-javascript-score-3880811-in-2019">5: For-each over an array in JavaScript? (score <span>3880811</span> in 2019)</a></li>
-<li><a href="#get-selected-value-in-dropdown-list-using-javascript-score-3750417-in-2019">6: Get selected value in dropdown list using JavaScript (score <span>3750417</span> in 2019)</a></li>
-<li><a href="#how-can-i-get-query-string-values-in-javascript-score-3549269-in-2015">7: How can I get query string values in JavaScript? (score <span>3549269</span> in 2015)</a></li>
-<li><a href="#loop-through-an-array-in-javascript-score-3479539-in-2018">8: Loop through an array in JavaScript (score <span>3479539</span> in 2018)</a></li>
-<li><a href="#how-to-format-a-javascript-date-score-3218299-in-2018">9: How to format a JavaScript date (score <span>3218299</span> in 2018)</a></li>
-<li><a href="#setting-checked-for-a-checkbox-with-jquery-score-3137898-in-2016">10: Setting “checked” for a checkbox with jQuery? (score <span>3137898</span> in 2016)</a></li>
-<li><a href="#how-to-replace-all-occurrences-of-a-string-score-3132930-in-2019">11: How to replace all occurrences of a string? (score <span>3132930</span> in 2019)</a></li>
-<li><a href="#how-to-append-something-to-an-array-score-2888739-in-2017">12: How to append something to an array? (score <span>2888739</span> in 2017)</a></li>
-<li><a href="#how-do-i-include-a-javascript-file-in-another-javascript-file-score-2883256-in-2017">13: How do I include a JavaScript file in another JavaScript file? (score <span>2883256</span> in 2017)</a></li>
-<li><a href="#how-to-validate-an-email-address-in-javascript-score-2751724-in-2019">14: How to validate an email address in JavaScript (score <span>2751724</span> in 2019)</a></li>
-<li><a href="#get-the-current-url-with-javascript-score-2692673-in-2017">15: Get the current URL with JavaScript? (score <span>2692673</span> in 2017)</a></li>
-<li><a href="#how-do-you-get-a-timestamp-in-javascript-score-2691791-in-2019">16: How do you get a timestamp in JavaScript? (score <span>2691791</span> in 2019)</a></li>
-<li><a href="#how-to-check-emptyundefinednull-string-in-javascript-score-2687485-in-2018">17: How to check empty/undefined/null string in JavaScript? (score <span>2687485</span> in 2018)</a></li>
-<li><a href="#how-do-i-check-if-an-element-is-hidden-in-jquery-score-2524355-in-2019">18: How do I check if an element is hidden in jQuery? (score <span>2524355</span> in 2019)</a></li>
-<li><a href="#how-to-change-an-elements-class-with-javascript-score-2446526-in-2019">19: How to change an element’s class with JavaScript? (score <span>2446526</span> in 2019)</a></li>
-<li><a href="#how-do-i-get-the-current-date-in-javascript-score-2442657-in-2018">20: How do I get the current date in JavaScript? (score <span>2442657</span> in 2018)</a></li>
-<li><a href="#how-do-i-check-if-an-array-includes-a-value-in-javascript-score-2382154-in-2019">21: How do I check if an array includes a value in JavaScript? (score <span>2382154</span> in 2019)</a></li>
-<li><a href="#how-do-i-empty-an-array-in-javascript-score-2380812-in-2015">22: How do I empty an array in JavaScript? (score <span>2380812</span> in 2015)</a></li>
-<li><a href="#how-can-i-refresh-a-page-with-jquery-score-2363933-in-2013">23: How can I refresh a page with jQuery? (score <span>2363933</span> in 2013)</a></li>
-<li><a href="#open-a-url-in-a-new-tab-and-not-a-new-window-using-javascript-score-2357996-in-2019">25: Open a URL in a new tab (and not a new window) using JavaScript (score <span>2357996</span> in 2019)</a></li>
-<li><a href="#what-is-the-javascript-version-of-sleep-score-2356533-in-2018">26: What is the JavaScript version of sleep()? (score <span>2356533</span> in 2018)</a></li>
-<li><a href="#jquery-scroll-to-element-score-2328481-in-2017">27: jQuery scroll to element (score <span>2328481</span> in 2017)</a></li>
-<li><a href="#which-href-value-should-i-use-for-javascript-links-or-javascriptvoid0-score-2233339-in-2017">28: Which “href” value should I use for JavaScript links, “#” or “javascript:void(0)”? (score <span>2233339</span> in 2017)</a></li>
-<li><a href="#how-to-check-for-undefined-in-javascript-score-2185286-in-2014">29: How to check for “undefined” in JavaScript? (score <span>2185286</span> in 2014)</a></li>
-<li><a href="#round-to-at-most-2-decimal-places-only-if-necessary-score-2144234-in-2019">30: Round to at most 2 decimal places (only if necessary) (score <span>2144234</span> in 2019)</a></li>
-<li><a href="#disableenable-an-input-with-jquery-score-2086518-in-2016">31: Disable/enable an input with jQuery? (score <span>2086518</span> in 2016)</a></li>
-<li><a href="#how-can-i-know-which-radio-button-is-selected-via-jquery-score-2061588-in-2017">32: How can I know which radio button is selected via jQuery? (score <span>2061588</span> in 2017)</a></li>
-<li><a href="#how-do-i-remove-a-property-from-a-javascript-object-score-2051539-in-2017">33: How do I remove a property from a JavaScript object? (score <span>2051539</span> in 2017)</a></li>
-<li><a href="#get-selected-text-from-a-drop-down-list-select-box-using-jquery-score-1964098-in-2018">35: Get selected text from a drop-down list (select box) using jQuery (score <span>1964098</span> in 2018)</a></li>
-<li><a href="#how-can-i-add-a-keyvalue-pair-to-a-javascript-object-score-1959719-in-2015">36: How can I add a key/value pair to a JavaScript object? (score <span>1959719</span> in 2015)</a></li>
-<li><a href="#how-to-get-the-value-from-the-get-parameters-score-1930107-in-2016">37: How to get the value from the GET parameters? (score <span>1930107</span> in 2016)</a></li>
-<li><a href="#how-can-i-create-a-two-dimensional-array-in-javascript-score-1897981-in-2015">38: How can I create a two dimensional array in JavaScript? (score <span>1897981</span> in 2015)</a></li>
-<li><a href="#how-do-i-test-for-an-empty-javascript-object-score-1881498-in-2019">39: How do I test for an empty JavaScript object? (score <span>1881498</span> in 2019)</a></li>
-<li><a href="#what-is-the-most-efficient-way-to-deep-clone-an-object-in-javascript-score-1868130-in-2017">40: What is the most efficient way to deep clone an object in JavaScript? (score <span>1868130</span> in 2017)</a></li>
-<li><a href="#how-do-i-make-the-first-letter-of-a-string-uppercase-in-javascript-score-1858457-in-2019">41: How do I make the first letter of a string uppercase in JavaScript? (score <span>1858457</span> in 2019)</a></li>
-<li><a href="#parse-json-in-javascript-score-1857919-in-2017">42: Parse JSON in JavaScript? (score <span>1857919</span> in 2017)</a></li>
-<li><a href="#compare-two-dates-with-javascript-score-1785021-in-2019">43: Compare two dates with JavaScript (score <span>1785021</span> in 2019)</a></li>
-<li><a href="#checking-if-a-key-exists-in-a-javascript-object-score-1769527-in-2019">44: Checking if a key exists in a JavaScript object? (score <span>1769527</span> in 2019)</a></li>
-<li><a href="#how-do-i-loop-through-or-enumerate-a-javascript-object-score-1767834-in-2018">45: How do I loop through or enumerate a JavaScript object? (score <span>1767834</span> in 2018)</a></li>
-<li><a href="#how-to-get-the-children-of-the-this-selector-score-1766627-in-2017">46: How to get the children of the $(this) selector? (score <span>1766627</span> in 2017)</a></li>
-<li><a href="#how-can-i-convert-a-string-to-boolean-in-javascript-score-1764203-in">47: How can I convert a string to boolean in JavaScript? (score <span>1764203</span> in )</a></li>
-<li><a href="#check-if-checkbox-is-checked-with-jquery-score-1743815-in-2018">48: Check if checkbox is checked with jQuery (score <span>1743815</span> in 2018)</a></li>
-<li><a href="#how-do-i-correctly-clone-a-javascript-object-score-1734289-in-2018">49: How do I correctly clone a JavaScript object? (score <span>1734289</span> in 2018)</a></li>
-<li><a href="#disable-same-origin-policy-in-chrome-score-1730961-in-2019">50: Disable same origin policy in Chrome (score <span>1730961</span> in 2019)</a></li>
-<li><a href="#what-does-javascriptvoid0-mean-score-1723008-in-2017">51: What does “javascript:void(0)” mean? (score <span>1723008</span> in 2017)</a></li>
-<li><a href="#which-equals-operator-vs-should-be-used-in-javascript-comparisons-score-1695940-in-2017">52: Which equals operator (== vs ===) should be used in JavaScript comparisons? (score <span>1695940</span> in 2017)</a></li>
-<li><a href="#how-can-i-format-numbers-as-currency-string-in-javascript-score-1687668-in-2019">53: How can I format numbers as currency string in JavaScript? (score <span>1687668</span> in 2019)</a></li>
-<li><a href="#how-do-i-copy-to-the-clipboard-in-javascript-score-1678830-in-2017">54: How do I copy to the clipboard in JavaScript? (score <span>1678830</span> in 2017)</a></li>
-<li><a href="#length-of-a-javascript-object-score-1658003-in-2019">57: Length of a JavaScript object (score <span>1658003</span> in 2019)</a></li>
-<li><a href="#how-can-i-display-a-javascript-object-score-1635768-in-2016">58: How can I display a JavaScript object? (score <span>1635768</span> in 2016)</a></li>
-<li><a href="#create-guid-uuid-in-javascript-score-1617271-in-2014">59: Create GUID / UUID in JavaScript? (score <span>1617271</span> in 2014)</a></li>
-<li><a href="#add-table-row-in-jquery-score-1585868-in-2015">61: Add table row in jQuery (score <span>1585868</span> in 2015)</a></li>
-<li><a href="#determine-whether-an-array-contains-a-value-score-1581682-in-2015">62: Determine whether an array contains a value (score <span>1581682</span> in 2015)</a></li>
-<li><a href="#scroll-to-the-top-of-the-page-using-javascript-score-1573088-in-2019">63: Scroll to the top of the page using JavaScript? (score <span>1573088</span> in 2019)</a></li>
-<li><a href="#javascript-equivalent-to-printfstring.format-score-1572835-in-2018">64: JavaScript equivalent to printf/String.Format (score <span>1572835</span> in 2018)</a></li>
-<li><a href="#javascript-chopslicetrim-off-last-character-in-string-score-1568123-in-2017">65: JavaScript chop/slice/trim off last character in string (score <span>1568123</span> in 2017)</a></li>
-<li><a href="#how-to-loop-through-a-plain-javascript-object-with-the-objects-as-members-score-1555849-in-2018">66: How to loop through a plain JavaScript object with the objects as members? (score <span>1555849</span> in 2018)</a></li>
-<li><a href="#how-do-i-add-a-class-to-a-given-element-score-1505892-in-2019">67: How do I add a class to a given element? (score <span>1505892</span> in 2019)</a></li>
-<li><a href="#convert-js-object-to-json-string-score-1499332-in-2019">68: Convert JS object to JSON string (score <span>1499332</span> in 2019)</a></li>
-<li><a href="#validate-decimal-numbers-in-javascript---isnumeric-score-1447994-in-2016">69: Validate decimal numbers in JavaScript - IsNumeric() (score <span>1447994</span> in 2016)</a></li>
-<li><a href="#encode-url-in-javascript-score-1436477-in-2014">70: Encode URL in JavaScript? (score <span>1436477</span> in 2014)</a></li>
-<li><a href="#what-is-the-best-way-to-detect-a-mobile-device-score-1433708-in-2019">71: What is the best way to detect a mobile device? (score <span>1433708</span> in 2019)</a></li>
-<li><a href="#where-can-i-find-documentation-on-formatting-a-date-in-javascript-score-1423476-in-2018">72: Where can I find documentation on formatting a date in JavaScript? (score <span>1423476</span> in 2018)</a></li>
-<li><a href="#how-do-i-completely-uninstall-node.js-and-reinstall-from-beginning-mac-os-x-score-1423100-in-2017">73: How do I completely uninstall Node.js, and reinstall from beginning (Mac OS X) (score <span>1423100</span> in 2017)</a></li>
-<li><a href="#how-to-check-if-an-object-is-an-array-score-1421658-in-2019">74: How to check if an object is an array? (score <span>1421658</span> in 2019)</a></li>
-<li><a href="#get-the-size-of-the-screen-current-web-page-and-browser-window-score-1416478-in-2017">75: Get the size of the screen, current web page and browser window (score <span>1416478</span> in 2017)</a></li>
-<li><a href="#how-does-access-control-allow-origin-header-work-score-1414222-in-2016">76: How does Access-Control-Allow-Origin header work? (score <span>1414222</span> in 2016)</a></li>
-<li><a href="#remove-element-by-id-score-1399549-in-2016">77: Remove element by id (score <span>1399549</span> in 2016)</a></li>
-<li><a href="#javascript-check-if-variable-exists-is-definedinitialized-score-1385078-in-2015">78: JavaScript check if variable exists (is defined/initialized) (score <span>1385078</span> in 2015)</a></li>
-<li><a href="#writing-files-in-node.js-score-1381849-in-2018">79: Writing files in Node.js (score <span>1381849</span> in 2018)</a></li>
-<li><a href="#how-do-javascript-closures-work-score-1379921-in-2017">80: How do JavaScript closures work? (score <span>1379921</span> in 2017)</a></li>
-<li><a href="#javascript-post-request-like-a-form-submit-score-1368289-in-2017">81: JavaScript post request like a form submit (score <span>1368289</span> in 2017)</a></li>
-<li><a href="#how-to-change-the-href-for-a-hyperlink-using-jquery-score-1363581-in-2016">82: How to change the href for a hyperlink using jQuery (score <span>1363581</span> in 2016)</a></li>
-<li><a href="#how-can-i-select-an-element-by-name-with-jquery-score-1362990-in-2018">83: How can I select an element by name with jQuery? (score <span>1362990</span> in 2018)</a></li>
-<li><a href="#creating-multiline-strings-in-javascript-score-1336887-in-2013">85: Creating multiline strings in JavaScript (score <span>1336887</span> in 2013)</a></li>
-<li><a href="#trigger-a-button-click-with-javascript-on-the-enter-key-in-a-text-box-score-1329593-in-2015">86: Trigger a button click with JavaScript on the Enter key in a text box (score <span>1329593</span> in 2015)</a></li>
-<li><a href="#deleting-array-elements-in-javascript---delete-vs-splice-score-1329284-in-2016">87: Deleting array elements in JavaScript - delete vs splice (score <span>1329284</span> in 2016)</a></li>
-<li><a href="#sort-array-of-objects-by-string-property-value-score-1325247-in-2018">88: Sort array of objects by string property value (score <span>1325247</span> in 2018)</a></li>
-<li><a href="#how-do-i-return-the-response-from-an-asynchronous-call-score-1313831-in-2019">89: How do I return the response from an asynchronous call? (score <span>1313831</span> in 2019)</a></li>
-<li><a href="#convert-a-string-to-an-integer-score-1303678-in-2019">90: Convert a string to an integer? (score <span>1303678</span> in 2019)</a></li>
-<li><a href="#generate-random-number-between-two-numbers-in-javascript-score-1293869-in-2016">91: Generate random number between two numbers in JavaScript (score <span>1293869</span> in 2016)</a></li>
-<li><a href="#how-can-i-upload-files-asynchronously-score-1286681-in-2019">92: How can I upload files asynchronously? (score <span>1286681</span> in 2019)</a></li>
-<li><a href="#find-object-by-id-in-an-array-of-javascript-objects-score-1282573-in-2016">93: Find object by id in an array of JavaScript objects (score <span>1282573</span> in 2016)</a></li>
-<li><a href="#remove-duplicate-values-from-js-array-score-1269025-in-2018">94: Remove duplicate values from JS array (score <span>1269025</span> in 2018)</a></li>
-<li><a href="#how-do-i-modify-the-url-without-reloading-the-page-score-1266619-in-2019">95: How do I modify the URL without reloading the page? (score <span>1266619</span> in 2019)</a></li>
-<li><a href="#convert-a-unix-timestamp-to-time-in-javascript-score-1259520-in-2018">96: Convert a Unix timestamp to time in JavaScript (score <span>1259520</span> in 2018)</a></li>
-<li><a href="#retrieve-the-position-xy-of-an-html-element-score-1258174-in-2013">97: Retrieve the position (X,Y) of an HTML element (score <span>1258174</span> in 2013)</a></li>
-<li><a href="#pure-javascript-equivalent-of-jquerys-.ready---how-to-call-a-function-when-the-pagedom-is-ready-for-it-score-1254609-in-2017">98: Pure JavaScript equivalent of jQuery’s $.ready() - how to call a function when the page/DOM is ready for it (score <span>1254609</span> in 2017)</a></li>
-<li><a href="#check-if-element-exists-in-jquery-score-1244831-in-2013">99: Check if element exists in jQuery (score <span>1244831</span> in 2013)</a></li>
-<li><a href="#how-do-i-get-started-with-node.js-score-1227201-in-2013">100: How do I get started with Node.js (score <span>1227201</span> in 2013)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-remove-a-particular-element-from-an-array-in-javascript-score-6032283-in-2019" class="level3">
