--- a/Linux_top_100.html
+++ b/Linux_top_100.html
@@ -78,116 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Linux &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-find-all-files-containing-specific-text-on-linux-score-6026154-in-2017">1: How do I find all files containing specific text on Linux? (score <span>6026154</span> in 2017)</a></li>
-<li><a href="#how-do-i-change-permissions-for-a-folder-and-all-of-its-subfolders-and-files-in-one-step-in-linux-score-3802221-in-2019">2: How do I change permissions for a folder and all of its subfolders and files in one step in Linux? (score <span>3802221</span> in 2019)</a></li>
-<li><a href="#how-do-i-copy-folder-with-files-to-another-folder-in-unixlinux-score-2371756-in-2017">3: How do I copy folder with files to another folder in Unix/Linux? (score <span>2371756</span> in 2017)</a></li>
-<li><a href="#how-can-i-recursively-find-all-files-in-current-and-subfolders-based-on-wildcard-matching-score-2158446-in-2016">4: How can I recursively find all files in current and subfolders based on wildcard matching? (score <span>2158446</span> in 2016)</a></li>
-<li><a href="#how-to-symlink-a-file-in-linux-score-1958525-in-2016">5: How to symlink a file in Linux? (score <span>1958525</span> in 2016)</a></li>
-<li><a href="#chmod-777-to-a-folder-and-all-contents-score-1793940-in-2018">6: Chmod 777 to a folder and all contents (score <span>1793940</span> in 2018)</a></li>
-<li><a href="#how-to-create-a-file-in-linux-from-terminal-window-score-1564036-in-2018">7: How to create a file in Linux from terminal window? (score <span>1564036</span> in 2018)</a></li>
-<li><a href="#how-to-permanently-set-path-on-linuxunix-score-1467227-in-2018">8: How to permanently set $PATH on Linux/Unix? (score <span>1467227</span> in 2018)</a></li>
-<li><a href="#how-do-i-grep-recursively-score-1461938-in-2018">9: How do I grep recursively? (score <span>1461938</span> in 2018)</a></li>
-<li><a href="#looping-through-the-content-of-a-file-in-bash-score-1415142-in-2018">10: Looping through the content of a file in Bash (score <span>1415142</span> in 2018)</a></li>
-<li><a href="#error-could-not-find-or-load-main-class-score-1353834-in-2012">11: Error: Could not find or load main class (score <span>1353834</span> in 2012)</a></li>
-<li><a href="#kill-detached-screen-session-score-1279942-in-2019">12: Kill detached screen session (score <span>1279942</span> in 2019)</a></li>
-<li><a href="#how-to-get-the-current-date-and-time-in-the-terminal-and-set-a-custom-command-in-terminal-for-it-score-1254767-in-2016">13: How to get the current date and time in the terminal and set a custom command in terminal for it? (score <span>1254767</span> in 2016)</a></li>
-<li><a href="#how-to-count-lines-in-a-document-score-1222035-in-2015">14: How to count lines in a document? (score <span>1222035</span> in 2015)</a></li>
-<li><a href="#how-to-download-a-file-from-server-using-ssh-score-1214123-in-2016">15: How to download a file from server using SSH? (score <span>1214123</span> in 2016)</a></li>
-<li><a href="#sleep-for-milliseconds-score-1182180-in-2015">16: Sleep for milliseconds (score <span>1182180</span> in 2015)</a></li>
-<li><a href="#how-to-measure-actual-memory-usage-of-an-application-or-process-score-1147677-in-2017">17: How to measure actual memory usage of an application or process? (score <span>1147677</span> in 2017)</a></li>
-<li><a href="#error-cant-connect-to-local-mysql-server-through-socketvarrunmysqldmysqld.sock-2-missing-varrunmysqldmysqld.sock-score-1145574-in-2018">18: error: ‘Can’t connect to local MySQL server through socket’/var/run/mysqld/mysqld.sock’ (2)’ – Missing /var/run/mysqld/mysqld.sock (score <span>1145574</span> in 2018)</a></li>
-<li><a href="#is-there-a-command-to-list-all-unix-group-names-score-1057247-in-2017">19: Is there a command to list all Unix group names? (score <span>1057247</span> in 2017)</a></li>
-<li><a href="#lost-httpd.conf-file-located-apache-score-1043824-in-2017">20: Lost httpd.conf file located apache (score <span>1043824</span> in 2017)</a></li>
-<li><a href="#linux-error-while-loading-shared-libraries-cannot-open-shared-object-file-no-such-file-or-directory-score-1027980-in-2009">21: Linux error while loading shared libraries: cannot open shared object file: No such file or directory (score <span>1027980</span> in 2009)</a></li>
-<li><a href="#redirect-all-output-to-file-score-1007650-in-2015">22: Redirect all output to file (score <span>1007650</span> in 2015)</a></li>
-<li><a href="#c-ide-for-linux-score-967131-in-2017">23: C++ IDE for Linux? (score <span>967131</span> in 2017)</a></li>
-<li><a href="#how-to-kill-a-process-running-on-particular-port-in-linux-score-954064-in-2017">24: How to kill a process running on particular port in Linux? (score <span>954064</span> in 2017)</a></li>
-<li><a href="#how-to-force-cp-to-overwrite-without-confirmation-score-937183-in-2016">25: How to force cp to overwrite without confirmation (score <span>937183</span> in 2016)</a></li>
-<li><a href="#how-do-i-prompt-for-yesnocancel-input-in-a-linux-shell-script-score-926403-in-2016">26: How do I prompt for Yes/No/Cancel input in a Linux shell script? (score <span>926403</span> in 2016)</a></li>
-<li><a href="#how-can-i-generate-a-list-of-files-with-their-absolute-path-in-linux-score-923845-in-2019">27: How can I generate a list of files with their absolute path in Linux? (score <span>923845</span> in 2019)</a></li>
-<li><a href="#remove-a-symlink-to-a-directory-score-921379-in-2014">28: Remove a symlink to a directory (score <span>921379</span> in 2014)</a></li>
-<li><a href="#http-post-and-get-using-curl-in-linux-score-908003-in-2019">29: HTTP POST and GET using cURL in Linux (score <span>908003</span> in 2019)</a></li>
-<li><a href="#how-to-run-a-shell-script-at-startup-score-904087-in-2018">30: How to run a shell script at startup (score <span>904087</span> in 2018)</a></li>
-<li><a href="#how-to-exclude-a-directory-in-find-.-command-score-899880-in-2018">31: How to exclude a directory in find . command (score <span>899880</span> in 2018)</a></li>
-<li><a href="#how-to-change-the-output-color-of-echo-in-linux-score-896232-in-2017">32: How to change the output color of echo in Linux (score <span>896232</span> in 2017)</a></li>
-<li><a href="#error-1045-28000-access-denied-for-user-rootlocalhost-using-password-yes-score-860136-in-2019">33: ERROR 1045 (28000): Access denied for user ‘root’@‘localhost’ (using password: YES) (score <span>860136</span> in 2019)</a></li>
-<li><a href="#usrbinld-cannot-find--l-score-838868-in-2016">34: usr/bin/ld: cannot find -l<nameOfTheLibrary> (score <span>838868</span> in 2016)</a></li>
-<li><a href="#how-to-run-a-shell-script-on-a-unix-console-or-mac-terminal-score-838291-in-2017">35: How to run a shell script on a Unix console or Mac terminal? (score <span>838291</span> in 2017)</a></li>
-<li><a href="#how-to-get-full-path-of-a-file-score-837153-in-2014">36: How to get full path of a file? (score <span>837153</span> in 2014)</a></li>
-<li><a href="#performing-http-requests-with-curl-using-proxy-score-833120-in-2017">37: performing HTTP requests with cURL (using PROXY) (score <span>833120</span> in 2017)</a></li>
-<li><a href="#shell-command-to-tar-directory-excluding-certain-filesfolders-score-811337-in-2019">38: Shell command to tar directory excluding certain files/folders (score <span>811337</span> in 2019)</a></li>
-<li><a href="#how-do-i-delete-an-exported-environment-variable-score-805227-in-2017">39: How do I delete an exported environment variable? (score <span>805227</span> in 2017)</a></li>
-<li><a href="#how-does-cat-eof-work-in-bash-score-797520-in-2017">40: How does “cat &lt;&lt; EOF” work in bash? (score <span>797520</span> in 2017)</a></li>
-<li><a href="#dude-wheres-my-php.ini-score-754046-in-2019">41: Dude, where’s my php.ini? (score <span>754046</span> in 2019)</a></li>
-<li><a href="#how-do-i-find-the-mysql-my.cnf-location-score-752753-in-2018">42: How do I find the MySQL my.cnf location (score <span>752753</span> in 2018)</a></li>
-<li><a href="#open-in-python-does-not-create-a-file-if-it-doesnt-exist-score-749514-in-2016">43: open() in Python does not create a file if it doesn’t exist (score <span>749514</span> in 2016)</a></li>
-<li><a href="#how-to-set-the-environmental-variable-ld_library_path-in-linux-score-746566-in-2015">44: How to set the environmental variable LD_LIBRARY_PATH in linux (score <span>746566</span> in 2015)</a></li>
-<li><a href="#how-to-run-node.js-as-a-background-process-and-never-die-score-716866-in-2018">45: How to run Node.js as a background process and never die? (score <span>716866</span> in 2018)</a></li>
-<li><a href="#how-can-i-see-the-size-of-files-and-directories-in-linux-score-707520-in-2019">46: How can I see the size of files and directories in linux? (score <span>707520</span> in 2019)</a></li>
-<li><a href="#using-ls-to-list-directories-and-their-total-sizes-score-698469-in-2009">47: Using ls to list directories and their total sizes (score <span>698469</span> in 2009)</a></li>
-<li><a href="#how-can-i-redirect-and-append-both-stdout-and-stderr-to-a-file-with-bash-score-692374-in-2015">48: How can I redirect and append both stdout and stderr to a file with Bash? (score <span>692374</span> in 2015)</a></li>
-<li><a href="#how-to-set-java_home-in-linux-for-all-users-score-675722-in-2014">49: How to set JAVA_HOME in Linux for all users (score <span>675722</span> in 2014)</a></li>
-<li><a href="#how-do-i-change-the-root-directory-of-an-apache-server-score-667193-in-2016">50: How do I change the root directory of an apache server? (score <span>667193</span> in 2016)</a></li>
-<li><a href="#how-to-fix-sudo-no-tty-present-and-no-askpass-program-specified-error-score-655921-in-2018">51: How to fix ‘sudo: no tty present and no askpass program specified’ error? (score <span>655921</span> in 2018)</a></li>
-<li><a href="#how-do-i-send-a-file-as-an-email-attachment-using-linux-command-line-score-635793-in-2016">53: How do I send a file as an email attachment using Linux command line? (score <span>635793</span> in 2016)</a></li>
-<li><a href="#unicodedecodeerror-utf8-codec-cant-decode-byte-0x9c-score-605641-in-2019">54: UnicodeDecodeError: ‘utf8’ codec can’t decode byte 0x9c (score <span>605641</span> in 2019)</a></li>
-<li><a href="#how-to-pass-password-to-scp-score-596751-in-2019">55: How to pass password to scp? (score <span>596751</span> in 2019)</a></li>
-<li><a href="#how-do-i-test-if-a-variable-is-a-number-in-bash-score-596633-in-2017">56: How do I test if a variable is a number in Bash? (score <span>596633</span> in 2017)</a></li>
-<li><a href="#using-openssl-to-get-the-certificate-from-a-server-score-591147-in">57: Using openssl to get the certificate from a server (score <span>591147</span> in )</a></li>
-<li><a href="#why-doesnt-cd-work-in-a-shell-script-score-584778-in-2018">58: Why doesn’t “cd” work in a shell script? (score <span>584778</span> in 2018)</a></li>
-<li><a href="#ld-cannot-find-an-existing-library-score-583334-in-2010">59: ld cannot find an existing library (score <span>583334</span> in 2010)</a></li>
-<li><a href="#recursively-counting-files-in-a-linux-directory-score-580138-in-2015">60: Recursively counting files in a Linux directory (score <span>580138</span> in 2015)</a></li>
-<li><a href="#why-do-you-need-to-put-binbash-at-the-beginning-of-a-script-file-score-573690-in-2018">61: Why do you need to put #!/bin/bash at the beginning of a script file? (score <span>573690</span> in 2018)</a></li>
-<li><a href="#how-can-i-use-grep-to-show-just-filenames-on-linux-score-572766-in-2019">62: How can I use grep to show just filenames on Linux? (score <span>572766</span> in 2019)</a></li>
-<li><a href="#how-to-obtain-the-number-of-cpuscores-in-linux-from-the-command-line-score-571310-in-2015">63: How to obtain the number of CPUs/cores in Linux from the command line? (score <span>571310</span> in 2015)</a></li>
-<li><a href="#how-to-redirect-output-to-a-file-and-stdout-score-560328-in-2014">64: How to redirect output to a file and stdout (score <span>560328</span> in 2014)</a></li>
-<li><a href="#write-to-.txt-file-score-558915-in-2014">65: Write to .txt file? (score <span>558915</span> in 2014)</a></li>
-<li><a href="#how-to-grep-a-string-in-a-directory-and-all-its-subdirectories-files-in-linux-score-553700-in">66: How to grep a string in a directory and all its subdirectories’ files in LINUX? (score <span>553700</span> in )</a></li>
-<li><a href="#install-tkinter-for-python-score-552246-in-2019">67: Install tkinter for Python (score <span>552246</span> in 2019)</a></li>
-<li><a href="#grep-but-only-certain-file-extensions-score-550776-in-2017">68: grep, but only certain file extensions (score <span>550776</span> in 2017)</a></li>
-<li><a href="#undefined-reference-to-pthread_create-in-linux-score-550266-in-2017">69: Undefined reference to pthread_create in Linux (score <span>550266</span> in 2017)</a></li>
-<li><a href="#how-to-create-a-link-to-a-directory-score-529086-in-2016">70: How to create a link to a directory (score <span>529086</span> in 2016)</a></li>
-<li><a href="#command-to-change-the-default-home-directory-of-a-user-score-524721-in-2014">71: Command to change the default home directory of a user (score <span>524721</span> in 2014)</a></li>
-<li><a href="#argument-list-too-long-error-for-rm-cp-mv-commands-score-523283-in-2018">72: Argument list too long error for rm, cp, mv commands (score <span>523283</span> in 2018)</a></li>
-<li><a href="#how-to-set-proxy-for-wget-score-523259-in-2019">73: How to set proxy for wget? (score <span>523259</span> in 2019)</a></li>
-<li><a href="#convert-dos-line-endings-to-linux-line-endings-in-vim-score-517407-in-2016">74: Convert DOS line endings to Linux line endings in vim (score <span>517407</span> in 2016)</a></li>
-<li><a href="#how-to-log-in-to-mysql-and-query-the-database-from-linux-terminal-score-516111-in-2011">75: how to log in to mysql and query the database from linux terminal (score <span>516111</span> in 2011)</a></li>
-<li><a href="#how-to-determine-whether-a-given-linux-is-32-bit-or-64-bit-score-510809-in-2011">76: How to determine whether a given Linux is 32 bit or 64 bit? (score <span>510809</span> in 2011)</a></li>
-<li><a href="#how-do-i-connect-to-a-terminal-to-a-serial-to-usb-device-on-ubuntu-10.10-maverick-meerkat-score-507010-in-2018">77: How do I connect to a terminal to a serial-to-USB device on Ubuntu 10.10 (Maverick Meerkat)? (score <span>507010</span> in 2018)</a></li>
-<li><a href="#changing-default-shell-in-linux-score-504666-in-2019">78: Changing default shell in Linux (score <span>504666</span> in 2019)</a></li>
-<li><a href="#chmod-recursively-score-502035-in-2017">79: Chmod recursively (score <span>502035</span> in 2017)</a></li>
-<li><a href="#docker-cant-connect-to-docker-daemon-score-499935-in-2017">80: Docker can’t connect to docker daemon (score <span>499935</span> in 2017)</a></li>
-<li><a href="#command-line-tool-to-find-java-heap-size-and-memory-used-linux-score-494555-in">81: Command-line Tool to find Java Heap Size and Memory Used (Linux)? (score <span>494555</span> in )</a></li>
-<li><a href="#how-to-see-top-processes-sorted-by-actual-memory-usage-score-492906-in-2018">82: How to see top processes sorted by actual memory usage? (score <span>492906</span> in 2018)</a></li>
-<li><a href="#how-do-i-change-the-number-of-open-files-limit-in-linux-score-491550-in-2012">83: How do I change the number of open files limit in Linux? (score <span>491550</span> in 2012)</a></li>
-<li><a href="#check-if-a-particular-service-is-running-on-ubuntu-score-490966-in-2016">84: Check If a Particular Service Is Running on Ubuntu (score <span>490966</span> in 2016)</a></li>
-<li><a href="#apt-get-command-not-found-score-490087-in">85: apt-get: command not found (score <span>490087</span> in )</a></li>
-<li><a href="#how-to-unmount-a-busy-device-score-483674-in-2019">86: How to unmount a busy device (score <span>483674</span> in 2019)</a></li>
-<li><a href="#configure-binshm-bad-interpreter-score-480455-in-2010">87: ./configure : /bin/sh^M : bad interpreter (score <span>480455</span> in 2010)</a></li>
-<li><a href="#given-two-directory-trees-how-can-i-find-out-which-files-differ-score-474513-in">88: Given two directory trees, how can I find out which files differ? (score <span>474513</span> in )</a></li>
-<li><a href="#execute-combine-multiple-linux-commands-in-one-line-score-471680-in-2019">89: Execute combine multiple Linux commands in one line (score <span>471680</span> in 2019)</a></li>
-<li><a href="#automatically-enter-ssh-password-with-script-score-471660-in-2017">90: Automatically enter SSH password with script (score <span>471660</span> in 2017)</a></li>
-<li><a href="#easily-measure-elapsed-time-score-469449-in-2013">91: Easily measure elapsed time (score <span>469449</span> in 2013)</a></li>
-<li><a href="#extract-file-basename-without-path-and-extension-in-bash-score-465033-in-2017">92: Extract file basename without path and extension in bash (score <span>465033</span> in 2017)</a></li>
-<li><a href="#find-all-storage-devices-attached-to-a-linux-machine-score-460866-in-2013">93: Find all storage devices attached to a Linux machine (score <span>460866</span> in 2013)</a></li>
-<li><a href="#get-current-time-in-seconds-since-the-epoch-on-linux-bash-score-459374-in-2018">94: Get current time in seconds since the Epoch on Linux, Bash (score <span>459374</span> in 2018)</a></li>
-<li><a href="#how-to-add-a-default-include-path-for-gcc-in-linux-score-455167-in-2017">95: How to add a default include path for GCC in Linux? (score <span>455167</span> in 2017)</a></li>
-<li><a href="#how-to-replace-a-string-in-multiple-files-in-linux-command-line-score-453048-in-2017">96: How to replace a string in multiple files in linux command line (score <span>453048</span> in 2017)</a></li>
-<li><a href="#pipe-tofrom-the-clipboard-in-bash-script-score-452594-in-2018">97: Pipe to/from the clipboard in Bash script (score <span>452594</span> in 2018)</a></li>
-<li><a href="#how-to-recursively-download-a-folder-via-ftp-on-linux-score-452057-in-2016">98: How to recursively download a folder via FTP on Linux (score <span>452057</span> in 2016)</a></li>
-<li><a href="#count-number-of-files-within-a-directory-in-linux-score-451411-in-2018">99: Count number of files within a directory in Linux? (score <span>451411</span> in 2018)</a></li>
-<li><a href="#exploring-docker-containers-file-system-score-448919-in-2017">100: Exploring Docker container’s file system (score <span>448919</span> in 2017)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-find-all-files-containing-specific-text-on-linux-score-6026154-in-2017" class="level3">
