--- a/Math_top_100_se.html
+++ b/Math_top_100_se.html
@@ -13,118 +13,15 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Math &lt;- MathOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#examples-of-common-false-beliefs-in-mathematics-score-212191-in-2015">1: Examples of common false beliefs in mathematics (score <span>212191</span> in 2015)</a></li>
-<li><a href="#the-factorial-of--1--2--3-score-185397-in-2018">2: The factorial of -1, -2, -3, (score <span>185397</span> in 2018)</a></li>
-<li><a href="#too-old-for-advanced-mathematics-score-168920-in-2014">3: Too old for advanced mathematics? (score <span>168920</span> in 2014)</a></li>
-<li><a href="#mathematical-urban-legends-score-164396-in-2011">4: Mathematical “urban legends” (score <span>164396</span> in 2011)</a></li>
-<li><a href="#proofs-without-words-score-149973-in-2017">5: Proofs without words (score <span>149973</span> in 2017)</a></li>
-<li><a href="#intuitive-crutches-for-higher-dimensional-thinking-score-128841-in-2016">6: Intuitive crutches for higher dimensional thinking (score <span>128841</span> in 2016)</a></li>
-<li><a href="#philosophy-behind-mochizukis-work-on-the-abc-conjecture-score-127623-in-2013">7: Philosophy behind Mochizuki’s work on the ABC conjecture (score <span>127623</span> in 2013)</a></li>
-<li><a href="#video-lectures-of-mathematics-courses-available-online-for-free-score-120012-in-2017">8: Video lectures of mathematics courses available online for free (score <span>120012</span> in 2017)</a></li>
-<li><a href="#best-algebraic-geometry-text-book-other-than-hartshorne-score-118267-in-2011">9: Best Algebraic Geometry text book? (other than Hartshorne) (score <span>118267</span> in 2011)</a></li>
-<li><a href="#perfectly-centered-break-of-a-perfectly-aligned-pool-ball-rack-score-111710-in-2014">10: Perfectly centered break of a perfectly aligned pool ball rack (score <span>111710</span> in 2014)</a></li>
-<li><a href="#what-are-the-qualities-of-a-good-math-teacher-score-106300-in-2017">11: What are the qualities of a good (math) teacher? (score <span>106300</span> in 2017)</a></li>
-<li><a href="#mathematicians-who-were-late-learners-list-score-102172-in-2010">12: Mathematicians who were late learners?-list (score <span>102172</span> in 2010)</a></li>
-<li><a href="#whats-a-mathematician-to-do-score-96030-in-2010">13: What’s a mathematician to do? (score <span>96030</span> in 2010)</a></li>
-<li><a href="#awfully-sophisticated-proof-for-simple-facts-score-95288-in-2017">14: Awfully sophisticated proof for simple facts (score <span>95288</span> in 2017)</a></li>
-<li><a href="#examples-of-unexpected-mathematical-images-score-95027-in-2014">15: Examples of unexpected mathematical images (score <span>95027</span> in 2014)</a></li>
-<li><a href="#if-you-break-a-stick-at-two-points-chosen-uniformly-the-probability-the-three-resulting-sticks-form-a-triangle-is-14.-is-there-a-nice-proof-of-this-score-93557-in-2013">16: If you break a stick at two points chosen uniformly, the probability the three resulting sticks form a triangle is 1/4. Is there a nice proof of this? (score <span>93557</span> in 2013)</a></li>
-<li><a href="#google-question-in-a-country-in-which-people-only-want-boys-score-91404-in">17: Google question: In a country in which people only want boys (score <span>91404</span> in )</a></li>
-<li><a href="#magic-trick-based-on-deep-mathematics-score-89313-in-2017">18: Magic trick based on deep mathematics (score <span>89313</span> in 2017)</a></li>
-<li><a href="#famous-mathematical-quotes-score-86555-in-2009">19: Famous mathematical quotes (score <span>86555</span> in 2009)</a></li>
-<li><a href="#mathematical-games-interesting-to-both-you-and-a-5-year-old-child-score-81836-in-2017">20: Mathematical games interesting to both you and a 5+-year-old child (score <span>81836</span> in 2017)</a></li>
-<li><a href="#why-do-so-many-textbooks-have-so-much-technical-detail-and-so-little-enlightenment-score-81766-in-2010">21: Why do so many textbooks have so much technical detail and so little enlightenment? (score <span>81766</span> in 2010)</a></li>
-<li><a href="#a-single-paper-everyone-should-read-score-81763-in-2010">22: A single paper everyone should read? (score <span>81763</span> in 2010)</a></li>
-<li><a href="#widely-accepted-mathematical-results-that-were-later-shown-to-be-wrong-score-79324-in-2017">23: Widely accepted mathematical results that were later shown to be wrong? (score <span>79324</span> in 2017)</a></li>
-<li><a href="#what-programming-languages-do-mathematicians-use-score-76631-in-2014">24: What programming languages do mathematicians use? (score <span>76631</span> in 2014)</a></li>
-<li><a href="#what-practical-applications-does-set-theory-have-score-76603-in-2017">25: What practical applications does set theory have? (score <span>76603</span> in 2017)</a></li>
-<li><a href="#interesting-mathematical-documentaries-score-75830-in-2016">26: Interesting mathematical documentaries (score <span>75830</span> in 2016)</a></li>
-<li><a href="#which-are-the-best-mathematics-journals-and-what-are-the-differences-between-them-score-73650-in-2016">27: Which are the best mathematics journals, and what are the differences between them? (score <span>73650</span> in 2016)</a></li>
-<li><a href="#where-to-buy-premium-white-chalk-in-the-u.s.-like-they-have-at-rims-score-71745-in-2010">28: Where to buy premium white chalk in the U.S., like they have at RIMS? (score <span>71745</span> in 2010)</a></li>
-<li><a href="#reading-list-for-basic-differential-geometry-score-70858-in-2009">29: Reading list for basic differential geometry? (score <span>70858</span> in 2009)</a></li>
-<li><a href="#undergraduate-level-math-books-score-69885-in-2010">30: Undergraduate Level Math Books (score <span>69885</span> in 2010)</a></li>
-<li><a href="#fourier-vs-laplace-transforms-score-68878-in-2013">31: Fourier vs Laplace transforms (score <span>68878</span> in 2013)</a></li>
-<li><a href="#real-world-applications-of-mathematics-by-arxiv-subject-area-score-68805-in-2010">32: Real-world applications of mathematics, by arxiv subject area? (score <span>68805</span> in 2010)</a></li>
-<li><a href="#finding-all-paths-on-undirected-graph-score-67365-in">33: Finding all paths on undirected graph (score <span>67365</span> in )</a></li>
-<li><a href="#why-do-we-teach-calculus-students-the-derivative-as-a-limit-score-67079-in-2014">34: Why do we teach calculus students the derivative as a limit? (score <span>67079</span> in 2014)</a></li>
-<li><a href="#why-is-a-topology-made-up-of-open-sets-score-64671-in-2016">35: Why is a topology made up of ‘open’ sets? (score <span>64671</span> in 2016)</a></li>
-<li><a href="#suggestions-for-a-good-measure-theory-book-score-64499-in-2011">36: Suggestions for a good Measure Theory book (score <span>64499</span> in 2011)</a></li>
-<li><a href="#most-interesting-mathematics-mistake-score-64108-in-2017">37: Most interesting mathematics mistake? (score <span>64108</span> in 2017)</a></li>
-<li><a href="#what-are-some-examples-of-colorful-language-in-serious-mathematics-papers-score-63952-in-2017">38: What are some examples of colorful language in serious mathematics papers? (score <span>63952</span> in 2017)</a></li>
-<li><a href="#not-especially-famous-long-open-problems-which-anyone-can-understand-score-63721-in-2019">39: Not especially famous, long-open problems which anyone can understand (score <span>63721</span> in 2019)</a></li>
-<li><a href="#what-is-your-favorite-strange-function-score-61718-in-2017">40: What is your favorite “strange” function? (score <span>61718</span> in 2017)</a></li>
-<li><a href="#good-programs-for-drawing-graphs-directed-weighted-graphs-score-61603-in-2017">41: Good programs for drawing graphs ( directed weighted graphs ) (score <span>61603</span> in 2017)</a></li>
-<li><a href="#a-good-book-of-functional-analysis-score-61208-in-2014">42: A good book of functional analysis (score <span>61208</span> in 2014)</a></li>
-<li><a href="#good-differential-equations-text-for-undergraduates-who-want-to-become-pure-mathematicians-score-58613-in-2018">43: Good differential equations text for undergraduates who want to become pure mathematicians (score <span>58613</span> in 2018)</a></li>
-<li><a href="#eigenvalues-of-matrix-sums-score-58345-in-2018">44: Eigenvalues of matrix sums (score <span>58345</span> in 2018)</a></li>
-<li><a href="#what-is-the-shortest-ph.d.-thesis-score-57495-in-2018">45: What is the shortest Ph.D. thesis? (score <span>57495</span> in 2018)</a></li>
-<li><a href="#linear-algebra-texts-score-57193-in-2016">46: Linear Algebra Texts? (score <span>57193</span> in 2016)</a></li>
-<li><a href="#best-online-mathematics-videos-score-57092-in-2018">47: Best online mathematics videos? (score <span>57092</span> in 2018)</a></li>
-<li><a href="#have-any-long-suspected-irrational-numbers-turned-out-to-be-rational-score-55519-in-2016">48: Have any long-suspected irrational numbers turned out to be rational? (score <span>55519</span> in 2016)</a></li>
-<li><a href="#ways-to-prove-the-fundamental-theorem-of-algebra-score-55468-in-2010">49: Ways to prove the fundamental theorem of algebra (score <span>55468</span> in 2010)</a></li>
-<li><a href="#what-is-convolution-intuitively-score-55353-in-2017">50: What is convolution intuitively? (score <span>55353</span> in 2017)</a></li>
-<li><a href="#sum-of-the-first-k-binomial-coefficients-for-fixed-n-score-55335-in-2018">51: Sum of ‘the first k’ binomial coefficients for fixed n (score <span>55335</span> in 2018)</a></li>
-<li><a href="#what-are-the-most-misleading-alternate-definitions-in-taught-mathematics-score-55284-in-2015">52: What are the most misleading alternate definitions in taught mathematics? (score <span>55284</span> in 2015)</a></li>
-<li><a href="#how-much-work-does-it-take-to-be-a-successful-mathematician-score-54789-in-2009">53: How Much Work Does it Take to be a Successful Mathematician? (score <span>54789</span> in 2009)</a></li>
-<li><a href="#applications-of-the-chinese-remainder-theorem-score-52784-in-2009">54: Applications of the Chinese remainder theorem (score <span>52784</span> in 2009)</a></li>
-<li><a href="#undergraduate-math-research-score-51577-in-2013">55: Undergraduate math research (score <span>51577</span> in 2013)</a></li>
-<li><a href="#lorentzian-vs-gaussian-fitting-functions-score-50621-in-2012">56: Lorentzian vs Gaussian Fitting Functions (score <span>50621</span> in 2012)</a></li>
-<li><a href="#why-do-roots-of-polynomials-tend-to-have-absolute-value-close-to-1-score-50607-in-2014">57: Why do roots of polynomials tend to have absolute value close to 1? (score <span>50607</span> in 2014)</a></li>
-<li><a href="#the-dzhanibekov-effect---an-exercise-in-mechanics-or-fiction-explain-mathematically-a-video-from-a-space-station-score-49615-in-2011">58: The “Dzhanibekov effect” - an exercise in mechanics or fiction? Explain mathematically a video from a space station (score <span>49615</span> in 2011)</a></li>
-<li><a href="#why-is-the-gradient-normal-score-48790-in-2017">59: Why is the gradient normal? (score <span>48790</span> in 2017)</a></li>
-<li><a href="#periods-and-commas-in-mathematical-writing-score-48739-in-2009">60: Periods and commas in mathematical writing (score <span>48739</span> in 2009)</a></li>
-<li><a href="#where-does-a-math-person-go-to-learn-quantum-mechanics-score-48197-in-2016">61: Where does a math person go to learn quantum mechanics? (score <span>48197</span> in 2016)</a></li>
-<li><a href="#how-do-i-convert-a-uniform-value-in-01-to-a-standard-normal-gaussian-distribution-value-score-48120-in">62: How do I convert a uniform value in [0,1) to a standard normal (Gaussian) distribution value? (score <span>48120</span> in )</a></li>
-<li><a href="#open-problems-with-monetary-rewards-score-47390-in-2018">63: Open problems with monetary rewards (score <span>47390</span> in 2018)</a></li>
-<li><a href="#how-large-is-tree3-score-46981-in-2015">64: How large is TREE(3)? (score <span>46981</span> in 2015)</a></li>
-<li><a href="#geometric-interpretation-of-trace-score-46913-in-2019">65: Geometric Interpretation of Trace (score <span>46913</span> in 2019)</a></li>
-<li><a href="#estimating-the-size-of-solutions-of-a-diophantine-equation-score-46788-in-2016">66: Estimating the size of solutions of a diophantine equation (score <span>46788</span> in 2016)</a></li>
-<li><a href="#modern-algebraic-geometry-vs.-classical-algebraic-geometry-score-45698-in-2015">67: Modern algebraic geometry vs. classical algebraic geometry (score <span>45698</span> in 2015)</a></li>
-<li><a href="#thinking-and-explaining-score-45652-in-2016">68: Thinking and Explaining (score <span>45652</span> in 2016)</a></li>
-<li><a href="#why-doesnt-mathematics-collapse-even-though-humans-quite-often-make-mistakes-in-their-proofs-score-45649-in-2019">69: Why doesn’t mathematics collapse even though humans quite often make mistakes in their proofs? (score <span>45649</span> in 2019)</a></li>
-<li><a href="#most-memorable-titles-score-45615-in-2017">70: Most memorable titles (score <span>45615</span> in 2017)</a></li>
-<li><a href="#coin-pusher-game-score-45558-in">71: Coin Pusher Game (score <span>45558</span> in )</a></li>
-<li><a href="#what-elementary-problems-can-you-solve-with-schemes-score-45509-in-2017">72: What elementary problems can you solve with schemes? (score <span>45509</span> in 2017)</a></li>
-<li><a href="#which-popular-games-are-the-most-mathematical-score-45072-in-2017">73: Which popular games are the most mathematical? (score <span>45072</span> in 2017)</a></li>
-<li><a href="#why-worry-about-the-axiom-of-choice-score-44529-in-2010">74: Why worry about the axiom of choice? (score <span>44529</span> in 2010)</a></li>
-<li><a href="#what-are-perfectoid-spaces-score-44439-in-2017">75: What are “perfectoid spaces”? (score <span>44439</span> in 2017)</a></li>
-<li><a href="#consequences-of-the-riemann-hypothesis-score-44372-in-2015">76: Consequences of the Riemann hypothesis (score <span>44372</span> in 2015)</a></li>
-<li><a href="#cool-problems-to-impress-students-with-group-theory-score-44072-in-2010">77: Cool problems to impress students with group theory (score <span>44072</span> in 2010)</a></li>
-<li><a href="#text-for-an-introductory-real-analysis-course.-score-43602-in-2011">78: Text for an introductory Real Analysis course. (score <span>43602</span> in 2011)</a></li>
-<li><a href="#correlation-between-3-variables-score-43118-in-2011">79: Correlation between 3 variables (score <span>43118</span> in 2011)</a></li>
-<li><a href="#fundamental-examples-score-42145-in-2017">80: Fundamental Examples (score <span>42145</span> in 2017)</a></li>
-<li><a href="#polynomial-bijection-from-mathbb-qtimesmathbb-q-to-mathbb-q-score-41148-in-2019">81: Polynomial bijection from <span class="math inline">\(\mathbb Q\times\mathbb Q\)</span> to <span class="math inline">\(\mathbb Q\)</span>? (score <span>41148</span> in 2019)</a></li>
-<li><a href="#math-puzzles-for-dinner-score-40254-in-2010">82: Math puzzles for dinner (score <span>40254</span> in 2010)</a></li>
-<li><a href="#difference-between-connected-vs-strongly-connected-vs-complete-graphs-score-39705-in-2009">83: Difference between connected vs strongly connected vs complete graphs (score <span>39705</span> in 2009)</a></li>
-<li><a href="#advice-for-pure-math-phd-students-score-39567-in-2013">84: Advice for pure-math Phd students (score <span>39567</span> in 2013)</a></li>
-<li><a href="#memorizing-theorems-score-38483-in">85: Memorizing theorems (score <span>38483</span> in )</a></li>
-<li><a href="#examples-of-great-mathematical-writing-score-38222-in-2009">86: Examples of great mathematical writing (score <span>38222</span> in 2009)</a></li>
-<li><a href="#determinant-of-sum-of-positive-definite-matrices-score-37805-in-2018">87: Determinant of sum of positive definite matrices (score <span>37805</span> in 2018)</a></li>
-<li><a href="#should-i-not-cite-an-arxiv.org-paper-which-otherwise-seems-to-be-unpublished-score-37307-in-2017">88: Should I not cite an arxiv.org paper which otherwise seems to be unpublished? (score <span>37307</span> in 2017)</a></li>
-<li><a href="#what-are-your-favorite-instructional-counterexamples-score-36712-in-2017">89: What are your favorite instructional counterexamples? (score <span>36712</span> in 2017)</a></li>
-<li><a href="#top-specialized-journals-score-36339-in-2009">90: Top specialized journals (score <span>36339</span> in 2009)</a></li>
-<li><a href="#practical-applications-of-eigenvalues-and-eigenvectors-score-36191-in-2010">91: practical applications of eigenvalues and eigenvectors (score <span>36191</span> in 2010)</a></li>
-<li><a href="#favorite-popular-math-book-score-36020-in-2009">92: Favorite popular math book (score <span>36020</span> in 2009)</a></li>
-<li><a href="#knuths-intuition-that-goldbach-might-be-unprovable-score-35889-in-2010">93: Knuth’s intuition that Goldbach might be unprovable (score <span>35889</span> in 2010)</a></li>
-<li><a href="#the-most-outrageous-or-ridiculous-conjectures-in-mathematics-score-35604-in-2017">94: The most outrageous (or ridiculous) conjectures in mathematics (score <span>35604</span> in 2017)</a></li>
-<li><a href="#difference-between-a-calculus-and-an-algebra-score-35572-in-2011">95: Difference between a ‘calculus’ and an ‘algebra’ (score <span>35572</span> in 2011)</a></li>
-<li><a href="#a-learning-roadmap-for-algebraic-geometry-score-35176-in">96: A learning roadmap for algebraic geometry (score <span>35176</span> in )</a></li>
-<li><a href="#what-is-the-definition-of-canonical-score-34492-in-2013">97: What is the definition of “canonical”? (score <span>34492</span> in 2013)</a></li>
-<li><a href="#proofs-that-require-fundamentally-new-ways-of-thinking-score-33900-in-2018">98: Proofs that require fundamentally new ways of thinking (score <span>33900</span> in 2018)</a></li>
-<li><a href="#example-of-a-good-zero-knowledge-proof.-score-33881-in-2010">99: Example of a good Zero Knowledge Proof. (score <span>33881</span> in 2010)</a></li>
-<li><a href="#proof-for-the-derivative-of-the-determinant-of-a-matrix-score-33529-in">100: Proof for the derivative of the determinant of a matrix (score <span>33529</span> in )</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="examples-of-common-false-beliefs-in-mathematics-score-212191-in-2015" class="level3">
