--- a/Mythology_top_100_se.html
+++ b/Mythology_top_100_se.html
@@ -13,117 +13,14 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Mythology &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#why-are-goats-associated-with-satan-score-134752-in-2018">1: Why are goats associated with Satan? (score <span>134752</span> in 2018)</a></li>
-<li><a href="#why-is-salt-used-to-get-rid-of-ghosts-and-keep-out-demons-score-96432-in-2018">2: Why is salt used to get rid of ghosts and keep out demons? (score <span>96432</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-a-god-and-a-titan-score-59223-in-2015">3: What is the difference between a God and a Titan? (score <span>59223</span> in 2015)</a></li>
-<li><a href="#are-excalibur-and-caliburn-different-swords-score-52410-in">4: Are Excalibur and Caliburn different swords? (score <span>52410</span> in )</a></li>
-<li><a href="#what-is-the-moral-of-the-myth-of-icarus-score-47114-in-2016">5: What is the moral of the myth of Icarus? (score <span>47114</span> in 2016)</a></li>
-<li><a href="#why-was-it-a-good-thing-that-hope-remained-in-pandoras-box-score-47051-in-2018">6: Why was it a good thing that hope remained in Pandora’s box? (score <span>47051</span> in 2018)</a></li>
-<li><a href="#what-are-the-punishments-for-the-seven-deadly-sins-score-45845-in-2017">7: What are the punishments for the seven deadly sins? (score <span>45845</span> in 2017)</a></li>
-<li><a href="#how-was-it-decided-which-warriors-would-go-to-fólkvangr-and-which-to-valhalla-score-32924-in-2018">8: How was it decided which warriors would go to Fólkvangr and which to Valhalla? (score <span>32924</span> in 2018)</a></li>
-<li><a href="#is-there-a-word-for-the-type-of-creatures-that-feeds-off-human-energy-such-as-emotions-score-31482-in-2015">9: Is there a word for the type of creatures that feeds off human energy, such as emotions? (score <span>31482</span> in 2015)</a></li>
-<li><a href="#where-did-the-roman-gods-live-score-31241-in-2015">10: Where did the Roman gods live? (score <span>31241</span> in 2015)</a></li>
-<li><a href="#why-is-the-story-of-odin-hanging-from-yggdrasil-so-similar-to-that-of-jesus-on-the-cross-score-29569-in-2016">11: Why is the story of Odin hanging from Yggdrasil so similar to that of Jesus on the cross? (score <span>29569</span> in 2016)</a></li>
-<li><a href="#what-did-cuchulainns-warp-spasm-look-like-score-24242-in-2016">12: What did Cuchulainn’s warp spasm look like? (score <span>24242</span> in 2016)</a></li>
-<li><a href="#why-did-egyptian-gods-have-animal-heads-score-22930-in-2016">13: Why did Egyptian Gods have animal heads? (score <span>22930</span> in 2016)</a></li>
-<li><a href="#origin-of-the-vampires-have-no-reflection-myth-score-20661-in-2017">14: Origin of the ‘vampires have no reflection’ myth (score <span>20661</span> in 2017)</a></li>
-<li><a href="#are-there-any-depictions-of-horus-being-crucified-and-resurrected-score-19429-in-2015">15: Are there any depictions of Horus being crucified and resurrected (score <span>19429</span> in 2015)</a></li>
-<li><a href="#who-were-the-weapons-makers-for-the-norse-gods-score-19052-in-2015">16: Who were the weapons-makers for the Norse gods? (score <span>19052</span> in 2015)</a></li>
-<li><a href="#can-the-greek-gods-be-killed-score-18943-in-2017">17: Can the Greek Gods Be “Killed”? (score <span>18943</span> in 2017)</a></li>
-<li><a href="#achilles-and-his-gold-score-18809-in-2017">18: Achilles and his gold? (score <span>18809</span> in 2017)</a></li>
-<li><a href="#what-was-the-role-of-the-bear-in-norse-mythology-are-there-bears-in-asgard-score-18794-in">19: What was the role of the bear in Norse mythology? (Are there bears in Asgard?) (score <span>18794</span> in )</a></li>
-<li><a href="#is-there-a-western-greek-roman-egyptian-or-norse-god-of-the-cosmos-score-18136-in-2016">20: Is there a Western (Greek, Roman, Egyptian, or Norse) god of the cosmos? (score <span>18136</span> in 2016)</a></li>
-<li><a href="#why-does-athena-not-hold-poseidon-responsible-for-desecrating-her-temple-with-medusa-score-15239-in-2016">21: Why does Athena not hold Poseidon responsible for desecrating her temple with Medusa? (score <span>15239</span> in 2016)</a></li>
-<li><a href="#what-happens-after-ragnarök-score-14863-in-2015">22: What happens after Ragnarök? (score <span>14863</span> in 2015)</a></li>
-<li><a href="#how-old-was-merlin-when-he-died-score-14831-in-2015">23: How old was Merlin when he died? (score <span>14831</span> in 2015)</a></li>
-<li><a href="#who-were-aphrodites-parents-score-14507-in-2017">24: Who were Aphrodite’s parents? (score <span>14507</span> in 2017)</a></li>
-<li><a href="#what-is-the-worlds-oldest-joke-score-14499-in-2018">25: What is the world’s oldest joke? (score <span>14499</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-hecate-selene-artemis-and-phoebe-score-14027-in">26: What is the difference between Hecate, Selene, Artemis, and Phoebe? (score <span>14027</span> in )</a></li>
-<li><a href="#why-did-zeus-assume-so-many-different-forms-for-seduction-score-13380-in-2016">27: Why did Zeus assume so many different forms for seduction? (score <span>13380</span> in 2016)</a></li>
-<li><a href="#why-does-looking-at-medusa-with-a-mirror-work-score-13167-in-2016">28: Why does looking at Medusa with a mirror work? (score <span>13167</span> in 2016)</a></li>
-<li><a href="#why-was-odin-afraid-that-his-ravens-would-not-return-back-to-him-score-12946-in-2016">29: Why was Odin afraid that his ravens would not return back to him? (score <span>12946</span> in 2016)</a></li>
-<li><a href="#are-kitsune-and-huli-jing-the-same-score-12618-in-2017">30: Are Kitsune and Huli jing the same? (score <span>12618</span> in 2017)</a></li>
-<li><a href="#what-is-the-difference-between-the-prose-edda-and-the-poetic-edda-score-12079-in-2016">31: What is the difference between the Prose Edda and the Poetic Edda? (score <span>12079</span> in 2016)</a></li>
-<li><a href="#what-is-the-difference-between-a-cockatrice-and-a-basilisk-score-11746-in-2016">32: What is the difference between a cockatrice and a basilisk? (score <span>11746</span> in 2016)</a></li>
-<li><a href="#is-satan-a-seraph-or-a-cherub-score-11391-in-2017">33: Is Satan a seraph or a cherub? (score <span>11391</span> in 2017)</a></li>
-<li><a href="#what-were-the-five-parts-of-the-egyptian-soul-score-11191-in-2017">34: What were the five parts of the Egyptian soul? (score <span>11191</span> in 2017)</a></li>
-<li><a href="#what-is-the-symbolism-behind-psyches-tasks-score-11128-in-2017">35: What is the symbolism behind Psyche’s tasks? (score <span>11128</span> in 2017)</a></li>
-<li><a href="#what-is-the-importance-of-the-number-seven-in-mythology-and-religion-score-10963-in-2017">36: What is the importance of the number seven in mythology and religion? (score <span>10963</span> in 2017)</a></li>
-<li><a href="#when-did-odin-and-loki-became-blood-brothers-score-10292-in-2016">37: When did Odin and Loki became blood brothers? (score <span>10292</span> in 2016)</a></li>
-<li><a href="#was-loki-originally-a-fire-god-score-10173-in">38: Was Loki originally a fire god? (score <span>10173</span> in )</a></li>
-<li><a href="#how-many-sons-did-zeus-father-through-mortal-women-score-10088-in-2018">39: How many sons did Zeus father through mortal women? (score <span>10088</span> in 2018)</a></li>
-<li><a href="#who-gave-hermes-his-winged-shoes-score-9926-in-2018">40: Who gave Hermes his winged shoes? (score <span>9926</span> in 2018)</a></li>
-<li><a href="#how-does-one-become-a-skin-walker-score-8993-in">41: How does one become a skin-walker? (score <span>8993</span> in )</a></li>
-<li><a href="#what-do-faeries-do-with-kidnapped-human-children-score-8909-in-2016">42: What do faeries do with kidnapped human children? (score <span>8909</span> in 2016)</a></li>
-<li><a href="#why-do-the-greeks-have-two-different-messenger-gods-score-8828-in-2016">43: Why do the Greeks have two different messenger gods? (score <span>8828</span> in 2016)</a></li>
-<li><a href="#what-was-the-plant-that-gilgamesh-found-after-utnapishtims-story-score-8668-in-2015">44: What was the plant that Gilgamesh found after Utnapishtim’s story? (score <span>8668</span> in 2015)</a></li>
-<li><a href="#why-cant-vampires-walk-in-the-sun-score-8663-in-2017">45: Why can’t vampires walk in the sun? (score <span>8663</span> in 2017)</a></li>
-<li><a href="#was-the-story-of-adam-and-eve-influenced-by-sumerian-ninti-and-enki-score-8448-in-2015">46: Was the story of Adam and Eve influenced by Sumerian Ninti and Enki? (score <span>8448</span> in 2015)</a></li>
-<li><a href="#did-zeus-have-any-male-lovers-score-8421-in-2018">47: Did Zeus have any male lovers? (score <span>8421</span> in 2018)</a></li>
-<li><a href="#what-is-an-half-angel-half-demon-score-8385-in">48: What is an Half Angel Half Demon? (score <span>8385</span> in )</a></li>
-<li><a href="#what-would-happen-if-you-made-contradictory-vows-on-the-river-styx-score-8021-in-2015">49: What would happen if you made contradictory vows on the River Styx? (score <span>8021</span> in 2015)</a></li>
-<li><a href="#what-is-the-earliest-known-dragon-myth-score-7980-in-2015">50: What is the earliest known dragon myth? (score <span>7980</span> in 2015)</a></li>
-<li><a href="#what-are-the-origins-of-thestrals-score-7937-in-2016">51: What are the origins of thestrals? (score <span>7937</span> in 2016)</a></li>
-<li><a href="#what-is-the-difference-between-ra-and-horus-score-7894-in">52: What is the difference between Ra and Horus? (score <span>7894</span> in )</a></li>
-<li><a href="#how-old-were-paris-and-achilles-at-the-time-of-the-trojan-war-score-7812-in">53: How old were Paris and Achilles at the time of the Trojan War? (score <span>7812</span> in )</a></li>
-<li><a href="#was-artemis-a-lesbian-score-7773-in">54: Was Artemis a lesbian? (score <span>7773</span> in )</a></li>
-<li><a href="#are-liberty-and-columbia-the-same-goddess-score-7119-in-2015">55: Are Liberty and Columbia the same Goddess? (score <span>7119</span> in 2015)</a></li>
-<li><a href="#how-did-zeus-poseidon-and-hades-decide-who-would-rule-what-score-7000-in-2018">56: How did Zeus, Poseidon, and Hades decide who would rule what? (score <span>7000</span> in 2018)</a></li>
-<li><a href="#what-kind-of-cats-pulled-freyas-chariot-score-6945-in">57: What kind of cats pulled Freya’s chariot? (score <span>6945</span> in )</a></li>
-<li><a href="#how-many-godsgoddesses-are-there-in-total-in-greek-mythology-score-6760-in-2016">58: How many gods/goddesses are there in total in greek mythology? (score <span>6760</span> in 2016)</a></li>
-<li><a href="#why-do-some-asian-dragons-have-fur-or-hair-score-6647-in-2015">59: Why do some Asian dragons have fur (or hair)? (score <span>6647</span> in 2015)</a></li>
-<li><a href="#what-is-the-origin-of-the-japanese-kodama-score-6331-in">60: What is the origin of the Japanese Kodama? (score <span>6331</span> in )</a></li>
-<li><a href="#are-the-four-horsemen-more-powerful-than-the-devil-score-6321-in-2017">61: Are the four Horsemen more powerful than the Devil? (score <span>6321</span> in 2017)</a></li>
-<li><a href="#why-is-athena-gray-eyed-score-6261-in">62: Why is Athena “gray eyed”? (score <span>6261</span> in )</a></li>
-<li><a href="#what-is-the-relationship-between-jesus-iseous-and-zeus-score-6181-in-2016">63: What is the relationship between Jesus, Iseous, and Zeus (score <span>6181</span> in 2016)</a></li>
-<li><a href="#why-is-gilgamesh-considered-to-be-one-third-human-and-two-third-god-score-6163-in-2016">64: Why is Gilgamesh considered to be one-third human and two-third god? (score <span>6163</span> in 2016)</a></li>
-<li><a href="#is-there-a-creature-in-mythology-that-is-a-frost-bird-or-a-frost-phoenix-score-6126-in-2015">65: Is there a creature in mythology that is a frost bird or a frost phoenix? (score <span>6126</span> in 2015)</a></li>
-<li><a href="#who-did-adam-and-eves-son-cain-marry-score-6079-in-2015">66: Who did Adam and Eve’s son Cain marry? (score <span>6079</span> in 2015)</a></li>
-<li><a href="#are-vampires-called-anything-else-in-european-folklore-score-6049-in-2017">67: Are vampires called anything else in European folklore? (score <span>6049</span> in 2017)</a></li>
-<li><a href="#how-many-heads-did-the-hydra-originally-have-score-6017-in">68: How many heads did the Hydra originally have? (score <span>6017</span> in )</a></li>
-<li><a href="#what-is-the-difference-between-giants-jotuns-and-trolls-in-norse-mythology-score-6007-in-2017">69: What is the difference between giants, Jotuns and trolls in Norse mythology? (score <span>6007</span> in 2017)</a></li>
-<li><a href="#what-is-the-symbolism-behind-pandoras-box-score-5750-in-2018">70: What is the symbolism behind Pandora’s Box? (score <span>5750</span> in 2018)</a></li>
-<li><a href="#why-is-silver-in-particular-effective-against-dark-creatures-like-vampires-score-5711-in-2018">71: Why is silver in particular effective against dark creatures like vampires? (score <span>5711</span> in 2018)</a></li>
-<li><a href="#what-happened-to-prometheus-after-hercules-freed-him-score-5537-in-2019">72: What happened to Prometheus after Hercules freed him? (score <span>5537</span> in 2019)</a></li>
-<li><a href="#why-is-the-crow-of-a-rooster-fatal-to-a-basilisk-score-5519-in-2017">73: Why is the crow of a rooster fatal to a basilisk? (score <span>5519</span> in 2017)</a></li>
-<li><a href="#how-did-gilgamesh-die-score-5460-in-2015">74: How did Gilgamesh die? (score <span>5460</span> in 2015)</a></li>
-<li><a href="#is-there-a-connection-between-adam-and-eve-and-ask-and-embla-score-5252-in-2016">75: Is there a connection between Adam and Eve, and Ask and Embla? (score <span>5252</span> in 2016)</a></li>
-<li><a href="#what-is-the-family-tree-of-the-sumerian-gods-score-5203-in-2016">76: What is the family tree of the Sumerian gods? (score <span>5203</span> in 2016)</a></li>
-<li><a href="#why-did-charon-collect-a-toll-at-the-river-styx-score-5193-in-2018">77: Why did Charon collect a toll at the River Styx (score <span>5193</span> in 2018)</a></li>
-<li><a href="#are-there-any-children-of-hades-score-5166-in-2016">78: Are there any children of Hades? (score <span>5166</span> in 2016)</a></li>
-<li><a href="#did-ancient-egyptian-gods-have-weapons-like-the-greek-gods-score-5093-in-2015">79: Did ancient Egyptian gods have weapons like the Greek gods? (score <span>5093</span> in 2015)</a></li>
-<li><a href="#why-was-medusa-the-only-mortal-of-the-gorgons-score-5071-in-2017">80: Why was Medusa the only mortal of the Gorgons? (score <span>5071</span> in 2017)</a></li>
-<li><a href="#why-do-native-americans-think-photographs-steals-their-souls-score-4991-in-2017">81: Why do Native Americans think photographs steals their souls? (score <span>4991</span> in 2017)</a></li>
-<li><a href="#why-is-12-such-a-holy-number-score-4985-in-2017">82: Why is 12 such a holy number? (score <span>4985</span> in 2017)</a></li>
-<li><a href="#how-did-the-monkey-king-sun-wukong-go-from-fictional-character-to-religious-icon-score-4931-in-2015">83: How did the Monkey King (Sun Wukong) go from fictional character to religious icon? (score <span>4931</span> in 2015)</a></li>
-<li><a href="#how-are-norse-and-celtic-mythology-related-score-4873-in-2018">84: How are Norse and Celtic mythology related? (score <span>4873</span> in 2018)</a></li>
-<li><a href="#who-is-the-oldest-being-in-greek-mythology-score-4823-in-2016">85: Who is the oldest being in Greek mythology? (score <span>4823</span> in 2016)</a></li>
-<li><a href="#did-any-greek-mythological-hero-father-a-son-who-surpassed-him-in-fame-score-4805-in-2017">86: Did any Greek mythological hero father a son who surpassed him in fame? (score <span>4805</span> in 2017)</a></li>
-<li><a href="#could-ragnarok-be-considered-to-have-occurred-score-4787-in">87: Could Ragnarok be considered to have occurred? (score <span>4787</span> in )</a></li>
-<li><a href="#why-is-odin-called-the-allfather-score-4767-in-2017">88: Why is Odin called the Allfather? (score <span>4767</span> in 2017)</a></li>
-<li><a href="#griffin-griffon-or-gryphon-score-4705-in-2016">89: Griffin, Griffon, or Gryphon? (score <span>4705</span> in 2016)</a></li>
-<li><a href="#is-there-a-greek-godgoddess-of-freedom-score-4621-in">90: Is there a Greek god/goddess of freedom? (score <span>4621</span> in )</a></li>
-<li><a href="#why-would-turning-clothes-inside-out-keep-the-faerie-away-score-4512-in-2018">91: Why would turning clothes inside-out keep the Faerie away? (score <span>4512</span> in 2018)</a></li>
-<li><a href="#what-is-the-easiest-way-to-become-a-god-score-4370-in-2016">92: What is the easiest way to become a god? (score <span>4370</span> in 2016)</a></li>
-<li><a href="#what-is-the-origin-of-the-story-that-santa-claus-lives-at-the-north-pole-score-4333-in-2016">93: What is the origin of the story that Santa Claus lives at the North Pole? (score <span>4333</span> in 2016)</a></li>
-<li><a href="#are-dwarves-and-dark-elves-the-same-score-4331-in">94: Are dwarves and dark elves the same? (score <span>4331</span> in )</a></li>
-<li><a href="#what-is-the-folkloristic-origin-of-cats-having-9-lives-score-4306-in">95: What is the folkloristic origin of cats having 9 lives? (score <span>4306</span> in )</a></li>
-<li><a href="#why-does-ishtar-go-to-the-underworld-score-4294-in-2015">96: Why does Ishtar go to the underworld? (score <span>4294</span> in 2015)</a></li>
-<li><a href="#what-is-the-meaning-of-sage-in-respect-of-eastern-folklore-score-4252-in">97: What is the meaning of Sage in respect of eastern folklore? (score <span>4252</span> in )</a></li>
-<li><a href="#why-is-roman-mythology-so-similar-to-greek-mythology-or-vice-versa-score-4216-in-2016">98: Why is Roman Mythology so similar to Greek Mythology or vice versa? (score <span>4216</span> in 2016)</a></li>
-<li><a href="#what-is-original-story-of-fox-spiritnine-tails-fox-in-indias-myth-score-4205-in">99: What is original story of Fox Spirit/Nine tails fox in india’s myth? (score <span>4205</span> in )</a></li>
-<li><a href="#in-the-odyssey-why-didnt-penelope-simply-turn-away-her-suitors-score-4183-in">100: In the Odyssey, why didn’t Penelope simply turn away her suitors? (score <span>4183</span> in )</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="why-are-goats-associated-with-satan-score-134752-in-2018" class="level3">
