--- a/Perl_top_100.html
+++ b/Perl_top_100.html
@@ -78,115 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Perl &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#find-size-of-an-array-in-perl-score-559516-in-2015">1: Find size of an array in Perl (score <span>559516</span> in 2015)</a></li>
-<li><a href="#how-do-i-break-out-of-a-loop-in-perl-score-547733-in-2014">2: How do I break out of a loop in Perl? (score <span>547733</span> in 2014)</a></li>
-<li><a href="#how-to-fix-a-locale-setting-warning-from-perl-score-488557-in-2016">3: How to fix a locale setting warning from Perl? (score <span>488557</span> in 2016)</a></li>
-<li><a href="#how-can-i-check-if-a-perl-array-contains-a-particular-value-score-389390-in-2010">4: How can I check if a Perl array contains a particular value? (score <span>389390</span> in 2010)</a></li>
-<li><a href="#how-do-i-compare-two-strings-in-perl-score-361902-in-2009">5: How do I compare two strings in Perl? (score <span>361902</span> in 2009)</a></li>
-<li><a href="#how-do-you-round-a-floating-point-number-in-perl-score-322891-in-2008">7: How do you round a floating point number in Perl? (score <span>322891</span> in 2008)</a></li>
-<li><a href="#how-can-i-print-the-contents-of-a-hash-in-perl-score-306215-in-2016">8: How can I print the contents of a hash in Perl? (score <span>306215</span> in 2016)</a></li>
-<li><a href="#check-whether-a-string-contains-a-substring-score-302935-in-2017">9: Check whether a string contains a substring (score <span>302935</span> in 2017)</a></li>
-<li><a href="#string-compare-in-perl-with-eq-vs-score-301040-in-2016">10: String compare in Perl with “eq” vs “==” (score <span>301040</span> in 2016)</a></li>
-<li><a href="#perl-read-line-by-line-score-273520-in-2012">11: Perl read line by line (score <span>273520</span> in 2012)</a></li>
-<li><a href="#how-can-i-check-if-a-file-exists-in-perl-score-269401-in-2013">12: How can I check if a file exists in Perl? (score <span>269401</span> in 2013)</a></li>
-<li><a href="#how-can-i-convert-a-string-to-a-number-in-perl-score-264988-in-2012">13: How can I convert a string to a number in Perl? (score <span>264988</span> in 2012)</a></li>
-<li><a href="#how-do-i-enter-a-multi-line-comment-in-perl-score-250429-in-2017">14: How do I enter a multi-line comment in Perl? (score <span>250429</span> in 2017)</a></li>
-<li><a href="#how-do-i-use-boolean-variables-in-perl-score-243622-in-2009">15: How do I use boolean variables in Perl? (score <span>243622</span> in 2009)</a></li>
-<li><a href="#easy-way-to-print-perl-array-with-a-little-formatting-score-242206-in-2017">16: Easy way to print Perl array? (with a little formatting) (score <span>242206</span> in 2017)</a></li>
-<li><a href="#whats-the-easiest-way-to-install-a-missing-perl-module-score-241111-in-2015">17: What’s the easiest way to install a missing Perl module? (score <span>241111</span> in 2015)</a></li>
-<li><a href="#regex-to-match-any-character-including-new-lines-score-222128-in">18: Regex to match any character including new lines (score <span>222128</span> in )</a></li>
-<li><a href="#best-way-to-iterate-through-a-perl-array-score-214532-in-2013">19: Best way to iterate through a Perl array (score <span>214532</span> in 2013)</a></li>
-<li><a href="#whats-the-difference-between-perls-backticks-system-and-exec-score-212862-in-2010">20: What’s the difference between Perl’s backticks, system, and exec? (score <span>212862</span> in 2010)</a></li>
-<li><a href="#show-a-pdf-files-in-users-browser-via-phpperl-score-211415-in-2012">21: Show a PDF files in users browser via PHP/Perl (score <span>211415</span> in 2012)</a></li>
-<li><a href="#how-do-i-get-a-list-of-installed-cpan-modules-score-207546-in">22: How do I get a list of installed CPAN modules? (score <span>207546</span> in )</a></li>
-<li><a href="#how-do-i-remove-duplicate-items-from-an-array-in-perl-score-206565-in-2014">23: How do I remove duplicate items from an array in Perl? (score <span>206565</span> in 2014)</a></li>
-<li><a href="#perl---if-string-contains-text-score-204940-in-2015">24: Perl - If string contains text? (score <span>204940</span> in 2015)</a></li>
-<li><a href="#how-to-extract-string-following-a-pattern-with-grep-regex-or-perl-score-193684-in-2018">25: How to extract string following a pattern with grep, regex or perl (score <span>193684</span> in 2018)</a></li>
-<li><a href="#how-can-i-call-a-shell-command-in-my-perl-script-score-190411-in-2019">26: How can I call a shell command in my Perl script? (score <span>190411</span> in 2019)</a></li>
-<li><a href="#the-program-cant-start-because-api-ms-win-crt-runtime-l1-1-0.dll-is-missing-while-starting-apache-server-on-my-computer-score-184586-in-2017">27: The program can’t start because api-ms-win-crt-runtime-l1-1-0.dll is missing while starting Apache server on my computer (score <span>184586</span> in 2017)</a></li>
-<li><a href="#inappropriate-ioctl-for-device-score-183560-in-2016">28: “inappropriate ioctl for device” (score <span>183560</span> in 2016)</a></li>
-<li><a href="#what-is-the-proper-way-to-check-if-a-string-is-empty-in-perl-score-182537-in-2010">29: What is the proper way to check if a string is empty in Perl? (score <span>182537</span> in 2010)</a></li>
-<li><a href="#how-do-i-perform-a-perl-substitution-on-a-string-while-keeping-the-original-score-181742-in-2013">30: How do I perform a Perl substitution on a string while keeping the original? (score <span>181742</span> in 2013)</a></li>
-<li><a href="#in-perl-how-can-i-concisely-check-if-a-variable-is-defined-and-contains-a-non-zero-length-string-score-177567-in-2009">31: In Perl, how can I concisely check if a $variable is defined and contains a non zero length string? (score <span>177567</span> in 2009)</a></li>
-<li><a href="#how-do-i-search-a-perl-array-for-a-matching-string-score-176905-in-2010">32: How do I search a Perl array for a matching string? (score <span>176905</span> in 2010)</a></li>
-<li><a href="#how-do-i-get-the-full-path-to-a-perl-script-that-is-executing-score-175554-in-2015">33: How do I get the full path to a Perl script that is executing? (score <span>175554</span> in 2015)</a></li>
-<li><a href="#difference-between-and-expression-meta-characters-score-174237-in-2019">34: Difference between and  expression meta characters (score <span>174237</span> in 2019)</a></li>
-<li><a href="#in-perl-how-can-i-read-an-entire-file-into-a-string-score-171157-in-2014">35: In Perl, how can I read an entire file into a string? (score <span>171157</span> in 2014)</a></li>
-<li><a href="#how-to-match-any-non-white-space-character-except-a-particular-one-score-168481-in-2014">36: How to match any non white space character except a particular one? (score <span>168481</span> in 2014)</a></li>
-<li><a href="#no-pg_hba.conf-entry-for-host-score-161302-in-2016">37: no pg_hba.conf entry for host (score <span>161302</span> in 2016)</a></li>
-<li><a href="#array-initialization-in-perl-score-161143-in-2015">38: Array initialization in Perl (score <span>161143</span> in 2015)</a></li>
-<li><a href="#how-do-i-configure-apache-2-to-run-perl-cgi-scripts-score-157915-in-2016">39: How do I configure Apache 2 to run Perl CGI scripts? (score <span>157915</span> in 2016)</a></li>
-<li><a href="#how-can-i-check-if-a-perl-module-is-installed-on-my-system-from-the-command-line-score-157845-in-2009">40: How can I check if a Perl module is installed on my system from the command line? (score <span>157845</span> in 2009)</a></li>
-<li><a href="#escaping-a-forward-slash-in-a-regular-expression-score-156283-in-2011">41: Escaping a forward slash in a regular expression (score <span>156283</span> in 2011)</a></li>
-<li><a href="#how-to-print-variables-in-perl-score-148908-in-2017">42: How to print variables in Perl (score <span>148908</span> in 2017)</a></li>
-<li><a href="#what-is-the-best-way-to-delete-a-value-from-an-array-in-perl-score-144303-in-2014">43: What is the best way to delete a value from an array in Perl? (score <span>144303</span> in 2014)</a></li>
-<li><a href="#how-is-perls-inc-constructed-aka-what-are-all-the-ways-of-affecting-where-perl-modules-are-searched-for-score-141297-in-2017">44: How is Perl’s <span class="citation" data-cites="INC">@INC</span> constructed? (aka What are all the ways of affecting where Perl modules are searched for?) (score <span>141297</span> in 2017)</a></li>
-<li><a href="#what-is-the-meaning-of-_-in-perl-score-140281-in-2010">45: What is the meaning of <span class="citation" data-cites="_">@_</span> in Perl? (score <span>140281</span> in 2010)</a></li>
-<li><a href="#submit-form-and-stay-on-same-page-score-139638-in">46: Submit form and stay on same page? (score <span>139638</span> in )</a></li>
-<li><a href="#todays-date-in-perl-in-mmddyyyy-format-score-138594-in-2012">47: Today’s Date in Perl in MM/DD/YYYY format (score <span>138594</span> in 2012)</a></li>
-<li><a href="#how-do-i-include-a-perl-module-thats-in-a-different-directory-score-138552-in-2016">48: How do I include a Perl module that’s in a different directory? (score <span>138552</span> in 2016)</a></li>
-<li><a href="#find-everything-between-two-xml-tags-with-regex-score-137341-in-2018">49: Find everything between two XML tags with RegEx (score <span>137341</span> in 2018)</a></li>
-<li><a href="#programmatically-read-from-stdin-or-input-file-in-perl-score-135677-in">50: Programmatically read from STDIN or input file in Perl (score <span>135677</span> in )</a></li>
-<li><a href="#what-does-1-mean-in-perl-score-133432-in-2009">52: What does $1 mean in Perl? (score <span>133432</span> in 2009)</a></li>
-<li><a href="#quickly-getting-to-yyyy-mm-dd-hhmmss-in-perl-score-133065-in-2009">53: Quickly getting to YYYY-mm-dd HH:MM:SS in Perl (score <span>133065</span> in 2009)</a></li>
-<li><a href="#how-do-i-get-a-files-last-modified-time-in-perl-score-131340-in">54: How do I get a file’s last modified time in Perl? (score <span>131340</span> in )</a></li>
-<li><a href="#perl-regular-expression-using-a-variable-as-a-search-string-with-perl-operator-characters-included-score-131154-in-2018">55: Perl regular expression (using a variable as a search string with Perl operator characters included) (score <span>131154</span> in 2018)</a></li>
-<li><a href="#turning-multiple-lines-into-one-line-with-comma-separated-perlsedawk-score-126035-in">56: Turning multiple lines into one line with comma separated (Perl/Sed/AWK) (score <span>126035</span> in )</a></li>
-<li><a href="#perl-function-to-trim-string-leading-and-trailing-whitespace-score-125433-in-2011">57: Perl: function to trim string leading and trailing whitespace (score <span>125433</span> in 2011)</a></li>
-<li><a href="#how-do-i-tell-if-a-variable-has-a-numeric-value-in-perl-score-125334-in-2009">58: How do I tell if a variable has a numeric value in Perl? (score <span>125334</span> in 2009)</a></li>
-<li><a href="#match-whitespace-but-not-newlines-score-125061-in-2016">59: Match whitespace but not newlines (score <span>125061</span> in 2016)</a></li>
-<li><a href="#how-can-perls-print-add-a-newline-by-default-score-124937-in-2010">60: How can Perl’s print add a newline by default? (score <span>124937</span> in 2010)</a></li>
-<li><a href="#negative-regex-for-perl-string-pattern-match-score-124513-in-2017">61: Negative regex for Perl string pattern match (score <span>124513</span> in 2017)</a></li>
-<li><a href="#in-perl-how-do-i-create-a-hash-whose-keys-come-from-a-given-array-score-121882-in-2015">62: In Perl, how do I create a hash whose keys come from a given array? (score <span>121882</span> in 2015)</a></li>
-<li><a href="#how-can-i-see-if-a-perl-hash-already-has-a-certain-key-score-120275-in-2015">63: How can I see if a Perl hash already has a certain key? (score <span>120275</span> in 2015)</a></li>
-<li><a href="#how-do-i-convert-a-datetime-to-epoch-time-unix-timeseconds-since-1970-in-perl-score-119553-in-2018">64: How do I convert a date/time to epoch time (unix time/seconds since 1970) in Perl? (score <span>119553</span> in 2018)</a></li>
-<li><a href="#how-can-i-start-an-interactive-console-for-perl-score-117894-in-2015">65: How can I start an interactive console for Perl? (score <span>117894</span> in 2015)</a></li>
-<li><a href="#how-can-i-output-utf-8-from-perl-score-115758-in-2013">66: How can I output UTF-8 from Perl? (score <span>115758</span> in 2013)</a></li>
-<li><a href="#how-can-i-install-a-cpan-module-into-a-local-directory-score-115048-in-2017">67: How can I install a CPAN module into a local directory? (score <span>115048</span> in 2017)</a></li>
-<li><a href="#the-correct-way-to-read-a-data-file-into-an-array-score-114674-in-2014">68: The correct way to read a data file into an array (score <span>114674</span> in 2014)</a></li>
-<li><a href="#how-to-see-if-a-directory-exists-or-not-in-perl-score-113090-in">69: How to see if a directory exists or not in Perl? (score <span>113090</span> in )</a></li>
-<li><a href="#how-to-efficiently-calculate-a-running-standard-deviation-score-113026-in-2019">70: How to efficiently calculate a running standard deviation? (score <span>113026</span> in 2019)</a></li>
-<li><a href="#counting-array-elements-in-perl-score-112206-in-2016">71: Counting array elements in Perl (score <span>112206</span> in 2016)</a></li>
-<li><a href="#better-way-to-remove-specific-characters-from-a-perl-string-score-110624-in-2015">72: Better way to remove specific characters from a Perl string (score <span>110624</span> in 2015)</a></li>
-<li><a href="#how-to-remove-the-first-two-columns-in-a-file-using-shell-awk-sed-whatever-score-109506-in-2016">73: how to remove the first two columns in a file using shell (awk, sed, whatever) (score <span>109506</span> in 2016)</a></li>
-<li><a href="#whats-the-safest-way-to-iterate-through-the-keys-of-a-perl-hash-score-109288-in-2008">74: What’s the safest way to iterate through the keys of a Perl hash? (score <span>109288</span> in 2008)</a></li>
-<li><a href="#what-is-the-difference-between-my-and-our-in-perl-score-107621-in-2015">75: What is the difference between my and our in Perl? (score <span>107621</span> in 2015)</a></li>
-<li><a href="#how-can-i-list-all-of-the-files-in-a-directory-with-perl-score-107466-in-2014">76: How can I list all of the files in a directory with Perl? (score <span>107466</span> in 2014)</a></li>
-<li><a href="#how-do-i-sleep-for-a-millisecond-in-perl-score-107325-in-2012">77: How do I sleep for a millisecond in Perl? (score <span>107325</span> in 2012)</a></li>
-<li><a href="#in-perl-how-to-remove-m-from-a-file-score-106742-in-2017">78: In Perl, how to remove ^M from a file? (score <span>106742</span> in 2017)</a></li>
-<li><a href="#split-a-string-into-array-in-perl-score-106685-in-2018">79: Split a string into array in Perl (score <span>106685</span> in 2018)</a></li>
-<li><a href="#printing-everything-except-the-first-field-with-awk-score-105846-in-2018">80: Printing everything except the first field with awk (score <span>105846</span> in 2018)</a></li>
-<li><a href="#end-of-script-output-before-headers-error-in-apache-score-105429-in-2014">81: “End of script output before headers” error in Apache (score <span>105429</span> in 2014)</a></li>
-<li><a href="#neatest-way-to-remove-linebreaks-in-perl-score-105050-in-2009">82: Neatest way to remove linebreaks in Perl (score <span>105050</span> in 2009)</a></li>
-<li><a href="#grep-to-find-item-in-perl-array-score-105013-in-2017">83: Grep to find item in Perl array (score <span>105013</span> in 2017)</a></li>
-<li><a href="#automatically-get-loop-index-in-foreach-loop-in-perl-score-104712-in">84: automatically get loop index in foreach loop in perl (score <span>104712</span> in )</a></li>
-<li><a href="#search-and-replace-a-particular-string-in-a-file-using-perl-score-104110-in-2017">85: Search and replace a particular string in a file using Perl (score <span>104110</span> in 2017)</a></li>
-<li><a href="#how-do-i-update-all-my-cpan-modules-to-their-latest-versions-score-103764-in-2016">86: How do I update all my CPAN modules to their latest versions? (score <span>103764</span> in 2016)</a></li>
-<li><a href="#how-should-i-do-integer-division-in-perl-score-103299-in-2009">87: How should I do integer division in Perl? (score <span>103299</span> in 2009)</a></li>
-<li><a href="#rename-files-and-directories-add-prefix-score-101108-in-2011">88: Rename Files and Directories (Add Prefix) (score <span>101108</span> in 2011)</a></li>
-<li><a href="#how-can-i-extract-substrings-from-a-string-in-perl-score-98783-in-2009">89: How can I extract substrings from a string in Perl? (score <span>98783</span> in 2009)</a></li>
-<li><a href="#why-does-modern-perl-avoid-utf-8-by-default-score-97673-in-2018">90: Why does modern Perl avoid UTF-8 by default? (score <span>97673</span> in 2018)</a></li>
-<li><a href="#how-can-i-remove-text-within-parentheses-with-a-regex-score-97531-in-2009">91: How can I remove text within parentheses with a regex? (score <span>97531</span> in 2009)</a></li>
-<li><a href="#how-can-i-store-the-result-of-a-system-command-in-a-perl-variable-score-97221-in-2013">92: How can I store the result of a system command in a Perl variable? (score <span>97221</span> in 2013)</a></li>
-<li><a href="#how-can-i-compile-my-perl-script-so-it-can-be-executed-on-systems-without-perl-installed-score-96840-in-2009">93: How can I compile my Perl script so it can be executed on systems without perl installed? (score <span>96840</span> in 2009)</a></li>
-<li><a href="#how-can-i-delete-a-newline-if-it-is-the-last-character-in-a-file-score-96750-in-2017">94: How can I delete a newline if it is the last character in a file? (score <span>96750</span> in 2017)</a></li>
-<li><a href="#how-to-compile-a-perl-script-to-a-windows-executable-with-strawberry-perl-score-96303-in-2016">95: How to compile a Perl script to a Windows executable with Strawberry Perl? (score <span>96303</span> in 2016)</a></li>
-<li><a href="#how-to-use-a-variable-in-the-replacement-side-of-the-perl-substitution-operator-score-96218-in-2008">96: How to use a variable in the replacement side of the Perl substitution operator? (score <span>96218</span> in 2008)</a></li>
-<li><a href="#what-exactly-does-perls-bless-do-score-96108-in-2008">97: What exactly does Perl’s “bless” do? (score <span>96108</span> in 2008)</a></li>
-<li><a href="#how-can-i-ssh-inside-a-perl-script-score-94512-in-2015">98: How can I ssh inside a Perl script? (score <span>94512</span> in 2015)</a></li>
-<li><a href="#in-perl-what-is-the-difference-between-a-.pm-perl-module-and-.pl-perl-script-file-score-94271-in-2012">99: In Perl, what is the difference between a .pm (Perl module) and .pl (Perl script) file? (score <span>94271</span> in 2012)</a></li>
-<li><a href="#perl---multiple-condition-if-statement-without-duplicating-code-score-94162-in">100: Perl - Multiple condition if statement without duplicating code? (score <span>94162</span> in )</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="find-size-of-an-array-in-perl-score-559516-in-2015" class="level3">
