--- a/Puzzling_top_100_se.html
+++ b/Puzzling_top_100_se.html
@@ -13,118 +13,15 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Puzzling &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#brooklyn-99-riddle-weighing-islanders-score-1017514-in-2015">1: Brooklyn 99 riddle: Weighing Islanders (score <span>1017514</span> in 2015)</a></li>
-<li><a href="#two-doors-with-two-guards---one-lies-one-tells-the-truth-score-925166-in-2017">2: Two doors with two guards - one lies, one tells the truth (score <span>925166</span> in 2017)</a></li>
-<li><a href="#puzzle-of-putting-numbers-1-9-in-3x3-grid-to-add-up-to-15-score-380924-in-2015">3: Puzzle of putting numbers 1-9 in 3x3 Grid to add up to 15 (score <span>380924</span> in 2015)</a></li>
-<li><a href="#crack-the-lock-code-score-271894-in-2016">4: Crack the lock code (score <span>271894</span> in 2016)</a></li>
-<li><a href="#score-264230-in-2017">5: 1 2 3 4 5 6 7 8 9 = 1 (score <span>264230</span> in 2017)</a></li>
-<li><a href="#the-magic-number-score-260778-in-2014">6: 6, the magic number (score <span>260778</span> in 2014)</a></li>
-<li><a href="#what-is-the-number-of-the-parking-spot-score-198434-in-2015">7: What is the number of the parking spot? (score <span>198434</span> in 2015)</a></li>
-<li><a href="#what-is-the-best-method-of-scrambling-a-rubiks-cube-score-158170-in-2014">8: What is the best method of scrambling a rubik’s cube? (score <span>158170</span> in 2014)</a></li>
-<li><a href="#score-146365-in-2015">9: 1 2 3 4 5 6 7 8 9 = 100 (score <span>146365</span> in 2015)</a></li>
-<li><a href="#letter-word-removing-letters-score-135367-in">10: 5 Letter Word, Removing letters (score <span>135367</span> in )</a></li>
-<li><a href="#poisoned-iced-tea-score-130496-in-2015">11: Poisoned Iced Tea (score <span>130496</span> in 2015)</a></li>
-<li><a href="#four-prisoners-wearing-black-and-white-hats-score-127079-in-2018">12: Four prisoners wearing black and white hats (score <span>127079</span> in 2018)</a></li>
-<li><a href="#the-jeweler-and-the-five-rings-score-119814-in-2017">13: The Jeweler and the Five Rings (score <span>119814</span> in 2017)</a></li>
-<li><a href="#brooklyn-nine-nine-riddle-weighing-islanders-score-117031-in-2015">14: Brooklyn Nine-Nine Riddle: Weighing Islanders (score <span>117031</span> in 2015)</a></li>
-<li><a href="#when-is-cheryls-birthday-score-113551-in-2015">15: When is Cheryl’s Birthday? (score <span>113551</span> in 2015)</a></li>
-<li><a href="#five-angles-in-a-star-score-111014-in-2015">16: Five Angles in a Star (score <span>111014</span> in 2015)</a></li>
-<li><a href="#clever-ways-to-solve-mastermind-score-107039-in-2015">17: Clever ways to solve Mastermind? (score <span>107039</span> in 2015)</a></li>
-<li><a href="#i-am-the-first-in-earth-what-am-i-score-96996-in-2015">18: I am the first in Earth, What am I? (score <span>96996</span> in 2015)</a></li>
-<li><a href="#three-doors-one-truth-teller-one-question-score-92757-in-2017">19: Three Doors, One Truth-Teller, One Question (score <span>92757</span> in 2017)</a></li>
-<li><a href="#when-does-113-score-89217-in-2014">20: When does 1+1=3? (score <span>89217</span> in 2014)</a></li>
-<li><a href="#deaf-mute-and-blind-score-88202-in-2015">21: Deaf, Mute and Blind (score <span>88202</span> in 2015)</a></li>
-<li><a href="#the-man-who-made-it-didnt-want-it-score-80820-in-2016">22: The man who made it didn’t want it (score <span>80820</span> in 2016)</a></li>
-<li><a href="#make-numbers-1---30-using-the-digits-2-0-1-8-score-76112-in">23: Make numbers 1 - 30 using the digits 2, 0, 1, 8 (score <span>76112</span> in )</a></li>
-<li><a href="#twelve-balls-and-a-scale-score-75823-in-2015">24: Twelve balls and a scale (score <span>75823</span> in 2015)</a></li>
-<li><a href="#in-the-100-blue-eyes-problem---why-is-the-oracle-necessary-score-73451-in-2015">25: In the 100 blue eyes problem - why is the oracle necessary? (score <span>73451</span> in 2015)</a></li>
-<li><a href="#flip-edge-in-equator-layer-score-71502-in">26: Flip edge in Equator layer (score <span>71502</span> in )</a></li>
-<li><a href="#what-can-go-up-a-chimney-down-but-not-down-a-chimney-up-score-61276-in-2017">27: What can go up a chimney down, but not down a chimney up? (score <span>61276</span> in 2017)</a></li>
-<li><a href="#are-there-published-sudoku-puzzles-that-require-guessing-score-60838-in-2016">28: Are there published Sudoku puzzles that require guessing? (score <span>60838</span> in 2016)</a></li>
-<li><a href="#which-way-is-the-bus-going-score-57797-in-2016">29: Which way is the bus going? (score <span>57797</span> in 2016)</a></li>
-<li><a href="#a-man-with-two-red-pills-and-two-white-pills-score-57508-in">30: A man with two red pills and two white pills (score <span>57508</span> in )</a></li>
-<li><a href="#a-short-brutal-riddle-score-53338-in-2017">31: A short, brutal riddle (score <span>53338</span> in 2017)</a></li>
-<li><a href="#make-the-equation-true-by-only-drawing-a-single-straight-line-score-50124-in-2014">32: Make the equation true by only drawing a single straight line (score <span>50124</span> in 2014)</a></li>
-<li><a href="#fill-the-holes-score-49848-in-2015">33: Fill the holes? (score <span>49848</span> in 2015)</a></li>
-<li><a href="#make-numbers-1---32-using-the-digits-2-0-1-7-score-49183-in-2017">34: Make numbers 1 - 32 using the digits 2, 0, 1, 7 (score <span>49183</span> in 2017)</a></li>
-<li><a href="#tries-to-guess-a-number-between-1-100-score-47675-in">35: 6 Tries to Guess a Number Between 1-100 (score <span>47675</span> in )</a></li>
-<li><a href="#what-is-the-maximum-number-of-solutions-a-sudoku-puzzle-can-have-score-46788-in-2015">36: What is the maximum number of solutions a Sudoku puzzle can have? (score <span>46788</span> in 2015)</a></li>
-<li><a href="#swap-the-edges-in-a-solved-rubiks-cube-score-46592-in-2015">37: Swap the edges in a solved Rubik’s cube (score <span>46592</span> in 2015)</a></li>
-<li><a href="#a-camel-transporting-bananas-score-46069-in-2016">38: A camel transporting bananas (score <span>46069</span> in 2016)</a></li>
-<li><a href="#use-the-numbers-8-6-4-2-25-score-45803-in-2015">39: Use the numbers 8 6 4 2 = 25 (score <span>45803</span> in 2015)</a></li>
-<li><a href="#fill-number-in-missing-score-44423-in-2019">40: Fill number in missing? (score <span>44423</span> in 2019)</a></li>
-<li><a href="#if-you-have-one-you-have-none-score-44092-in-2018">41: if you have one, you have none (score <span>44092</span> in 2018)</a></li>
-<li><a href="#how-many-balls-can-fit-in-the-box-score-43426-in">42: How many balls can fit in the box? (score <span>43426</span> in )</a></li>
-<li><a href="#candle-timing-measurement-score-42744-in-2014">43: Candle timing measurement (score <span>42744</span> in 2014)</a></li>
-<li><a href="#cutting-a-cake-into-8-pieces-score-42662-in-2017">44: Cutting a cake into 8 pieces (score <span>42662</span> in 2017)</a></li>
-<li><a href="#make-a-square-with-matchsticks-score-42484-in-2017">45: Make a square with matchsticks! (score <span>42484</span> in 2017)</a></li>
-<li><a href="#mensa-iq-test-question-made-by-www.bergmandata.com-score-41929-in-2019">46: Mensa IQ test question made by www.bergmandata.com (score <span>41929</span> in 2019)</a></li>
-<li><a href="#simple-4x4x4-oll-parity-algs-score-41513-in-2017">47: Simple 4x4x4 OLL parity algs? (score <span>41513</span> in 2017)</a></li>
-<li><a href="#how-score-41363-in-2017">48: 29 - 1 = 30 – how? (score <span>41363</span> in 2017)</a></li>
-<li><a href="#what-is-the-largest-tile-possible-in-2048-score-41212-in-2015">49: What is the largest tile possible in 2048? (score <span>41212</span> in 2015)</a></li>
-<li><a href="#mysterious-murder-mystery-score-39100-in-2015">50: Mysterious Murder Mystery (score <span>39100</span> in 2015)</a></li>
-<li><a href="#how-can-one-solve-a-rubiks-cube-without-relying-on-guidesalgorithms-score-38620-in-2017">51: How can one solve a Rubik’s cube without relying on guides/algorithms? (score <span>38620</span> in 2017)</a></li>
-<li><a href="#logical-english-riddles-score-38297-in">52: Logical English Riddles (score <span>38297</span> in )</a></li>
-<li><a href="#up-the-hill-with-3-legs-and-back-down-with-4-score-38115-in-2016">53: Up the hill with 3 legs and back down with 4 (score <span>38115</span> in 2016)</a></li>
-<li><a href="#logicians-walk-into-a-bar-score-37838-in-2015">54: 3 Logicians Walk Into a Bar (score <span>37838</span> in 2015)</a></li>
-<li><a href="#the-coach-the-shoes-and-the-whistle-score-37298-in-2018">55: The coach, the shoes and the whistle (score <span>37298</span> in 2018)</a></li>
-<li><a href="#if-you-choose-an-answer-to-this-question-at-random-what-is-the-chance-you-will-be-correct-score-37273-in">56: If you choose an answer to this question at random, what is the chance you will be correct? (score <span>37273</span> in )</a></li>
-<li><a href="#my-wife-has-died-score-37239-in-2015">57: My wife has died (score <span>37239</span> in 2015)</a></li>
-<li><a href="#you-can-keep-it-only-after-you-give-it-to-someone-else.-what-is-it-score-36905-in">58: You can keep it only after you give it to someone else. What is it? (score <span>36905</span> in )</a></li>
-<li><a href="#what-is-the-official-notation-on-rubiks-revenge4x4-score-36474-in-2018">59: What is the Official notation on rubik’s revenge(4x4)? (score <span>36474</span> in 2018)</a></li>
-<li><a href="#d-wooden-puzzle-score-36361-in-2017">60: 3D wooden puzzle (score <span>36361</span> in 2017)</a></li>
-<li><a href="#why-does-this-answer-to-two-doors-with-two-guards-work-score-34473-in-2017">61: Why does this answer to “two doors with two guards” work? (score <span>34473</span> in 2017)</a></li>
-<li><a href="#a-seven-letter-word---the-meaning-doesnt-change-if-you-remove-letters-score-34367-in-2018">62: A seven letter word - the meaning doesn’t change if you remove letters (score <span>34367</span> in 2018)</a></li>
-<li><a href="#how-do-i-solve-the-worlds-hardest-sudoku-score-34325-in-2017">63: How do I solve the world’s hardest sudoku? (score <span>34325</span> in 2017)</a></li>
-<li><a href="#create-all-numbers-from-0-100-only-using-all-of-1234-and-5-score-34121-in-2017">64: Create all numbers from 0-100 only using all of 1,2,3,4 and 5 (score <span>34121</span> in 2017)</a></li>
-<li><a href="#what-color-was-the-bear-score-33846-in-2016">65: What color was the bear (score <span>33846</span> in 2016)</a></li>
-<li><a href="#i-cant-die.-who-am-i-score-33684-in-2019">66: I can’t die. Who am I? (score <span>33684</span> in 2019)</a></li>
-<li><a href="#how-to-swap-two-opposite-corner-pieces-of-a-solved-face-score-33489-in-2016">67: How to swap two opposite corner pieces of a solved face? (score <span>33489</span> in 2016)</a></li>
-<li><a href="#make-24-with-7373-score-33224-in-2015">68: Make 24 With 7,3,7,3 (score <span>33224</span> in 2015)</a></li>
-<li><a href="#rubiks-cube-with-one-disoriented-corner-score-32771-in">69: Rubik’s cube with one disoriented corner (score <span>32771</span> in )</a></li>
-<li><a href="#is-it-possible-to-use-one-sequence-of-moves-to-solve-the-rubiks-cube-from-any-position-score-32200-in-2014">70: Is it possible to use one sequence of moves to solve the Rubik’s cube from any position? (score <span>32200</span> in 2014)</a></li>
-<li><a href="#i-am-a-computers-nightmare-but-a-programmers-best-friend-score-32180-in-2017">71: I am a computer’s nightmare, but a programmer’s best friend (score <span>32180</span> in 2017)</a></li>
-<li><a href="#how-did-the-man-hang-himself-score-32179-in-2015">72: How did the man hang himself? (score <span>32179</span> in 2015)</a></li>
-<li><a href="#i-can-only-live-where-there-is-light-score-32127-in">73: I Can Only Live Where There is Light (score <span>32127</span> in )</a></li>
-<li><a href="#how-can-64-65-score-32033-in-2016">74: How can 64 = 65? (score <span>32033</span> in 2016)</a></li>
-<li><a href="#this-is-important.-i-need-you-to-listen-score-30813-in-2016">75: This is important. I need you to listen… (score <span>30813</span> in 2016)</a></li>
-<li><a href="#split-12-liters-in-half-with-5-and-8-liter-bottles-score-30780-in-2016">76: Split 12 liters in half with 5 and 8 liter bottles (score <span>30780</span> in 2016)</a></li>
-<li><a href="#put-the-numbers-1-2-3-4-5-6-7-8-and-9-so-the-total-of-each-row-column-and-diagonal-add-up-to-the-same-number-score-30637-in">77: Put the numbers 1, 2, 3, 4, 5, 6, 7, 8, and 9 so the total of each row, column and diagonal add up to the same number (score <span>30637</span> in )</a></li>
-<li><a href="#man-buys-item-throws-it-away-on-his-way-out-score-30627-in-2018">78: Man buys item, throws it away on his way out (score <span>30627</span> in 2018)</a></li>
-<li><a href="#how-to-solve-this-iq-test-puzzle-with-arrows-and-pied-squares-score-30542-in-2017">79: How to solve this IQ test puzzle with arrows and pied squares? (score <span>30542</span> in 2017)</a></li>
-<li><a href="#strategy-to-solve-the-missionaries-and-cannibals-problem-score-30524-in">80: Strategy to solve the Missionaries and Cannibals problem (score <span>30524</span> in )</a></li>
-<li><a href="#how-did-the-police-know-score-30306-in-2016">81: How did the police know? (score <span>30306</span> in 2016)</a></li>
-<li><a href="#riddles-whose-answer-is-the-moon-score-30302-in-2016">82: Riddles whose answer is “the moon” (score <span>30302</span> in 2016)</a></li>
-<li><a href="#can-you-make-1-1-1-1-5-score-29982-in-2018">83: Can you make 1 1 1 1 = 5? (score <span>29982</span> in 2018)</a></li>
-<li><a href="#draw-a-line-through-all-doors-score-29920-in-2015">84: Draw a line through all doors (score <span>29920</span> in 2015)</a></li>
-<li><a href="#grandma-likes-coffee-but-not-tea-score-29918-in-2016">85: Grandma likes coffee but not tea (score <span>29918</span> in 2016)</a></li>
-<li><a href="#hats-and-aliens-score-29316-in-2015">86: Hats and Aliens (score <span>29316</span> in 2015)</a></li>
-<li><a href="#sum-six-unique-digits-to-make-20-score-28776-in-2015">87: Sum six unique digits to make 20 (score <span>28776</span> in 2015)</a></li>
-<li><a href="#digit-number-where-first-n-digits-are-divisible-by-n-score-28372-in-2015">88: 10 digit number where first n digits are divisible by n (score <span>28372</span> in 2015)</a></li>
-<li><a href="#i-have-legs-but-cannot-walk-score-27952-in-2016">89: I have legs but cannot walk (score <span>27952</span> in 2016)</a></li>
-<li><a href="#how-can-i-solve-the-gear-cube-extreme-score-27821-in-2015">90: How can I solve the Gear Cube Extreme? (score <span>27821</span> in 2015)</a></li>
-<li><a href="#find-10-triangles-in-a-five-pointed-star-using-two-straight-lines-score-27159-in-2016">91: Find 10 triangles in a five pointed star using two straight lines (score <span>27159</span> in 2016)</a></li>
-<li><a href="#solving-rubiks-cube-with-one-algorithm-score-26812-in-2015">92: Solving Rubik’s cube with one algorithm (score <span>26812</span> in 2015)</a></li>
-<li><a href="#of-these-five-approaches-to-starting-a-jigsaw-puzzle-which-one-is-fastest-score-26112-in-2014">93: Of these five approaches to starting a jigsaw puzzle, which one is fastest? (score <span>26112</span> in 2014)</a></li>
-<li><a href="#who-will-shout-first-score-25976-in-2018">94: Who will shout first? (score <span>25976</span> in 2018)</a></li>
-<li><a href="#not-the-usual-8-5-4-9-1-7-6-3-2-0-sequence-puzzle-score-25363-in">95: Not the usual “8 5 4 9 1 7 6 3 2 0” sequence puzzle (score <span>25363</span> in )</a></li>
-<li><a href="#lock-your-computer-when-you-walk-away-score-25090-in-2016">96: Lock your computer when you walk away! (score <span>25090</span> in 2016)</a></li>
-<li><a href="#can-you-solve-this-answer-isnt-19-or-26-score-24916-in">97: Can you solve this? Answer isn’t 19 or 26 (score <span>24916</span> in )</a></li>
-<li><a href="#is-this-tetris-puzzle-solvable-score-24915-in-2019">98: Is this Tetris puzzle solvable? (score <span>24915</span> in 2019)</a></li>
-<li><a href="#some-rebus-puzzles-score-24737-in-2017">99: Some Rebus puzzles (score <span>24737</span> in 2017)</a></li>
-<li><a href="#how-do-i-solve-these-3x3-magic-squares-score-24704-in-2015">100: How do I solve these 3x3 magic squares? (score <span>24704</span> in 2015)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="brooklyn-99-riddle-weighing-islanders-score-1017514-in-2015" class="level3">
