--- a/Python_top_100.html
+++ b/Python_top_100.html
@@ -78,116 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Python &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#iterating-over-dictionaries-using-for-loops-score-4065148-in-2017">1: Iterating over dictionaries using ‘for’ loops (score <span>4065148</span> in 2017)</a></li>
-<li><a href="#does-python-have-a-string-contains-substring-method-score-3792442-in-2017">2: Does Python have a string ‘contains’ substring method? (score <span>3792442</span> in 2017)</a></li>
-<li><a href="#how-do-i-check-whether-a-file-exists-without-exceptions-score-3681360-in-2018">3: How do I check whether a file exists without exceptions? (score <span>3681360</span> in 2018)</a></li>
-<li><a href="#how-do-i-parse-a-string-to-a-float-or-int-score-3665519-in-2019">4: How do I parse a string to a float or int? (score <span>3665519</span> in 2019)</a></li>
-<li><a href="#how-do-i-list-all-files-of-a-directory-score-3621699-in-2017">5: How do I list all files of a directory? (score <span>3621699</span> in 2017)</a></li>
-<li><a href="#finding-the-index-of-an-item-given-a-list-containing-it-in-python-score-3448930-in-2019">6: Finding the index of an item given a list containing it in Python (score <span>3448930</span> in 2019)</a></li>
-<li><a href="#how-to-read-a-file-line-by-line-into-a-list-score-3366083-in-2018">7: How to read a file line-by-line into a list? (score <span>3366083</span> in 2018)</a></li>
-<li><a href="#calling-an-external-command-in-python-score-3202147-in-2019">8: Calling an external command in Python (score <span>3202147</span> in 2019)</a></li>
-<li><a href="#converting-integer-to-string-score-3197810-in-2019">9: Converting integer to string? (score <span>3197810</span> in 2019)</a></li>
-<li><a href="#add-new-keys-to-a-dictionary-score-3143556-in-2019">10: Add new keys to a dictionary? (score <span>3143556</span> in 2019)</a></li>
-<li><a href="#check-if-a-given-key-already-exists-in-a-dictionary-score-3139063-in-2013">11: Check if a given key already exists in a dictionary (score <span>3139063</span> in 2013)</a></li>
-<li><a href="#how-do-i-get-the-number-of-elements-in-a-list-score-3134575-in-2019">12: How do I get the number of elements in a list? (score <span>3134575</span> in 2019)</a></li>
-<li><a href="#using-global-variables-in-a-function-score-3043289-in-2018">13: Using global variables in a function (score <span>3043289</span> in 2018)</a></li>
-<li><a href="#how-to-get-the-current-time-in-python-score-3001470-in-2018">14: How to get the current time in Python (score <span>3001470</span> in 2018)</a></li>
-<li><a href="#how-do-i-install-pip-on-windows-score-2887828-in-2017">15: How do I install pip on Windows? (score <span>2887828</span> in 2017)</a></li>
-<li><a href="#how-can-i-make-a-time-delay-in-python-score-2839107-in-2018">16: How can I make a time delay in Python? (score <span>2839107</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-pythons-list-methods-append-and-extend-score-2798324-in-2019">17: What is the difference between Python’s list methods append and extend? (score <span>2798324</span> in 2019)</a></li>
-<li><a href="#limiting-floats-to-two-decimal-points-score-2780835-in-2017">18: Limiting floats to two decimal points (score <span>2780835</span> in 2017)</a></li>
-<li><a href="#converting-string-into-datetime-score-2674955-in-2019">19: Converting string into datetime (score <span>2674955</span> in 2019)</a></li>
-<li><a href="#how-do-i-get-a-substring-of-a-string-in-python-score-2671603-in-2019">20: How do I get a substring of a string in Python? (score <span>2671603</span> in 2019)</a></li>
-<li><a href="#find-current-directory-and-files-directory-score-2648748-in-2016">21: Find current directory and file’s directory (score <span>2648748</span> in 2016)</a></li>
-<li><a href="#why-cant-python-parse-this-json-data-score-2591542-in-2019">22: Why can’t Python parse this JSON data? (score <span>2591542</span> in 2019)</a></li>
-<li><a href="#what-does-if-name-main-do-score-2531456-in-2018">23: What does if <strong>name</strong> == “<strong>main</strong>”: do? (score <span>2531456</span> in 2018)</a></li>
-<li><a href="#how-do-i-check-if-a-list-is-empty-score-2462573-in-2018">24: How do I check if a list is empty? (score <span>2462573</span> in 2018)</a></li>
-<li><a href="#how-do-i-sort-a-dictionary-by-value-score-2415416-in-2019">25: How do I sort a dictionary by value? (score <span>2415416</span> in 2019)</a></li>
-<li><a href="#how-can-i-safely-create-a-nested-directory-score-2407666-in-2019">26: How can I safely create a nested directory? (score <span>2407666</span> in 2019)</a></li>
-<li><a href="#how-to-remove-an-element-from-a-list-by-index-score-2347506-in-2019">27: How to remove an element from a list by index? (score <span>2347506</span> in 2019)</a></li>
-<li><a href="#renaming-columns-in-pandas-score-2283204-in-2017">28: Renaming columns in pandas (score <span>2283204</span> in 2017)</a></li>
-<li><a href="#how-to-determine-a-python-variables-type-score-2254676-in-2017">29: How to determine a Python variable’s type? (score <span>2254676</span> in 2017)</a></li>
-<li><a href="#how-do-i-lowercase-a-string-in-python-score-2241046-in-2019">30: How do I lowercase a string in Python? (score <span>2241046</span> in 2019)</a></li>
-<li><a href="#how-to-convert-list-to-string-score-2197422-in-2019">31: How to convert list to string (score <span>2197422</span> in 2019)</a></li>
-<li><a href="#select-rows-from-a-dataframe-based-on-values-in-a-column-in-pandas-score-2183835-in-2019">32: Select rows from a DataFrame based on values in a column in pandas (score <span>2183835</span> in 2019)</a></li>
-<li><a href="#how-do-you-change-the-size-of-figures-drawn-with-matplotlib-score-2126797-in">33: How do you change the size of figures drawn with matplotlib? (score <span>2126797</span> in )</a></li>
-<li><a href="#how-do-i-concatenate-two-lists-in-python-score-2112225-in-2019">34: How do I concatenate two lists in Python? (score <span>2112225</span> in 2019)</a></li>
-<li><a href="#what-does-the-yield-keyword-do-score-2091736-in-2019">35: What does the “yield” keyword do? (score <span>2091736</span> in 2019)</a></li>
-<li><a href="#how-to-define-a-two-dimensional-array-in-python-score-2033452-in-2017">36: How to define a two-dimensional array in Python (score <span>2033452</span> in 2017)</a></li>
-<li><a href="#how-do-i-install-pip-on-macos-or-os-x-score-1952317-in-2017">37: How do I install pip on macOS or OS X? (score <span>1952317</span> in 2017)</a></li>
-<li><a href="#convert-bytes-to-a-string-score-1932306-in-2019">38: Convert bytes to a string (score <span>1932306</span> in 2019)</a></li>
-<li><a href="#correct-way-to-write-line-to-file-score-1928059-in-2017">39: Correct way to write line to file? (score <span>1928059</span> in 2017)</a></li>
-<li><a href="#accessing-the-index-in-for-loops-score-1900009-in-2019">40: Accessing the index in ‘for’ loops? (score <span>1900009</span> in 2019)</a></li>
-<li><a href="#how-to-iterate-over-rows-in-a-dataframe-in-pandas-score-1869294-in-2018">41: How to iterate over rows in a DataFrame in Pandas? (score <span>1869294</span> in 2018)</a></li>
-<li><a href="#pythons-equivalent-of-logical-and-in-an-if-statement-score-1813435-in-2018">43: Python’s equivalent of &amp;&amp; (logical-and) in an if-statement (score <span>1813435</span> in 2018)</a></li>
-<li><a href="#getting-the-last-element-of-a-list-score-1789328-in-2019">44: Getting the last element of a list (score <span>1789328</span> in 2019)</a></li>
-<li><a href="#adding-new-column-to-existing-dataframe-in-python-pandas-score-1789112-in-2017">45: Adding new column to existing DataFrame in Python pandas (score <span>1789112</span> in 2017)</a></li>
-<li><a href="#delete-a-file-or-folder-score-1779349-in-2018">46: Delete a file or folder (score <span>1779349</span> in 2018)</a></li>
-<li><a href="#does-python-have-a-ternary-conditional-operator-score-1772957-in-2019">47: Does Python have a ternary conditional operator? (score <span>1772957</span> in 2019)</a></li>
-<li><a href="#how-to-make-a-flat-list-out-of-list-of-lists-score-1764924-in-2019">48: How to make a flat list out of list of lists? (score <span>1764924</span> in 2019)</a></li>
-<li><a href="#how-to-print-without-newline-or-space-score-1755449-in-2019">49: How to print without newline or space? (score <span>1755449</span> in 2019)</a></li>
-<li><a href="#generate-random-integers-between-0-and-9-score-1740843-in-2018">50: Generate random integers between 0 and 9 (score <span>1740843</span> in 2018)</a></li>
-<li><a href="#how-do-i-copy-a-file-in-python-score-1692227-in-2018">51: How do I copy a file in Python? (score <span>1692227</span> in 2018)</a></li>
-<li><a href="#how-to-declare-an-array-in-python-score-1679894-in-2014">52: How to declare an array in Python? (score <span>1679894</span> in 2014)</a></li>
-<li><a href="#how-to-split-a-string-into-a-list-score-1677830-in-2019">53: How to split a string into a list? (score <span>1677830</span> in 2019)</a></li>
-<li><a href="#fastest-way-to-check-if-a-value-exists-in-a-list-score-1650273-in-2019">54: Fastest way to check if a value exists in a list (score <span>1650273</span> in 2019)</a></li>
-<li><a href="#how-do-i-merge-two-dictionaries-in-a-single-expression-score-1648573-in-2019">55: How do I merge two dictionaries in a single expression? (score <span>1648573</span> in 2019)</a></li>
-<li><a href="#determine-the-type-of-an-object-score-1647494-in-2017">56: Determine the type of an object? (score <span>1647494</span> in 2017)</a></li>
-<li><a href="#is-arr.__len__-the-preferred-way-to-get-the-length-of-an-array-in-python-score-1645889-in-2018">57: Is arr.__len__() the preferred way to get the length of an array in Python? (score <span>1645889</span> in 2018)</a></li>
-<li><a href="#what-ide-to-use-for-python-score-1633282-in-2014">58: What IDE to use for Python? (score <span>1633282</span> in 2014)</a></li>
-<li><a href="#how-can-i-remove-a-trailing-newline-score-1623884-in-2019">59: How can I remove a trailing newline? (score <span>1623884</span> in 2019)</a></li>
-<li><a href="#how-to-convert-strings-into-integers-in-python-score-1618410-in-2017">60: How to convert strings into integers in Python? (score <span>1618410</span> in 2017)</a></li>
-<li><a href="#is-there-a-simple-way-to-delete-a-list-element-by-value-score-1596938-in-2019">61: Is there a simple way to delete a list element by value? (score <span>1596938</span> in 2019)</a></li>
-<li><a href="#python-find-in-list-score-1578399-in-2018">62: Python: Find in list (score <span>1578399</span> in 2018)</a></li>
-<li><a href="#manually-raising-throwing-an-exception-in-python-score-1572164-in-2019">63: Manually raising (throwing) an exception in Python (score <span>1572164</span> in 2019)</a></li>
-<li><a href="#how-to-access-environment-variable-values-score-1565338-in-2019">64: How to access environment variable values? (score <span>1565338</span> in 2019)</a></li>
-<li><a href="#understanding-python-super-with-init-methods-score-1561073-in-2018">65: Understanding Python super() with <strong>init</strong>() methods (score <span>1561073</span> in 2018)</a></li>
-<li><a href="#understanding-slice-notation-score-1550739-in-2019">66: Understanding slice notation (score <span>1550739</span> in 2019)</a></li>
-<li><a href="#get-list-from-pandas-dataframe-column-headers-score-1535570-in-2019">67: Get list from pandas DataFrame column headers (score <span>1535570</span> in 2019)</a></li>
-<li><a href="#find-all-files-in-a-directory-with-extension-.txt-in-python-score-1534437-in-2017">68: Find all files in a directory with extension .txt in Python (score <span>1534437</span> in 2017)</a></li>
-<li><a href="#unicodeencodeerror-ascii-codec-cant-encode-character-u-in-position-20-ordinal-not-in-range128-score-1532253-in-2016">69: UnicodeEncodeError: ‘ascii’ codec can’t encode character u’’ in position 20: ordinal not in range(128) (score <span>1532253</span> in 2016)</a></li>
-<li><a href="#how-do-i-append-one-string-to-another-in-python-score-1511101-in-2019">70: How do I append one string to another in Python? (score <span>1511101</span> in 2019)</a></li>
-<li><a href="#sum-a-list-of-numbers-in-python-score-1505579-in-2018">71: Sum a list of numbers in Python (score <span>1505579</span> in 2018)</a></li>
-<li><a href="#remove-all-whitespace-in-a-string-in-python-score-1504934-in-2018">72: Remove all whitespace in a string in Python (score <span>1504934</span> in 2018)</a></li>
-<li><a href="#is-there-a-not-equal-operator-in-python-score-1487533-in-2018">73: Is there a “not equal” operator in Python? (score <span>1487533</span> in 2018)</a></li>
-<li><a href="#how-do-you-append-to-a-file-in-python-score-1477953-in-2019">74: How do you append to a file in Python? (score <span>1477953</span> in 2019)</a></li>
-<li><a href="#replacements-for-switch-statement-in-python-score-1472506-in-2018">75: Replacements for switch statement in Python? (score <span>1472506</span> in 2018)</a></li>
-<li><a href="#why-does-comparing-strings-using-either-or-is-sometimes-produce-a-different-result-score-1471340-in-2019">76: Why does comparing strings using either ‘==’ or ‘is’ sometimes produce a different result? (score <span>1471340</span> in 2019)</a></li>
-<li><a href="#how-can-i-count-the-occurrences-of-a-list-item-score-1467929-in-2018">77: How can I count the occurrences of a list item? (score <span>1467929</span> in 2018)</a></li>
-<li><a href="#how-do-you-read-from-stdin-score-1462727-in-2018">78: How do you read from stdin? (score <span>1462727</span> in 2018)</a></li>
-<li><a href="#how-do-i-get-the-row-count-of-a-pandas-dataframe-score-1456763-in-2019">79: How do I get the row count of a pandas DataFrame? (score <span>1456763</span> in 2019)</a></li>
-<li><a href="#way-to-create-multiline-comments-in-python-score-1449100-in-2019">80: Way to create multiline comments in Python? (score <span>1449100</span> in 2019)</a></li>
-<li><a href="#how-to-clone-or-copy-a-list-score-1446611-in-2019">81: How to clone or copy a list? (score <span>1446611</span> in 2019)</a></li>
-<li><a href="#python-add-new-item-to-dictionary-score-1441083-in-2016">82: Python add new item to dictionary (score <span>1441083</span> in 2016)</a></li>
-<li><a href="#delete-column-from-pandas-dataframe-score-1437865-in-2019">83: Delete column from pandas DataFrame (score <span>1437865</span> in 2019)</a></li>
-<li><a href="#how-to-check-if-the-string-is-empty-score-1432962-in-2019">84: How to check if the string is empty? (score <span>1432962</span> in 2019)</a></li>
-<li><a href="#difference-between-del-remove-and-pop-on-lists-score-1429816-in-2012">85: Difference between del, remove and pop on lists (score <span>1429816</span> in 2012)</a></li>
-<li><a href="#delete-an-element-from-a-dictionary-score-1418712-in-2019">86: Delete an element from a dictionary (score <span>1418712</span> in 2019)</a></li>
-<li><a href="#null-object-in-python-score-1404774-in-2013">87: null object in Python? (score <span>1404774</span> in 2013)</a></li>
-<li><a href="#how-can-i-do-a-line-break-line-continuation-in-python-score-1403503-in-2018">88: How can I do a line break (line continuation) in Python? (score <span>1403503</span> in 2018)</a></li>
-<li><a href="#save-plot-to-image-file-instead-of-displaying-it-using-matplotlib-score-1400228-in-2018">89: Save plot to image file instead of displaying it using Matplotlib (score <span>1400228</span> in 2018)</a></li>
-<li><a href="#how-do-i-check-what-version-of-python-is-running-my-script-score-1394392-in-2011">90: How do I check what version of Python is running my script? (score <span>1394392</span> in 2011)</a></li>
-<li><a href="#writing-a-list-to-a-file-with-python-score-1386411-in-2016">91: Writing a list to a file with Python (score <span>1386411</span> in 2016)</a></li>
-<li><a href="#how-to-delete-a-character-from-a-string-using-python-score-1381554-in-2018">92: How to delete a character from a string using Python (score <span>1381554</span> in 2018)</a></li>
-<li><a href="#how-to-comment-out-a-block-of-code-in-python-score-1371641-in-2018">93: How to comment out a block of code in Python (score <span>1371641</span> in 2018)</a></li>
-<li><a href="#terminating-a-python-script-score-1362795-in-2016">94: Terminating a Python script (score <span>1362795</span> in 2016)</a></li>
-<li><a href="#how-to-import-other-python-files-score-1351747-in-2018">95: How to import other Python files? (score <span>1351747</span> in 2018)</a></li>
-<li><a href="#how-can-i-reverse-a-list-in-python-score-1346403-in-2018">96: How can I reverse a list in Python? (score <span>1346403</span> in 2018)</a></li>
-<li><a href="#how-do-i-specify-new-lines-on-python-when-writing-on-files-score-1343781-in-2019">97: How do I specify new lines on Python, when writing on files? (score <span>1343781</span> in 2019)</a></li>
-<li><a href="#removing-duplicates-in-lists-score-1337045-in-2019">98: Removing duplicates in lists (score <span>1337045</span> in 2019)</a></li>
-<li><a href="#get-unique-values-from-a-list-in-python-score-1335592-in-2019">99: Get unique values from a list in python (score <span>1335592</span> in 2019)</a></li>
-<li><a href="#python-error-importerror-no-module-named-score-1319040-in-2017">100: Python error “ImportError: No module named” (score <span>1319040</span> in 2017)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="iterating-over-dictionaries-using-for-loops-score-4065148-in-2017" class="level3">
