--- a/Qt_top_100.html
+++ b/Qt_top_100.html
@@ -78,116 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Qt &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-to-convert-int-to-qstring-score-432339-in-2015">1: How to convert int to QString? (score <span>432339</span> in 2015)</a></li>
-<li><a href="#qlabel-set-color-of-text-and-background-score-298574-in-2012">2: QLabel: set color of text and background (score <span>298574</span> in 2012)</a></li>
-<li><a href="#how-to-convert-qstring-to-stdstring-score-263024-in-2015">3: How to convert QString to std::string? (score <span>263024</span> in 2015)</a></li>
-<li><a href="#how-to-print-to-console-when-using-qt-score-247741-in-2015">4: How to print to console when using Qt (score <span>247741</span> in 2015)</a></li>
-<li><a href="#qt-5.1.1-application-failed-to-start-because-platform-plugin-windows-is-missing-score-227971-in-2017">5: Qt 5.1.1: Application failed to start because platform plugin “windows” is missing (score <span>227971</span> in 2017)</a></li>
-<li><a href="#adding-external-library-into-qt-creator-project-score-208998-in-2013">6: Adding external library into Qt Creator project (score <span>208998</span> in 2013)</a></li>
-<li><a href="#how-to-change-string-into-qstring-score-203123-in-2016">7: How to change string into QString? (score <span>203123</span> in 2016)</a></li>
-<li><a href="#failed-to-load-platform-pluginxcb-while-launching-qt5-app-on-linux-without-qt-installed-score-183978-in-2015">8: “Failed to load platform plugin”xcb" " while launching qt5 app on linux without qt installed (score <span>183978</span> in 2015)</a></li>
-<li><a href="#how-do-i-create-a-pausewait-function-using-qt-score-179030-in-2015">9: How do I create a pause/wait function using Qt? (score <span>179030</span> in 2015)</a></li>
-<li><a href="#qmake-could-not-find-a-qt-installation-of-score-170258-in-2016">10: qmake: could not find a Qt installation of ’’ (score <span>170258</span> in 2016)</a></li>
-<li><a href="#auto-expanding-layout-with-qt-designer-score-168660-in">11: Auto-expanding layout with Qt-Designer (score <span>168660</span> in )</a></li>
-<li><a href="#how-to-convert-qstring-to-int-score-164587-in-2016">12: How to convert QString to int? (score <span>164587</span> in 2016)</a></li>
-<li><a href="#creatingwriting-into-a-new-file-in-qt-score-159250-in-2017">13: Creating/writing into a new file in Qt (score <span>159250</span> in 2017)</a></li>
-<li><a href="#qstring-to-char-conversion-score-153496-in-2014">14: QString to char* conversion (score <span>153496</span> in 2014)</a></li>
-<li><a href="#qt-jpg-image-display-score-152919-in-2013">15: Qt jpg image display (score <span>152919</span> in 2013)</a></li>
-<li><a href="#how-to-install-pyqt5-on-windows-score-136283-in-2018">16: How to install PyQt5 on Windows? (score <span>136283</span> in 2018)</a></li>
-<li><a href="#yesno-message-box-using-qmessagebox-score-135833-in-2018">17: Yes/No message box using QMessageBox (score <span>135833</span> in 2018)</a></li>
-<li><a href="#qt---reading-from-a-text-file-score-135498-in">18: Qt - reading from a text file (score <span>135498</span> in )</a></li>
-<li><a href="#get-current-working-directory-in-a-qt-application-score-135066-in-2016">19: Get current working directory in a Qt application (score <span>135066</span> in 2016)</a></li>
-<li><a href="#how-to-enable-c11-in-qt-creator-score-133748-in-2015">20: How to enable C++11 in Qt Creator? (score <span>133748</span> in 2015)</a></li>
-<li><a href="#qt.-get-part-of-qstring-score-131962-in-2017">21: Qt. get part of QString (score <span>131962</span> in 2017)</a></li>
-<li><a href="#cl-is-not-recognized-as-an-internal-or-external-command-score-129230-in-2012">22: ‘cl’ is not recognized as an internal or external command, (score <span>129230</span> in 2012)</a></li>
-<li><a href="#how-can-i-get-the-selected-value-out-of-a-qcombobox-score-126983-in-2018">23: How can I get the selected VALUE out of a QCombobox? (score <span>126983</span> in 2018)</a></li>
-<li><a href="#qtcreator-no-valid-kits-found-score-126122-in-2016">24: QtCreator: No valid kits found (score <span>126122</span> in 2016)</a></li>
-<li><a href="#correct-way-to-quit-a-qt-program-score-122572-in-2013">25: Correct way to quit a Qt program? (score <span>122572</span> in 2013)</a></li>
-<li><a href="#how-to-format-a-qstring-score-122452-in-2015">26: How to format a QString? (score <span>122452</span> in 2015)</a></li>
-<li><a href="#how-to-set-image-on-qpushbutton-score-122196-in-2012">27: How to set image on QPushButton? (score <span>122196</span> in 2012)</a></li>
-<li><a href="#error-qapplication-no-such-file-or-directory-score-120687-in-2014">28: Error QApplication: no such file or directory (score <span>120687</span> in 2014)</a></li>
-<li><a href="#checking-if-a-folder-exists-and-creating-folders-in-qt-c-score-119925-in-2017">29: Checking if a folder exists (and creating folders) in Qt, C++ (score <span>119925</span> in 2017)</a></li>
-<li><a href="#display-qimage-with-qtgui-score-116001-in-2013">30: Display QImage with QtGui (score <span>116001</span> in 2013)</a></li>
-<li><a href="#interpreting-segfault-messages-score-115638-in">31: Interpreting segfault messages (score <span>115638</span> in )</a></li>
-<li><a href="#how-to-get-the-current-timestamp-score-112703-in-2016">32: How to get the current TimeStamp? (score <span>112703</span> in 2016)</a></li>
-<li><a href="#linking-a-qtdesigner-.ui-file-to-pythonpyqt-score-112212-in-2010">33: Linking a qtDesigner .ui file to python/pyqt? (score <span>112212</span> in 2010)</a></li>
-<li><a href="#qt-c-aggregate-stdstringstream-ss-has-incomplete-type-and-cannot-be-defined-score-110931-in-2018">34: Qt c++ aggregate ‘std::stringstream ss’ has incomplete type and cannot be defined (score <span>110931</span> in 2018)</a></li>
-<li><a href="#console-output-in-a-qt-gui-app-score-109338-in-2015">35: Console output in a Qt GUI app? (score <span>109338</span> in 2015)</a></li>
-<li><a href="#how-do-i-create-a-simple-qt-console-application-in-c-score-102046-in-2010">36: How do I create a simple Qt console application in C++? (score <span>102046</span> in 2010)</a></li>
-<li><a href="#how-to-specify-different-debugrelease-output-directories-in-qmake-.pro-file-score-101236-in">37: How to specify different Debug/Release output directories in QMake .pro file (score <span>101236</span> in )</a></li>
-<li><a href="#how-to-show-another-window-from-mainwindow-in-qt-score-101105-in-2013">38: How to show another window from mainwindow in QT (score <span>101105</span> in 2013)</a></li>
-<li><a href="#how-to-give-a-delay-in-loop-execution-using-qt-score-98368-in-2015">39: How to give a delay in loop execution using Qt (score <span>98368</span> in 2015)</a></li>
-<li><a href="#qt-how-do-i-handle-the-event-of-the-user-pressing-the-x-close-button-score-97062-in-2017">40: Qt: How do I handle the event of the user pressing the ‘X’ (close) button? (score <span>97062</span> in 2017)</a></li>
-<li><a href="#convert-a-double-to-a-qstring-score-93114-in-2017">41: Convert a double to a QString (score <span>93114</span> in 2017)</a></li>
-<li><a href="#how-to-change-the-title-of-the-window-in-qt-score-91005-in-2012">42: How to change the Title of the window in Qt? (score <span>91005</span> in 2012)</a></li>
-<li><a href="#cannot-connect-to-x-server-0.0-with-a-qt-application-score-90554-in-2012">43: Cannot connect to X server :0.0 with a Qt application (score <span>90554</span> in 2012)</a></li>
-<li><a href="#for-loop-vs-qts-foreach-in-c-score-89778-in-2013">44: ‘for’ loop vs Qt’s ‘foreach’ in C++ (score <span>89778</span> in 2013)</a></li>
-<li><a href="#how-to-link-opencv-in-qtcreator-and-use-qt-library-score-89274-in-2013">45: How to link opencv in QtCreator and use Qt library (score <span>89274</span> in 2013)</a></li>
-<li><a href="#qbytearray-to-qstring-score-87770-in-2017">46: QByteArray to QString (score <span>87770</span> in 2017)</a></li>
-<li><a href="#read-a-text-file-line-by-line-in-qt-score-86068-in-2015">47: Read a text file line by line in Qt (score <span>86068</span> in 2015)</a></li>
-<li><a href="#how-to-use-qtimer-score-85340-in-2014">48: How to use QTimer (score <span>85340</span> in 2014)</a></li>
-<li><a href="#hide-console-of-windows-application-score-85169-in-2012">49: Hide console of Windows Application (score <span>85169</span> in 2012)</a></li>
-<li><a href="#how-to-createreadwrite-json-files-in-qt5-score-83939-in-2014">50: How to create/read/write JSon files in Qt5 (score <span>83939</span> in 2014)</a></li>
-<li><a href="#get-elapsed-time-in-qt-score-83913-in-2015">51: Get elapsed time in Qt (score <span>83913</span> in 2015)</a></li>
-<li><a href="#qcombobox---set-selected-item-based-on-the-items-data-score-83818-in-2018">52: QComboBox - set selected item based on the item’s data (score <span>83818</span> in 2018)</a></li>
-<li><a href="#qt-resizing-a-qlabel-containing-a-qpixmap-while-keeping-its-aspect-ratio-score-83053-in-2017">53: Qt: resizing a QLabel containing a QPixmap while keeping its aspect ratio (score <span>83053</span> in 2017)</a></li>
-<li><a href="#how-do-i-set-the-background-color-of-a-widget-like-combobox-or-double-spin-box-score-82434-in-2017">54: How do I set the background color of a widget like combobox or double spin box? (score <span>82434</span> in 2017)</a></li>
-<li><a href="#cannot-launch-avd-in-emulatorqt-library-not-found-score-82177-in-2018">55: Cannot launch AVD in emulator:QT library not found (score <span>82177</span> in 2018)</a></li>
-<li><a href="#set-qlineedit-to-accept-only-numbers-score-82113-in-2013">56: Set QLineEdit to accept only numbers (score <span>82113</span> in 2013)</a></li>
-<li><a href="#qt-creator-needs-a-compiler-set-up-to-build.-configure-a-compiler-in-the-kit-options-score-81825-in-2016">57: Qt Creator needs a compiler set up to build. Configure a compiler in the kit options (score <span>81825</span> in 2016)</a></li>
-<li><a href="#how-to-emit-cross-thread-signal-in-qt-score-81768-in-2018">58: How to emit cross-thread signal in Qt? (score <span>81768</span> in 2018)</a></li>
-<li><a href="#qt-static-linking-and-deployment-score-81137-in">59: Qt static linking and deployment (score <span>81137</span> in )</a></li>
-<li><a href="#can-the-open-file-dialog-be-used-to-select-a-folder-score-80712-in-2010">60: can the Open File dialog be used to select a Folder? (score <span>80712</span> in 2010)</a></li>
-<li><a href="#how-to-configure-cdb-in-qt-creator-score-80287-in-2017">61: How to configure CDB in Qt Creator? (score <span>80287</span> in 2017)</a></li>
-<li><a href="#qt-tutorials-for-beginners-score-79516-in-2015">62: Qt tutorials for beginners (score <span>79516</span> in 2015)</a></li>
-<li><a href="#undefined-reference-to-vtable.-trying-to-compile-a-qt-project-score-78650-in-2017">63: Undefined reference to vtable. Trying to compile a Qt project (score <span>78650</span> in 2017)</a></li>
-<li><a href="#convert-an-int-to-a-qstring-with-zero-padding-leading-zeroes-score-77961-in-2014">64: Convert an int to a QString with zero padding (leading zeroes) (score <span>77961</span> in 2014)</a></li>
-<li><a href="#qt-cant-find--lgl-error-score-76629-in-2014">65: Qt: can’t find -lGL error (score <span>76629</span> in 2014)</a></li>
-<li><a href="#how-to-set-application-icon-in-a-qt-based-project-score-75456-in-2013">66: How to set application icon in a Qt-based project? (score <span>75456</span> in 2013)</a></li>
-<li><a href="#qtcpsocket-reading-and-writing-score-75373-in">67: QTcpSocket: reading and writing (score <span>75373</span> in )</a></li>
-<li><a href="#how-to-build-qt-for-visual-studio-2010-score-75051-in-2011">68: How to build Qt for Visual Studio 2010 (score <span>75051</span> in 2011)</a></li>
-<li><a href="#qt-repaintredrawupdatedo-something-score-74789-in-2017">69: QT Repaint/Redraw/Update/Do Something (score <span>74789</span> in 2017)</a></li>
-<li><a href="#how-to-make-a-qpushbutton-disabled-score-74644-in-2013">70: How to make a QPushButton disabled (score <span>74644</span> in 2013)</a></li>
-<li><a href="#how-to-check-whether-file-exists-in-qt-in-c-score-74605-in-2015">71: How to check whether file exists in Qt in c++ (score <span>74605</span> in 2015)</a></li>
-<li><a href="#what-should-i-choose-gtk-or-qt-score-74518-in-2009">72: What should I choose: GTK+ or Qt? (score <span>74518</span> in 2009)</a></li>
-<li><a href="#symbols-not-found-for-architecture-x86_64-on-qtcreator-project-score-72955-in">73: “Symbol(s) not found for architecture x86_64” on QtCreator project (score <span>72955</span> in )</a></li>
-<li><a href="#configuring-the-gcc-compiler-switches-in-qt-qtcreator-and-qmake-score-72633-in-2011">74: Configuring the GCC compiler switches in Qt, QtCreator, and QMake (score <span>72633</span> in 2011)</a></li>
-<li><a href="#qdialog-exec-and-getting-result-value-score-71773-in-2019">75: QDialog exec() and getting result value (score <span>71773</span> in 2019)</a></li>
-<li><a href="#unresolved-external-symbol-public-virtual-struct-qmetaobject-const-__thiscall-parent-score-71464-in-2016">76: Unresolved external symbol "public: virtual struct QMetaObject const * __thiscall Parent (score <span>71464</span> in 2016)</a></li>
-<li><a href="#non-resizeable-qdialog-with-fixed-size-in-qt-score-70946-in-2014">77: Non-resizeable QDialog with fixed size in Qt? (score <span>70946</span> in 2014)</a></li>
-<li><a href="#how-to-compare-two-qstrings-score-70623-in-2013">78: How to Compare two Qstrings? (score <span>70623</span> in 2013)</a></li>
-<li><a href="#error-c2228-left-of-must-have-classstructunion-score-70493-in">79: Error: C2228: left of ’’ must have class/struct/union (score <span>70493</span> in )</a></li>
-<li><a href="#converting-qstring-to-char-score-70483-in-2017">80: Converting QString to char* (score <span>70483</span> in 2017)</a></li>
-<li><a href="#how-do-i-configure-qt-for-cross-compilation-from-linux-to-windows-target-score-69935-in-2013">81: How do I configure Qt for cross-compilation from Linux to Windows target? (score <span>69935</span> in 2013)</a></li>
-<li><a href="#what-does-the-q_object-macro-do-why-do-all-qt-objects-need-this-macro-score-69320-in-2016">82: What does the Q_OBJECT macro do? Why do all Qt objects need this macro? (score <span>69320</span> in 2016)</a></li>
-<li><a href="#qt-parsing-json-using-qjsondocument-qjsonobject-qjsonarray-score-69072-in-2019">83: Qt parsing JSON using QJsonDocument, QJsonObject, QJsonArray (score <span>69072</span> in 2019)</a></li>
-<li><a href="#what-is-the-correct-way-to-implement-a-qthread-example-please-score-68687-in-2018">84: what is the correct way to implement a QThread… (example please…) (score <span>68687</span> in 2018)</a></li>
-<li><a href="#how-to-build-a-full-path-string-safely-from-separate-strings-score-68494-in-2011">85: How to build a full path string (safely) from separate strings? (score <span>68494</span> in 2011)</a></li>
-<li><a href="#c-signal-to-qml-slot-in-qt-score-68457-in-2017">86: C++ signal to QML slot in Qt (score <span>68457</span> in 2017)</a></li>
-<li><a href="#how-do-i-set-a-background-color-for-the-whole-window-of-a-qt-application-score-68078-in-2017">88: How do I set a background color for the whole window of a Qt application? (score <span>68078</span> in 2017)</a></li>
-<li><a href="#iterating-over-a-qmap-with-for-score-67619-in-2015">89: Iterating over a QMap with for (score <span>67619</span> in 2015)</a></li>
-<li><a href="#how-to-print-string-literal-and-qstring-with-qdebug-score-67586-in">90: How to print string literal and QString with qDebug? (score <span>67586</span> in )</a></li>
-<li><a href="#fatal-error-qtguiqapplication-no-such-file-or-directory-score-67138-in-2019">91: fatal error: QtGui/QApplication: No such file or directory (score <span>67138</span> in 2019)</a></li>
-<li><a href="#how-do-i-use-qt-in-my-visual-studio-2015-projects-score-66140-in">92: How do i use Qt in my Visual Studio 2015 projects? (score <span>66140</span> in )</a></li>
-<li><a href="#how-to-create-a-bold-red-text-label-in-qt-score-66101-in">93: How to create a bold, red text label in Qt? (score <span>66101</span> in )</a></li>
-<li><a href="#how-can-i-concatenate-qstrings-score-65515-in-2013">94: How can I concatenate QStrings? (score <span>65515</span> in 2013)</a></li>
-<li><a href="#qt-layout-on-qmainwindow-score-64119-in-2017">95: Qt Layout on QMainWindow (score <span>64119</span> in 2017)</a></li>
-<li><a href="#convert-stdstring-to-qstring-score-64084-in-2016">96: Convert std::string to QString (score <span>64084</span> in 2016)</a></li>
-<li><a href="#how-to-get-selected-rows-in-qtableview-score-63806-in-2016">97: how to get selected rows in QTableView (score <span>63806</span> in 2016)</a></li>
-<li><a href="#qvboxlayout-how-to-vertically-align-widgets-to-the-top-instead-of-the-center-score-63577-in">98: QVBoxLayout: How to vertically align widgets to the top instead of the center (score <span>63577</span> in )</a></li>
-<li><a href="#qt5-static-build-yields-failed-to-load-platform-plugin-windows-score-63348-in-2013">99: Qt5 Static Build yields Failed to load platform plugin “windows” (score <span>63348</span> in 2013)</a></li>
-<li><a href="#qt-set-size-of-qmainwindow-score-63091-in-2016">100: Qt: Set size of QMainWindow (score <span>63091</span> in 2016)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-to-convert-int-to-qstring-score-432339-in-2015" class="level3">
