--- a/Ruby_top_100.html
+++ b/Ruby_top_100.html
@@ -78,120 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Ruby &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-to-write-a-switch-statement-in-ruby-score-809157-in-2018">1: How to write a switch statement in Ruby (score <span>809157</span> in 2018)</a></li>
-<li><a href="#check-if-a-value-exists-in-an-array-in-ruby-score-802557-in-2015">2: Check if a value exists in an array in Ruby (score <span>802557</span> in 2015)</a></li>
-<li><a href="#how-to-check-whether-a-string-contains-a-substring-in-ruby-score-684461-in-2013">3: How to check whether a string contains a substring in Ruby? (score <span>684461</span> in 2013)</a></li>
-<li><a href="#how-to-convert-a-string-to-lower-or-upper-case-in-ruby-score-638074-in-2016">4: How to convert a string to lower or upper case in Ruby (score <span>638074</span> in 2016)</a></li>
-<li><a href="#how-to-write-to-file-in-ruby-score-560295-in-2016">5: How to write to file in Ruby? (score <span>560295</span> in 2016)</a></li>
-<li><a href="#string-concatenation-in-ruby-score-536211-in-2015">6: String concatenation in Ruby (score <span>536211</span> in 2015)</a></li>
-<li><a href="#execute-a-command-line-binary-with-node.js-score-516439-in-2015">7: Execute a command line binary with Node.js (score <span>516439</span> in 2015)</a></li>
-<li><a href="#how-to-get-a-random-number-in-ruby-score-515026-in-2018">8: How to get a random number in Ruby (score <span>515026</span> in 2018)</a></li>
-<li><a href="#calling-shell-commands-from-ruby-score-504395-in-2015">9: Calling shell commands from Ruby (score <span>504395</span> in 2015)</a></li>
-<li><a href="#ruby-function-to-remove-all-white-spaces-score-503134-in-2014">10: Ruby function to remove all white spaces? (score <span>503134</span> in 2014)</a></li>
-<li><a href="#what-is-the-right-way-to-iterate-through-an-array-in-ruby-score-497256-in-2011">11: What is the “right” way to iterate through an array in Ruby? (score <span>497256</span> in 2011)</a></li>
-<li><a href="#how-do-i-get-the-current-absolute-url-in-ruby-on-rails-score-464615-in-2017">12: How do I get the current absolute URL in Ruby on Rails? (score <span>464615</span> in 2017)</a></li>
-<li><a href="#how-to-install-a-gem-or-updatie-rubygems-if-it-fails-with-a-permissions-error-score-459294-in-2019">13: How to install a gem or updatie RubyGems if it fails with a permissions error (score <span>459294</span> in 2019)</a></li>
-<li><a href="#what-is-attr_accessor-in-ruby-score-443423-in-2017">14: What is attr_accessor in Ruby? (score <span>443423</span> in 2017)</a></li>
-<li><a href="#parsing-a-json-string-in-ruby-score-425311-in-2016">15: Parsing a JSON string in Ruby (score <span>425311</span> in 2016)</a></li>
-<li><a href="#what-ruby-ide-do-you-prefer-score-424357-in-2008">16: What Ruby IDE do you prefer? (score <span>424357</span> in 2008)</a></li>
-<li><a href="#checking-if-a-variable-is-not-nil-and-not-zero-in-ruby-score-422191-in-2015">17: Checking if a variable is not nil and not zero in ruby (score <span>422191</span> in 2015)</a></li>
-<li><a href="#how-to-sum-array-of-numbers-in-ruby-score-412523-in-2014">18: How to sum array of numbers in Ruby? (score <span>412523</span> in 2014)</a></li>
-<li><a href="#determining-type-of-an-object-in-ruby-score-395964-in-2016">19: Determining type of an object in ruby (score <span>395964</span> in 2016)</a></li>
-<li><a href="#how-to-generate-a-random-string-in-ruby-score-394882-in-2017">20: How to generate a random string in Ruby (score <span>394882</span> in 2017)</a></li>
-<li><a href="#begin-rescue-and-ensure-in-ruby-score-391402-in-2014">21: Begin, Rescue and Ensure in Ruby? (score <span>391402</span> in 2014)</a></li>
-<li><a href="#multi-line-comments-in-ruby-score-387437-in-2015">22: Multi-Line Comments in Ruby? (score <span>387437</span> in 2015)</a></li>
-<li><a href="#how-to-install-a-specific-version-of-a-ruby-gem-score-385296-in">23: How to install a specific version of a ruby gem? (score <span>385296</span> in )</a></li>
-<li><a href="#how-to-check-if-a-specific-key-is-present-in-a-hash-or-not-score-379134-in-2016">24: How to check if a specific key is present in a hash or not? (score <span>379134</span> in 2016)</a></li>
-<li><a href="#how-to-remove-a-key-from-hash-and-get-the-remaining-hash-in-rubyrails-score-369464-in-2017">25: How to remove a key from Hash and get the remaining hash in Ruby/Rails? (score <span>369464</span> in 2017)</a></li>
-<li><a href="#how-do-you-add-an-array-to-another-array-in-ruby-and-not-end-up-with-a-multi-dimensional-result-score-347066-in-2009">26: How do you add an array to another array in Ruby and not end up with a multi-dimensional result? (score <span>347066</span> in 2009)</a></li>
-<li><a href="#how-to-drop-columns-using-rails-migration-score-341510-in-2019">27: How to drop columns using Rails migration (score <span>341510</span> in 2019)</a></li>
-<li><a href="#how-to-update-ruby-version-2.0.0-to-the-latest-version-in-mac-osx-yosemite-score-341177-in-2016">28: How to update Ruby Version 2.0.0 to the latest version in Mac OSX Yosemite? (score <span>341177</span> in 2016)</a></li>
-<li><a href="#what-are-all-the-common-ways-to-read-a-file-in-ruby-score-330735-in-2013">29: What are all the common ways to read a file in Ruby? (score <span>330735</span> in 2013)</a></li>
-<li><a href="#difference-between-rake-dbmigrate-dbreset-and-dbschemaload-score-328333-in-2014">30: Difference between rake db:migrate db:reset and db:schema:load (score <span>328333</span> in 2014)</a></li>
-<li><a href="#how-do-i-use-the-conditional-operator-in-ruby-score-327740-in-2014">31: How do I use the conditional operator (? :) in Ruby? (score <span>327740</span> in 2014)</a></li>
-<li><a href="#what-does-warray-mean-score-326817-in-2016">32: What does %w(array) mean? (score <span>326817</span> in 2016)</a></li>
-<li><a href="#checking-if-a-variable-is-defined-score-323815-in-2014">33: Checking if a variable is defined? (score <span>323815</span> in 2014)</a></li>
-<li><a href="#how-to-pass-command-line-arguments-to-a-rake-task-score-321914-in-2016">34: How to pass command line arguments to a rake task (score <span>321914</span> in 2016)</a></li>
-<li><a href="#replace-words-in-a-string---ruby-score-320293-in-2018">35: Replace words in a string - Ruby (score <span>320293</span> in 2018)</a></li>
-<li><a href="#how-can-i-delete-one-element-from-an-array-by-value-score-319020-in-2019">36: How can I delete one element from an array by value (score <span>319020</span> in 2019)</a></li>
-<li><a href="#ruby-can-i-write-multi-line-string-with-no-concatenation-score-313943-in-2012">37: Ruby: Can I write multi-line string with no concatenation? (score <span>313943</span> in 2012)</a></li>
-<li><a href="#how-to-execute-a-ruby-script-in-terminal-score-309118-in-2014">38: How to execute a Ruby script in Terminal? (score <span>309118</span> in 2014)</a></li>
-<li><a href="#how-can-i-install-a-local-gem-score-305796-in-2013">39: How can I install a local gem? (score <span>305796</span> in 2013)</a></li>
-<li><a href="#what-does-the-map-method-do-in-ruby-score-305419-in-2014">40: What does the “map” method do in Ruby? (score <span>305419</span> in 2014)</a></li>
-<li><a href="#how-to-split-a-delimited-string-in-ruby-and-convert-it-to-an-array-score-301478-in-2017">41: How to split a delimited string in Ruby and convert it to an array? (score <span>301478</span> in 2017)</a></li>
-<li><a href="#how-to-break-out-from-a-ruby-block-score-300787-in-2016">42: How to break out from a ruby block? (score <span>300787</span> in 2016)</a></li>
-<li><a href="#a-concise-explanation-of-nil-v.-empty-v.-blank-in-ruby-on-rails-score-298526-in-2013">43: A concise explanation of nil v. empty v. blank in Ruby on Rails (score <span>298526</span> in 2013)</a></li>
-<li><a href="#why-use-rubys-attr_accessor-attr_reader-and-attr_writer-score-296881-in-2013">44: Why use Ruby’s attr_accessor, attr_reader and attr_writer? (score <span>296881</span> in 2013)</a></li>
-<li><a href="#tell-ruby-program-to-wait-some-amount-of-time-score-296044-in-2016">45: Tell Ruby Program to Wait some amount of time (score <span>296044</span> in 2016)</a></li>
-<li><a href="#how-to-read-lines-of-a-file-in-ruby-score-287879-in-2016">46: How to read lines of a file in Ruby (score <span>287879</span> in 2016)</a></li>
-<li><a href="#rails-4-list-of-available-datatypes-score-277783-in-2016">47: Rails 4: List of available datatypes (score <span>277783</span> in 2016)</a></li>
-<li><a href="#how-to-uninstall-rvm-score-277193-in-2018">48: How to Uninstall RVM? (score <span>277193</span> in 2018)</a></li>
-<li><a href="#why-is-it-bad-style-to-rescue-exception-e-in-ruby-score-276074-in-2017">49: Why is it bad style to <code>rescue Exception =&gt; e</code> in Ruby? (score <span>276074</span> in 2017)</a></li>
-<li><a href="#failed-to-build-gem-native-extension-installing-compass-score-276002-in-2014">50: Failed to build gem native extension (installing Compass) (score <span>276002</span> in 2014)</a></li>
-<li><a href="#how-to-get-a-specific-output-iterating-a-hash-in-ruby-score-273875-in-2018">51: How to get a specific output iterating a hash in Ruby? (score <span>273875</span> in 2018)</a></li>
-<li><a href="#how-do-i-parse-json-with-ruby-on-rails-score-272587-in-2015">52: How do I parse JSON with Ruby on Rails? (score <span>272587</span> in 2015)</a></li>
-<li><a href="#what-is-the-difference-between-print-and-puts-score-271853-in-2014">53: What is the difference between print and puts? (score <span>271853</span> in 2014)</a></li>
-<li><a href="#how-to-add-new-item-to-hash-score-271685-in-2018">54: How to add new item to hash (score <span>271685</span> in 2018)</a></li>
-<li><a href="#how-can-i-pretty-format-my-json-output-in-ruby-on-rails-score-271430-in-2016">55: How can I “pretty” format my JSON output in Ruby on Rails? (score <span>271430</span> in 2016)</a></li>
-<li><a href="#how-to-convert-a-ruby-hash-object-to-json-score-265343-in-2016">56: How to convert a ruby hash object to JSON? (score <span>265343</span> in 2016)</a></li>
-<li><a href="#could-not-locate-gemfile-score-262557-in">57: Could not locate Gemfile (score <span>262557</span> in )</a></li>
-<li><a href="#uninstall-old-versions-of-ruby-gems-score-255332-in-2015">58: Uninstall old versions of Ruby gems (score <span>255332</span> in 2015)</a></li>
-<li><a href="#pass-variables-to-ruby-script-via-command-line-score-250980-in-2014">59: Pass variables to Ruby script via command line (score <span>250980</span> in 2014)</a></li>
-<li><a href="#is-there-a-do-while-loop-in-ruby-score-249266-in">60: Is there a “do … while” loop in Ruby? (score <span>249266</span> in )</a></li>
-<li><a href="#error-installing-mysql2-failed-to-build-gem-native-extension-score-248014-in-2017">61: Error installing mysql2: Failed to build gem native extension (score <span>248014</span> in 2017)</a></li>
-<li><a href="#ssl_connect-returned1-errno0-statesslv3-read-server-certificate-b-certificate-verify-failed-score-247830-in">62: SSL_connect returned=1 errno=0 state=SSLv3 read server certificate B: certificate verify failed (score <span>247830</span> in )</a></li>
-<li><a href="#ruby-array-to-string-conversion-score-246800-in-2015">63: Ruby array to string conversion (score <span>246800</span> in 2015)</a></li>
-<li><a href="#how-do-i-pick-randomly-from-an-array-score-244689-in-2011">64: How do I pick randomly from an array? (score <span>244689</span> in 2011)</a></li>
-<li><a href="#getting-output-of-system-calls-in-ruby-score-243524-in-2015">65: Getting output of system() calls in Ruby (score <span>243524</span> in 2015)</a></li>
-<li><a href="#how-to-make-a-http-request-using-ruby-on-rails-score-242680-in-2017">66: How to make a HTTP request using Ruby on Rails? (score <span>242680</span> in 2017)</a></li>
-<li><a href="#one-line-if-statement-not-working-score-241210-in-2015">67: One line if statement not working (score <span>241210</span> in 2015)</a></li>
-<li><a href="#how-to-make-no-ri-no-rdoc-the-default-for-gem-install-score-237851-in-2014">68: How to make –no-ri –no-rdoc the default for gem install? (score <span>237851</span> in 2014)</a></li>
-<li><a href="#how-do-i-update-ruby-gems-from-behind-a-proxy-isa-ntlm-score-237459-in-2016">69: How do I update Ruby Gems from behind a Proxy (ISA-NTLM) (score <span>237459</span> in 2016)</a></li>
-<li><a href="#how-do-i-get-the-name-of-a-ruby-class-score-235678-in-2014">70: How do I get the name of a Ruby class? (score <span>235678</span> in 2014)</a></li>
-<li><a href="#how-do-you-find-a-min-max-with-ruby-score-235414-in-2012">71: How do you find a min / max with Ruby? (score <span>235414</span> in 2012)</a></li>
-<li><a href="#gem-install-failed-to-build-gem-native-extension-cant-find-header-files-score-228909-in-2016">72: gem install: Failed to build gem native extension (can’t find header files) (score <span>228909</span> in 2016)</a></li>
-<li><a href="#for-vs-each-in-ruby-score-224935-in-2014">73: “for” vs “each” in Ruby (score <span>224935</span> in 2014)</a></li>
-<li><a href="#equivalent-of-continue-in-ruby-score-223168-in-2012">74: Equivalent of “continue” in Ruby (score <span>223168</span> in 2012)</a></li>
-<li><a href="#what-is-the-difference-between-include-and-require-in-ruby-score-221607-in-2017">75: What is the difference between include and require in Ruby? (score <span>221607</span> in 2017)</a></li>
-<li><a href="#check-for-array-not-empty-any-score-219644-in-2012">76: Check for array not empty: any? (score <span>219644</span> in 2012)</a></li>
-<li><a href="#get-names-of-all-files-from-a-folder-with-ruby-score-218927-in">77: Get names of all files from a folder with Ruby (score <span>218927</span> in )</a></li>
-<li><a href="#pgconnectionbad---could-not-connect-to-server-connection-refused-score-217377-in-2019">78: PG::ConnectionBad - could not connect to server: Connection refused (score <span>217377</span> in 2019)</a></li>
-<li><a href="#how-to-redirect-to-a-404-in-rails-score-217141-in-2017">79: How to redirect to a 404 in Rails? (score <span>217141</span> in 2017)</a></li>
-<li><a href="#remove-substring-from-the-string-score-215430-in-2011">80: Remove substring from the string (score <span>215430</span> in 2011)</a></li>
-<li><a href="#ruby-require-error-cannot-load-such-file-score-213382-in-2014">81: Ruby ‘require’ error: cannot load such file (score <span>213382</span> in 2014)</a></li>
-<li><a href="#map-and-remove-nil-values-in-ruby-score-211476-in-2019">82: Map and Remove nil values in Ruby (score <span>211476</span> in 2019)</a></li>
-<li><a href="#how-to-find-a-hash-key-containing-a-matching-value-score-209106-in-2013">83: How to find a hash key containing a matching value (score <span>209106</span> in 2013)</a></li>
-<li><a href="#how-do-you-round-a-float-to-two-decimal-places-in-jruby-score-208509-in-2012">84: How do you round a float to two decimal places in jruby (score <span>208509</span> in 2012)</a></li>
-<li><a href="#how-do-i-parse-a-yaml-file-score-208179-in-2012">85: How do I parse a YAML file? (score <span>208179</span> in 2012)</a></li>
-<li><a href="#how-to-get-the-current-working-directorys-absolute-path-from-irb-score-207448-in-2015">86: how to get the current working directory’s absolute path from irb (score <span>207448</span> in 2015)</a></li>
-<li><a href="#how-to-upgrade-rubygems-score-207239-in">87: How to upgrade rubygems (score <span>207239</span> in )</a></li>
-<li><a href="#read-binary-file-as-string-in-ruby-score-207228-in-2017">88: Read binary file as string in Ruby (score <span>207228</span> in 2017)</a></li>
-<li><a href="#how-to-convert-a-unix-timestamp-seconds-since-epoch-to-ruby-datetime-score-206812-in-2015">89: How to convert a unix timestamp (seconds since epoch) to Ruby DateTime? (score <span>206812</span> in 2015)</a></li>
-<li><a href="#sorting-an-array-in-descending-order-in-ruby-score-206431-in">90: Sorting an array in descending order in Ruby (score <span>206431</span> in )</a></li>
-<li><a href="#error-while-installing-json-gem-mkmf.rb-cant-find-header-files-for-ruby-score-200434-in-2017">91: Error while installing json gem ‘mkmf.rb can’t find header files for ruby’ (score <span>200434</span> in 2017)</a></li>
-<li><a href="#what-is-the-canonical-way-to-trim-a-string-in-ruby-without-creating-a-new-string-score-199484-in-2009">92: What is the canonical way to trim a string in Ruby without creating a new string? (score <span>199484</span> in 2009)</a></li>
-<li><a href="#how-to-find-where-gem-files-are-installed-score-198624-in-2019">93: How to find where gem files are installed (score <span>198624</span> in 2019)</a></li>
-<li><a href="#ruby---test-for-array-score-197783-in">94: Ruby - test for array (score <span>197783</span> in )</a></li>
-<li><a href="#remove-duplicate-elements-from-array-in-ruby-score-197438-in-2017">95: Remove duplicate elements from array in Ruby (score <span>197438</span> in 2017)</a></li>
-<li><a href="#whats-the-difference-between-equal-eql-and-score-196839-in-2014">96: What’s the difference between equal?, eql?, ===, and ==? (score <span>196839</span> in 2014)</a></li>
-<li><a href="#is-the-same-as">is the same as</a>
-<ul>
-<li><a href="#how-do-you-run-a-single-testspec-file-in-rspec-score-196194-in-2012">97: How do you run a single test/spec file in RSpec? (score <span>196194</span> in 2012)</a></li>
-<li><a href="#how-to-map-with-index-in-ruby-score-195350-in-2015">98: How to map with index in Ruby? (score <span>195350</span> in 2015)</a></li>
-<li><a href="#learning-ruby-on-rails-score-189430-in-2011">99: Learning Ruby on Rails (score <span>189430</span> in 2011)</a></li>
-<li><a href="#how-can-i-remove-rvm-ruby-version-manager-from-my-system-score-188959-in-2014">100: How can I remove RVM (Ruby Version Manager) from my system? (score <span>188959</span> in 2014)</a></li>
-</ul></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-to-write-a-switch-statement-in-ruby-score-809157-in-2018" class="level3">
