--- a/Sql_top_100.html
+++ b/Sql_top_100.html
@@ -78,116 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Sql &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-update-from-a-select-in-sql-server-score-4028296-in-2019">1: How do I UPDATE from a SELECT in SQL Server? (score <span>4028296</span> in 2019)</a></li>
-<li><a href="#how-do-i-perform-an-ifthen-in-an-sql-select-score-3492496-in-2018">2: How do I perform an IF…THEN in an SQL SELECT? (score <span>3492496</span> in 2018)</a></li>
-<li><a href="#or-is-not-supported-with-case-statement-in-sql-server-score-2977623-in-2019">3: OR is not supported with CASE Statement in SQL Server (score <span>2977623</span> in 2019)</a></li>
-<li><a href="#how-do-i-import-an-sql-file-using-the-command-line-in-mysql-score-2945526-in-2019">4: How do I import an SQL file using the command line in MySQL? (score <span>2945526</span> in 2019)</a></li>
-<li><a href="#add-a-column-with-a-default-value-to-an-existing-table-in-sql-server-score-2693765-in-2018">5: Add a column with a default value to an existing table in SQL Server (score <span>2693765</span> in 2018)</a></li>
-<li><a href="#how-to-return-only-the-date-from-a-sql-server-datetime-datatype-score-2620097-in-2017">6: How to return only the Date from a SQL Server DateTime datatype (score <span>2620097</span> in 2017)</a></li>
-<li><a href="#finding-duplicate-values-in-a-sql-table-score-2602064-in-2019">7: Finding duplicate values in a SQL table (score <span>2602064</span> in 2019)</a></li>
-<li><a href="#inserting-multiple-rows-in-a-single-sql-query-score-2497025-in-2019">8: Inserting multiple rows in a single SQL query? (score <span>2497025</span> in 2019)</a></li>
-<li><a href="#insert-into-values-select-from-score-2393511-in-2018">9: Insert into … values ( SELECT … FROM … ) (score <span>2393511</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-inner-join-and-outer-join-score-2264024-in-2019">10: What is the difference between “INNER JOIN” and “OUTER JOIN”? (score <span>2264024</span> in 2019)</a></li>
-<li><a href="#how-to-concatenate-text-from-multiple-rows-into-a-single-text-string-in-sql-server-score-2175107-in-2018">11: How to concatenate text from multiple rows into a single text string in SQL server? (score <span>2175107</span> in 2018)</a></li>
-<li><a href="#get-list-of-all-tables-in-oracle-score-2096870-in-2015">12: Get list of all tables in Oracle? (score <span>2096870</span> in 2015)</a></li>
-<li><a href="#find-all-tables-containing-column-with-specified-name---ms-sql-server-score-1904000-in-2018">13: Find all tables containing column with specified name - MS SQL Server (score <span>1904000</span> in 2018)</a></li>
-<li><a href="#insert-results-of-a-stored-procedure-into-a-temporary-table-score-1868029-in-2018">14: Insert results of a stored procedure into a temporary table (score <span>1868029</span> in 2018)</a></li>
-<li><a href="#sql-select-where-field-contains-words-score-1644153-in-2017">15: SQL SELECT WHERE field contains words (score <span>1644153</span> in 2017)</a></li>
-<li><a href="#how-can-i-prevent-sql-injection-in-php-score-1643165-in-2016">16: How can I prevent SQL injection in PHP? (score <span>1643165</span> in 2016)</a></li>
-<li><a href="#sql-update-from-one-table-to-another-based-on-a-id-match-score-1639088-in-2018">17: SQL update from one Table to another based on a ID match (score <span>1639088</span> in 2018)</a></li>
-<li><a href="#sql-query-to-select-dates-between-two-dates-score-1619137-in-2017">18: SQL query to select dates between two dates (score <span>1619137</span> in 2017)</a></li>
-<li><a href="#how-can-i-get-column-names-from-a-table-in-sql-server-score-1538227-in-2017">19: How can I get column names from a table in SQL Server? (score <span>1538227</span> in 2017)</a></li>
-<li><a href="#how-can-i-do-an-update-statement-with-join-in-sql-score-1502329-in-2018">20: How can I do an UPDATE statement with JOIN in SQL? (score <span>1502329</span> in 2018)</a></li>
-<li><a href="#how-can-i-select-rows-with-maxcolumn-value-distinct-by-another-column-in-sql-score-1406300-in-2018">21: How can I SELECT rows with MAX(Column value), DISTINCT by another column in SQL? (score <span>1406300</span> in 2018)</a></li>
-<li><a href="#how-to-convert-datetime-to-varchar-score-1396857-in-2015">22: How to convert DateTime to VarChar (score <span>1396857</span> in 2015)</a></li>
-<li><a href="#not-in-vs-not-exists-score-1367238-in-2012">23: NOT IN vs NOT EXISTS (score <span>1367238</span> in 2012)</a></li>
-<li><a href="#if-in-select-statement---choose-output-value-based-on-column-values-score-1331519-in-2015">24: ‘IF’ in ‘SELECT’ statement - choose output value based on column values (score <span>1331519</span> in 2015)</a></li>
-<li><a href="#whats-the-difference-between-inner-join-left-join-right-join-and-full-join-score-1324680-in-2018">25: What’s the difference between INNER JOIN, LEFT JOIN, RIGHT JOIN and FULL JOIN? (score <span>1324680</span> in 2018)</a></li>
-<li><a href="#how-do-i-limit-the-number-of-rows-returned-by-an-oracle-query-after-ordering-score-1310688-in-2018">26: How do I limit the number of rows returned by an Oracle query after ordering? (score <span>1310688</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-union-and-union-all-score-1265525-in-2018">27: What is the difference between UNION and UNION ALL? (score <span>1265525</span> in 2018)</a></li>
-<li><a href="#search-text-in-stored-procedure-in-sql-server-score-1248594-in-2018">28: Search text in stored procedure in SQL Server (score <span>1248594</span> in 2018)</a></li>
-<li><a href="#how-to-delete-using-inner-join-with-sql-server-score-1236813-in-2018">29: How to Delete using INNER JOIN with SQL Server? (score <span>1236813</span> in 2018)</a></li>
-<li><a href="#sql-inner-join-with-3-tables-score-1220486-in-2019">30: SQL Inner-join with 3 tables? (score <span>1220486</span> in 2019)</a></li>
-<li><a href="#how-to-reset-auto_increment-in-mysql-score-1163265-in-2018">31: How to reset AUTO_INCREMENT in MySQL? (score <span>1163265</span> in 2018)</a></li>
-<li><a href="#convert-int-to-varchar-sql-score-1158597-in-2015">32: Convert INT to VARCHAR SQL (score <span>1158597</span> in 2015)</a></li>
-<li><a href="#how-to-create-temp-table-with-select-into-temptable-from-cte-query-score-1073684-in-2013">33: How to create Temp table with SELECT * INTO tempTable FROM CTE Query (score <span>1073684</span> in 2013)</a></li>
-<li><a href="#rename-column-sql-server-2008-score-1064792-in-2018">34: Rename column SQL Server 2008 (score <span>1064792</span> in 2018)</a></li>
-<li><a href="#get-all-table-names-of-a-particular-database-by-sql-query-score-1044124-in-2016">35: Get all table names of a particular database by SQL query? (score <span>1044124</span> in 2016)</a></li>
-<li><a href="#sql-select-only-rows-with-max-value-on-a-column-score-1041887-in-2019">36: SQL select only rows with max value on a column (score <span>1041887</span> in 2019)</a></li>
-<li><a href="#should-i-use-or-for-not-equal-in-t-sql-score-1016642-in-2018">37: Should I use != or &lt;&gt; for not equal in T-SQL? (score <span>1016642</span> in 2018)</a></li>
-<li><a href="#how-do-i-escape-a-single-quote-in-sql-server-score-1006028-in-2019">38: How do I escape a single quote in SQL Server? (score <span>1006028</span> in 2019)</a></li>
-<li><a href="#how-do-i-query-for-all-dates-greater-than-a-certain-date-in-sql-server-score-968312-in-2018">39: How do I query for all dates greater than a certain date in SQL Server? (score <span>968312</span> in 2018)</a></li>
-<li><a href="#using-group-by-on-multiple-columns-score-950952-in-2018">40: Using group by on multiple columns (score <span>950952</span> in 2018)</a></li>
-<li><a href="#how-to-list-the-tables-in-a-sqlite-database-file-that-was-opened-with-attach-score-950088-in-2019">41: How to list the tables in a SQLite database file that was opened with ATTACH? (score <span>950088</span> in 2019)</a></li>
-<li><a href="#convert-month-number-to-month-name-function-in-sql-score-931125-in-2012">42: Convert Month Number to Month Name Function in SQL (score <span>931125</span> in 2012)</a></li>
-<li><a href="#select-first-row-in-each-group-by-group-score-921853-in-2018">43: Select first row in each GROUP BY group? (score <span>921853</span> in 2018)</a></li>
-<li><a href="#how-to-insert-a-line-break-in-a-sql-server-varcharnvarchar-string-score-920209-in-2013">44: How to insert a line break in a SQL Server VARCHAR/NVARCHAR string (score <span>920209</span> in 2013)</a></li>
-<li><a href="#how-do-i-see-active-sql-server-connections-score-917310-in-2019">45: How do I see active SQL Server connections? (score <span>917310</span> in 2019)</a></li>
-<li><a href="#getting-only-month-and-year-from-sql-date-score-894623-in-2018">46: Getting only Month and Year from SQL DATE (score <span>894623</span> in 2018)</a></li>
-<li><a href="#how-to-query-mongodb-with-like-score-894279-in-2019">47: How to query MongoDB with “like”? (score <span>894279</span> in 2019)</a></li>
-<li><a href="#convert-date-format-into-ddmmmyyyy-format-in-sql-server-score-891524-in-2016">48: Convert Date format into DD/MMM/YYYY format in SQL Server (score <span>891524</span> in 2016)</a></li>
-<li><a href="#oracle-sql-update-a-table-with-data-from-another-table-score-884573-in-2017">49: Oracle SQL: Update a table with data from another table (score <span>884573</span> in 2017)</a></li>
-<li><a href="#reset-identity-seed-after-deleting-records-in-sql-server-score-884214-in-2016">50: Reset identity seed after deleting records in SQL Server (score <span>884214</span> in 2016)</a></li>
-<li><a href="#how-to-create-id-with-auto_increment-on-oracle-score-874399-in-2017">51: How to create id with AUTO_INCREMENT on Oracle? (score <span>874399</span> in 2017)</a></li>
-<li><a href="#how-to-turn-identity_insert-on-and-off-using-sql-server-2008-score-872201-in-2013">52: How to turn IDENTITY_INSERT on and off using SQL Server 2008? (score <span>872201</span> in 2013)</a></li>
-<li><a href="#sql-server-query---selecting-count-with-distinct-score-856305-in-2019">53: SQL Server query - Selecting COUNT(*) with DISTINCT (score <span>856305</span> in 2019)</a></li>
-<li><a href="#how-do-i-or-can-i-select-distinct-on-multiple-columns-score-850430-in-2014">54: How do I (or can I) SELECT DISTINCT on multiple columns? (score <span>850430</span> in 2014)</a></li>
-<li><a href="#sql-update-query-using-joins-score-847493-in-2014">55: SQL update query using joins (score <span>847493</span> in 2014)</a></li>
-<li><a href="#how-to-find-third-or-nth-maximum-salary-from-salary-table-score-839668-in-2015">56: How to find third or nth maximum salary from salary table? (score <span>839668</span> in 2015)</a></li>
-<li><a href="#sql-query-to-insert-datetime-in-sql-server-score-835603-in-2018">57: Sql query to insert datetime in SQL Server (score <span>835603</span> in 2018)</a></li>
-<li><a href="#how-to-create-a-table-from-select-query-result-in-sql-server-2008-score-827650-in-2013">58: How to create a table from select query result in SQL Server 2008 (score <span>827650</span> in 2013)</a></li>
-<li><a href="#how-do-i-split-a-string-so-i-can-access-item-x-score-817330-in-2018">59: How do I split a string so I can access item x? (score <span>817330</span> in 2018)</a></li>
-<li><a href="#copy-tables-from-one-database-to-another-in-sql-server-score-814936-in-2013">60: Copy tables from one database to another in SQL Server (score <span>814936</span> in 2013)</a></li>
-<li><a href="#sql-server---select-from-stored-procedure-score-813645-in-2012">61: SQL Server - SELECT FROM stored procedure (score <span>813645</span> in 2012)</a></li>
-<li><a href="#adding-an-identity-to-an-existing-column-score-807332-in-2011">62: Adding an identity to an existing column (score <span>807332</span> in 2011)</a></li>
-<li><a href="#how-does-database-indexing-work-score-804940-in-2018">63: How does database indexing work? (score <span>804940</span> in 2018)</a></li>
-<li><a href="#sqlmysql---select-distinctunique-but-return-all-columns-score-797787-in-2015">64: SQL/mysql - Select distinct/UNIQUE but return all columns? (score <span>797787</span> in 2015)</a></li>
-<li><a href="#sql-with-clause-example-score-797102-in-2017">65: SQL WITH clause example (score <span>797102</span> in 2017)</a></li>
-<li><a href="#how-do-i-restore-a-dump-file-from-mysqldump-score-793050-in-2018">66: How do I restore a dump file from mysqldump? (score <span>793050</span> in 2018)</a></li>
-<li><a href="#how-do-i-use-row_number-score-792545-in-2013">67: How do I use ROW_NUMBER()? (score <span>792545</span> in 2013)</a></li>
-<li><a href="#sql-multiple-column-ordering-score-790109-in-2015">69: SQL multiple column ordering (score <span>790109</span> in 2015)</a></li>
-<li><a href="#efficiently-convert-rows-to-columns-in-sql-server-score-785265-in-2018">70: Efficiently convert rows to columns in sql server (score <span>785265</span> in 2018)</a></li>
-<li><a href="#best-way-to-get-identity-of-inserted-row-score-784594-in-2018">71: Best way to get identity of inserted row? (score <span>784594</span> in 2018)</a></li>
-<li><a href="#case-statement-within-where-clause-in-sql-server-2008-score-782209-in-2012">72: “CASE” statement within “WHERE” clause in SQL Server 2008 (score <span>782209</span> in 2012)</a></li>
-<li><a href="#how-to-delete-duplicate-rows-in-sql-server-score-779227-in-2019">73: How to delete duplicate rows in SQL Server? (score <span>779227</span> in 2019)</a></li>
-<li><a href="#update-and-replace-part-of-a-string-score-777842-in-2015">74: UPDATE and REPLACE part of a string (score <span>777842</span> in 2015)</a></li>
-<li><a href="#convert-rows-to-columns-using-pivot-in-sql-server-score-777059-in-2019">75: Convert Rows to columns using ‘Pivot’ in SQL Server (score <span>777059</span> in 2019)</a></li>
-<li><a href="#sql-query-return-data-from-multiple-tables-score-775509-in-2018">76: SQL query return data from multiple tables (score <span>775509</span> in 2018)</a></li>
-<li><a href="#how-do-i-set-a-column-value-to-null-in-sql-server-management-studio-score-774030-in-2019">77: How do I set a column value to NULL in SQL Server Management Studio? (score <span>774030</span> in 2019)</a></li>
-<li><a href="#how-to-calculate-percentage-with-a-sql-statement-score-771868-in-2013">78: How to calculate percentage with a SQL statement (score <span>771868</span> in 2013)</a></li>
-<li><a href="#conversion-failed-when-converting-date-andor-time-from-character-string-while-inserting-datetime-score-771777-in-2013">79: Conversion failed when converting date and/or time from character string while inserting datetime (score <span>771777</span> in 2013)</a></li>
-<li><a href="#insert-into-a-mysql-table-or-update-if-exists-score-762170-in-2019">80: Insert into a MySQL table or update if exists (score <span>762170</span> in 2019)</a></li>
-<li><a href="#how-to-replace-a-string-in-a-sql-server-table-column-score-755845-in-2018">81: How to replace a string in a SQL Server Table Column (score <span>755845</span> in 2018)</a></li>
-<li><a href="#sql-if-clause-within-where-clause-score-754551-in-2008">82: SQL: IF clause within WHERE clause (score <span>754551</span> in 2008)</a></li>
-<li><a href="#sql-error-ora-01722-invalid-number-score-751360-in-2018">83: SQL error “ORA-01722: invalid number” (score <span>751360</span> in 2018)</a></li>
-<li><a href="#how-to-avoid-the-divide-by-zero-error-in-sql-score-744505-in-2018">84: How to avoid the “divide by zero” error in SQL? (score <span>744505</span> in 2018)</a></li>
-<li><a href="#select-statement-to-find-duplicates-on-certain-fields-score-743636-in-2014">85: Select statement to find duplicates on certain fields (score <span>743636</span> in 2014)</a></li>
-<li><a href="#case-in-select-statement-score-742394-in-2013">86: Case in Select Statement (score <span>742394</span> in 2013)</a></li>
-<li><a href="#sql-server-select-into-variable-score-742086-in-2011">87: SQL Server SELECT INTO <span class="citation" data-cites="variable">@variable</span>? (score <span>742086</span> in 2011)</a></li>
-<li><a href="#inserting-data-into-a-temporary-table-score-737037-in">88: Inserting data into a temporary table (score <span>737037</span> in )</a></li>
-<li><a href="#how-do-i-do-multiple-case-when-conditions-using-sql-server-2008-score-736058-in-2017">89: How do I do multiple CASE WHEN conditions using SQL Server 2008? (score <span>736058</span> in 2017)</a></li>
-<li><a href="#write-a-number-with-two-decimal-places-sql-server-score-733058-in-2013">90: Write a number with two decimal places SQL server (score <span>733058</span> in 2013)</a></li>
-<li><a href="#remove-all-spaces-from-a-string-in-sql-server-score-729620-in-2018">91: Remove all spaces from a string in SQL Server (score <span>729620</span> in 2018)</a></li>
-<li><a href="#error-string-or-binary-data-would-be-truncated-when-trying-to-insert-score-726384-in-2017">92: error, string or binary data would be truncated when trying to insert (score <span>726384</span> in 2017)</a></li>
-<li><a href="#how-to-select-all-records-from-one-table-that-do-not-exist-in-another-table-score-725294-in-2013">93: How to select all records from one table that do not exist in another table? (score <span>725294</span> in 2013)</a></li>
-<li><a href="#mysql-query-string-contains-score-721783-in-2017">94: MySQL query String contains (score <span>721783</span> in 2017)</a></li>
-<li><a href="#oracle-select-top-10-records-score-720286-in-2017">95: Oracle SELECT TOP 10 records (score <span>720286</span> in 2017)</a></li>
-<li><a href="#pad-a-string-with-leading-zeros-so-its-3-characters-long-in-sql-server-2008-score-718842-in-2015">96: Pad a string with leading zeros so it’s 3 characters long in SQL Server 2008 (score <span>718842</span> in 2015)</a></li>
-<li><a href="#best-approach-to-remove-time-part-of-datetime-in-sql-server-score-715443-in-2011">97: Best approach to remove time part of datetime in SQL Server (score <span>715443</span> in 2011)</a></li>
-<li><a href="#the-multi-part-identifier-could-not-be-bound-score-713638-in-2016">98: The multi-part identifier could not be bound (score <span>713638</span> in 2016)</a></li>
-<li><a href="#get-month-and-year-from-a-datetime-in-sql-server-2005-score-711888-in-2017">99: Get month and year from a datetime in SQL Server 2005 (score <span>711888</span> in 2017)</a></li>
-<li><a href="#how-do-i-list-all-the-columns-in-a-table-score-710519-in">100: How do I list all the columns in a table? (score <span>710519</span> in )</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-update-from-a-select-in-sql-server-score-4028296-in-2019" class="level3">
