--- a/Tex_top_100_se.html
+++ b/Tex_top_100_se.html
@@ -78,115 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Tex &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-does-one-insert-a-backslash-or-a-tilde-into-latex-score-1603360-in-2013">1: How does one insert a backslash or a tilde (~) into LaTeX? (score <span>1603360</span> in 2013)</a></li>
-<li><a href="#latex-figures-side-by-side-score-1275987-in-2016">2: LaTeX figures side by side (score <span>1275987</span> in 2016)</a></li>
-<li><a href="#force-figure-placement-in-text-score-1141069-in-2019">3: Force figure placement in text (score <span>1141069</span> in 2019)</a></li>
-<li><a href="#how-can-i-use-bibtex-to-cite-a-web-page-score-1021732-in">4: How can I use BibTeX to cite a web page? (score <span>1021732</span> in )</a></li>
-<li><a href="#what-commands-are-there-for-horizontal-spacing-score-1007838-in-2012">5: What commands are there for horizontal spacing? (score <span>1007838</span> in 2012)</a></li>
-<li><a href="#how-can-i-get-bold-math-symbols-score-912579-in-2012">6: How can I get bold math symbols? (score <span>912579</span> in 2012)</a></li>
-<li><a href="#absolute-value-symbols-score-855870-in-2012">7: Absolute Value Symbols (score <span>855870</span> in 2012)</a></li>
-<li><a href="#matrix-in-latex-score-843233-in">8: Matrix in Latex (score <span>843233</span> in )</a></li>
-<li><a href="#making-appendix-for-thesis-score-717041-in-2012">9: making appendix for thesis (score <span>717041</span> in 2012)</a></li>
-<li><a href="#correct-way-to-bolditalicize-text-score-699966-in-2012">10: “Correct” way to bold/italicize text? (score <span>699966</span> in 2012)</a></li>
-<li><a href="#how-can-i-split-an-equation-over-two-or-more-lines-score-694758-in-2017">11: How can I split an equation over two (or more) lines (score <span>694758</span> in 2017)</a></li>
-<li><a href="#not-equal-sign-with-a-vertical-bar-score-659244-in-2017">12: Not equal sign (≠) with a vertical bar (score <span>659244</span> in 2017)</a></li>
-<li><a href="#commenting-out-large-sections-score-652824-in-2011">13: Commenting out large sections (score <span>652824</span> in 2011)</a></li>
-<li><a href="#how-to-typeset-the-symbol-caretcircumflexhat-score-649339-in-2017">14: How to typeset the symbol “^” (caret/circumflex/hat) (score <span>649339</span> in 2017)</a></li>
-<li><a href="#how-to-add-a-forced-line-break-inside-a-table-cell-score-647359-in-2017">15: How to add a forced line break inside a table cell (score <span>647359</span> in 2017)</a></li>
-<li><a href="#big-parenthesis-in-an-equation-score-634865-in-2014">16: Big Parenthesis in an Equation (score <span>634865</span> in 2014)</a></li>
-<li><a href="#how-can-i-manually-install-a-package-on-miktex-windows-score-632471-in-2011">17: How can I manually install a package on MiKTeX (Windows) (score <span>632471</span> in 2011)</a></li>
-<li><a href="#how-to-break-a-long-equation-score-624419-in-2013">18: How to break a long equation? (score <span>624419</span> in 2013)</a></li>
-<li><a href="#multi-line-block-comments-in-latex-score-589299-in-2012">19: Multi-line (block) comments in LaTeX (score <span>589299</span> in 2012)</a></li>
-<li><a href="#underscores-in-words-text-score-588444-in-2014">20: Underscores in words (text) (score <span>588444</span> in 2014)</a></li>
-<li><a href="#how-to-add-indentation-score-568734-in-2017">22: How to add indentation (score <span>568734</span> in 2017)</a></li>
-<li><a href="#horizontal-line-spanning-the-entire-document-in-latex-score-567060-in-2011">23: Horizontal line spanning the entire document in LaTeX (score <span>567060</span> in 2011)</a></li>
-<li><a href="#how-do-i-change-the-enumerate-list-format-to-use-letters-instead-of-the-default-arabic-numerals-score-566261-in-2011">24: How do I change the <code>enumerate</code> list format to use letters instead of the default Arabic numerals? (score <span>566261</span> in 2011)</a></li>
-<li><a href="#how-to-typeset-subscript-in-usual-text-mode-score-564359-in-2010">25: How to typeset subscript in usual text mode? (score <span>564359</span> in 2010)</a></li>
-<li><a href="#what-are-the-available-documentclass-types-and-their-uses-score-563208-in-2018">26: What are the available “documentclass” types and their uses? (score <span>563208</span> in 2018)</a></li>
-<li><a href="#how-to-add-an-extra-level-of-sections-with-headings-below-subsubsection-score-561869-in-2012">27: How to add an extra level of sections with headings below \subsubsection (score <span>561869</span> in 2012)</a></li>
-<li><a href="#how-to-force-a-table-into-page-width-score-558638-in-2017">28: How to force a table into page width? (score <span>558638</span> in 2017)</a></li>
-<li><a href="#how-to-add-a-url-to-a-latex-bibtex-file-score-555560-in-2013">29: How to add a URL to a LaTeX bibtex file? (score <span>555560</span> in 2013)</a></li>
-<li><a href="#how-to-write-ä-and-other-umlauts-and-accented-letters-in-bibliography-score-554189-in-2012">30: How to write “ä” and other umlauts and accented letters in bibliography? (score <span>554189</span> in 2012)</a></li>
-<li><a href="#which-dot-character-to-use-in-which-context-score-546659-in-2017">31: Which dot character to use in which context? (score <span>546659</span> in 2017)</a></li>
-<li><a href="#how-to-suppress-page-number-score-540975-in-2017">32: How to suppress page number? (score <span>540975</span> in 2017)</a></li>
-<li><a href="#tabular-title-above-and-caption-below-score-537321-in-2017">33: Tabular: title above and caption below? (score <span>537321</span> in 2017)</a></li>
-<li><a href="#latex-editorsides-score-535174-in-2019">34: LaTeX Editors/IDEs (score <span>535174</span> in 2019)</a></li>
-<li><a href="#what-are-all-the-font-styles-i-can-use-in-math-mode-score-534019-in-2017">35: What are all the font styles I can use in math mode? (score <span>534019</span> in 2017)</a></li>
-<li><a href="#change-image-size-score-509365-in-2012">36: Change image size (score <span>509365</span> in 2012)</a></li>
-<li><a href="#how-to-use-score-502307-in-2017">37: How to use (score <span>502307</span> in 2017)</a></li>
-<li><a href="#using-the-command-score-497594-in-2014">38: Using the Command (score <span>497594</span> in 2014)</a></li>
-<li><a href="#superscript-outside-math-mode-score-494404-in">39: Superscript outside math mode (score <span>494404</span> in )</a></li>
-<li><a href="#a-centered-plus-minus-symbol-score-491976-in-2011">40: A centered plus-minus symbol (score <span>491976</span> in 2011)</a></li>
-<li><a href="#how-to-change-color-for-a-block-of-texts-score-490203-in-2017">41: How to change color for a block of texts? (score <span>490203</span> in 2017)</a></li>
-<li><a href="#what-is-the-correct-way-of-embedding-text-into-math-mode-score-489162-in-2010">42: What is the “correct” way of embedding text into math mode? (score <span>489162</span> in 2010)</a></li>
-<li><a href="#subfigures-side-by-side-with-captions-score-486878-in">43: Subfigures side by side with captions (score <span>486878</span> in )</a></li>
-<li><a href="#why-do-the-less-than-symbol-and-the-greater-than-symbol-appear-wrong-as-upside-down-exclamation-or-question-mark-score-481208-in-2013">44: Why do the less than symbol (&lt;) and the greater than symbol (&gt;) appear wrong as upside down exclamation (¡) or question mark (¿)? (score <span>481208</span> in 2013)</a></li>
-<li><a href="#how-to-write-an-mn-matrix-in-latex-score-478823-in-2017">45: How to write an m⨉n matrix in LaTeX? (score <span>478823</span> in 2017)</a></li>
-<li><a href="#real-number-symbol-utf-8-ℝ-in-xetex-score-477048-in-2014">46: Real number symbol (UTF-8: ℝ) in XeTeX (score <span>477048</span> in 2014)</a></li>
-<li><a href="#how-to-type-specialaccented-letters-in-latex-score-475475-in-2013">47: How to type special/accented letters in LaTeX? (score <span>475475</span> in 2013)</a></li>
-<li><a href="#column-and-row-padding-in-tables-score-471355-in-2014">48: Column and row padding in tables (score <span>471355</span> in 2014)</a></li>
-<li><a href="#where-do-i-place-my-own-.sty-or-.cls-files-to-make-them-available-to-all-my-.tex-files-score-460520-in-2015">49: Where do I place my own .sty or .cls files, to make them available to all my .tex files? (score <span>460520</span> in 2015)</a></li>
-<li><a href="#how-to-change-the-space-between-the-itemize-items-in-latex-score-457785-in-2017">50: How to change the space between the itemize “items” in LaTeX? (score <span>457785</span> in 2017)</a></li>
-<li><a href="#how-to-create-fixed-width-table-columns-with-text-raggedrightcenteredraggedleft-score-456538-in-2013">51: How to create fixed width table columns with text raggedright/centered/raggedleft? (score <span>456538</span> in 2013)</a></li>
-<li><a href="#double-line-spacing-score-450230-in-2011">52: Double line spacing (score <span>450230</span> in 2011)</a></li>
-<li><a href="#the-and-commands-score-449467-in-2011">53: The and commands (score <span>449467</span> in 2011)</a></li>
-<li><a href="#write-pseudo-code-in-latex-score-448386-in-2014">54: Write pseudo code in latex (score <span>448386</span> in 2014)</a></li>
-<li><a href="#how-to-write-n-x-n-with-a-multiplication-symbol-for-matrix-dimensions-score-447732-in-2011">55: How to write N x N (with a multiplication symbol, for matrix dimensions)? (score <span>447732</span> in 2011)</a></li>
-<li><a href="#how-to-write-a-function-piecewise-with-bracket-outside-score-446202-in-2017">56: How to write a function (piecewise) with bracket outside? (score <span>446202</span> in 2017)</a></li>
-<li><a href="#how-do-i-type-the-infinity-symbol-in-mactex-score-437929-in-2013">57: How do I type the infinity symbol in MacTex? (score <span>437929</span> in 2013)</a></li>
-<li><a href="#how-to-use-the-placement-options-t-h-with-figures-score-430347-in-2011">58: How to use the placement options [t], [h] with figures? (score <span>430347</span> in 2011)</a></li>
-<li><a href="#eqnarray-vs-align-score-418137-in-2015">59: eqnarray vs align (score <span>418137</span> in 2015)</a></li>
-<li><a href="#using-multicolumn-in-latex-score-416715-in-2017">60: Using multicolumn in latex (score <span>416715</span> in 2017)</a></li>
-<li><a href="#how-do-i-turn-off-equation-auto-numbering-score-416052-in-2012">61: How do I turn off equation auto numbering (score <span>416052</span> in 2012)</a></li>
-<li><a href="#how-to-write-partial-differential-equation-ex.-dqdtdsdt-with-real-partial-derivative-signs-score-413935-in-2015">62: How to write partial differential equation (Ex. dQ/dt=ds/dt) with real partial derivative signs? (score <span>413935</span> in 2015)</a></li>
-<li><a href="#scale-image-to-page-width-score-413830-in-2012">63: Scale image to page width? (score <span>413830</span> in 2012)</a></li>
-<li><a href="#change-line-spacing-inside-the-document-score-411634-in-2012">65: Change line spacing inside the document (score <span>411634</span> in 2012)</a></li>
-<li><a href="#cannot-determine-size-of-graphic-score-410400-in-2013">66: Cannot determine size of graphic (score <span>410400</span> in 2013)</a></li>
-<li><a href="#remove-indentation-for-a-single-paragraph-score-406890-in-2014">67: Remove Indentation for a Single Paragraph (score <span>406890</span> in 2014)</a></li>
-<li><a href="#what-point-pt-font-size-are-etc.-score-399777-in-2011">68: What point (pt) font size are etc.? (score <span>399777</span> in 2011)</a></li>
-<li><a href="#strikethrough-text-score-395536-in-2011">69: Strikethrough text (score <span>395536</span> in 2011)</a></li>
-<li><a href="#how-to-add-an-empty-line-between-paragraphs-score-392084-in-2013">70: How to add an empty line between paragraphs? (score <span>392084</span> in 2013)</a></li>
-<li><a href="#vector-arrow-with-superscript-score-392048-in">71: vector arrow with superscript (score <span>392048</span> in )</a></li>
-<li><a href="#insert-pdf-file-in-latex-document-score-391212-in-2013">72: Insert PDF file in LaTeX document (score <span>391212</span> in 2013)</a></li>
-<li><a href="#how-to-include-svg-diagrams-in-latex-score-386106-in-2015">73: How to include SVG diagrams in LaTeX? (score <span>386106</span> in 2015)</a></li>
-<li><a href="#how-to-change-certain-pages-into-landscapeportrait-mode-score-384442-in-2013">74: How to change certain pages into landscape/portrait mode (score <span>384442</span> in 2013)</a></li>
-<li><a href="#how-to-influence-the-position-of-float-environments-like-figure-and-table-in-latex-score-383391-in-2011">75: How to influence the position of float environments like figure and table in LaTeX? (score <span>383391</span> in 2011)</a></li>
-<li><a href="#how-to-avoid-numbering-the-first-page-of-the-document-score-383279-in-2017">76: How to avoid numbering the first page of the document? (score <span>383279</span> in 2017)</a></li>
-<li><a href="#displaying-a-wide-figure-in-a-two-column-document-score-380994-in-2017">77: Displaying a wide figure in a two-column document (score <span>380994</span> in 2017)</a></li>
-<li><a href="#what-is-the-latex-command-for-em-dash-score-374087-in-2012">78: What is the LaTeX command for “em dash” (—)? (score <span>374087</span> in 2012)</a></li>
-<li><a href="#when-should-we-use-begincenter-instead-of-score-372884-in-2017">79: When should we use \begin{center} instead of ? (score <span>372884</span> in 2017)</a></li>
-<li><a href="#command-for-argmin-or-argmax-score-371849-in-2010">80: Command for argmin or argmax? (score <span>371849</span> in 2010)</a></li>
-<li><a href="#how-to-write-cases-with-latex-score-370901-in-2015">81: How to write cases with LaTeX? (score <span>370901</span> in 2015)</a></li>
-<li><a href="#align-equation-left-score-369617-in-2018">82: Align equation left (score <span>369617</span> in 2018)</a></li>
-<li><a href="#what-is-causing-undefined-control-sequence-score-366857-in-2017">83: What is causing undefined control sequence? (score <span>366857</span> in 2017)</a></li>
-<li><a href="#crop-an-inserted-image-score-360551-in-2012">84: Crop an inserted image? (score <span>360551</span> in 2012)</a></li>
-<li><a href="#syntax-similar-to-for-right-and-left-score-359623-in-2013">85: Syntax similar to for right and left? (score <span>359623</span> in 2013)</a></li>
-<li><a href="#latex-template-for-resumecurriculum-vitae-score-348865-in-2019">86: LaTeX template for resume/curriculum vitae (score <span>348865</span> in 2019)</a></li>
-<li><a href="#how-can-i-make-an-enumerate-list-start-at-something-other-than-1-score-347879-in-2011">87: How can I make an enumerate list start at something other than 1? (score <span>347879</span> in 2011)</a></li>
-<li><a href="#how-to-write-two-dot-above-a-letter-score-341885-in-2015">88: How to write two dot above a letter? (score <span>341885</span> in 2015)</a></li>
-<li><a href="#how-to-fix-table-position-score-340026-in-2011">89: How to fix table position (score <span>340026</span> in 2011)</a></li>
-<li><a href="#adding-more-than-one-author-with-different-affiliation-score-336275-in-2011">90: Adding more than one author with different affiliation (score <span>336275</span> in 2011)</a></li>
-<li><a href="#keeping-tablesfigures-close-to-where-they-are-mentioned-score-335492-in-2013">91: Keeping tables/figures close to where they are mentioned (score <span>335492</span> in 2013)</a></li>
-<li><a href="#force-latex-image-to-appear-in-the-section-in-which-its-declared-score-334789-in-2017">92: Force LaTeX image to appear in the section in which it’s declared (score <span>334789</span> in 2017)</a></li>
-<li><a href="#how-to-align-a-set-of-multiline-equations-score-332953-in-2017">93: How to align a set of multiline equations (score <span>332953</span> in 2017)</a></li>
-<li><a href="#square-root-radical-sign-score-329864-in-2014">94: Square Root Radical Sign (score <span>329864</span> in 2014)</a></li>
-<li><a href="#how-to-center-the-table-in-latex-score-327276-in">95: How to center the table in Latex (score <span>327276</span> in )</a></li>
-<li><a href="#how-to-turn-latex-figure-by-90-degrees-along-with-the-caption-score-326591-in-2015">96: how to turn latex figure by 90 degrees along with the caption? (score <span>326591</span> in 2015)</a></li>
-<li><a href="#vs.-score-325146-in-2011">97: vs. (score <span>325146</span> in 2011)</a></li>
-<li><a href="#insert-multiple-figures-in-latex-score-323764-in-2013">98: Insert multiple figures in Latex (score <span>323764</span> in 2013)</a></li>
-<li><a href="#is-there-a-way-to-slightly-shrink-a-table-including-font-size-to-fit-within-the-column-boundaries-score-322788-in-2017">99: Is there a way to slightly shrink a table, including font size, to fit within the column boundaries? (score <span>322788</span> in 2017)</a></li>
-<li><a href="#how-do-i-use-literally-in-latex-score-320031-in-2017">100: How do I use ‘&amp;’ literally in LaTeX? (score <span>320031</span> in 2017)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-does-one-insert-a-backslash-or-a-tilde-into-latex-score-1603360-in-2013" class="level3">
