--- a/Unix_top_100_se.html
+++ b/Unix_top_100_se.html
@@ -78,117 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Unix &lt;- StackExchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-to-copy-files-from-one-machine-to-another-using-ssh-score-2648711-in-2018">1: How to copy files from one machine to another using ssh (score <span>2648711</span> in 2018)</a></li>
-<li><a href="#how-do-i-get-the-size-of-a-directory-on-the-command-line-score-2399217-in-2017">2: How do I get the size of a directory on the command line? (score <span>2399217</span> in 2017)</a></li>
-<li><a href="#how-to-correctly-add-a-path-to-path-score-2218650-in-2015">3: How to correctly add a path to PATH? (score <span>2218650</span> in 2015)</a></li>
-<li><a href="#how-to-switch-between-users-on-one-terminal-score-2038581-in-2011">4: How to switch between users on one terminal? (score <span>2038581</span> in 2011)</a></li>
-<li><a href="#how-do-i-zipunzip-on-the-unix-command-line-score-1996378-in-2011">5: How do I zip/unzip on the unix command line? (score <span>1996378</span> in 2011)</a></li>
-<li><a href="#how-to-install-a-deb-file-by-dpkg--i-or-by-apt-score-1830525-in-2016">6: How to install a deb file, by dpkg -i or by apt? (score <span>1830525</span> in 2016)</a></li>
-<li><a href="#how-to-check-os-and-version-using-a-linux-command-score-1592512-in-2015">7: How to check OS and version using a Linux command (score <span>1592512</span> in 2015)</a></li>
-<li><a href="#using-sed-to-find-and-replace-score-1560762-in-2014">8: Using ‘sed’ to find and replace (score <span>1560762</span> in 2014)</a></li>
-<li><a href="#how-can-i-replace-a-string-in-a-files-score-1507545-in-2017">9: How can I replace a string in a file(s)? (score <span>1507545</span> in 2017)</a></li>
-<li><a href="#how-do-i-grep-for-multiple-patterns-with-pattern-having-a-pipe-character-score-1442607-in-2018">10: How do I grep for multiple patterns with pattern having a pipe character? (score <span>1442607</span> in 2018)</a></li>
-<li><a href="#zip-all-files-in-directory-score-1425705-in-2012">11: Zip all files in directory? (score <span>1425705</span> in 2012)</a></li>
-<li><a href="#how-to-copy-a-file-from-a-remote-server-to-a-local-machine-score-1107157-in-2017">12: How to copy a file from a remote server to a local machine? (score <span>1107157</span> in 2017)</a></li>
-<li><a href="#can-i-zip-an-entire-folder-using-gzip-score-1042586-in-2015">13: Can I zip an entire folder using gzip? (score <span>1042586</span> in 2015)</a></li>
-<li><a href="#how-do-i-make-ls-show-file-sizes-in-megabytes-score-1020921-in-2013">14: How do I make <code>ls</code> show file sizes in megabytes? (score <span>1020921</span> in 2013)</a></li>
-<li><a href="#how-to-install-desktop-environments-on-centos-7-score-963793-in-2016">15: How to install Desktop Environments on CentOS 7? (score <span>963793</span> in 2016)</a></li>
-<li><a href="#how-can-i-pass-a-command-line-argument-into-a-shell-script-score-913715-in">16: How can I pass a command line argument into a shell script? (score <span>913715</span> in )</a></li>
-<li><a href="#how-to-permanently-set-environmental-variables-score-881957-in-2014">17: How to permanently set environmental variables (score <span>881957</span> in 2014)</a></li>
-<li><a href="#how-do-i-find-out-what-hard-disks-are-in-the-system-score-878044-in-2013">18: How do I find out what hard disks are in the system? (score <span>878044</span> in 2013)</a></li>
-<li><a href="#how-do-i-remove-a-directory-and-all-its-contents-score-868946-in-2015">19: How do I remove a directory and all its contents? (score <span>868946</span> in 2015)</a></li>
-<li><a href="#how-to-forward-x-over-ssh-to-run-graphics-applications-remotely-score-855042-in-2017">20: How to forward X over SSH to run graphics applications remotely? (score <span>855042</span> in 2017)</a></li>
-<li><a href="#how-do-i-set-my-dns-when-resolv.conf-is-being-overwritten-score-843688-in-2017">21: How do I set my DNS when resolv.conf is being overwritten? (score <span>843688</span> in 2017)</a></li>
-<li><a href="#how-to-create-a-simple-.txt-text-file-using-terminal-score-798669-in-2014">22: How to create a simple .txt (text) file using terminal? (score <span>798669</span> in 2014)</a></li>
-<li><a href="#finding-the-pid-of-the-process-using-a-specific-port-score-788176-in-2016">23: Finding the PID of the process using a specific port? (score <span>788176</span> in 2016)</a></li>
-<li><a href="#username-is-not-in-the-sudoers-file.-this-incident-will-be-reported-score-766227-in-2018">24: Username is not in the sudoers file. This incident will be reported (score <span>766227</span> in 2018)</a></li>
-<li><a href="#how-to-run-find--exec-score-757133-in-2011">25: How to run find -exec? (score <span>757133</span> in 2011)</a></li>
-<li><a href="#how-to-append-multiple-lines-to-a-file-score-739887-in-2017">26: How to append multiple lines to a file (score <span>739887</span> in 2017)</a></li>
-<li><a href="#where-are-apache-file-access-logs-stored-score-737619-in-2012">27: Where are Apache file access logs stored? (score <span>737619</span> in 2012)</a></li>
-<li><a href="#why-am-i-still-getting-a-password-prompt-with-ssh-with-public-key-authentication-score-718769-in-2017">28: Why am I still getting a password prompt with ssh with public key authentication? (score <span>718769</span> in 2017)</a></li>
-<li><a href="#how-do-you-empty-the-buffers-and-cache-on-a-linux-system-score-718172-in-2016">29: How do you empty the buffers and cache on a Linux system? (score <span>718172</span> in 2016)</a></li>
-<li><a href="#how-can-i-display-the-contents-of-a-text-file-on-the-command-line-score-705890-in-2016">30: How can I display the contents of a text file on the command line? (score <span>705890</span> in 2016)</a></li>
-<li><a href="#how-to-mount-a-device-in-linux-score-697966-in-2015">31: How to mount a device in Linux? (score <span>697966</span> in 2015)</a></li>
-<li><a href="#what-dns-servers-am-i-using-score-689495-in-2014">32: What DNS servers am I using? (score <span>689495</span> in 2014)</a></li>
-<li><a href="#colorizing-your-terminal-and-shell-environment-score-674432-in-2019">33: Colorizing your terminal and shell environment? (score <span>674432</span> in 2019)</a></li>
-<li><a href="#how-to-get-over-device-or-resource-busy-score-672304-in-2016">34: How to get over “device or resource busy”? (score <span>672304</span> in 2016)</a></li>
-<li><a href="#how-can-i-monitor-disk-io-score-655850-in-2012">35: How can I monitor disk io? (score <span>655850</span> in 2012)</a></li>
-<li><a href="#how-to-get-the-complete-and-exact-list-of-mounted-filesystems-in-linux-score-649421-in-2017">36: How to get the complete and exact list of mounted filesystems in Linux? (score <span>649421</span> in 2017)</a></li>
-<li><a href="#unzipping-a-.gz-file-without-removing-the-gzipped-file-score-648265-in-2015">37: Unzipping a .gz file without removing the gzipped file (score <span>648265</span> in 2015)</a></li>
-<li><a href="#how-do-i-copy-a-folder-keeping-owners-and-permissions-intact-score-640673-in-2014">38: How do I copy a folder keeping owners and permissions intact? (score <span>640673</span> in 2014)</a></li>
-<li><a href="#how-do-i-remove-a-user-from-a-group-score-638067-in-2012">39: How do I remove a user from a group? (score <span>638067</span> in 2012)</a></li>
-<li><a href="#what-is-the-fastest-way-to-view-images-from-the-terminal-score-630771-in-2012">40: What is the fastest way to view images from the terminal? (score <span>630771</span> in 2012)</a></li>
-<li><a href="#does-curl-have-a-no-check-certificate-option-like-wget-score-628499-in">41: Does curl have a –no-check-certificate option like wget? (score <span>628499</span> in )</a></li>
-<li><a href="#compress-a-folder-with-tar-score-624560-in-2012">42: Compress a folder with tar? (score <span>624560</span> in 2012)</a></li>
-<li><a href="#how-to-list-disks-partitions-and-filesystems-in-linux-score-624481-in-2019">43: How to list disks, partitions and filesystems in Linux? (score <span>624481</span> in 2019)</a></li>
-<li><a href="#timezone-setting-in-linux-score-620340-in-2014">44: Timezone setting in Linux (score <span>620340</span> in 2014)</a></li>
-<li><a href="#unixlinux-undeleterecover-deleted-files-score-613994-in-2014">45: Unix/Linux undelete/recover deleted files (score <span>613994</span> in 2014)</a></li>
-<li><a href="#check-package-version-using-apt-getaptitude-score-601191-in-2016">46: Check package version using apt-get/aptitude? (score <span>601191</span> in 2016)</a></li>
-<li><a href="#how-can-i-get-the-current-working-directory-score-597551-in-2017">47: How can I get the current working directory? (score <span>597551</span> in 2017)</a></li>
-<li><a href="#count-total-number-of-occurrences-using-grep-score-595238-in-2015">48: Count total number of occurrences using grep (score <span>595238</span> in 2015)</a></li>
-<li><a href="#how-can-i-resolve-a-hostname-to-an-ip-address-in-a-bash-script-score-571795-in-2015">49: How can I resolve a hostname to an IP address in a Bash script? (score <span>571795</span> in 2015)</a></li>
-<li><a href="#how-to-display-top-results-sorted-by-memory-usage-in-real-time-score-565542-in-2015">50: How to display <code>top</code> results sorted by memory usage in real time? (score <span>565542</span> in 2015)</a></li>
-<li><a href="#tracking-down-where-disk-space-has-gone-on-linux-score-563835-in-2019">51: Tracking down where disk space has gone on Linux? (score <span>563835</span> in 2019)</a></li>
-<li><a href="#how-to-install-apt-get-or-yum-on-mac-os-x-score-559846-in-2018">52: How to install apt-get or YUM on Mac OS X (score <span>559846</span> in 2018)</a></li>
-<li><a href="#execute-shell-commands-in-python-score-551297-in-2015">53: Execute shell commands in Python (score <span>551297</span> in 2015)</a></li>
-<li><a href="#what-if-kill--9-does-not-work-score-546773-in-2012">54: What if ‘kill -9’ does not work? (score <span>546773</span> in 2012)</a></li>
-<li><a href="#how-can-i-instruct-yum-to-install-a-specific-version-of-package-x-score-542038-in-2015">55: How can I instruct yum to install a specific version of package X? (score <span>542038</span> in 2015)</a></li>
-<li><a href="#get-file-createdcreation-time-score-537418-in-2017">56: Get file created/creation time? (score <span>537418</span> in 2017)</a></li>
-<li><a href="#ssh_exchange_identification-read-connection-reset-by-peer-score-534734-in-2014">57: ssh_exchange_identification: read: Connection reset by peer (score <span>534734</span> in 2014)</a></li>
-<li><a href="#how-to-terminate-a-background-process-score-527774-in-2017">58: How to terminate a background process? (score <span>527774</span> in 2017)</a></li>
-<li><a href="#how-can-i-get-a-count-of-files-in-a-directory-using-the-command-line-score-523917-in">59: How can I get a count of files in a directory using the command line? (score <span>523917</span> in )</a></li>
-<li><a href="#run-a-command-without-making-me-wait-score-521355-in-2015">60: Run a command without making me wait (score <span>521355</span> in 2015)</a></li>
-<li><a href="#how-to-find-path-where-jdk-installed-score-517666-in-2016">61: How to find path where jdk installed? (score <span>517666</span> in 2016)</a></li>
-<li><a href="#list-all-connected-ssh-sessions-score-516524-in">62: List all connected SSH sessions? (score <span>516524</span> in )</a></li>
-<li><a href="#how-to-list-all-files-ordered-by-size-score-504759-in-2016">63: How to list all files ordered by size (score <span>504759</span> in 2016)</a></li>
-<li><a href="#how-to-split-the-terminal-into-more-than-one-view-score-497837-in-2012">64: How to split the terminal into more than one “view”? (score <span>497837</span> in 2012)</a></li>
-<li><a href="#use-scp-to-transfer-a-file-from-local-directory-x-to-remote-directory-y-score-496212-in-2014">65: Use scp to transfer a file from local directory X to remote directory Y (score <span>496212</span> in 2014)</a></li>
-<li><a href="#how-to-conditionally-do-something-if-a-command-succeeded-or-failed-score-493846-in-2011">66: How to conditionally do something if a command succeeded or failed (score <span>493846</span> in 2011)</a></li>
-<li><a href="#umount-device-is-busy.-why-score-493778-in-2017">67: umount: device is busy. Why? (score <span>493778</span> in 2017)</a></li>
-<li><a href="#repeat-a-unix-command-every-x-seconds-forever-score-492897-in-2017">68: Repeat a Unix command every x seconds forever (score <span>492897</span> in 2017)</a></li>
-<li><a href="#how-can-get-a-list-of-all-scheduled-cron-jobs-on-my-machine-score-492891-in">69: How can get a list of all scheduled cron jobs on my machine? (score <span>492891</span> in )</a></li>
-<li><a href="#how-can-i-fix-cannot-find-a-valid-baseurl-for-repo-errors-on-centos-score-492382-in-2011">70: How can I fix “cannot find a valid baseurl for repo” errors on CentOS? (score <span>492382</span> in 2011)</a></li>
-<li><a href="#how-to-clean-log-file-score-490027-in-2015">71: How to clean log file? (score <span>490027</span> in 2015)</a></li>
-<li><a href="#what-is-the-eval-command-in-bash-score-487764-in-2016">72: What is the “eval” command in bash? (score <span>487764</span> in 2016)</a></li>
-<li><a href="#why-does-find--mtime-1-only-return-files-older-than-2-days-score-480450-in-2015">73: Why does find -mtime +1 only return files older than 2 days? (score <span>480450</span> in 2015)</a></li>
-<li><a href="#how-can-i-test-if-a-variable-is-empty-or-contains-only-spaces-score-473621-in-2014">74: How can I test if a variable is empty or contains only spaces? (score <span>473621</span> in 2014)</a></li>
-<li><a href="#how-to-know-number-of-cores-of-a-system-in-linux-score-470466-in-2018">75: How to know number of cores of a system in Linux? (score <span>470466</span> in 2018)</a></li>
-<li><a href="#how-to-get-execution-time-of-a-script-effectively-score-463777-in">76: How to get execution time of a script effectively? (score <span>463777</span> in )</a></li>
-<li><a href="#how-do-i-set-a-user-environment-variable-permanently-not-session-score-462273-in-2015">77: How do I set a user environment variable? (permanently, not session) (score <span>462273</span> in 2015)</a></li>
-<li><a href="#how-to-move-all-files-and-folders-via-mv-command-score-460027-in">78: How to move all files and folders via mv command (score <span>460027</span> in )</a></li>
-<li><a href="#create-a-symbolic-link-relative-to-the-current-directory-score-458234-in-2017">79: Create a symbolic link relative to the current directory (score <span>458234</span> in 2017)</a></li>
-<li><a href="#connecting-to-wifi-network-through-command-line-score-458007-in-2013">80: Connecting to wifi network through command line (score <span>458007</span> in 2013)</a></li>
-<li><a href="#how-can-i-delete-all-lines-in-a-file-using-vi-score-457247-in-2014">81: How can I delete all lines in a file using vi? (score <span>457247</span> in 2014)</a></li>
-<li><a href="#create-file-in-folder-permission-denied-score-456046-in-2018">82: Create file in folder: permission denied (score <span>456046</span> in 2018)</a></li>
-<li><a href="#how-to-remove-all-the-files-in-a-directory-score-453533-in-2012">83: How to remove all the files in a directory? (score <span>453533</span> in 2012)</a></li>
-<li><a href="#ifconfig-command-not-found-score-450089-in-2017">84: ifconfig command not found (score <span>450089</span> in 2017)</a></li>
-<li><a href="#how-to-see-full-log-from-systemctl-status-service-score-440141-in-2015">85: How to see full log from systemctl status service? (score <span>440141</span> in 2015)</a></li>
-<li><a href="#how-can-i-get-the-size-of-a-file-in-a-bash-script-score-431964-in-2015">86: How can I get the size of a file in a bash script? (score <span>431964</span> in 2015)</a></li>
-<li><a href="#pass-command-line-arguments-to-bash-script-score-431322-in-2012">87: Pass command line arguments to bash script (score <span>431322</span> in 2012)</a></li>
-<li><a href="#delete-the-last-character-of-a-string-using-string-manipulation-in-shell-script-score-427336-in-2016">88: Delete the last character of a string using string manipulation in shell script (score <span>427336</span> in 2016)</a></li>
-<li><a href="#trying-to-ssh-to-local-vm-ubuntu-with-putty-score-424931-in-2015">89: Trying to SSH to local VM Ubuntu with Putty (score <span>424931</span> in 2015)</a></li>
-<li><a href="#how-to-set-default-file-permissions-for-all-foldersfiles-in-a-directory-score-418176-in-2013">90: How to set default file permissions for all folders/files in a directory? (score <span>418176</span> in 2013)</a></li>
-<li><a href="#how-to-unfreeze-after-accidentally-pressing-ctrl-s-in-a-terminal-score-415151-in-2017">91: How to unfreeze after accidentally pressing Ctrl-S in a terminal? (score <span>415151</span> in 2017)</a></li>
-<li><a href="#using-the-not-equal-operator-for-string-comparison-score-408060-in-2019">92: Using the not equal operator for string comparison (score <span>408060</span> in 2019)</a></li>
-<li><a href="#ssh-login-with-clear-text-password-as-a-parameter-score-407789-in-2015">93: SSH login with clear text password as a parameter? (score <span>407789</span> in 2015)</a></li>
-<li><a href="#how-to-write-startup-script-for-systemd-score-407696-in-2017">94: How to write startup script for systemd (score <span>407696</span> in 2017)</a></li>
-<li><a href="#delete-files-older-than-x-days-score-405807-in-2015">95: Delete files older than X days + (score <span>405807</span> in 2015)</a></li>
-<li><a href="#in-a-bash-script-using-the-conditional-or-in-an-if-statement-score-405275-in-2017">96: In a bash script, using the conditional “or” in an “if” statement (score <span>405275</span> in 2017)</a></li>
-<li><a href="#gpu-usage-monitoring-cuda-score-404894-in">97: GPU usage monitoring (CUDA) (score <span>404894</span> in )</a></li>
-<li><a href="#what-is-the-purpose-of-.bashrc-and-how-does-it-work-score-404368-in-2014">98: What is the purpose of .bashrc and how does it work? (score <span>404368</span> in 2014)</a></li>
-<li><a href="#inputoutput-error-when-accessing-a-directory-score-403238-in-2015">99: “Input/output error” when accessing a directory (score <span>403238</span> in 2015)</a></li>
-<li><a href="#how-to-connect-to-a-serial-port-as-simple-as-using-ssh-score-402296-in-2011">100: How to connect to a serial port as simple as using SSH? (score <span>402296</span> in 2011)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-to-copy-files-from-one-machine-to-another-using-ssh-score-2648711-in-2018" class="level3">
