--- a/Vim_top_100.html
+++ b/Vim_top_100.html
@@ -13,117 +13,14 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/code_prism_dark.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Vim &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-exit-the-vim-editor-score-1992281-in-2019">1: How do I exit the Vim editor? (score <span>1992281</span> in 2019)</a></li>
-<li><a href="#how-do-i-make-git-use-the-editor-of-my-choice-for-commits-score-845181-in-2017">2: How do I make Git use the editor of my choice for commits? (score <span>845181</span> in 2017)</a></li>
-<li><a href="#whats-a-quick-way-to-commentuncomment-lines-in-vim-score-810229-in-2013">3: What’s a quick way to comment/uncomment lines in Vim? (score <span>810229</span> in 2013)</a></li>
-<li><a href="#tab-key-4-spaces-and-auto-indent-after-curly-braces-in-vim-score-784783-in-2015">4: Tab key == 4 spaces and auto-indent after curly braces in Vim (score <span>784783</span> in 2015)</a></li>
-<li><a href="#redefine-tab-as-4-spaces-score-763913-in-2014">5: Redefine tab as 4 spaces (score <span>763913</span> in 2014)</a></li>
-<li><a href="#indent-multiple-lines-quickly-in-vi-score-753143-in-2014">6: Indent multiple lines quickly in vi (score <span>753143</span> in 2014)</a></li>
-<li><a href="#what-is-your-most-productive-shortcut-with-vim-score-752799-in-2017">7: What is your most productive shortcut with Vim? (score <span>752799</span> in 2017)</a></li>
-<li><a href="#how-to-replace-a-character-by-a-newline-in-vim-score-739765-in-2019">8: How to replace a character by a newline in Vim (score <span>739765</span> in 2019)</a></li>
-<li><a href="#copy-all-the-lines-to-clipboard-score-729835-in-2019">9: Copy all the lines to clipboard (score <span>729835</span> in 2019)</a></li>
-<li><a href="#how-do-i-move-to-end-of-line-in-vim-score-683506-in-2017">10: How do I move to end of line in Vim? (score <span>683506</span> in 2017)</a></li>
-<li><a href="#duplicate-a-whole-line-in-vim-score-671286-in-2017">11: Duplicate a whole line in Vim (score <span>671286</span> in 2017)</a></li>
-<li><a href="#make-vim-show-all-white-spaces-as-a-character-score-585726-in">12: Make Vim show ALL white spaces as a character (score <span>585726</span> in )</a></li>
-<li><a href="#how-to-effectively-work-with-multiple-files-in-vim-score-552719-in-2011">13: How to effectively work with multiple files in Vim? (score <span>552719</span> in 2011)</a></li>
-<li><a href="#how-to-make-vim-paste-from-and-copy-to-systems-clipboard-score-525630-in-2015">14: How to make vim paste from (and copy to) system’s clipboard? (score <span>525630</span> in 2015)</a></li>
-<li><a href="#convert-dos-line-endings-to-linux-line-endings-in-vim-score-517407-in-2016">15: Convert DOS line endings to Linux line endings in vim (score <span>517407</span> in 2016)</a></li>
-<li><a href="#move-cursor-to-end-of-file-in-vim-score-515115-in-2013">16: Move cursor to end of file in vim (score <span>515115</span> in 2013)</a></li>
-<li><a href="#where-is-my-.vimrc-file-score-466283-in-2015">17: Where is my .vimrc file? (score <span>466283</span> in 2015)</a></li>
-<li><a href="#vim-clear-last-search-highlighting-score-457149-in-2016">18: Vim clear last search highlighting (score <span>457149</span> in 2016)</a></li>
-<li><a href="#how-to-copy-to-clipboard-in-vim-score-437882-in-2016">19: How to copy to clipboard in Vim? (score <span>437882</span> in 2016)</a></li>
-<li><a href="#how-to-do-case-insensitive-search-in-vim-score-433542-in-2014">20: How to do case insensitive search in Vim (score <span>433542</span> in 2014)</a></li>
-<li><a href="#differences-between-emacs-and-vim-score-416096-in-2018">21: Differences between Emacs and Vim (score <span>416096</span> in 2018)</a></li>
-<li><a href="#how-to-convert-the-m-linebreak-to-normal-linebreak-in-a-file-opened-in-vim-score-356218-in-2014">22: How to convert the ^M linebreak to ‘normal’ linebreak in a file opened in vim? (score <span>356218</span> in 2014)</a></li>
-<li><a href="#turning-off-auto-indent-when-pasting-text-into-vim-score-347468-in-2018">23: Turning off auto indent when pasting text into vim (score <span>347468</span> in 2018)</a></li>
-<li><a href="#how-does-the-vim-write-with-sudo-trick-work-score-337504-in-2012">24: How does the vim “write with sudo” trick work? (score <span>337504</span> in 2012)</a></li>
-<li><a href="#vim-delete-blank-lines-score-332736-in-2010">25: Vim delete blank lines (score <span>332736</span> in 2010)</a></li>
-<li><a href="#how-do-i-insert-text-at-beginning-of-a-multi-line-selection-in-vivim-score-322539-in-2018">26: How do I insert text at beginning of a multi-line selection in vi/Vim? (score <span>322539</span> in 2018)</a></li>
-<li><a href="#copy-and-paste-content-from-one-file-to-another-file-in-vi-score-314454-in-2017">27: Copy and paste content from one file to another file in vi (score <span>314454</span> in 2017)</a></li>
-<li><a href="#what-is-the-in-a-.vimrc-file-score-308014-in-2018">28: What is the <leader> in a .vimrc file? (score <span>308014</span> in 2018)</a></li>
-<li><a href="#replace-tabs-with-spaces-in-vim-score-306849-in-2019">29: Replace tabs with spaces in vim (score <span>306849</span> in 2019)</a></li>
-<li><a href="#find-and-replace-strings-in-vim-on-multiple-lines-score-296903-in-2013">30: Find and replace strings in vim on multiple lines (score <span>296903</span> in 2013)</a></li>
-<li><a href="#find-next-in-vim-score-295769-in">31: “Find next” in vim (score <span>295769</span> in )</a></li>
-<li><a href="#autocompletion-in-vim-score-293759-in-2012">32: Autocompletion in Vim (score <span>293759</span> in 2012)</a></li>
-<li><a href="#how-do-i-do-redo-i.e.-undo-undo-in-vim-score-290699-in-2013">33: How do I do redo (i.e. “undo undo”) in Vim? (score <span>290699</span> in 2013)</a></li>
-<li><a href="#how-can-i-quickly-delete-a-line-in-vim-starting-at-the-cursor-position-score-289880-in">34: How can I quickly delete a line in VIM starting at the cursor position? (score <span>289880</span> in )</a></li>
-<li><a href="#what-is-vim-recording-and-how-can-it-be-disabled-score-277475-in-2016">35: What is vim recording and how can it be disabled? (score <span>277475</span> in 2016)</a></li>
-<li><a href="#how-to-get-the-list-of-all-installed-color-schemes-in-vim-score-275800-in-2013">36: How to get the list of all installed color schemes in Vim? (score <span>275800</span> in 2013)</a></li>
-<li><a href="#what-does-m-character-mean-in-vim-score-270803-in-2013">37: What does ^M character mean in Vim? (score <span>270803</span> in 2013)</a></li>
-<li><a href="#how-do-i-fix-the-indentation-of-an-entire-file-in-vi-score-266638-in-2012">38: How do I fix the indentation of an entire file in Vi? (score <span>266638</span> in 2012)</a></li>
-<li><a href="#vim-and-ctags-tips-and-tricks-score-261799-in-2016">39: Vim and Ctags tips and tricks (score <span>261799</span> in 2016)</a></li>
-<li><a href="#setting-the-vim-background-colors-score-255989-in-2019">40: Setting the Vim background colors (score <span>255989</span> in 2019)</a></li>
-<li><a href="#how-do-i-run-a-terminal-inside-of-vim-score-252923-in-2016">41: How do I run a terminal inside of Vim? (score <span>252923</span> in 2016)</a></li>
-<li><a href="#how-do-i-use-vim-registers-score-251044-in-2016">42: How do I use vim registers? (score <span>251044</span> in 2016)</a></li>
-<li><a href="#what-is-in-your-.vimrc-score-249413-in-2017">43: What is in your .vimrc? (score <span>249413</span> in 2017)</a></li>
-<li><a href="#how-can-i-add-a-string-to-the-end-of-each-line-in-vim-score-246015-in-2013">44: How can I add a string to the end of each line in Vim? (score <span>246015</span> in 2013)</a></li>
-<li><a href="#vim-80-column-layout-concerns-score-241633-in-2010">45: Vim 80 column layout concerns (score <span>241633</span> in 2010)</a></li>
-<li><a href="#how-to-save-as-a-new-file-and-keep-working-on-the-original-one-in-vim-score-239921-in-2016">46: How to save as a new file and keep working on the original one in Vim? (score <span>239921</span> in 2016)</a></li>
-<li><a href="#how-do-i-exit-from-the-text-window-in-git-score-229788-in-2012">47: How do I exit from the text window in Git? (score <span>229788</span> in 2012)</a></li>
-<li><a href="#what-are-the-benefits-of-learning-vim-score-227338-in-2015">48: What are the benefits of learning Vim? (score <span>227338</span> in 2015)</a></li>
-<li><a href="#how-to-select-columns-in-editors-atomnotepad-kate-vim-sublime-textpadetc-and-ides-netbeans-intellij-idea-eclipse-visual-studio-etc-score-225765-in-2016">49: How to Select Columns in Editors (Atom,Notepad++, Kate, VIM, Sublime, Textpad,etc) and IDEs (NetBeans, IntelliJ IDEA, Eclipse, Visual Studio, etc) (score <span>225765</span> in 2016)</a></li>
-<li><a href="#how-can-i-change-a-files-encoding-with-vim-score-218678-in">50: How can I change a file’s encoding with vim? (score <span>218678</span> in )</a></li>
-<li><a href="#how-to-use-vim-in-the-terminal-score-214981-in-2016">51: How to use vim in the terminal? (score <span>214981</span> in 2016)</a></li>
-<li><a href="#how-to-set-default-vim-colorscheme-score-199655-in-2018">52: How to set default vim colorscheme (score <span>199655</span> in 2018)</a></li>
-<li><a href="#how-do-i-switch-between-command-and-insert-mode-in-vim-score-198230-in-2016">53: How do I switch between command and insert mode in Vim? (score <span>198230</span> in 2016)</a></li>
-<li><a href="#how-do-i-close-a-single-buffer-out-of-many-in-vim-score-190152-in-2011">54: How do I close a single buffer (out of many) in Vim? (score <span>190152</span> in 2011)</a></li>
-<li><a href="#jump-to-function-definition-in-vim-score-188891-in-2017">55: Jump to function definition in vim (score <span>188891</span> in 2017)</a></li>
-<li><a href="#paste-in-insert-mode-score-185878-in-2018">56: Paste in insert mode? (score <span>185878</span> in 2018)</a></li>
-<li><a href="#renaming-the-current-file-in-vim-score-184978-in-2018">57: Renaming the current file in Vim (score <span>184978</span> in 2018)</a></li>
-<li><a href="#why-does-using-from-future-import-print_function-breaks-python2-style-print-score-182008-in-2019">58: Why does using from <strong>future</strong> import print_function breaks Python2-style print? (score <span>182008</span> in 2019)</a></li>
-<li><a href="#delete-newline-in-vim-score-177877-in">59: Delete newline in Vim (score <span>177877</span> in )</a></li>
-<li><a href="#vi-editor-copy-a-block-not-usual-action-score-172648-in-2018">60: vi editor, copy a block (not usual action) (score <span>172648</span> in 2018)</a></li>
-<li><a href="#what-is-the-difference-between-the-remap-noremap-nnoremap-and-vnoremap-mapping-commands-in-vim-score-171778-in-2018">61: What is the difference between the remap, noremap, nnoremap and vnoremap mapping commands in Vim? (score <span>171778</span> in 2018)</a></li>
-<li><a href="#how-do-i-change-tab-size-in-vim-score-170917-in-2017">62: How do I change tab size in Vim? (score <span>170917</span> in 2017)</a></li>
-<li><a href="#vim---how-to-delete-a-large-block-of-text-without-counting-the-lines-score-169640-in">63: vim - How to delete a large block of text without counting the lines? (score <span>169640</span> in )</a></li>
-<li><a href="#how-i-can-delete-in-vim-all-text-from-current-line-to-end-of-file-score-169543-in-2019">64: How I can delete in VIM all text from current line to end of file? (score <span>169543</span> in 2019)</a></li>
-<li><a href="#git-commit-in-terminal-opens-vim-but-cant-get-back-to-terminal-score-168900-in-2016">65: Git commit in terminal opens VIM, but can’t get back to terminal (score <span>168900</span> in 2016)</a></li>
-<li><a href="#changing-vim-indentation-behavior-by-file-type-score-167470-in-2017">66: Changing Vim indentation behavior by file type (score <span>167470</span> in 2017)</a></li>
-<li><a href="#go-to-beginning-of-line-without-opening-new-line-in-vi-score-160892-in-2012">67: Go to beginning of line without opening new line in VI (score <span>160892</span> in 2012)</a></li>
-<li><a href="#how-do-you-delete-all-text-above-a-certain-line-score-154077-in">68: How do you delete all text above a certain line (score <span>154077</span> in )</a></li>
-<li><a href="#go-to-first-line-in-a-file-in-vim-score-152109-in-2013">69: Go to first line in a file in vim? (score <span>152109</span> in 2013)</a></li>
-<li><a href="#set-gvim-font-in-.vimrc-file-score-151084-in-2019">70: set gvim font in .vimrc file (score <span>151084</span> in 2019)</a></li>
-<li><a href="#how-to-run-mvim-macvim-from-terminal-score-150401-in-2011">71: How to run mvim (MacVim) from Terminal? (score <span>150401</span> in 2011)</a></li>
-<li><a href="#vim-line-numbers---how-to-have-them-on-by-default-score-148936-in-2014">72: vim line numbers - how to have them on by default? (score <span>148936</span> in 2014)</a></li>
-<li><a href="#how-can-i-install-macvim-on-os-x-score-146996-in-2016">73: How can I install MacVim on OS X? (score <span>146996</span> in 2016)</a></li>
-<li><a href="#how-can-i-autoformatindent-c-code-in-vim-score-146498-in-2015">74: How can I autoformat/indent C code in vim? (score <span>146498</span> in 2015)</a></li>
-<li><a href="#vim-for-windows---what-do-i-type-to-save-and-exit-from-a-file-score-145559-in-2019">75: Vim for Windows - What do I type to save and exit from a file? (score <span>145559</span> in 2019)</a></li>
-<li><a href="#searching-word-in-vim-score-145070-in-2013">76: Searching word in vim? (score <span>145070</span> in 2013)</a></li>
-<li><a href="#how-to-stop-line-breaking-in-vim-score-143730-in-2012">77: How to stop line breaking in vim (score <span>143730</span> in 2012)</a></li>
-<li><a href="#using-vims-tabs-like-buffers-score-142309-in-2012">78: Using Vim’s tabs like buffers (score <span>142309</span> in 2012)</a></li>
-<li><a href="#delete-word-after-or-around-cursor-in-vim-score-140526-in-2019">79: delete word after or around cursor in VIM (score <span>140526</span> in 2019)</a></li>
-<li><a href="#tips-for-using-vim-as-a-java-ide-score-138495-in-2013">80: Tips for using Vim as a Java IDE? (score <span>138495</span> in 2013)</a></li>
-<li><a href="#a-more-useful-statusline-in-vim-score-133810-in-2013">81: A more useful statusline in vim? (score <span>133810</span> in 2013)</a></li>
-<li><a href="#setting-up-vim-for-python-score-133193-in-2016">82: Setting up Vim for Python (score <span>133193</span> in 2016)</a></li>
-<li><a href="#how-to-expandcollapse-a-diff-sections-in-vimdiff-score-132951-in-2018">83: How to expand/collapse a diff sections in Vimdiff? (score <span>132951</span> in 2018)</a></li>
-<li><a href="#to-switch-from-vertical-split-to-horizontal-split-fast-in-vim-score-131069-in-2011">84: To switch from vertical split to horizontal split fast in Vim (score <span>131069</span> in 2011)</a></li>
-<li><a href="#how-do-i-install-a-plugin-for-vim-score-130513-in">85: How do I install a plugin for vim? (score <span>130513</span> in )</a></li>
-<li><a href="#how-to-temporarily-exit-vim-and-go-back-score-129430-in-2019">86: How to temporarily exit Vim and go back (score <span>129430</span> in 2019)</a></li>
-<li><a href="#vim-insert-the-same-characters-across-multiple-lines-score-127799-in-2018">87: Vim: insert the same characters across multiple lines (score <span>127799</span> in 2018)</a></li>
-<li><a href="#using-regular-expressions-to-do-mass-replace-in-notepad-and-vim-score-126919-in-2015">88: Using regular expressions to do mass replace in Notepad++ and Vim (score <span>126919</span> in 2015)</a></li>
-<li><a href="#how-to-cut-an-entire-line-in-vim-and-paste-it-score-126646-in-2012">89: How to cut an entire line in vim and paste it? (score <span>126646</span> in 2012)</a></li>
-<li><a href="#highlight-all-occurrence-of-a-selected-word-score-126348-in-2014">90: Highlight all occurrence of a selected word? (score <span>126348</span> in 2014)</a></li>
-<li><a href="#working-with-huge-files-in-vim-score-125856-in-2017">91: Working with huge files in VIM (score <span>125856</span> in 2017)</a></li>
-<li><a href="#move-entire-line-up-and-down-in-vim-score-123972-in-2015">92: Move entire line up and down in Vim (score <span>123972</span> in 2015)</a></li>
-<li><a href="#shortcut-to-open-file-in-vim-score-122748-in-2015">93: Shortcut to open file in Vim (score <span>122748</span> in 2015)</a></li>
-<li><a href="#how-to-go-back-ctrlz-in-vivim-score-122634-in-2017">94: How to go back (ctrl+z) in vi/vim (score <span>122634</span> in 2017)</a></li>
-<li><a href="#how-do-i-join-two-lines-in-vi-score-122393-in-2017">95: How do I join two lines in vi? (score <span>122393</span> in 2017)</a></li>
-<li><a href="#how-do-i-set-the-default-font-size-in-vim-score-121999-in-2018">96: How do I set the default font size in Vim? (score <span>121999</span> in 2018)</a></li>
-<li><a href="#how-to-convert-all-text-to-lowercase-in-vim-score-121012-in-2017">97: How to convert all text to lowercase in Vim (score <span>121012</span> in 2017)</a></li>
-<li><a href="#what-are-the-dark-corners-of-vim-your-mom-never-told-you-about-score-120702-in-2017">98: What are the dark corners of Vim your mom never told you about? (score <span>120702</span> in 2017)</a></li>
-<li><a href="#how-to-paste-yanked-text-into-vim-command-line-score-119495-in-2015">99: How to paste yanked text into Vim command line? (score <span>119495</span> in 2015)</a></li>
-<li><a href="#vim-copy-selection-to-os-x-clipboard-score-117584-in-2015">100: Vim: copy selection to OS X clipboard (score <span>117584</span> in 2015)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-exit-the-vim-editor-score-1992281-in-2019" class="level3">
