--- a/Vim_top_100_se.html
+++ b/Vim_top_100_se.html
@@ -13,117 +13,14 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/code_prism_dark.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Vim &lt;- StackEchange top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-can-i-copy-text-to-the-system-clipboard-from-vim-score-228296-in-2015">1: How can I copy text to the system clipboard from Vim? (score <span>228296</span> in 2015)</a></li>
-<li><a href="#how-can-i-use-vim-as-a-hex-editor-score-160234-in-2017">2: How can I use Vim as a hex editor? (score <span>160234</span> in 2017)</a></li>
-<li><a href="#how-do-i-install-a-plugin-in-vimvi-score-140003-in-2017">3: How do I install a plugin in Vim/vi? (score <span>140003</span> in 2017)</a></li>
-<li><a href="#how-do-i-use-vim-as-a-diff-tool-score-134835-in-2015">4: How do I use vim as a diff tool? (score <span>134835</span> in 2015)</a></li>
-<li><a href="#displaying-tabs-as-characters-score-118320-in-2015">5: Displaying tabs as characters (score <span>118320</span> in 2015)</a></li>
-<li><a href="#why-doesnt-the-backspace-key-work-in-insert-mode-score-103819-in-2017">6: Why doesn’t the backspace key work in insert mode? (score <span>103819</span> in 2017)</a></li>
-<li><a href="#whats-the-simplest-way-to-strip-trailing-whitespace-from-all-lines-in-a-file-score-91801-in-2015">7: What’s the simplest way to strip trailing whitespace from all lines in a file? (score <span>91801</span> in 2015)</a></li>
-<li><a href="#is-it-possible-to-split-vim-window-to-view-multiple-files-at-once-score-90210-in">8: Is it possible to split Vim window to view multiple files at once? (score <span>90210</span> in )</a></li>
-<li><a href="#what-is-the-difference-between-the-vim-plugin-managers-score-89866-in-2016">9: What is the difference between the vim plugin managers? (score <span>89866</span> in 2016)</a></li>
-<li><a href="#how-do-i-reload-the-current-file-score-74672-in-2015">10: How do I reload the current file? (score <span>74672</span> in 2015)</a></li>
-<li><a href="#is-it-possible-to-have-vim-auto-complete-function-names-variables-etc.-when-using-it-to-program-score-72480-in-2015">11: Is it possible to have vim auto-complete function names, variables, etc. when using it to program? (score <span>72480</span> in 2015)</a></li>
-<li><a href="#how-to-replace-tabs-with-spaces-score-67722-in-2015">12: How to replace tabs with spaces? (score <span>67722</span> in 2015)</a></li>
-<li><a href="#how-to-edit-binary-files-with-vim-score-64852-in-2015">13: How to edit binary files with Vim? (score <span>64852</span> in 2015)</a></li>
-<li><a href="#find-and-replace-using-regular-expressions-score-64492-in-2019">14: Find and replace using regular expressions (score <span>64492</span> in 2019)</a></li>
-<li><a href="#how-can-i-see-the-full-path-of-the-current-file-score-62317-in-2015">15: How can I see the full path of the current file? (score <span>62317</span> in 2015)</a></li>
-<li><a href="#how-do-i-change-the-current-splits-width-and-height-score-60587-in-2019">16: How do I change the current split’s width and height? (score <span>60587</span> in 2019)</a></li>
-<li><a href="#how-can-i-clear-word-highlighting-in-the-current-document-e.g.-such-as-after-searching-for-a-word-score-57992-in">17: How can I clear word highlighting in the current document (e.g. such as after searching for a word)? (score <span>57992</span> in )</a></li>
-<li><a href="#how-do-i-delete-a-large-block-of-text-without-counting-the-lines-score-57383-in">18: How do I delete a large block of text without counting the lines? (score <span>57383</span> in )</a></li>
-<li><a href="#other-ways-to-exit-insert-mode-besides-escape-score-57295-in-2015">19: Other ways to exit Insert mode besides Escape (score <span>57295</span> in 2015)</a></li>
-<li><a href="#how-can-i-change-the-font-size-in-gvim-score-49495-in-2017">20: How can I change the font size in gVim? (score <span>49495</span> in 2017)</a></li>
-<li><a href="#how-do-i-fix-the-status-bar-symbols-in-the-airline-plugin-score-48604-in-2017">21: How do I fix the status bar symbols in the Airline plugin? (score <span>48604</span> in 2017)</a></li>
-<li><a href="#how-can-i-easily-move-a-line-score-48450-in-2015">22: How can I easily move a line? (score <span>48450</span> in 2015)</a></li>
-<li><a href="#what-does-set-backgrounddark-do-score-41525-in-2017">23: What does :set background=dark do? (score <span>41525</span> in 2017)</a></li>
-<li><a href="#how-to-install-youcompleteme-with-clang-completer-offline-score-39070-in">24: How to install YouCompleteMe with Clang completer offline? (score <span>39070</span> in )</a></li>
-<li><a href="#what-is-the-purpose-of-swap-files-score-38781-in">25: What is the purpose of swap files? (score <span>38781</span> in )</a></li>
-<li><a href="#does-ex-mode-have-any-practical-use-score-37752-in-2018">26: Does Ex mode have any practical use? (score <span>37752</span> in 2018)</a></li>
-<li><a href="#how-to-get-intelligent-c-auto-completion-score-37303-in-2015">27: How to get intelligent C++ auto-completion (score <span>37303</span> in 2015)</a></li>
-<li><a href="#how-do-i-configure-the-vim-airline-plugin-to-look-like-its-own-project-screenshot-score-37122-in-2019">28: How do I configure the Vim airline plugin to look like its own project screenshot? (score <span>37122</span> in 2019)</a></li>
-<li><a href="#how-to-enable-python-feature-in-vim-score-36047-in-2017">29: How to enable +python feature in vim (score <span>36047</span> in 2017)</a></li>
-<li><a href="#is-there-a-way-to-count-the-number-of-occurrences-of-a-word-in-a-file-score-35456-in-2017">30: Is there a way to count the number of occurrences of a word in a file? (score <span>35456</span> in 2017)</a></li>
-<li><a href="#how-can-i-integrate-gdb-with-vim-score-34965-in-2015">31: How can I integrate gdb with Vim? (score <span>34965</span> in 2015)</a></li>
-<li><a href="#what-is-neovim-how-is-it-different-from-vim-and-why-should-i-care-score-33870-in-2015">32: What is Neovim? How is it different from Vim? And why should I care? (score <span>33870</span> in 2015)</a></li>
-<li><a href="#how-can-i-rename-the-file-im-editing-score-33764-in-2015">33: How can I rename the file I’m editing? (score <span>33764</span> in 2015)</a></li>
-<li><a href="#how-do-i-stop-recording-while-in-command-line-score-32725-in">34: How do I stop recording while in command line? (score <span>32725</span> in )</a></li>
-<li><a href="#close-and-unload-a-buffer-without-exiting-vim-score-32516-in">35: Close and unload a buffer without exiting Vim (score <span>32516</span> in )</a></li>
-<li><a href="#how-to-add-indentation-guideslines-score-32447-in-2015">36: How to add indentation guides/lines (score <span>32447</span> in 2015)</a></li>
-<li><a href="#how-to-execute-shell-commands-silently-score-31968-in-2015">37: How to execute shell commands silently? (score <span>31968</span> in 2015)</a></li>
-<li><a href="#how-can-i-get-gvim-on-windows-to-behave-as-on-linux-score-29967-in-2018">38: How can I get gVim on Windows to behave as on Linux? (score <span>29967</span> in 2018)</a></li>
-<li><a href="#setting-tab-to-2-spaces-score-29213-in">39: Setting TAB to 2 spaces (score <span>29213</span> in )</a></li>
-<li><a href="#is-there-an-easy-way-to-close-a-scratch-bufferpreview-window-score-28792-in-2015">40: Is there an easy way to close a scratch buffer/preview window? (score <span>28792</span> in 2015)</a></li>
-<li><a href="#how-to-install-nerdtree-with-vundle-score-28784-in-2016">41: How to install NERDTree with Vundle? (score <span>28784</span> in 2016)</a></li>
-<li><a href="#what-is-the-vim8-package-feature-and-how-should-i-use-it-score-28596-in-2017">42: What is the Vim8 package feature and how should I use it? (score <span>28596</span> in 2017)</a></li>
-<li><a href="#vim-8.0-python-support-score-28486-in-2017">43: Vim 8.0 Python support (score <span>28486</span> in 2017)</a></li>
-<li><a href="#how-can-i-set-up-a-ruler-at-a-specific-column-score-27647-in-2016">44: How can I set up a ruler at a specific column? (score <span>27647</span> in 2016)</a></li>
-<li><a href="#how-can-i-get-a-newer-version-of-vim-on-ubuntu-score-27162-in">45: How can I get a newer version of Vim on Ubuntu? (score <span>27162</span> in )</a></li>
-<li><a href="#exit-from-terminal-mode-in-neovim-score-26735-in-2017">46: Exit from Terminal mode in Neovim (score <span>26735</span> in 2017)</a></li>
-<li><a href="#what-is-the-command-for-select-all-in-vim-and-vsvim-score-23764-in-2016">47: what is the command for “Select All” in vim and VsVim? (score <span>23764</span> in 2016)</a></li>
-<li><a href="#how-to-map-alt-key-score-23521-in-2015">48: How to map Alt key? (score <span>23521</span> in 2015)</a></li>
-<li><a href="#what-are-the-differences-between-wq-x-and-zz-when-exiting-vim-score-23339-in-2016">49: What are the differences between :wq<cr> :x<cr> and ZZ when exiting vim? (score <span>23339</span> in 2016)</a></li>
-<li><a href="#how-can-i-yank-copy-the-single-character-on-which-the-cursor-rests-score-22848-in-2017">50: How can I yank (copy) the single character on which the cursor rests? (score <span>22848</span> in 2017)</a></li>
-<li><a href="#fastest-way-to-switch-to-a-buffer-in-vim-score-22833-in-2017">51: Fastest way to switch to a buffer in vim? (score <span>22833</span> in 2017)</a></li>
-<li><a href="#colorschemes-background-not-correct-in-terminal-score-22830-in-2015">52: Colorscheme’s background not correct in terminal (score <span>22830</span> in 2015)</a></li>
-<li><a href="#how-do-i-open-and-close-nerdtree-toggle-nerdtree-view-using-a-single-keystroke-score-22723-in">53: How do I open and close NERDTree (toggle NERDTree view) using a single keystroke? (score <span>22723</span> in )</a></li>
-<li><a href="#how-can-i-find-out-what-is-set-to-and-is-it-possible-to-remap-score-22707-in-2015">54: How can I find out what <Leader> is set to? And is it possible to remap <Leader>? (score <span>22707</span> in 2015)</a></li>
-<li><a href="#search-for-lines-starting-with-given-string-in-vim-score-22603-in-2015">55: Search for lines starting with given string in vim? (score <span>22603</span> in 2015)</a></li>
-<li><a href="#e297-write-error-in-swap-file-due-to-running-in-a-vm-score-21311-in-2016">56: “E297: Write error in swap file” due to running in a VM (score <span>21311</span> in 2016)</a></li>
-<li><a href="#how-can-i-change-the-indent-size-score-21224-in-2016">57: How can I change the indent size? (score <span>21224</span> in 2016)</a></li>
-<li><a href="#what-is-the-difference-between-filetype-plugin-indent-on-and-filetype-indent-on-score-19996-in">58: What is the difference between <code>filetype plugin indent on</code> and <code>filetype indent on</code>? (score <span>19996</span> in )</a></li>
-<li><a href="#what-are-the-.viminfo-and-.netrwhist-files-score-19886-in">59: What are the .viminfo and .netrwhist files? (score <span>19886</span> in )</a></li>
-<li><a href="#how-to-indent-as-spaces-instead-of-tab-score-19184-in-2017">60: How to indent as spaces instead of tab? (score <span>19184</span> in 2017)</a></li>
-<li><a href="#how-can-i-show-relative-line-numbers-score-19134-in-2015">61: How can I show relative line numbers? (score <span>19134</span> in 2015)</a></li>
-<li><a href="#what-is-the-difference-between-autoindent-and-smartindent-in-vimrc-score-18488-in-2016">62: What is the difference between autoindent and smartindent in vimrc? (score <span>18488</span> in 2016)</a></li>
-<li><a href="#why-do-i-need-both-a-vimrc-and-a-gvimrc-score-18307-in-2015">63: Why do I need both a vimrc and a gvimrc? (score <span>18307</span> in 2015)</a></li>
-<li><a href="#what-is-softtabstop-used-for-score-17681-in-2015">64: What is <code>softtabstop</code> used for? (score <span>17681</span> in 2015)</a></li>
-<li><a href="#how-to-block-replace-code-in-visual-mode-score-17521-in">65: How to block replace code in visual mode? (score <span>17521</span> in )</a></li>
-<li><a href="#trouble-using-color-scheme-in-neovim-score-17506-in-2015">66: Trouble Using Color Scheme in NeoVim (score <span>17506</span> in 2015)</a></li>
-<li><a href="#show-only-matching-lines-score-16648-in-2015">67: Show only matching lines? (score <span>16648</span> in 2015)</a></li>
-<li><a href="#can-i-jump-to-a-function-declaration-or-definition-in-a-multiple-c-source-files-project-score-16557-in-2015">68: Can I jump to a function declaration or definition in a multiple C++ source files project? (score <span>16557</span> in 2015)</a></li>
-<li><a href="#how-to-diff-and-merge-two-directories-score-15944-in-2017">69: How to diff and merge two directories? (score <span>15944</span> in 2017)</a></li>
-<li><a href="#how-to-jump-to-function-call-score-15853-in">70: How to jump to function call? (score <span>15853</span> in )</a></li>
-<li><a href="#how-can-i-get-vim-to-stop-putting-comments-in-front-of-new-lines-score-15818-in-2015">71: How can I get vim to stop putting comments in front of new lines? (score <span>15818</span> in 2015)</a></li>
-<li><a href="#how-do-i-know-the-patch-version-of-my-vim-score-15753-in">72: How do I know the patch version of my vim? (score <span>15753</span> in )</a></li>
-<li><a href="#how-do-i-debug-my-vimrc-file-score-15629-in-2018">73: How do I debug my vimrc file? (score <span>15629</span> in 2018)</a></li>
-<li><a href="#why-is-using-arrow-keys-in-normal-mode-considered-bad-practice-score-15441-in-2018">74: Why is using arrow keys in normal mode considered bad practice? (score <span>15441</span> in 2018)</a></li>
-<li><a href="#execute-normal-command-over-range-score-15035-in-2015">75: Execute normal command over range (score <span>15035</span> in 2015)</a></li>
-<li><a href="#vim-code-completion-for-python-3-score-14860-in-2015">76: Vim Code Completion for Python 3 (score <span>14860</span> in 2015)</a></li>
-<li><a href="#what-is-the-difference-between-the-vim-snippets-plugins-score-14786-in-2017">77: What is the difference between the vim snippets plugins? (score <span>14786</span> in 2017)</a></li>
-<li><a href="#how-can-i-install-64-bit-vim-on-windows-score-14762-in-2017">78: How can I install 64-bit Vim on Windows? (score <span>14762</span> in 2017)</a></li>
-<li><a href="#how-to-open-multiple-files-in-split-mode-score-14601-in-2017">79: How to open multiple files in split mode? (score <span>14601</span> in 2017)</a></li>
-<li><a href="#why-am-i-getting-a-e488-trailing-characters-error-on-this-custom-command-score-14576-in-2015">80: Why am I getting a “E488: Trailing characters” error on this custom command? (score <span>14576</span> in 2015)</a></li>
-<li><a href="#how-to-share-config-between-vim-and-neovim-score-14462-in-2018">81: How to share config between vim and Neovim (score <span>14462</span> in 2018)</a></li>
-<li><a href="#how-to-join-lines-without-producing-a-space-score-14278-in-2015">82: How to join lines without producing a space? (score <span>14278</span> in 2015)</a></li>
-<li><a href="#regex-to-match-any-character-including-newline-score-14103-in">83: Regex to match any character including newline (score <span>14103</span> in )</a></li>
-<li><a href="#list-valid-color-schemes-score-13644-in">84: List valid color schemes? (score <span>13644</span> in )</a></li>
-<li><a href="#how-to-match-the-first-occurence-of-a-repeating-pattern-on-the-same-line-score-13388-in-2015">85: How to match the first occurence of a repeating pattern on the same line? (score <span>13388</span> in 2015)</a></li>
-<li><a href="#list-known-filetypes-score-13108-in-2015">86: List known filetypes (score <span>13108</span> in 2015)</a></li>
-<li><a href="#how-can-i-get-vim-to-show-documentation-of-a-cc-function-score-13098-in-2016">87: How can I get Vim to show documentation of a C/C++ function? (score <span>13098</span> in 2016)</a></li>
-<li><a href="#how-to-automatically-turn-off-hlsearch-after-im-done-searching-score-13021-in-2016">88: How to automatically turn off “hlsearch” after I’m done searching? (score <span>13021</span> in 2016)</a></li>
-<li><a href="#how-to-insert-a-newline-without-leaving-normal-mode-score-12974-in-2019">89: How to insert a newline without leaving normal mode (score <span>12974</span> in 2019)</a></li>
-<li><a href="#how-can-i-change-the-colour-of-the-line-highlighted-with-the-cursorline-option-score-12817-in-2015">90: How can I change the colour of the line highlighted with the ‘cursorline’ option? (score <span>12817</span> in 2015)</a></li>
-<li><a href="#use-conditional-operators-and-or-or-in-an-if-statement-score-12775-in-2016">91: Use conditional operators AND or OR in an IF statement? (score <span>12775</span> in 2016)</a></li>
-<li><a href="#where-is-xxd-in-windows-gvim-score-12746-in-2016">92: Where is xxd in Windows gvim? (score <span>12746</span> in 2016)</a></li>
-<li><a href="#swap-the-position-of-two-windows-score-12523-in-2015">93: Swap the position of two windows (score <span>12523</span> in 2015)</a></li>
-<li><a href="#is-there-a-difference-between-sudo-apt-get-vim-and-.configure-with-featureshuge-score-12436-in-2015">94: Is there a difference between “sudo apt-get vim” and “./configure –with-features=huge”? (score <span>12436</span> in 2015)</a></li>
-<li><a href="#why-does-vim-use-hjkl-for-cursor-keys-score-12352-in-2017">95: Why does vim use hjkl for cursor keys? (score <span>12352</span> in 2017)</a></li>
-<li><a href="#how-do-i-use-the-system-clipboard-with-vim-in-arch-linux-score-12300-in-2015">96: How do I use the system clipboard with Vim in Arch Linux? (score <span>12300</span> in 2015)</a></li>
-<li><a href="#how-do-i-copy-and-paste-between-two-vim-instances---shared-clipboard-score-12281-in">97: How do I copy and paste between two vim instances - shared clipboard? (score <span>12281</span> in )</a></li>
-<li><a href="#how-do-i-exit-ex-input-mode-score-12106-in">98: How do I exit ex input mode? (score <span>12106</span> in )</a></li>
-<li><a href="#can-i-justify-text-in-vim-score-11909-in-2015">99: Can I justify text in Vim? (score <span>11909</span> in 2015)</a></li>
-<li><a href="#vim--p-caught-deadly-signal-segv-score-11863-in-2015">100: Vim -p: Caught deadly signal SEGV? (score <span>11863</span> in 2015)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-can-i-copy-text-to-the-system-clipboard-from-vim-score-228296-in-2015" class="level3">
