--- a/Windows_top_100.html
+++ b/Windows_top_100.html
@@ -78,112 +78,14 @@
     code span.vs { color: #da4453; } /* VerbatimString */
     code span.wa { color: #da4453; } /* Warning */
   </style>
-  <link rel="stylesheet" href=" https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css -c  https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css" />
+  <link rel="stylesheet" href="../wiki_html/Css/include.css" />
   <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Windows &lt;- StackOverflow top 100</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#how-do-i-install-pip-on-windows-score-2887828-in-2017">1: How do I install pip on Windows? (score <span>2887828</span> in 2017)</a></li>
-<li><a href="#how-can-you-find-out-which-process-is-listening-on-a-port-on-windows-score-2827167-in-2016">2: How can you find out which process is listening on a port on Windows? (score <span>2827167</span> in 2016)</a></li>
-<li><a href="#how-do-i-shutdown-restart-or-log-off-windows-via-a-bat-file-score-2377843-in-2018">3: How do I shutdown, restart, or log off Windows via a bat file? (score <span>2377843</span> in 2018)</a></li>
-<li><a href="#how-to-run-a-powershell-script-score-1638604-in-2018">4: How to run a PowerShell script (score <span>1638604</span> in 2018)</a></li>
-<li><a href="#text-editor-to-open-big-giant-huge-large-text-files-score-1537932-in-2010">5: Text editor to open big (giant, huge, large) text files (score <span>1537932</span> in 2010)</a></li>
-<li><a href="#cant-start-eclipse---java-was-started-but-returned-exit-code13-score-1496556-in-2019">6: Can’t start Eclipse - Java was started but returned exit code=13 (score <span>1496556</span> in 2019)</a></li>
-<li><a href="#adding-directory-to-path-environment-variable-in-windows-score-1421264-in-2018">7: Adding directory to PATH Environment Variable in Windows (score <span>1421264</span> in 2018)</a></li>
-<li><a href="#failed-to-load-the-jni-shared-library-jdk-score-1418728-in-2017">8: Failed to load the JNI shared Library (JDK) (score <span>1418728</span> in 2017)</a></li>
-<li><a href="#how-do-i-get-current-datetime-on-the-windows-command-line-in-a-suitable-format-for-usage-in-a-filefolder-name-score-1301764-in-2019">9: How do I get current date/time on the Windows command line in a suitable format for usage in a file/folder name? (score <span>1301764</span> in 2019)</a></li>
-<li><a href="#list-all-environment-variables-from-the-command-line-score-1247592-in-2019">11: List all environment variables from the command line (score <span>1247592</span> in 2019)</a></li>
-<li><a href="#how-do-i-install-a-python-package-with-a-.whl-file-score-1233159-in-2017">12: How do I install a Python package with a .whl file? (score <span>1233159</span> in 2017)</a></li>
-<li><a href="#best-c-ide-or-editor-for-windows-score-1193943-in-2009">13: Best C++ IDE or Editor for Windows (score <span>1193943</span> in 2009)</a></li>
-<li><a href="#how-do-i-install-and-use-curl-on-windows-score-1105897-in-2018">14: How do I install and use curl on Windows? (score <span>1105897</span> in 2018)</a></li>
-<li><a href="#how-can-i-develop-for-iphone-using-a-windows-development-machine-score-1099372-in-2019">15: How can I develop for iPhone using a Windows development machine? (score <span>1099372</span> in 2019)</a></li>
-<li><a href="#batch-file-to-delete-files-older-than-n-days-score-1097834-in-2018">16: Batch file to delete files older than N days (score <span>1097834</span> in 2018)</a></li>
-<li><a href="#how-can-i-update-npm-on-windows-score-1073070-in-2018">17: How can I update npm on Windows? (score <span>1073070</span> in 2018)</a></li>
-<li><a href="#how-to-create-an-empty-file-at-the-command-line-in-windows-score-1034890-in-2019">18: How to create an empty file at the command line in Windows? (score <span>1034890</span> in 2019)</a></li>
-<li><a href="#bat-file-to-run-a-.exe-at-the-command-prompt-score-1023585-in-2013">19: Bat file to run a .exe at the command prompt (score <span>1023585</span> in 2013)</a></li>
-<li><a href="#command-line-for-looking-at-specific-port-score-998385-in-2012">20: Command line for looking at specific port (score <span>998385</span> in 2012)</a></li>
-<li><a href="#how-to-check-if-a-file-exists-from-inside-a-batch-file-score-993839-in-2011">21: How to check if a file exists from inside a batch file (score <span>993839</span> in 2011)</a></li>
-<li><a href="#in-windows-cmd-how-do-i-prompt-for-user-input-and-use-the-result-in-another-command-score-975908-in-2013">22: In Windows cmd, how do I prompt for user input and use the result in another command? (score <span>975908</span> in 2013)</a></li>
-<li><a href="#ignoring-directories-in-git-repos-on-windows-score-935943-in-2017">23: Ignoring directories in Git repos on Windows (score <span>935943</span> in 2017)</a></li>
-<li><a href="#how-can-i-echo-a-newline-in-a-batch-file-score-914923-in-2019">24: How can I echo a newline in a batch file? (score <span>914923</span> in 2019)</a></li>
-<li><a href="#how-to-delete-filessubfolders-in-a-specific-directory-at-the-command-prompt-in-windows-score-910658-in-2019">25: How to delete files/subfolders in a specific directory at the command prompt in Windows (score <span>910658</span> in 2019)</a></li>
-<li><a href="#error-unable-to-find-vcvarsall.bat-score-861588-in-2017">26: error: Unable to find vcvarsall.bat (score <span>861588</span> in 2017)</a></li>
-<li><a href="#how-to-grant-permission-to-users-for-a-directory-using-command-line-in-windows-score-835471-in-2016">28: How to grant permission to users for a directory using command line in Windows? (score <span>835471</span> in 2016)</a></li>
-<li><a href="#command-to-list-all-files-in-a-folder-as-well-as-sub-folders-in-windows-score-824293-in-2015">29: Command to list all files in a folder as well as sub-folders in windows (score <span>824293</span> in 2015)</a></li>
-<li><a href="#how-can-you-find-and-replace-text-in-a-file-using-the-windows-command-line-environment-score-823252-in-2018">30: How can you find and replace text in a file using the Windows command-line environment? (score <span>823252</span> in 2018)</a></li>
-<li><a href="#how-to-exportimport-putty-sessions-list-score-813310-in-2018">31: How to export/import PuTTy sessions list? (score <span>813310</span> in 2018)</a></li>
-<li><a href="#how-do-i-run-two-commands-in-one-line-in-windows-cmd-score-807691-in-2018">32: How do I run two commands in one line in Windows CMD? (score <span>807691</span> in 2018)</a></li>
-<li><a href="#batch-script-loop-score-780981-in-2018">33: Batch script loop (score <span>780981</span> in 2018)</a></li>
-<li><a href="#how-to-run-a-hello.js-file-in-node.js-on-windows-score-771257-in-2016">34: How to run a hello.js file in Node.js on windows? (score <span>771257</span> in 2016)</a></li>
-<li><a href="#stop-and-start-a-service-via-batch-or-cmd-file-score-767352-in-2009">36: Stop and Start a service via batch or cmd file? (score <span>767352</span> in 2009)</a></li>
-<li><a href="#run-curl-commands-from-windows-console-score-738476-in-2013">37: Run cURL commands from Windows console (score <span>738476</span> in 2013)</a></li>
-<li><a href="#how-can-i-open-a-cmd-window-in-a-specific-location-score-735230-in-2017">38: How can I open a cmd window in a specific location? (score <span>735230</span> in 2017)</a></li>
-<li><a href="#how-to-create-.pfx-file-from-certificate-and-private-key-score-722231-in-2016">39: How to create .pfx file from certificate and private key? (score <span>722231</span> in 2016)</a></li>
-<li><a href="#how-do-i-uninstall-a-windows-service-if-the-files-do-not-exist-anymore-score-714336-in-2015">40: How do I uninstall a Windows service if the files do not exist anymore? (score <span>714336</span> in 2015)</a></li>
-<li><a href="#how-do-i-get-the-application-exit-code-from-a-windows-command-line-score-700869-in">41: How do I get the application exit code from a Windows command line? (score <span>700869</span> in )</a></li>
-<li><a href="#how-can-you-zip-or-unzip-from-the-script-using-only-windows-built-in-capabilities-score-686318-in-2019">42: How can you zip or unzip from the script using ONLY Windows’ built-in capabilities? (score <span>686318</span> in 2019)</a></li>
-<li><a href="#how-can-i-run-a-program-from-a-batch-file-without-leaving-the-console-open-after-the-program-starts-score-675156-in-2018">43: How can I run a program from a batch file without leaving the console open after the program starts? (score <span>675156</span> in 2018)</a></li>
-<li><a href="#how-to-kill-the-process-currently-using-a-port-on-localhost-in-windows-score-651351-in-2019">44: How to kill the process currently using a port on localhost in windows? (score <span>651351</span> in 2019)</a></li>
-<li><a href="#how-to-get-the-system-uptime-in-windows-score-646905-in-2016">45: How to get the system uptime in Windows? (score <span>646905</span> in 2016)</a></li>
-<li><a href="#check-status-of-one-port-on-remote-host-score-640720-in-2016">46: Check status of one port on remote host (score <span>640720</span> in 2016)</a></li>
-<li><a href="#how-to-change-directory-using-windows-command-line-score-639399-in-2017">47: how to change directory using Windows command line (score <span>639399</span> in 2017)</a></li>
-<li><a href="#pip-install-fails-with-connection-error-ssl-certificate_verify_failed-certificate-verify-failed-_ssl.c598-score-634501-in-2014">48: pip install fails with "connection error: [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed (_ssl.c:598)" (score <span>634501</span> in 2014)</a></li>
-<li><a href="#how-to-run-a-powershell-script-from-a-batch-file-score-633470-in-2014">49: How to run a PowerShell script from a batch file (score <span>633470</span> in 2014)</a></li>
-<li><a href="#php-7-missing-vcruntime140.dll-score-619583-in-2017">50: PHP 7: Missing VCRUNTIME140.dll (score <span>619583</span> in 2017)</a></li>
-<li><a href="#create-windows-service-from-executable-score-606305-in-2013">51: Create Windows service from executable (score <span>606305</span> in 2013)</a></li>
-<li><a href="#how-to-prevent-auto-closing-of-console-after-the-execution-of-batch-file-score-592911-in-2018">52: How to prevent auto-closing of console after the execution of batch file (score <span>592911</span> in 2018)</a></li>
-<li><a href="#remove-credentials-from-git-score-588935-in-2017">53: Remove credentials from Git (score <span>588935</span> in 2017)</a></li>
-<li><a href="#really-killing-a-process-in-windows-score-579432-in-2016">54: Really killing a process in Windows (score <span>579432</span> in 2016)</a></li>
-<li><a href="#create-folder-with-batch-but-only-if-it-doesnt-already-exist-score-577198-in-2016">55: Create folder with batch but only if it doesn’t already exist (score <span>577198</span> in 2016)</a></li>
-<li><a href="#iis-manager-in-windows-10-score-567408-in-2019">56: IIS Manager in Windows 10 (score <span>567408</span> in 2019)</a></li>
-<li><a href="#how-to-code-a-bat-file-to-always-run-as-admin-mode-score-565736-in-2011">57: How to code a BAT file to always run as admin mode? (score <span>565736</span> in 2011)</a></li>
-<li><a href="#how-to-check-if-a-process-is-running-via-a-batch-script-score-554470-in-2008">58: How to check if a process is running via a batch script (score <span>554470</span> in 2008)</a></li>
-<li><a href="#is-there-an-equivalent-of-which-on-the-windows-command-line-score-550715-in-2018">59: Is there an equivalent of ‘which’ on the Windows command line? (score <span>550715</span> in 2018)</a></li>
-<li><a href="#setting-windows-powershell-environment-variables-score-548411-in-2019">60: Setting Windows PowerShell environment variables (score <span>548411</span> in 2019)</a></li>
-<li><a href="#how-to-log-in-to-phpmyadmin-with-wamp-what-is-the-username-and-password-score-547231-in-2015">61: How to log in to phpMyAdmin with WAMP, what is the username and password? (score <span>547231</span> in 2015)</a></li>
-<li><a href="#javac-not-working-in-windows-command-prompt-score-539803-in-2018">62: javac not working in windows command prompt (score <span>539803</span> in 2018)</a></li>
-<li><a href="#iterate-all-files-in-a-directory-using-a-for-loop-score-534443-in-2016">63: Iterate all files in a directory using a ‘for’ loop (score <span>534443</span> in 2016)</a></li>
-<li><a href="#show-a-popupmessage-box-from-a-windows-batch-file-score-532467-in-2016">64: Show a popup/message box from a Windows batch file (score <span>532467</span> in 2016)</a></li>
-<li><a href="#rm--rf-equivalent-for-windows-score-531124-in-2018">65: “rm -rf” equivalent for Windows? (score <span>531124</span> in 2018)</a></li>
-<li><a href="#how-to-output-something-in-powershell-score-530739-in-2018">66: How to output something in PowerShell (score <span>530739</span> in 2018)</a></li>
-<li><a href="#how-to-find-which-program-is-using-port-80-in-windows-score-521839-in-2014">67: How to find which program is using port 80 in Windows? (score <span>521839</span> in 2014)</a></li>
-<li><a href="#git-is-not-recognized-as-an-internal-or-external-command-score-520774-in-2018">68: ‘git’ is not recognized as an internal or external command (score <span>520774</span> in 2018)</a></li>
-<li><a href="#how-to-clear-the-interpreter-console-score-512843-in-2019">69: How to clear the interpreter console? (score <span>512843</span> in 2019)</a></li>
-<li><a href="#how-to-run-.sh-on-windows-command-prompt-score-510971-in">70: How to run .sh on Windows Command Prompt? (score <span>510971</span> in )</a></li>
-<li><a href="#permanently-add-a-directory-to-pythonpath-score-509513-in-2018">71: Permanently add a directory to PYTHONPATH? (score <span>509513</span> in 2018)</a></li>
-<li><a href="#how-do-i-run-redis-on-windows-score-502853-in-2012">72: How do I run Redis on Windows? (score <span>502853</span> in 2012)</a></li>
-<li><a href="#how-do-i-use-spaces-in-the-command-prompt-score-491652-in-2017">73: How do I use spaces in the Command Prompt? (score <span>491652</span> in 2017)</a></li>
-<li><a href="#register-comdlg32.dll-gets-regsvr32-dllregisterserver-entry-point-was-not-found-score-491213-in-2017">74: Register comdlg32.dll gets Regsvr32: DllRegisterServer entry point was not found (score <span>491213</span> in 2017)</a></li>
-<li><a href="#npm-is-not-recognized-as-internal-or-external-command-operable-program-or-batch-file-score-490579-in-2018">75: ‘npm’ is not recognized as internal or external command, operable program or batch file (score <span>490579</span> in 2018)</a></li>
-<li><a href="#is-there-a-command-to-refresh-environment-variables-from-the-command-prompt-in-windows-score-490548-in-2017">76: Is there a command to refresh environment variables from the command prompt in Windows? (score <span>490548</span> in 2017)</a></li>
-<li><a href="#how-do-i-get-the-current-username-in-windows-powershell-score-488193-in-2019">77: How do I get the current username in Windows PowerShell? (score <span>488193</span> in 2019)</a></li>
-<li><a href="#what-are-good-grep-tools-for-windows-score-488031-in-2013">78: What are good grep tools for Windows? (score <span>488031</span> in 2013)</a></li>
-<li><a href="#xampp---port-80-in-use-by-unable-to-open-process-with-pid-4-12-score-481779-in-2018">79: XAMPP - Port 80 in use by “Unable to open process” with PID 4! 12 (score <span>481779</span> in 2018)</a></li>
-<li><a href="#import-sql-file-into-mysql-score-473829-in-2018">81: Import SQL file into mysql (score <span>473829</span> in 2018)</a></li>
-<li><a href="#how-to-run-a-makefile-in-windows-score-450355-in-2013">83: How to run a makefile in Windows? (score <span>450355</span> in 2013)</a></li>
-<li><a href="#how-do-you-loop-through-each-line-in-a-text-file-using-a-windows-batch-file-score-448770-in-2010">84: How do you loop through each line in a text file using a windows batch file? (score <span>448770</span> in 2010)</a></li>
-<li><a href="#a-windows-equivalent-of-the-unix-tail-command-score-439478-in-2018">85: A Windows equivalent of the Unix tail command (score <span>439478</span> in 2018)</a></li>
-<li><a href="#call-command-vs.-start-with-wait-option-score-433307-in-2014">86: CALL command vs. START with /WAIT option (score <span>433307</span> in 2014)</a></li>
-<li><a href="#error-android_home-is-not-set-and-android-command-not-in-your-path.-you-must-fulfill-at-least-one-of-these-conditions.-score-433019-in-2017">87: Error: ANDROID_HOME is not set and “android” command not in your PATH. You must fulfill at least one of these conditions. (score <span>433019</span> in 2017)</a></li>
-<li><a href="#get-folder-size-from-windows-command-line-score-432778-in-2016">88: Get Folder Size from Windows Command Line (score <span>432778</span> in 2016)</a></li>
-<li><a href="#redirect-windows-cmd-stdout-and-stderr-to-a-single-file-score-431021-in-2017">89: Redirect Windows cmd stdout and stderr to a single file (score <span>431021</span> in 2017)</a></li>
-<li><a href="#windows-batch-files-.bat-vs-.cmd-score-430244-in-2015">90: Windows batch files: .bat vs .cmd? (score <span>430244</span> in 2015)</a></li>
-<li><a href="#how-to-connect-from-windows-command-prompt-to-mysql-command-line-score-419573-in-2012">91: How to connect from windows command prompt to mysql command line (score <span>419573</span> in 2012)</a></li>
-<li><a href="#whats-the-fastest-way-to-delete-a-large-folder-in-windows-score-417534-in-2014">92: What’s the fastest way to delete a large folder in Windows? (score <span>417534</span> in 2014)</a></li>
-<li><a href="#using-parameters-in-batch-files-at-windows-command-line-score-417385-in-2017">93: Using parameters in batch files at Windows command line (score <span>417385</span> in 2017)</a></li>
-<li><a href="#how-to-convert-doswindows-newline-crlf-to-unix-newline-lf-in-a-bash-script-score-416217-in-2018">94: How to convert DOS/Windows newline (CRLF) to Unix newline (LF) in a Bash script? (score <span>416217</span> in 2018)</a></li>
-<li><a href="#get-date-in-yyyymmdd-format-in-windows-batch-file-score-412942-in-2013">95: Get Date in YYYYMMDD format in windows batch file (score <span>412942</span> in 2013)</a></li>
-<li><a href="#how-can-i-open-java-.class-files-in-a-human-readable-way-score-412591-in-2011">96: How can I open Java .class files in a human-readable way? (score <span>412591</span> in 2011)</a></li>
-<li><a href="#run-a-task-every-x-minutes-with-windows-task-scheduler-score-412366-in-2017">97: Run a task every x-minutes with Windows Task Scheduler (score <span>412366</span> in 2017)</a></li>
-<li><a href="#x-does-not-name-a-type-error-in-c-score-409958-in-2018">98: “X does not name a type” error in C++ (score <span>409958</span> in 2018)</a></li>
-<li><a href="#c-compiler-for-windows-score-405559-in-2013">99: C compiler for Windows? (score <span>405559</span> in 2013)</a></li>
-<li><a href="#windows-batch-file-file-download-from-a-url-score-403449-in-2017">100: Windows batch file file download from a URL (score <span>403449</span> in 2017)</a></li>
-</ul>
-</nav>
 <section class="level2">
 <p></b> </em> </i> </small> </strong> </sub> </sup></p>
 <section id="how-do-i-install-pip-on-windows-score-2887828-in-2017" class="level3">
