--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     ul.task-list{list-style: none;}
   </style>
   <link rel="stylesheet" href="../wiki_html/Css/include.css" />
-   
-  <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/masthttps://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css">
+  <script type="text/javascript" src="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/js_masonry_desandro.js"></script>
+  <p><link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/color_dark_solarized.css"> <link rel="stylesheet" href="https://raw.githubusercontent.com/tinmarino/wiki_html/master/Css/layout_toc.css"></p>
 </head>
 <body>
 <p><br/> <br/> <br/> <br/> <br/></p>
